--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "موصول ومشغل؛\nتم تفعيل Wi-Fi والاتصال به؛\nلم يتم تغيير كلمة مرور Wi-Fi مؤخرًا.",
     "dont_remind_again_uppercase": "لا تذكر مرة أخرى",
     "storage_tips_title": "نصائح التخزين:",
-    "heat_pump_oem": "سلسلة PRO DHW",
+    "heat_pump_oem": "نظام DHW ثابت السرعة ثابت السرعة",
     "td22_drying_empty_water_tank": "التجفيف - خزان المياه الفارغ",
     "td22_drying_paused": "التجفيف متوقف مؤقتا",
     "td22_drying_finished": "الانتهاء من التجفيف",
@@ -2430,7 +2430,7 @@
     "logout_tips": "إهل أنت متأكد أنك تريد تسجيل الخروج؟",
     "fridge_child_lock_open_tips": "بعد فتح قفل الأطفال، سيتم قفل شاشة اللمس والموزع.",
     "want_scan_code_tips": "أريد مسح الرمز.",
-    "tri_name_key": "درجة حرارة الماء",
+    "tri_name_key": "مضخة حرارية ATW Pro",
     "water_set_key": "فشل اتصال لوحة العرض",
     "f_e_fan_fault_tip": "الجزء العلوي من فشل مستشعر درجة حرارة الخزان",
     "zone_water_key": "مياه المنطقة 2",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "تأكد من تشغيل البلوتوث لديك.",
     "CL_DV_PIND_accessory_firmware_update": "تحديث البرامج الثابتة للملحقات",
     "CL_CF_CS_ble_scan_not_list": "إذا لم يكن جهازك مدرجًا في القائمة، فيمكنك النقر فوق \"محاولة مرة أخرى\" للبحث مرة أخرى، أو النقر فوق \"التالي\" لتكوين الشبكة بطريقة أخرى.",
-    "CL_CF_CS_ble_scan_have_not_found": "لم نعثر على أي جهاز على البلوتوث. يمكنك النقر فوق \"حاول مرة أخرى\" للبحث مرة أخرى، أو النقر فوق \"التالي\" لتكوين الشبكة بطريقة أخرى.",
+    "CL_CF_CS_ble_scan_have_not_found": "لم نعثر على أي جهاز متصل بالبلوتوث. يمكنك النقر فوق \"محاولة مرة أخرى\" للبحث مرة أخرى، أو تكوين الشبكة بطريقة أخرى.",
     "CL_DV_WM_pump_cleaning": "مضخة التنظيف...",
     "CL_DV_WM_autodoes_tip": "قم بتمكين هذه الميزة وسيقوم جهازك بتوزيع المنظفات ومنعم الأقمشة بذكاء أثناء غسل ملابسك.",
     "CL_DV_WM_detergent_department_key": "حجرة المنظفات",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "غير قادر على الاختباء",
     "program_management_unable_to_hide_desc": "هذا هو البرنامج المرئي الأخير ويجب أن يظل برنامج واحد على الأقل مرئيًا.",
     "CL_CF_FM_set_deadline": "حدد موعدًا نهائيًا",
-    "CL_CF_FM_expiry_date_must_be_selected": "يجب تحديد تاريخ انتهاء الصلاحية"
+    "CL_CF_FM_expiry_date_must_be_selected": "يجب تحديد تاريخ انتهاء الصلاحية",
+    "CL_CF_FM_add_custom_food_desc": "إضافة عنصر مخصص جديد",
+    "CL_CF_FM_delete_selected_items": "حذف العناصر المحددة",
+    "CL_CF_FM_delete_selected": "حذف المحدد",
+    "CL_DV_HOB_residual_heat_content": "لا تزال منطقة الطهي ساخنة. احرص على عدم لمسها.",
+    "CL_CF_FM_add_custom_food": "أضف الأطعمة غير المضمنة في المكتبة",
+    "air_care_temp_title": "معيار تقييم درجة الحرارة:",
+    "air_care_hum_title": "معيار تقييم الرطوبة:",
+    "air_care_temp_c": "جيد: 17 < T < 27 درجة مئوية\n العادي: 10≤T≤17°C، 27≤T≤30°C\n ليس جيدًا: T < 10°CT > 30°C",
+    "air_care_temp_f": "جيد: 62.6 < T < 80.6 درجة فهرنهايت\n عادي: 50≤T≤62.6 درجة فهرنهايت، 80.6≤T≤86 درجة فهرنهايت\n ليس جيدًا: T <50 درجة فهرنهايت T> 86 درجة فهرنهايت",
+    "air_care_hum_tips": "جيد: H < 70%\n العادي: 70≤H≤80%\n ليس جيدا: H>80%",
+    "CL_CF_RM_change_floor_key": "تغيير الطابق",
+    "CL_CF_FM_recently_added": "تمت الإضافة مؤخرًا",
+    "CL_CF_FM_no_matching_items": "لا توجد عناصر متطابقة",
+    "CL_CF_FM_search_stored_food": "البحث عن الأطعمة المخزنة",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "إشعار",
+    "CL_CF_FM_a_day_ago": "منذ يوم واحد",
+    "CL_CF_FM_a_week_ago": "منذ اسبوع",
+    "CL_CF_FM_a_month_ago": "منذ شهر",
+    "CL_CF_FM_a_year_ago": "منذ سنة",
+    "CL_CF_FM_x_days_ago": "** منذ أيام",
+    "CL_CF_FM_x_weeks_ago": "** منذ اسابيع",
+    "CL_CF_FM_x_months_ago": "** منذ أشهر",
+    "CL_CF_FM_x_years_ago": "** منذ سنوات",
+    "CL_CF_FM_shopping_list_details": "تفاصيل قائمة التسوق",
+    "CL_CF_FM_no_shopping_list": "لا يوجد قائمة تسوق",
+    "CL_DV_OV_24_time_zone": "المنطقة الزمنية",
+    "CL_CF_FM_reset_purchased_tips": "هل تريد إعادة تعيين جميع الأطعمة الموجودة في هذه القائمة إلى حالة \"غير مشتراة\"؟",
+    "CL_CF_FM_add_food_to_x": "أضف الطعام إلى \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "أضف الطعام المراد شراؤه",
+    "CL_DV_OV_24_always_on": "دائما على",
+    "CL_CF_CS_separated_ac_cs_step2": "اضغط على زر \"التأرجح الأفقي\" 6 مرات بجهاز التحكم عن بعد. أو اضغط على زر \"السكون\" 8 مرات بجهاز التحكم عن بعد السلكي.",
+    "CL_CF_FM_list": "قائمة",
+    "CL_CF_FM_select_shopping_list": "حدد قائمة التسوق",
+    "CL_CF_FM_x_items_added": "** تمت إضافة العناصر",
+    "CL_CF_FM_create_shopping_list_first": "يجب عليك إنشاء قائمة التسوق أولاً.",
+    "CL_CF_FM_no_shopping_list_available": "لا توجد قائمة تسوق متاحة!",
+    "CL_DV_OV_extra_drying_desc": "يؤدي تجفيف الطعام أو نزع الماء منه إلى إزالة الرطوبة منه لتحسين مدة صلاحيته. هذا برنامج موصى به. يمكنك تغييره حسب تفضيلاتك.",
+    "CL_DV_OV_extra_drying_herbs_desc": "التجفيف هو أسهل طريقة لحفظ الأعشاب. باستخدام الهواء الدافئ والجاف، تتبخر الرطوبة. يساعد هذا الأوراق أو الأزهار أو البذور على الاحتفاظ بلونها ونكهتها.",
+    "CL_DV_OV_extra_pasteurization_desc": "يتم تطبيق المعالجة الحرارية الخفيفة على الطعام لقتل البكتيريا الضارة وإطالة مدة صلاحيته. ويمكن استخدامه لحفظ الأطعمة مثل منتجات الألبان ومنتجات البيض والمكسرات.",
+    "CL_DV_OV_extra_canning_desc": "يسمح التعليب بحفظ الطعام من التلف عن طريق التعقيم بالحرارة. تأكد من تخزين الطعام في حاويات محكمة الغلق.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "برنامج فعال لإذابة الأطعمة المجمدة بسرعة وأمان. وهو مفيد بشكل خاص لمجموعة متنوعة من الأطعمة، من اللحوم والخضروات إلى الوجبات المطبوخة مسبقًا.",
+    "CL_DV_OV_extra_stream_defrost_desc": "يقوم بتذويب الأطعمة المجمدة بفعالية من خلال الجمع بين الحرارة اللطيفة والرطوبة الطبيعية للبخار. يساعد البخار في الحفاظ على مستويات رطوبة الطعام، والحفاظ على قوامه ونكهته. وهذا مفيد بشكل خاص للأطعمة الحساسة مثل الأسماك أو المعجنات أو الخبز.",
+    "CL_DV_OV_extra_fan_defrost_desc": "مع هذه الوظيفة، يدور الهواء بمساعدة المروحة. لا توجد عناصر حرارية قيد التشغيل. استخدم هذا الإعداد لإذابة تجميد الأطباق المجمدة مثل الكعك والخبز والفواكه.",
+    "CL_DV_OV_extra_plate_warming_desc": "قم بتسخين الأطباق إلى درجة الحرارة المطلوبة. يساعد هذا على إبقاء الأطباق الموجودة على الأطباق دافئة لفترة أطول.",
+    "CL_DV_OV_extra_oshibori_desc": "يقوم بتسخين مناشف اليد أوشيبوري بلطف، ويرفع درجة حرارتها إلى درجة حرارة مريحة.",
+    "CL_DV_OV_extra_hot_stone_desc": "تم تصميمها لعلاجات تشبه المنتجعات الصحية. يتم تسخين الأحجار بالتساوي إلى درجة الحرارة المثالية، مما يجعلها جاهزة للاستخدام في روتين الاسترخاء أو العافية.",
+    "CL_DV_OV_extra_sterilizing_desc": "قم بتطهير الأشياء مثل زجاجات الأطفال وأدوات المطبخ أو الأدوات الصغيرة. يصل الفرن إلى درجات حرارة كافية للقضاء على البكتيريا ومسببات الأمراض الأخرى، مما يوفر طريقة بسيطة وفعالة للحفاظ على النظافة والصحة.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "يستخدم البخار لإعادة تسخين الطعام بلطف، واستعادة رطوبته ونضارته. مثالي للأطباق الرقيقة مثل المعكرونة أو الأرز أو الأطباق المطهية في الفرن، حيث يضمن أن الطعام المعاد تسخينه يحتفظ بقوامه ونكهته الأصلية دون أن يجف.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "يجمع هذا البرنامج بين فوائد الهواء الساخن والبخار، وهو مثالي لإعادة تسخين مجموعة متنوعة من الأطعمة. يوفر الهواء الساخن تسخينًا متساويًا، بينما يضيف البخار الرطوبة، مما يجعله مثاليًا لأطباق مثل اللحوم أو الدواجن أو الوجبات المختلطة، مما يضمن بقائها طرية ولذيذة.",
+    "CL_DV_OV_extra_warming_hotair_desc": "مثالي للأطعمة التي تحتاج إلى طبقة خارجية مقرمشة، يستخدم هذا البرنامج الهواء الساخن لإعادة تسخين الأطباق بالتساوي مثل البيتزا أو المخبوزات أو الخضروات المشوية. يضمن الهواء الساخن المتداول تسخين الطعام جيدًا مع الحفاظ على ملمسه المقرمش.",
+    "CL_DV_OV_extra_warming_microwave_desc": "قم بإعادة تسخين الطعام بسرعة من الداخل إلى الخارج. إنه خيار سريع وفعال لإعادة تسخين الوجبات. مثالي للحساء أو اليخنة أو بقايا الطعام التي تحتاج إلى تسخين سريع.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "يحافظ على الطعام عند درجة الحرارة المثالية للتقديم دون الحاجة إلى المزيد من الطهي. مثالي للحفاظ على الأطباق دافئة حتى تصبح جاهزة للتقديم. إنه مثالي للوجبات التي يتم تحضيرها مسبقًا، مما يضمن بقائها ساخنة وجاهزة للاستمتاع بها.",
+    "CL_DV_OV_ends_at": "ينتهي عند: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "استمتع بالنكهات اللذيذة المدخنة للأطباق المشوية دون الحاجة إلى شواية خارجية. تم تصميمها لتوزيع الحرارة بالتساوي على كامل مساحتها، مما يقلل من البقع الساخنة ويضمن نتائج شواء متسقة. مثالية لشواء مجموعة متنوعة من الأطعمة، من اللحوم والخضروات إلى المأكولات البحرية وحتى الفواكه.",
+    "CL_DV_OV_remote_start_title": "تم تعطيل التشغيل عن بعد",
+    "CL_DV_OV_remote_start_content": "لإرسال البرامج وبدء تشغيلها من تطبيقك، يجب أن يكون التشغيل عن بعد نشطًا. ",
+    "CL_CF_FM_apple": "تفاحة",
+    "CL_CF_FM_bacon": "لحم خنزير مقدد",
+    "CL_CF_FM_broccoli": "بروكلي",
+    "CL_CF_FM_cabbage": "كرنب",
+    "CL_CF_FM_Cauliflower": "قرنبيط",
+    "CL_CF_FM_cod": "سمك القد",
+    "CL_CF_FM_dragon_fruit": "فاكهة التنين",
+    "CL_DV_OV_defrost_detail_desc": "إن إذابة الأطعمة بشكل صحيح تضمن جودة طعامك بعد تجميده. كما أن إذابة الأطعمة بشكل صحيح تقلل من خطر التسمم الغذائي.",
+    "CL_DV_OV_extra_non_food_detail_desc": "تم تصميم البرامج غير الغذائية لأداء مهام غير متعلقة بالطهي، مما يوفر الراحة والوظائف التي تتجاوز الطبخ التقليدي.",
+    "CL_DV_OV_extra_warming_detail_desc": "مجموعة من برامج التسخين لإعادة تسخين الطعام وتسخينه، مما يجعل من السهل الاستمتاع بالوجبات، سواء كنت تقوم بإعادة تسخين بقايا الطعام أو الحفاظ على الأطباق دافئة للتقديم.",
+    "CL_CF_FM_click_switch_status": "انقر هنا لتبديل حالة العنصر",
+    "CL_CF_FM_recent_purchased_tips": "لقد اشتريت هذه الأشياء، هل تريد إضافتها إلى مخزون الطعام؟",
+    "CL_DV_OV_extra_drying_herbs": "تجفيف الأعشاب",
+    "CL_DV_OV_extra_pasteurization": "بسترة",
+    "CL_DV_OV_extra_canning": "تعليب",
+    "CL_DV_OV_extra_defrost_microwave": "إزالة الجليد باستخدام الميكروويف",
+    "CL_DV_OV_extra_defrost_stream": "إزالة الجليد بالبخار",
+    "CL_DV_OV_extra_oshibori": "أوشيبوري",
+    "CL_DV_OV_extra_hot_stones": "الحجارة الساخنة",
+    "CL_DV_OV_extra_sterilizing": "التعقيم",
+    "CL_DV_OV_extra_warming_hotair_stream": "إعادة التسخين بالهواء الساخن + البخار",
+    "CL_DV_OV_extra_warming_hotair": "إعادة التسخين بالهواء الساخن",
+    "CL_DV_OV_extra_warming_microwave": "إعادة التسخين بالميكروويف",
+    "CL_DV_OV_extra_warming_keepwarm": "ابق دافىء",
+    "CL_CF_FM_dont_remind_in_3_months": "لا تذكر بعد مرور 3 أشهر",
+    "CL_DV_RF_cleaning_plan": "خطة التنظيف",
+    "CL_DV_RF_cleaning_refrigerator": "تنظيف الثلاجة",
+    "CL_DV_RF_cleaning_reminder": "تذكير بالتنظيف",
+    "CL_DV_RF_cleaning_cycle": "دورة التنظيف",
+    "CL_DV_RF_cleaning_history": "تاريخ التنظيف",
+    "CL_DV_RF_cleaning_cycle_not_selected": "لم يتم تحديد دورة التنظيف",
+    "CL_DV_RF_havent_cleaned_yet": "لم تقم بالتنظيف بعد.",
+    "CL_DV_RF_garbage_disposal_reminder": "تذكير بالتخلص من القمامة",
+    "CL_DV_RF_resource_waste": "نفايات الموارد",
+    "CL_DV_RF_timer_not_selected": "لم يتم تحديد المؤقت",
+    "CL_DV_RF_add_more_reminders": "إضافة المزيد من التذكيرات",
+    "CL_DV_RF_cleaning_tips": "نصائح التنظيف",
+    "CL_DV_RF_last_clean_time": "آخر مرة قمت فيها بتنظيف الثلاجة كانت في : ***",
+    "CL_DV_RF_last_cleaning_was_today": "آخر تنظيف كان اليوم.",
+    "CL_DV_RF_you_need_cleaning_now": "أنت بحاجة إلى التنظيف الآن.",
+    "CL_DV_RF_next_cleaning_in_x_days": "التنظيف القادم في ** أيام.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "آخر عملية تنظيف كانت منذ ** أيام.",
+    "CL_CF_CO_x_weeks": "اسابيع",
+    "CL_DV_RF_cleaned": "تم تنظيفه",
+    "CL_DV_OV_probe_temperature_graph": "رسم بياني لدرجة حرارة المسبار",
+    "CL_DV_OV_internal": "داخلي",
+    "CL_DV_OV_probe_desc": "يساعدك المجس على قياس درجة حرارة طعامك. يمكنك رؤية درجات الحرارة المختلفة بمرور الوقت.",
+    "CL_DV_RF_no_cleaning_history": "لا يوجد تاريخ تنظيف"
 }
