--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -889,7 +889,7 @@
     "oven_atag_extras_defrost_content": "При тази функция въздухът циркулира с помощта на вентилатор. Няма включени нагревателни елементи. Използвайте тази настройка за размразяване на замразени ястия като сладкиши, хляб и плодове.",
     "oven_atag_extras_keep_warm": "ПОДДЪРЖАЙ ТОПЛО",
     "oven_atag_extras_keep_warm_content": "Тази функция поддържа приготвените ястия топли.",
-    "oven_atag_extras_plate_warming": "ЗАГРЯВАНЕ НА ПЛОЧИ",
+    "oven_atag_extras_plate_warming": "Затопляне на съдовете",
     "oven_atag_extras_plate_warming_content": "Тази функция се използва за предварително загряване на съдове за хранене, така че сервираната храна да остане гореща по-дълго.",
     "oven_atag_extras_steam_clean": "Почистване с пара",
     "oven_atag_extras_steam_clean_content": "Петната ще бъдат напоени, така че да бъдат лесно отстранени с кърпа, след като програмата за почистване с пара приключи.",
@@ -1676,7 +1676,7 @@
     "add_timing": "ДОБАВЯНЕ НА ВРЕМЕ",
     "set_start_to_finish_time": "Задайте начално и крайно време",
     "pair_pump_appliance": "Нагревател за вода с термопомпа",
-    "heat_pump": "Термопомпа",
+    "heat_pump": "Инверторна платка",
     "pump_boost_1": "Подсилване 1",
     "pump_electric_heating": "Електрическо отопление",
     "pump_holiday_mode": "Ваканция",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Включено и включено;\nWi-Fi е активиран и свързан;\nПаролата за Wi-Fi не е променяна наскоро.",
     "dont_remind_again_uppercase": "НЕ НАПОМЕНАВАЙ ПОВТОРНО",
     "storage_tips_title": "Съвети за съхранение:",
-    "heat_pump_oem": "Серия PRO БГВ",
+    "heat_pump_oem": "БГВ с фиксирана скорост",
     "td22_drying_empty_water_tank": "Сушене – Изпразнете резервоара за вода",
     "td22_drying_paused": "Сушенето е спряно",
     "td22_drying_finished": "Сушенето приключи",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Сигурни ли сте, че искате да излезете?",
     "fridge_child_lock_open_tips": "След отваряне на блокировката за деца сензорният екран и дозаторът ще бъдат заключени.",
     "want_scan_code_tips": "Искам да сканирам кода.",
-    "tri_name_key": "Нагревател с термопомпа ATW",
+    "tri_name_key": "Термопомпа ATW Pro",
     "water_set_key": "ТЕМП. ВОДА",
     "f_e_fan_fault_tip": "Повреда на DC вентилатора",
     "zone_water_key": "Зона 1 Вода",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Уверете се, че вашият bluetooth е включен.",
     "CL_DV_PIND_accessory_firmware_update": "Актуализация на фърмуера на аксесоара",
     "CL_CF_CS_ble_scan_not_list": "Ако вашето устройство не е в списъка, можете да щракнете върху „ОПИТАЙ ОТНОВО“, за да търсите отново, или да щракнете върху „СЛЕДВАЩ“, за да конфигурирате мрежата по друг начин.",
-    "CL_CF_CS_ble_scan_have_not_found": "Не открихме устройство с Bluetooth. Можете да щракнете върху „ОПИТАЙ ОТНОВО“, за да търсите отново, или да щракнете върху „СЛЕДВАЩ“, за да конфигурирате мрежата по друг начин.",
+    "CL_CF_CS_ble_scan_have_not_found": "Не намерихме нито едно устройство с bluetooth. Можете да щракнете върху „ОПИТАЙ ОТНОВО“, за да търсите отново или да конфигурирате мрежата по друг начин.",
     "CL_DV_WM_pump_cleaning": "Почистваща помпа...",
     "CL_DV_WM_autodoes_tip": "Активирайте тази функция и вашето устройство интелигентно ще дозира препарат и омекотител, докато перете прането си.",
     "CL_DV_WM_detergent_department_key": "ОТДЕЛЕНИЕ ЗА ПЕРИЛЕН ПРЕПАРАТ",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Не може да се скрие",
     "program_management_unable_to_hide_desc": "Това е последната видима програма и поне една програма трябва да остане видима.",
     "CL_CF_FM_set_deadline": "Поставете краен срок",
-    "CL_CF_FM_expiry_date_must_be_selected": "Трябва да се избере срок на годност"
+    "CL_CF_FM_expiry_date_must_be_selected": "Трябва да се избере срок на годност",
+    "CL_CF_FM_add_custom_food_desc": "Добавете нов персонализиран артикул",
+    "CL_CF_FM_delete_selected_items": "Изтриване на избраните елементи",
+    "CL_CF_FM_delete_selected": "Изтриване на избраното",
+    "CL_DV_HOB_residual_heat_content": "Зоната за готвене е все още гореща. Внимавайте да не го докоснете.",
+    "CL_CF_FM_add_custom_food": "Добавете храна, която не е включена в библиотеката",
+    "air_care_temp_title": "Стандарт за оценка на температурата:",
+    "air_care_hum_title": "Стандарт за оценка на влажността:",
+    "air_care_temp_c": "Добър: 17 < T < 27 ℃\n Нормално: 10≤T≤17°C, 27≤T≤30°C\n Не е добре: T < 10°CT > 30°C",
+    "air_care_temp_f": "Добър: 62,6 < T < 80,6℉\n Нормално: 50≤T≤62.6℉,80.6≤T≤86℉\n Не е добре: T<50℉ T>86℉",
+    "air_care_hum_tips": "Добър: H < 70%\n Нормално: 70≤H≤80%\n Не е добре: H>80%",
+    "CL_CF_RM_change_floor_key": "смени етажа",
+    "CL_CF_FM_recently_added": "Наскоро добавени",
+    "CL_CF_FM_no_matching_items": "Няма съответстващи елементи",
+    "CL_CF_FM_search_stored_food": "Търсете съхранена храна",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "уведомяване",
+    "CL_CF_FM_a_day_ago": "Преди ден",
+    "CL_CF_FM_a_week_ago": "Преди седмица",
+    "CL_CF_FM_a_month_ago": "Преди месец",
+    "CL_CF_FM_a_year_ago": "Преди година",
+    "CL_CF_FM_x_days_ago": "** преди дни",
+    "CL_CF_FM_x_weeks_ago": "** преди седмици",
+    "CL_CF_FM_x_months_ago": "**преди месеци",
+    "CL_CF_FM_x_years_ago": "** преди години",
+    "CL_CF_FM_shopping_list_details": "Подробности за списъка за пазаруване",
+    "CL_CF_FM_no_shopping_list": "Няма списък за пазаруване",
+    "CL_DV_OV_24_time_zone": "Часова зона",
+    "CL_CF_FM_reset_purchased_tips": "Искате ли да върнете статуса на всички храни в този списък на незакупени?",
+    "CL_CF_FM_add_food_to_x": "Добавете храна към \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Добавете храната, която ще закупите",
+    "CL_DV_OV_24_always_on": "Винаги включен",
+    "CL_CF_CS_separated_ac_cs_step2": "Натиснете бутона \"Horizontal Swing\" 6 пъти на дистанционното управление. Или натиснете бутона \"Sleep\" 8 пъти в кабелното дистанционно управление.",
+    "CL_CF_FM_list": "списък",
+    "CL_CF_FM_select_shopping_list": "Изберете Списък за пазаруване",
+    "CL_CF_FM_x_items_added": "** добавени артикули",
+    "CL_CF_FM_create_shopping_list_first": "Първо трябва да създадете списък за пазаруване.",
+    "CL_CF_FM_no_shopping_list_available": "Няма наличен списък за пазаруване!",
+    "CL_DV_OV_extra_drying_desc": "Сушенето или дехидратирането на храна премахва влагата от храната, за да подобри срока на годност. Това е препоръчителна програма. Можете да го промените според вашите предпочитания.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Сушенето е най-лесният метод за консервиране на билки. Чрез използването на топъл и сух въздух влагата се изпарява. Това помага на листата, цветята или семената да запазят цвета и вкуса си.",
+    "CL_DV_OV_extra_pasteurization_desc": "Храната се подлага на лека термична обработка, за да убие вредните бактерии и да удължи срока на годност. Може да се използва за консервиране на храни като млечни продукти, яйчни продукти, ядки.",
+    "CL_DV_OV_extra_canning_desc": "Консервирането позволява запазване на храната от разваляне чрез стерилизиране с топлина. Уверете се, че храната се съхранява в контейнери, които са херметически затворени.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Ефективна програма за бързо и безопасно размразяване на замразени храни. Той е особено полезен за различни храни, от месо и зеленчуци до предварително приготвени ястия.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Размразява замразени храни ефективно чрез комбиниране на лека топлина с естествената влага на парата. Парата помага да се поддържат нивата на влага в храната, запазвайки нейната текстура и вкус. Това е особено полезно за деликатни храни като риба, сладкиши или хляб.",
+    "CL_DV_OV_extra_fan_defrost_desc": "При тази функция въздухът циркулира с помощта на вентилатор. Няма включени нагревателни елементи. Използвайте тази настройка за размразяване на замразени ястия като сладкиши, хляб и плодове.",
+    "CL_DV_OV_extra_plate_warming_desc": "Загрейте плочите до желаната температура. Това помага на ястията в чиниите да останат по-топли за по-дълъг период от време.",
+    "CL_DV_OV_extra_oshibori_desc": "Нежно затопля oshibori кърпи за ръце, като ги нагрява до комфортна температура.",
+    "CL_DV_OV_extra_hot_stone_desc": "Предназначен за спа процедури. Камъните се затоплят равномерно до перфектната температура, което ги прави готови за използване в релаксиращи или уелнес процедури.",
+    "CL_DV_OV_extra_sterilizing_desc": "Дезинфекцирайте предмети като бебешки бутилки, кухненски прибори или малки инструменти. Фурната достига температури, достатъчни за елиминиране на бактерии и други патогени, осигурявайки лесен и ефективен начин за поддържане на чистота и хигиена.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Използва пара за нежно претопляне на храната, възстановявайки нейната влажност и свежест. Идеален за деликатни ястия като паста, ориз или гювечи, тъй като гарантира, че претоплената храна запазва оригиналната си текстура и вкус, без да изсъхва.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Комбинирайки предимствата на горещия въздух и парата, тази програма е идеална за претопляне на голямо разнообразие от храни. Горещият въздух осигурява равномерно нагряване, докато парата добавя влага, което го прави идеален за ястия като месо, птици или смесени ястия, като гарантира, че остават сочни и ароматни.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Перфектна за храни, които се нуждаят от свеж външен вид, тази програма използва горещ въздух за равномерно претопляне на ястия като пица, печива или печени зеленчуци. Циркулиращият горещ въздух гарантира, че храната се затопля напълно, като същевременно се поддържа хрупкав финал.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Бързо претопляйте храната отвътре навън. Това е бърз и ефективен вариант за претопляне на ястия. Перфектен за супи, яхнии или остатъци, които се нуждаят от бързо загряване.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Поддържайте храната на перфектната температура за сервиране без допълнително готвене. Идеален за поддържане на ястията топли, докато станат готови за сервиране. Той е идеален за ястия, които са приготвени предварително, като гарантира, че остават горещи и готови за наслада.",
+    "CL_DV_OV_ends_at": "Приключва на: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Насладете се на вкусните, опушени вкусове на ястията на скара, без да имате нужда от грил на открито. Създаден да разпределя топлината равномерно по цялата му площ, като минимизира горещите точки и осигурява постоянни резултати при печене. Идеален за печене на различни храни, от месо и зеленчуци до морски дарове и дори плодове.",
+    "CL_DV_OV_remote_start_title": "Дистанционното стартиране е деактивирано",
+    "CL_DV_OV_remote_start_content": "За да изпращате и стартирате програми от вашето приложение, дистанционното стартиране трябва да е активно. ",
+    "CL_CF_FM_apple": "Ябълка",
+    "CL_CF_FM_bacon": "Бекон",
+    "CL_CF_FM_broccoli": "Броколи",
+    "CL_CF_FM_cabbage": "зеле",
+    "CL_CF_FM_Cauliflower": "Карфиол",
+    "CL_CF_FM_cod": "треска",
+    "CL_CF_FM_dragon_fruit": "Драконов плод",
+    "CL_DV_OV_defrost_detail_desc": "Правилното размразяване на храни гарантира качеството на вашата храна след като е била замразена. Правилното размразяване намалява риска от хранително отравяне.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Програмите за нехранителни продукти са създадени за различни некулинарни задачи, осигуряващи удобство и функционалност извън традиционното готвене.",
+    "CL_DV_OV_extra_warming_detail_desc": "Набор от програми за затопляне за претопляне и затопляне на храна, което улеснява наслаждаването на храната, независимо дали претопляте остатъци или поддържате ястията топли за сервиране.",
+    "CL_CF_FM_click_switch_status": "Кликнете, за да превключите статуса на елемента",
+    "CL_CF_FM_recent_purchased_tips": "Купихте тези неща, искате ли да добавите термични продукти към инвентара на храните?",
+    "CL_DV_OV_extra_drying_herbs": "Сушене на билки",
+    "CL_DV_OV_extra_pasteurization": "Пастьоризация",
+    "CL_DV_OV_extra_canning": "Консервиране",
+    "CL_DV_OV_extra_defrost_microwave": "Размразете с микровълнова",
+    "CL_DV_OV_extra_defrost_stream": "Размразете с пара",
+    "CL_DV_OV_extra_oshibori": "Ошибори",
+    "CL_DV_OV_extra_hot_stones": "Горещи камъни",
+    "CL_DV_OV_extra_sterilizing": "Стерилизиране",
+    "CL_DV_OV_extra_warming_hotair_stream": "Загрейте отново с горещ въздух + пара",
+    "CL_DV_OV_extra_warming_hotair": "Загрейте отново с горещ въздух",
+    "CL_DV_OV_extra_warming_microwave": "Загрейте отново с микровълнова",
+    "CL_DV_OV_extra_warming_keepwarm": "Поддържане на топлината",
+    "CL_CF_FM_dont_remind_in_3_months": "Не напомняй след 3 месеца",
+    "CL_DV_RF_cleaning_plan": "План за почистване",
+    "CL_DV_RF_cleaning_refrigerator": "Почистване на хладилник",
+    "CL_DV_RF_cleaning_reminder": "Напомняне за почистване",
+    "CL_DV_RF_cleaning_cycle": "Цикъл на почистване",
+    "CL_DV_RF_cleaning_history": "История на почистването",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Не е избран цикъл на почистване",
+    "CL_DV_RF_havent_cleaned_yet": "Още не си почистил.",
+    "CL_DV_RF_garbage_disposal_reminder": "Напомняне за изхвърляне на боклук",
+    "CL_DV_RF_resource_waste": "Разхищение на ресурси",
+    "CL_DV_RF_timer_not_selected": "Таймерът не е избран",
+    "CL_DV_RF_add_more_reminders": "Добавете още напомняния",
+    "CL_DV_RF_cleaning_tips": "Съвети за почистване",
+    "CL_DV_RF_last_clean_time": "Последният път, когато почистихте хладилника, беше на: ***",
+    "CL_DV_RF_last_cleaning_was_today": "Последното почистване беше днес.",
+    "CL_DV_RF_you_need_cleaning_now": "Имате нужда от почистване сега.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Следващо почистване след ** дни.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Последното почистване беше преди ** дни.",
+    "CL_CF_CO_x_weeks": "седмици",
+    "CL_DV_RF_cleaned": "Почистени",
+    "CL_DV_OV_probe_temperature_graph": "Графика на температурата на сондата",
+    "CL_DV_OV_internal": "Вътрешен",
+    "CL_DV_OV_probe_desc": "Сондата ви помага да измервате температурата на вашата храна. Можете да видите различните температури във времето.",
+    "CL_DV_RF_no_cleaning_history": "Няма история на почистване"
 }
