--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -1676,7 +1676,7 @@
     "add_timing": "PŘIDAT ČASOVÁNÍ",
     "set_start_to_finish_time": "Nastavit čas od začátku do konce",
     "pair_pump_appliance": "Ohřívač vody s tepelným čerpadlem",
-    "heat_pump": "Tepelné čerpadlo",
+    "heat_pump": "Invertorová deska",
     "pump_boost_1": "Posílení 1",
     "pump_electric_heating": "Elektrické vytápění",
     "pump_holiday_mode": "Dovolená",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Připojeno a zapnuto;\nWi-Fi je aktivováno a připojeno;\nHeslo Wi-Fi se v poslední době nezměnilo.",
     "dont_remind_again_uppercase": "NEPODMIŇUJTE ZNOVU",
     "storage_tips_title": "Tipy pro skladování:",
-    "heat_pump_oem": "TUV řady PRO",
+    "heat_pump_oem": "Pevné otáčky TUV",
     "td22_drying_empty_water_tank": "Sušení – Vyprázdněte nádržku na vodu",
     "td22_drying_paused": "Sušení pozastaveno",
     "td22_drying_finished": "Sušení dokončeno",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Opravdu se chcete odhlásit?",
     "fridge_child_lock_open_tips": "Po otevření dětské pojistky se dotyková obrazovka a dávkovač uzamknou.",
     "want_scan_code_tips": "Chci naskenovat kód.",
-    "tri_name_key": "Ohřívač tepelného čerpadla ATW",
+    "tri_name_key": "Tepelné čerpadlo ATW Pro",
     "water_set_key": "TEPLOTA VODY",
     "f_e_fan_fault_tip": "Porucha DC ventilátoru",
     "zone_water_key": "Zóna 1 Voda",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Ujistěte se, že máte zapnuté bluetooth.",
     "CL_DV_PIND_accessory_firmware_update": "Aktualizace firmwaru příslušenství",
     "CL_CF_CS_ble_scan_not_list": "Pokud vaše zařízení není v seznamu, můžete kliknout na 'ZKUSIT ZNOVU' a hledat znovu, nebo klepnout na 'DALŠÍ' pro konfiguraci sítě jiným způsobem.",
-    "CL_CF_CS_ble_scan_have_not_found": "Na bluetooth jsme nenašli žádné zařízení. Můžete kliknout na „ZKUSIT ZNOVU“ a hledat znovu, nebo kliknout na „DALŠÍ“ pro konfiguraci sítě jiným způsobem.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nenašli jsme žádné zařízení Bluetooth. Můžete kliknout na tlačítko \"TRY AGAIN\" a hledat znovu nebo síť nakonfigurovat jiným způsobem.",
     "CL_DV_WM_pump_cleaning": "Čisticí čerpadlo...",
     "CL_DV_WM_autodoes_tip": "Povolte tuto funkci a vaše zařízení bude během praní chytře dávkovat prací prostředek a aviváž.",
     "CL_DV_WM_detergent_department_key": "PŘIHRÁDKA NA PRACÍ PROSTŘEDEK",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Nelze se skrýt",
     "program_management_unable_to_hide_desc": "Toto je poslední viditelný program a alespoň jeden program musí zůstat viditelný.",
     "CL_CF_FM_set_deadline": "Stanovte si termín",
-    "CL_CF_FM_expiry_date_must_be_selected": "Musí být vybráno datum vypršení platnosti"
+    "CL_CF_FM_expiry_date_must_be_selected": "Musí být vybráno datum vypršení platnosti",
+    "CL_CF_FM_add_custom_food_desc": "Přidejte novou přizpůsobenou položku",
+    "CL_CF_FM_delete_selected_items": "Smazat vybrané položky",
+    "CL_CF_FM_delete_selected": "Smazat vybrané",
+    "CL_DV_HOB_residual_heat_content": "Varná zóna je stále horká. Dávejte pozor, abyste se ho nedotkli.",
+    "CL_CF_FM_add_custom_food": "Přidejte jídlo, které není součástí knihovny",
+    "air_care_temp_title": "Standard vyhodnocení teploty:",
+    "air_care_hum_title": "Standard hodnocení vlhkosti:",
+    "air_care_temp_c": "Dobrý: 17 < T < 27 ℃\n Normální: 10≤T≤17°C, 27≤T≤30°C\n Není dobré: T < 10°CT > 30°C",
+    "air_care_temp_f": "Dobrý: 62,6 < T < 80,6℉\n Normální: 50≤T≤62,6℉, 80,6≤T≤86℉\n Není dobré: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Dobrý: H < 70 %\n Normální: 70≤H≤80 %\n Není dobré: H＞80 %",
+    "CL_CF_RM_change_floor_key": "změnit podlahu",
+    "CL_CF_FM_recently_added": "Nedávno přidané",
+    "CL_CF_FM_no_matching_items": "Žádné odpovídající položky",
+    "CL_CF_FM_search_stored_food": "Hledat uložené potraviny",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "oznámení",
+    "CL_CF_FM_a_day_ago": "Před dnem",
+    "CL_CF_FM_a_week_ago": "Před týdnem",
+    "CL_CF_FM_a_month_ago": "Před měsícem",
+    "CL_CF_FM_a_year_ago": "Před rokem",
+    "CL_CF_FM_x_days_ago": "** před dny",
+    "CL_CF_FM_x_weeks_ago": "** před týdny",
+    "CL_CF_FM_x_months_ago": "** před měsíci",
+    "CL_CF_FM_x_years_ago": "** před lety",
+    "CL_CF_FM_shopping_list_details": "Podrobnosti nákupního seznamu",
+    "CL_CF_FM_no_shopping_list": "Žádný nákupní seznam",
+    "CL_DV_OV_24_time_zone": "Časové pásmo",
+    "CL_CF_FM_reset_purchased_tips": "Chcete obnovit všechny potraviny v tomto seznamu do stavu nezakoupeno?",
+    "CL_CF_FM_add_food_to_x": "Přidat jídlo do \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Přidejte jídlo, které chcete zakoupit",
+    "CL_DV_OV_24_always_on": "Vždy zapnuto",
+    "CL_CF_CS_separated_ac_cs_step2": "Stiskněte 6krát tlačítko \"Horizontal Swing\" na dálkovém ovladači. Nebo stiskněte 8x tlačítko \"Sleep\" na drátovém dálkovém ovladači.",
+    "CL_CF_FM_list": "Seznam",
+    "CL_CF_FM_select_shopping_list": "Vyberte Nákupní seznam",
+    "CL_CF_FM_x_items_added": "** položky byly přidány",
+    "CL_CF_FM_create_shopping_list_first": "Nejprve musíte vytvořit nákupní seznam.",
+    "CL_CF_FM_no_shopping_list_available": "Žádný nákupní seznam není k dispozici!",
+    "CL_DV_OV_extra_drying_desc": "Sušení nebo dehydratace potravin odstraňuje vlhkost z potravin a prodlužuje tak jejich trvanlivost. Toto je doporučený program. Můžete jej změnit podle svých preferencí.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Sušení je nejjednodušší způsob uchování bylinek. Použitím teplého a suchého vzduchu se vlhkost odpařuje. To pomáhá listům, květům nebo semenům udržet si barvu a chuť.",
+    "CL_DV_OV_extra_pasteurization_desc": "Na potraviny se aplikuje mírná tepelná úprava, která zahubí škodlivé bakterie a prodlouží trvanlivost. Lze jej použít ke konzervaci potravin, jako jsou mléčné výrobky, vaječné výrobky, ořechy.",
+    "CL_DV_OV_extra_canning_desc": "Konzervování umožňuje uchování potravin před znehodnocením sterilizací teplem. Ujistěte se, že jsou potraviny skladovány v nádobách, které jsou hermeticky uzavřeny.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Efektivní program pro rychlé a bezpečné rozmrazování zmrazených potravin. Je zvláště užitečné pro různé potraviny, od masa a zeleniny až po předvařená jídla.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Účinně rozmrazuje zmrazené potraviny kombinací jemného tepla s přirozenou vlhkostí páry. Pára pomáhá udržovat úroveň vlhkosti jídla a zachovává jeho texturu a chuť. To je zvláště užitečné pro choulostivá jídla, jako jsou ryby, pečivo nebo chléb.",
+    "CL_DV_OV_extra_fan_defrost_desc": "S touto funkcí vzduch cirkuluje pomocí ventilátoru. Nejsou zapnuté žádné topné články. Toto nastavení použijte k rozmrazování zmrazených pokrmů, jako jsou koláče, chléb a ovoce.",
+    "CL_DV_OV_extra_plate_warming_desc": "Ohřejte talíře na požadovanou teplotu. Pokrmy na talířích tak zůstanou déle teplé.",
+    "CL_DV_OV_extra_oshibori_desc": "Jemně zahřívá ručníky oshibori a zahřívá je na příjemnou teplotu.",
+    "CL_DV_OV_extra_hot_stone_desc": "Navrženo pro lázeňské procedury. Kameny se rovnoměrně zahřívají na dokonalou teplotu a jsou tak připraveny k použití při relaxaci nebo wellness.",
+    "CL_DV_OV_extra_sterilizing_desc": "Dezinfikujte předměty, jako jsou kojenecké lahve, kuchyňské náčiní nebo drobné nářadí. Trouba dosahuje teploty dostatečné k odstranění bakterií a jiných patogenů, což poskytuje jednoduchý a účinný způsob udržování čistoty a hygieny.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Používá páru k šetrnému ohřevu jídla, obnovuje jeho vlhkost a čerstvost. Ideální pro delikátní pokrmy, jako jsou těstoviny, rýže nebo kastrol, protože zajišťuje, že si ohřáté jídlo zachová svou původní texturu a chuť, aniž by se vysušilo.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Tento program, který kombinuje výhody horkého vzduchu a páry, je ideální pro ohřívání široké škály potravin. Horký vzduch zajišťuje rovnoměrný ohřev, zatímco pára dodává vlhkost, takže je ideální pro pokrmy, jako je maso, drůbež nebo míchaná jídla, a zajistí, že zůstanou šťavnaté a chutné.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Tento program, který je ideální pro potraviny, které potřebují křupavý povrch, využívá horký vzduch k rovnoměrnému ohřívání pokrmů, jako je pizza, pečivo nebo pečená zelenina. Cirkulující horký vzduch zajišťuje důkladné prohřátí jídla při zachování křupavého povrchu.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Rychle ohřejte jídlo zevnitř ven. Je to rychlá a efektivní možnost ohřívání jídel. Ideální pro polévky, dušená masa nebo zbytky jídel, které potřebují rychlé zahřátí.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Udržujte jídlo v perfektní teplotě pro podávání bez dalšího vaření. Ideální pro udržování pokrmů teplých, dokud nejsou připraveny k podávání. Je ideální pro jídla, která jsou připravena s předstihem, takže zůstanou teplá a připravená k vychutnání.",
+    "CL_DV_OV_ends_at": "Končí v: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Vychutnejte si lahodné, kouřové chutě grilovaných pokrmů, aniž byste potřebovali venkovní gril. Vyrobeno tak, aby rovnoměrně rozvádělo teplo po celé ploše, minimalizovalo horká místa a zajistilo konzistentní výsledky grilování. Ideální pro grilování různých potravin, od masa a zeleniny po mořské plody a dokonce i ovoce.",
+    "CL_DV_OV_remote_start_title": "Vzdálený start je zakázán",
+    "CL_DV_OV_remote_start_content": "Chcete-li odesílat a spouštět programy z aplikace, mělo by být aktivní vzdálené spouštění. ",
+    "CL_CF_FM_apple": "Jablko",
+    "CL_CF_FM_bacon": "Slanina",
+    "CL_CF_FM_broccoli": "Brokolice",
+    "CL_CF_FM_cabbage": "Zelí",
+    "CL_CF_FM_Cauliflower": "Květák",
+    "CL_CF_FM_cod": "Treska",
+    "CL_CF_FM_dragon_fruit": "Dračí ovoce",
+    "CL_DV_OV_defrost_detail_desc": "Správné rozmrazování potravin zajišťuje kvalitu vašich potravin po jejich zmrazení. Správné rozmrazování snižuje riziko otravy jídlem.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Nepotravinářské programy jsou vytvořeny pro různé nekuchářské úkoly a poskytují pohodlí a funkčnost nad rámec tradičního vaření.",
+    "CL_DV_OV_extra_warming_detail_desc": "Řada ohřívacích programů pro ohřívání a ohřívání pokrmů, díky kterým si pokrmy snadno vychutnáte, ať už ohříváte zbytky jídla nebo udržujete pokrmy teplé pro servírování.",
+    "CL_CF_FM_click_switch_status": "Kliknutím přepnete stav položky",
+    "CL_CF_FM_recent_purchased_tips": "Zakoupili jste tyto věci, chcete přidat term do zásob potravin?",
+    "CL_DV_OV_extra_drying_herbs": "Sušení bylinek",
+    "CL_DV_OV_extra_pasteurization": "Pasterizace",
+    "CL_DV_OV_extra_canning": "Konzervování",
+    "CL_DV_OV_extra_defrost_microwave": "Rozmrazování pomocí mikrovlnné trouby",
+    "CL_DV_OV_extra_defrost_stream": "Rozmrazování pomocí páry",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "horké kameny",
+    "CL_DV_OV_extra_sterilizing": "Sterilizační",
+    "CL_DV_OV_extra_warming_hotair_stream": "Ohřejte horkým vzduchem + párou",
+    "CL_DV_OV_extra_warming_hotair": "Znovu zahřejte horkým vzduchem",
+    "CL_DV_OV_extra_warming_microwave": "Ohřejte pomocí mikrovlnné trouby",
+    "CL_DV_OV_extra_warming_keepwarm": "Udržení teploty",
+    "CL_CF_FM_dont_remind_in_3_months": "Nepřipomínat za 3 měsíce",
+    "CL_DV_RF_cleaning_plan": "Plán úklidu",
+    "CL_DV_RF_cleaning_refrigerator": "Čištění lednice",
+    "CL_DV_RF_cleaning_reminder": "Upomínka na čištění",
+    "CL_DV_RF_cleaning_cycle": "Cyklus čištění",
+    "CL_DV_RF_cleaning_history": "Historie čištění",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Není vybrán čisticí cyklus",
+    "CL_DV_RF_havent_cleaned_yet": "Ještě jsi neuklízel.",
+    "CL_DV_RF_garbage_disposal_reminder": "Připomenutí odvozu odpadu",
+    "CL_DV_RF_resource_waste": "Odpady ze zdrojů",
+    "CL_DV_RF_timer_not_selected": "Časovač není vybrán",
+    "CL_DV_RF_add_more_reminders": "Přidejte další připomenutí",
+    "CL_DV_RF_cleaning_tips": "Tipy na čištění",
+    "CL_DV_RF_last_clean_time": "Naposledy jste čistili ledničku: ***",
+    "CL_DV_RF_last_cleaning_was_today": "Poslední úklid byl dnes.",
+    "CL_DV_RF_you_need_cleaning_now": "Teď potřebujete vyčistit.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Další úklid za ** dní.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Poslední úklid byl před ** dny.",
+    "CL_CF_CO_x_weeks": "týdny",
+    "CL_DV_RF_cleaned": "Vyčištěno",
+    "CL_DV_OV_probe_temperature_graph": "Graf teploty sondy",
+    "CL_DV_OV_internal": "Vnitřní",
+    "CL_DV_OV_probe_desc": "Sonda vám pomůže měřit teplotu vašeho jídla. Můžete vidět různé teploty v průběhu času.",
+    "CL_DV_RF_no_cleaning_history": "Žádná historie čištění"
 }
