--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -1676,7 +1676,7 @@
     "add_timing": "TILFØJ TIDSPLAN",
     "set_start_to_finish_time": "Indstil start- og sluttidspunkt",
     "pair_pump_appliance": "Vandvarmer til varmepumpe",
-    "heat_pump": "Varmepumpe",
+    "heat_pump": "Inverter DHW",
     "pump_boost_1": "Boost 1",
     "pump_electric_heating": "Elektrisk opvarmning",
     "pump_holiday_mode": "Ferie",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Tilsluttet og tændt;\nWi-Fi er aktiveret og tilsluttet;\nWi-Fi-adgangskoden er ikke blevet ændret for nylig.",
     "dont_remind_again_uppercase": "IKKE MIND PÅ NY",
     "storage_tips_title": "Tips til opbevaring:",
-    "heat_pump_oem": "PRO serie varmt vand",
+    "heat_pump_oem": "DHW med fast hastighed",
     "td22_drying_empty_water_tank": "Tørring – Tøm vandtanken",
     "td22_drying_paused": "Tørringen standset",
     "td22_drying_finished": "Tørring færdig",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Er du sikker på, at du vil logge ud?",
     "fridge_child_lock_open_tips": "Efter at børnesikringen er åbnet, låses berøringsskærmen og dispenseren.",
     "want_scan_code_tips": "Jeg vil scanne kode.",
-    "tri_name_key": "ATW varmepumpevarmer",
+    "tri_name_key": "ATW Pro varmepumpe",
     "water_set_key": "VANDTEMP",
     "f_e_fan_fault_tip": "DC blæser fejl",
     "zone_water_key": "Zone 1 Vand",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Sørg for, at din bluetooth er tændt.",
     "CL_DV_PIND_accessory_firmware_update": "Opdatering af tilbehørsfirmware",
     "CL_CF_CS_ble_scan_not_list": "Hvis din enhed ikke er på listen, kan du klikke på 'PRØV IGEN' for at søge igen, eller klik på 'NÆSTE' for at konfigurere netværket på en anden måde.",
-    "CL_CF_CS_ble_scan_have_not_found": "Vi har ikke fundet nogen enhed på bluetooth. Du kan klikke på 'PRØV IGEN' for at søge igen, eller klik på 'NÆSTE' for at konfigurere netværket på en anden måde.",
+    "CL_CF_CS_ble_scan_have_not_found": "Vi har ikke fundet nogen enhed på Bluetooth. Du kan klikke på 'PRØV IGEN' for at søge igen eller konfigurere netværket på en anden måde.",
     "CL_DV_WM_pump_cleaning": "Rengøring af pumpe...",
     "CL_DV_WM_autodoes_tip": "Aktiver denne funktion, og din enhed dispenserer smart vaskemiddel og skyllemiddel, mens du vasker.",
     "CL_DV_WM_detergent_department_key": "RUM TIL VASKEMIDDEL",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Kan ikke gemme sig",
     "program_management_unable_to_hide_desc": "Dette er det sidste synlige program, og mindst ét ​​program skal holdes synligt.",
     "CL_CF_FM_set_deadline": "Sæt en deadline",
-    "CL_CF_FM_expiry_date_must_be_selected": "Udløbsdato skal vælges"
+    "CL_CF_FM_expiry_date_must_be_selected": "Udløbsdato skal vælges",
+    "CL_CF_FM_add_custom_food_desc": "Tilføj et nyt tilpasset element",
+    "CL_CF_FM_delete_selected_items": "Slet valgte elementer",
+    "CL_CF_FM_delete_selected": "Slet valgte",
+    "CL_DV_HOB_residual_heat_content": "Kogezonen er stadig varm. Pas på ikke at røre ved den.",
+    "CL_CF_FM_add_custom_food": "Tilføj mad, der ikke er inkluderet i biblioteket",
+    "air_care_temp_title": "Temperaturevalueringsstandard:",
+    "air_care_hum_title": "Fugtighedsevalueringsstandard:",
+    "air_care_temp_c": "God: 17 < T < 27℃\n Normal: 10≤T≤17°C, 27≤T≤30°C\n Ikke godt: T < 10°CT > 30°C",
+    "air_care_temp_f": "God: 62,6 < T < 80,6℉\n Normal: 50≤T≤62,6℉, 80,6≤T≤86℉\n Ikke godt: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "God: H < 70 %\n Normal: 70≤H≤80 %\n Ikke godt: H＞80%",
+    "CL_CF_RM_change_floor_key": "skifte gulv",
+    "CL_CF_FM_recently_added": "Nyligt tilføjet",
+    "CL_CF_FM_no_matching_items": "Ingen matchende varer",
+    "CL_CF_FM_search_stored_food": "Søg i lagret mad",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "notifikation",
+    "CL_CF_FM_a_day_ago": "For en dag siden",
+    "CL_CF_FM_a_week_ago": "For en uge siden",
+    "CL_CF_FM_a_month_ago": "For en måned siden",
+    "CL_CF_FM_a_year_ago": "For et år siden",
+    "CL_CF_FM_x_days_ago": "** dage siden",
+    "CL_CF_FM_x_weeks_ago": "** uger siden",
+    "CL_CF_FM_x_months_ago": "** måneder siden",
+    "CL_CF_FM_x_years_ago": "** år siden",
+    "CL_CF_FM_shopping_list_details": "Indkøbsliste detaljer",
+    "CL_CF_FM_no_shopping_list": "Ingen indkøbsliste",
+    "CL_DV_OV_24_time_zone": "Tidszone",
+    "CL_CF_FM_reset_purchased_tips": "Vil du nulstille alle fødevarerne på denne liste til status som ikke købt?",
+    "CL_CF_FM_add_food_to_x": "Tilføj mad til \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Tilføj den mad, der skal købes",
+    "CL_DV_OV_24_always_on": "Altid TIL",
+    "CL_CF_CS_separated_ac_cs_step2": "Tryk på knappen \"Horizontal Swing\" 6 gange på fjernbetjeningen. Eller tryk på \"Sleep\"-knappen 8 gange i ledningsfjernbetjeningen.",
+    "CL_CF_FM_list": "Liste",
+    "CL_CF_FM_select_shopping_list": "Vælg Indkøbsliste",
+    "CL_CF_FM_x_items_added": "** elementer er tilføjet",
+    "CL_CF_FM_create_shopping_list_first": "Du skal først oprette en indkøbsliste.",
+    "CL_CF_FM_no_shopping_list_available": "Ingen indkøbsliste tilgængelig!",
+    "CL_DV_OV_extra_drying_desc": "Tørring eller dehydrering af mad fjerner fugt fra maden for at forbedre holdbarheden. Dette er et anbefalet program. Du kan ændre det til dine præferencer.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Tørring er den nemmeste måde at konservere urter på. Ved at bruge varm og tør luft fordamper fugten. Dette hjælper bladene, blomsterne eller frøene til at bevare deres farve og smag.",
+    "CL_DV_OV_extra_pasteurization_desc": "En mild varmebehandling påføres maden for at dræbe skadelige bakterier og forlænge holdbarheden. Det kan bruges til at konservere fødevarer såsom dagbogsprodukter, ægprodukter, nødder.",
+    "CL_DV_OV_extra_canning_desc": "Konservering gør det muligt at bevare mad fra fordærv sterilisering med varme. Sørg for, at maden opbevares i beholdere, der er hermetisk lukkede.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Et effektivt program til hurtigt og sikkert at optø frosne fødevarer. Det er især nyttigt til en række forskellige fødevarer, fra kød og grøntsager til færdiglavede måltider.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Optøer frosne fødevarer effektivt ved at kombinere blid varme med dampens naturlige fugt. Dampen er med til at opretholde madens fugtniveau, og bevarer dens tekstur og smag. Dette er især nyttigt til sarte fødevarer som fisk, kager eller brød.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Med denne funktion cirkulerer luften ved hjælp af ventilatoren. Ingen varmeelementer er tændt. Brug denne indstilling til at optø frosne retter som kager, brød og frugt.",
+    "CL_DV_OV_extra_plate_warming_desc": "Varm pladerne op til den ønskede temperatur. Dette hjælper med at tallerkenerne på tallerkenerne holder sig varmere i længere tid.",
+    "CL_DV_OV_extra_oshibori_desc": "Opvarmer blidt oshibori håndklæder og opvarmer dem til en behagelig temperatur.",
+    "CL_DV_OV_extra_hot_stone_desc": "Designet til spa-lignende behandlinger. Stenene opvarmes jævnt til den perfekte temperatur, hvilket gør dem klar til brug i afslapnings- eller wellness-rutiner.",
+    "CL_DV_OV_extra_sterilizing_desc": "Rengør genstande såsom sutteflasker, køkkenredskaber eller små værktøjer. Ovnen når temperaturer, der er tilstrækkelige til at eliminere bakterier og andre patogener, hvilket giver en enkel og effektiv måde at opretholde renlighed og hygiejne på.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Bruger damp til forsigtigt at genopvarme mad, og genopretter dens fugt og friskhed. Ideel til delikate retter som pasta, ris eller gryderetter, da det sikrer, at genopvarmet mad bevarer sin oprindelige tekstur og smag uden at blive tør.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Ved at kombinere fordelene ved både varmluft og damp er dette program ideelt til genopvarmning af en bred vifte af fødevarer. Den varme luft giver jævn opvarmning, mens dampen tilfører fugt, hvilket gør den perfekt til retter som kød, fjerkræ eller blandede måltider, hvilket sikrer, at de forbliver saftige og smagfulde.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Dette program er perfekt til fødevarer, der har brug for et sprødt ydre, og bruger varm luft til jævnt at genopvarme retter som pizza, bagværk eller ristede grøntsager. Den cirkulerende varme luft sørger for, at maden opvarmes grundigt, samtidig med at den bevarer en sprød finish.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Genopvarm hurtigt maden indefra og ud. Det er en hurtig og effektiv mulighed for at genopvarme måltider. Perfekt til supper, gryderetter eller rester, der trænger til en hurtig opvarmning.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Hold maden på den perfekte serveringstemperatur uden yderligere tilberedning. Ideel til at holde retter varme, indtil de er klar til at blive serveret. Den er perfekt til måltider, der er tilberedt i forvejen, hvilket sikrer, at de forbliver varme og klar til at nyde.",
+    "CL_DV_OV_ends_at": "Slutter kl.: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Nyd den lækre, røgede smag af grillretter uden at have brug for en udendørs grill. Udformet til at fordele varmen jævnt over hele området, minimere hot spots og sikre ensartede grillresultater. Ideel til at grille en række forskellige fødevarer, fra kød og grøntsager til skaldyr og endda frugter.",
+    "CL_DV_OV_remote_start_title": "Fjernstart er deaktiveret",
+    "CL_DV_OV_remote_start_content": "For at sende og starte programmer fra din app skal fjernstart være aktiv. ",
+    "CL_CF_FM_apple": "Æble",
+    "CL_CF_FM_bacon": "Bacon",
+    "CL_CF_FM_broccoli": "Broccoli",
+    "CL_CF_FM_cabbage": "Kål",
+    "CL_CF_FM_Cauliflower": "Blomkål",
+    "CL_CF_FM_cod": "Torsk",
+    "CL_CF_FM_dragon_fruit": "Dragon Frugt",
+    "CL_DV_OV_defrost_detail_desc": "Korrekt optøning af fødevarer sikrer kvaliteten af ​​din mad, efter den er blevet frosset. Korrekt afrimning reducerer risikoen for madforgiftning.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Non food-programmer er lavet til forskellige ikke-kulinariske opgaver, hvilket giver bekvemmelighed og funktionalitet ud over traditionel madlavning.",
+    "CL_DV_OV_extra_warming_detail_desc": "En række opvarmningsprogrammer til genopvarmning og opvarmning af mad, der gør det nemt at nyde måltider, uanset om du genopvarmer madrester eller holder retter varme til servering.",
+    "CL_CF_FM_click_switch_status": "Klik for at skifte status for elementet",
+    "CL_CF_FM_recent_purchased_tips": "Du har købt disse ting, vil du føje therm til Food Inventory?",
+    "CL_DV_OV_extra_drying_herbs": "Tørring af urter",
+    "CL_DV_OV_extra_pasteurization": "Pasteurisering",
+    "CL_DV_OV_extra_canning": "Konserves",
+    "CL_DV_OV_extra_defrost_microwave": "Optøning med mikrobølger",
+    "CL_DV_OV_extra_defrost_stream": "Optøning med damp",
+    "CL_DV_OV_extra_oshibori": "Varm fugtig vaskeklud",
+    "CL_DV_OV_extra_hot_stones": "Varme sten",
+    "CL_DV_OV_extra_sterilizing": "Sterilisering",
+    "CL_DV_OV_extra_warming_hotair_stream": "Genopvarm med varmluft + damp",
+    "CL_DV_OV_extra_warming_hotair": "Genopvarm med varm luft",
+    "CL_DV_OV_extra_warming_microwave": "Genopvarmning med mikrobølger",
+    "CL_DV_OV_extra_warming_keepwarm": "Hold varm",
+    "CL_CF_FM_dont_remind_in_3_months": "Husk det ikke om 3 måneder",
+    "CL_DV_RF_cleaning_plan": "Rengøringsplan",
+    "CL_DV_RF_cleaning_refrigerator": "Rengøring af køleskab",
+    "CL_DV_RF_cleaning_reminder": "Påmindelse om rengøring",
+    "CL_DV_RF_cleaning_cycle": "Rengøringscyklus",
+    "CL_DV_RF_cleaning_history": "Rengøringshistorie",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Rengøringscyklus ikke valgt",
+    "CL_DV_RF_havent_cleaned_yet": "Du har ikke gjort rent endnu.",
+    "CL_DV_RF_garbage_disposal_reminder": "Påmindelse om bortskaffelse af affald",
+    "CL_DV_RF_resource_waste": "Ressourcespild",
+    "CL_DV_RF_timer_not_selected": "Timer ikke valgt",
+    "CL_DV_RF_add_more_reminders": "Tilføj flere påmindelser",
+    "CL_DV_RF_cleaning_tips": "Rengøringstips",
+    "CL_DV_RF_last_clean_time": "Sidste gang du rensede køleskabet var tændt: ***",
+    "CL_DV_RF_last_cleaning_was_today": "Sidste rengøring var i dag.",
+    "CL_DV_RF_you_need_cleaning_now": "Du har brug for rengøring nu.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Næste rengøring om ** dage.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Sidste rengøring var ** dage siden.",
+    "CL_CF_CO_x_weeks": "Uger",
+    "CL_DV_RF_cleaned": "Rengjort",
+    "CL_DV_OV_probe_temperature_graph": "Probe temperatur graf",
+    "CL_DV_OV_internal": "Indre",
+    "CL_DV_OV_probe_desc": "Sonden hjælper dig med at måle temperaturen på din mad. Du kan se de forskellige temperaturer over tid.",
+    "CL_DV_RF_no_cleaning_history": "Ingen rengøringshistorik"
 }
