--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -1676,7 +1676,7 @@
     "add_timing": "ΠΡΟΣΘΗΚΗ ΧΡΟΝΟΜΕΤΡΗΣΗΣ",
     "set_start_to_finish_time": "Ορίστε την ώρα έναρξης και λήξης",
     "pair_pump_appliance": "Θερμαντήρας νερού με αντλία θερμότητας",
-    "heat_pump": "Αντλία θερμότητας",
+    "heat_pump": "Πλακέτα inverter",
     "pump_boost_1": "Ενίσχυση 1",
     "pump_electric_heating": "Ηλεκτρική θέρμανση",
     "pump_holiday_mode": "Διακοπές",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Συνδεδεμένο και ενεργοποιημένο;\nΤο Wi-Fi είναι ενεργοποιημένο και συνδεδεμένο;\nΟ κωδικός πρόσβασης Wi-Fi δεν έχει αλλάξει πρόσφατα.",
     "dont_remind_again_uppercase": "ΜΗΝ ΘΥΜΙΣΟΥΜΕ ΞΑΝΑ",
     "storage_tips_title": "Συμβουλές αποθήκευσης:",
-    "heat_pump_oem": "Σειρά PRO ΖΝΧ",
+    "heat_pump_oem": "Ζεστό νερό χρήσης σταθερής ταχύτητας",
     "td22_drying_empty_water_tank": "Στέγνωμα – Άδειο δοχείο νερού",
     "td22_drying_paused": "Το στέγνωμα σταμάτησε",
     "td22_drying_finished": "Το στέγνωμα ολοκληρώθηκε",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Είστε βέβαιοι ότι θέλετε να αποσυνδεθείτε?",
     "fridge_child_lock_open_tips": "Αφού ανοίξει το κλείδωμα για παιδιά, η οθόνη αφής και ο διανομέας θα κλειδωθούν.",
     "want_scan_code_tips": "Θέλω να σαρώσω τον κώδικα.",
-    "tri_name_key": "Θερμαντήρας αντλίας θερμότητας ATW",
+    "tri_name_key": "Αντλία θερμότητας ATW Pro",
     "water_set_key": "ΘΕΡΜΟΚΡΑΣΙΑ ΝΕΡΟΥ",
     "f_e_fan_fault_tip": "Αποτυχία ανεμιστήρα DC",
     "zone_water_key": "Ζώνη 1 Νερό",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Βεβαιωθείτε ότι το bluetooth είναι ενεργοποιημένο.",
     "CL_DV_PIND_accessory_firmware_update": "Ενημέρωση υλικολογισμικού αξεσουάρ",
     "CL_CF_CS_ble_scan_not_list": "Εάν η συσκευή σας δεν εμφανίζεται στη λίστα, μπορείτε να κάνετε κλικ στο «ΠΡΟΣΠΑΘΗΣΤΕ ΞΑΝΑ» για αναζήτηση ξανά ή να κάνετε κλικ στο «ΕΠΟΜΕΝΟ» για να διαμορφώσετε το δίκτυο με άλλο τρόπο.",
-    "CL_CF_CS_ble_scan_have_not_found": "Δεν βρήκαμε καμία συσκευή στο bluetooth. Μπορείτε να κάνετε κλικ στο «ΠΡΟΣΠΑΘΗΣΤΕ ΞΑΝΑ» για αναζήτηση ξανά ή να κάνετε κλικ στο «ΕΠΟΜΕΝΟ» για να διαμορφώσετε το δίκτυο με άλλο τρόπο.",
+    "CL_CF_CS_ble_scan_have_not_found": "Δεν βρήκαμε καμία συσκευή στο bluetooth. Μπορείτε να κάνετε κλικ στο «ΠΡΟΣΠΑΘΗΣΤΕ ΞΑΝΑ» για να αναζητήσετε ξανά ή να διαμορφώσετε το δίκτυο με άλλο τρόπο.",
     "CL_DV_WM_pump_cleaning": "Αντλία καθαρισμού...",
     "CL_DV_WM_autodoes_tip": "Ενεργοποιήστε αυτήν τη λειτουργία και η συσκευή σας θα διανέμει έξυπνα απορρυπαντικό και μαλακτικό ενώ πλένετε τα ρούχα σας.",
     "CL_DV_WM_detergent_department_key": "ΘΗΚΗ ΑΠΟΡΡΥΠΑΝΤΙΚΟΥ",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Δεν είναι δυνατή η απόκρυψη",
     "program_management_unable_to_hide_desc": "Αυτό είναι το τελευταίο ορατό πρόγραμμα και τουλάχιστον ένα πρόγραμμα πρέπει να παραμένει ορατό.",
     "CL_CF_FM_set_deadline": "Ορίστε μια προθεσμία",
-    "CL_CF_FM_expiry_date_must_be_selected": "Πρέπει να επιλεγεί η ημερομηνία λήξης"
+    "CL_CF_FM_expiry_date_must_be_selected": "Πρέπει να επιλεγεί η ημερομηνία λήξης",
+    "CL_CF_FM_add_custom_food_desc": "Προσθέστε ένα νέο προσαρμοσμένο στοιχείο",
+    "CL_CF_FM_delete_selected_items": "Διαγραφή επιλεγμένων αντικειμένων",
+    "CL_CF_FM_delete_selected": "Διαγραφή επιλεγμένων",
+    "CL_DV_HOB_residual_heat_content": "Η ζώνη μαγειρέματος είναι ακόμα ζεστή. Προσέξτε να μην το αγγίξετε.",
+    "CL_CF_FM_add_custom_food": "Προσθέστε τρόφιμα που δεν περιλαμβάνονται στη βιβλιοθήκη",
+    "air_care_temp_title": "Πρότυπο αξιολόγησης θερμοκρασίας:",
+    "air_care_hum_title": "Πρότυπο αξιολόγησης υγρασίας:",
+    "air_care_temp_c": "Καλό: 17 < T < 27℃\n Κανονική: 10≤T≤17°C, 27≤T≤30°C\n Δεν είναι καλό: T < 10°CT > 30°C",
+    "air_care_temp_f": "Καλό: 62,6 < T < 80,6℉\n Κανονικό: 50≤T≤62,6℉,80,6≤T≤86℉\n Όχι καλό: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Καλό: H < 70%\n Κανονικό: 70≤H≤80%\n Όχι καλό: H＞80%",
+    "CL_CF_RM_change_floor_key": "αλλαγή ορόφου",
+    "CL_CF_FM_recently_added": "Προστέθηκε πρόσφατα",
+    "CL_CF_FM_no_matching_items": "Δεν υπάρχουν αντικείμενα που ταιριάζουν",
+    "CL_CF_FM_search_stored_food": "Αναζήτηση Αποθηκευμένων Τροφίμων",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "κοινοποίηση",
+    "CL_CF_FM_a_day_ago": "Μια μέρα πριν",
+    "CL_CF_FM_a_week_ago": "Πριν μια εβδομάδα",
+    "CL_CF_FM_a_month_ago": "Πριν από ένα μήνα",
+    "CL_CF_FM_a_year_ago": "Πριν ένα χρόνο",
+    "CL_CF_FM_x_days_ago": "** πριν από μέρες",
+    "CL_CF_FM_x_weeks_ago": "** πριν από εβδομάδες",
+    "CL_CF_FM_x_months_ago": "** μήνες πριν",
+    "CL_CF_FM_x_years_ago": "** πριν από χρόνια",
+    "CL_CF_FM_shopping_list_details": "Στοιχεία λίστας αγορών",
+    "CL_CF_FM_no_shopping_list": "Δεν υπάρχει λίστα αγορών",
+    "CL_DV_OV_24_time_zone": "Ζώνη ώρας",
+    "CL_CF_FM_reset_purchased_tips": "Θέλετε να επαναφέρετε όλα τα τρόφιμα σε αυτήν τη λίστα στην κατάσταση των μη αγορασμένων;",
+    "CL_CF_FM_add_food_to_x": "Προσθέστε φαγητό στο \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Προσθέστε το φαγητό που θα αγοράσετε",
+    "CL_DV_OV_24_always_on": "Πάντα ενεργό",
+    "CL_CF_CS_separated_ac_cs_step2": "Πατήστε το κουμπί \"Οριζόντια αιώρηση\" για 6 φορές στο τηλεχειριστήριο. Ή πατήστε το κουμπί \"Sleep\" 8 φορές στο ενσύρματο τηλεχειριστήριο.",
+    "CL_CF_FM_list": "Λίστα",
+    "CL_CF_FM_select_shopping_list": "Επιλέξτε Λίστα αγορών",
+    "CL_CF_FM_x_items_added": "** Προστέθηκαν στοιχεία",
+    "CL_CF_FM_create_shopping_list_first": "Πρέπει πρώτα να δημιουργήσετε μια λίστα αγορών.",
+    "CL_CF_FM_no_shopping_list_available": "Δεν υπάρχει διαθέσιμη λίστα αγορών!",
+    "CL_DV_OV_extra_drying_desc": "Το στέγνωμα ή η αφυδάτωση των τροφίμων αφαιρεί την υγρασία από τα τρόφιμα για να βελτιώσει τη διάρκεια ζωής. Αυτό είναι ένα προτεινόμενο πρόγραμμα. Μπορείτε να το αλλάξετε σύμφωνα με τις προτιμήσεις σας.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Η αποξήρανση είναι η πιο εύκολη μέθοδος συντήρησης των βοτάνων. Χρησιμοποιώντας ζεστό και ξηρό αέρα, η υγρασία εξατμίζεται. Αυτό βοηθά τα φύλλα, τα άνθη ή τους σπόρους να διατηρήσουν το χρώμα και τη γεύση τους.",
+    "CL_DV_OV_extra_pasteurization_desc": "Μια ήπια θερμική επεξεργασία εφαρμόζεται στα τρόφιμα για να σκοτώσει τα επιβλαβή βακτήρια και να παρατείνει τη διάρκεια ζωής. Μπορεί να χρησιμοποιηθεί για τη συντήρηση τροφίμων όπως γαλακτοκομικά προϊόντα, προϊόντα αυγών, ξηρούς καρπούς.",
+    "CL_DV_OV_extra_canning_desc": "Η κονσερβοποίηση επιτρέπει τη διατήρηση των τροφίμων από αλλοίωση και αποστείρωση με θερμότητα. Βεβαιωθείτε ότι τα τρόφιμα αποθηκεύονται σε δοχεία που είναι ερμητικά κλεισμένα.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Ένα αποτελεσματικό πρόγραμμα για γρήγορη και ασφαλή απόψυξη κατεψυγμένων τροφίμων. Είναι ιδιαίτερα χρήσιμο για μια ποικιλία τροφίμων, από κρέατα και λαχανικά μέχρι προμαγειρεμένα γεύματα.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Ξεπαγώνει αποτελεσματικά τα κατεψυγμένα τρόφιμα συνδυάζοντας την ήπια θερμότητα με τη φυσική υγρασία του ατμού. Ο ατμός βοηθά στη διατήρηση των επιπέδων υγρασίας του φαγητού, διατηρώντας την υφή και τη γεύση του. Αυτό είναι ιδιαίτερα χρήσιμο για ευαίσθητα τρόφιμα όπως ψάρια, αρτοσκευάσματα ή ψωμί.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Με αυτή τη λειτουργία, ο αέρας κυκλοφορεί με τη βοήθεια του ανεμιστήρα. Δεν είναι ενεργοποιημένα στοιχεία θερμότητας. Χρησιμοποιήστε αυτή τη ρύθμιση για να ξεπαγώσετε κατεψυγμένα πιάτα, όπως κέικ, ψωμί και φρούτα.",
+    "CL_DV_OV_extra_plate_warming_desc": "Ζεσταίνουμε τις πλάκες στην επιθυμητή θερμοκρασία. Αυτό βοηθά τα πιάτα στα πιάτα να παραμείνουν πιο ζεστά για μεγαλύτερο χρονικό διάστημα.",
+    "CL_DV_OV_extra_oshibori_desc": "Ζεσταίνει απαλά τις πετσέτες χεριών oshibori, θερμαίνοντάς τις σε μια άνετη θερμοκρασία.",
+    "CL_DV_OV_extra_hot_stone_desc": "Σχεδιασμένο για θεραπείες που μοιάζουν με σπα. Οι πέτρες θερμαίνονται ομοιόμορφα στην τέλεια θερμοκρασία, καθιστώντας τις έτοιμες για χρήση σε ρουτίνες χαλάρωσης ή ευεξίας.",
+    "CL_DV_OV_extra_sterilizing_desc": "Απολυμάνετε αντικείμενα όπως μπιμπερό, μαγειρικά σκεύη ή μικρά εργαλεία. Ο φούρνος φτάνει σε θερμοκρασίες επαρκείς για την εξάλειψη βακτηρίων και άλλων παθογόνων μικροοργανισμών, παρέχοντας έναν απλό και αποτελεσματικό τρόπο διατήρησης της καθαριότητας και της υγιεινής.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Χρησιμοποιεί ατμό για να ξαναζεστάνει απαλά τα τρόφιμα, αποκαθιστώντας την υγρασία και τη φρεσκάδα τους. Ιδανικό για ευαίσθητα πιάτα όπως ζυμαρικά, ρύζι ή κατσαρόλες, καθώς διασφαλίζει ότι το ζεστό φαγητό διατηρεί την αρχική του υφή και γεύση χωρίς να στεγνώνει.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Συνδυάζοντας τα οφέλη τόσο του ζεστού αέρα όσο και του ατμού, αυτό το πρόγραμμα είναι ιδανικό για το ζέσταμα μεγάλης ποικιλίας φαγητών. Ο ζεστός αέρας παρέχει ομοιόμορφη θέρμανση, ενώ ο ατμός προσθέτει υγρασία, καθιστώντας τον ιδανικό για πιάτα όπως κρέας, πουλερικά ή ανάμεικτα γεύματα, διασφαλίζοντας ότι παραμένουν ζουμερά και γευστικά.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Ιδανικό για φαγητά που χρειάζονται ένα τραγανό εξωτερικό, αυτό το πρόγραμμα χρησιμοποιεί ζεστό αέρα για να ζεσταίνει ομοιόμορφα πιάτα όπως πίτσα, αρτοσκευάσματα ή ψητά λαχανικά. Ο ζεστός αέρας που κυκλοφορεί διασφαλίζει ότι τα τρόφιμα θερμαίνονται καλά ενώ διατηρεί ένα τραγανό φινίρισμα.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Ζεστάνετε γρήγορα το φαγητό από μέσα προς τα έξω. Είναι μια γρήγορη και αποτελεσματική επιλογή για το ζέσταμα των γευμάτων. Ιδανικό για σούπες, μαγειρευτά ή υπολείμματα που χρειάζονται γρήγορο ζέσταμα.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Διατηρήστε το φαγητό στην τέλεια θερμοκρασία σερβιρίσματος χωρίς περαιτέρω μαγείρεμα. Ιδανικό για να διατηρείτε τα πιάτα ζεστά μέχρι να είναι έτοιμα για σερβίρισμα. Είναι ιδανικό για γεύματα που προετοιμάζονται εκ των προτέρων, διασφαλίζοντας ότι παραμένουν ζεστά και έτοιμα για απόλαυση.",
+    "CL_DV_OV_ends_at": "Λήγει στις: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Απολαύστε τις νόστιμες, καπνιστές γεύσεις των ψημένων πιάτων χωρίς να χρειάζεστε εξωτερική ψησταριά. Κατασκευασμένο για να κατανέμει ομοιόμορφα τη θερμότητα σε ολόκληρη την περιοχή του, ελαχιστοποιώντας τα hot spot και διασφαλίζοντας σταθερά αποτελέσματα ψησίματος. Ιδανικό για ψήσιμο στη σχάρα ποικίλων φαγητών, από κρέατα και λαχανικά μέχρι θαλασσινά, ακόμη και φρούτα.",
+    "CL_DV_OV_remote_start_title": "Η απομακρυσμένη εκκίνηση είναι απενεργοποιημένη",
+    "CL_DV_OV_remote_start_content": "Για να στείλετε και να ξεκινήσετε προγράμματα από την εφαρμογή σας, η απομακρυσμένη εκκίνηση θα πρέπει να είναι ενεργή. ",
+    "CL_CF_FM_apple": "Μήλο",
+    "CL_CF_FM_bacon": "Μπέικον",
+    "CL_CF_FM_broccoli": "Μπρόκολο",
+    "CL_CF_FM_cabbage": "Λάχανο",
+    "CL_CF_FM_Cauliflower": "Κουνουπίδι",
+    "CL_CF_FM_cod": "Γάδος",
+    "CL_CF_FM_dragon_fruit": "Φρούτο του Δράκου",
+    "CL_DV_OV_defrost_detail_desc": "Η σωστή απόψυξη των τροφίμων διασφαλίζει την ποιότητα των τροφίμων σας μετά την κατάψυξή τους. Η σωστή απόψυξη μειώνει τον κίνδυνο τροφικής δηλητηρίασης.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Τα μη φαγητά προγράμματα είναι φτιαγμένα για διάφορες μη μαγειρικές εργασίες, παρέχοντας ευκολία και λειτουργικότητα πέρα ​​από το παραδοσιακό μαγείρεμα.",
+    "CL_DV_OV_extra_warming_detail_desc": "Μια σειρά προγραμμάτων θέρμανσης για το ζέσταμα και το ζέσταμα των φαγητών, που διευκολύνουν την απόλαυση των γευμάτων, είτε ξαναζεσταίνετε τα υπολείμματα είτε κρατάτε ζεστά τα πιάτα για το σερβίρισμα.",
+    "CL_CF_FM_click_switch_status": "Κάντε κλικ για να αλλάξετε την κατάσταση του στοιχείου",
+    "CL_CF_FM_recent_purchased_tips": "Αγοράσατε αυτά τα πράγματα, θέλετε να τα προσθέσετε στο Απόθεμα Τροφίμων;",
+    "CL_DV_OV_extra_drying_herbs": "Ξήρανση βοτάνων",
+    "CL_DV_OV_extra_pasteurization": "Παστερίωση",
+    "CL_DV_OV_extra_canning": "Κονσερβοποίηση",
+    "CL_DV_OV_extra_defrost_microwave": "Απόψυξη με φούρνο μικροκυμάτων",
+    "CL_DV_OV_extra_defrost_stream": "Απόψυξη με ατμό",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "Hot Stones",
+    "CL_DV_OV_extra_sterilizing": "Αποστείρωση",
+    "CL_DV_OV_extra_warming_hotair_stream": "Ζεσταίνουμε με ζεστό αέρα + ατμό",
+    "CL_DV_OV_extra_warming_hotair": "Ζεσταίνετε ξανά με ζεστό αέρα",
+    "CL_DV_OV_extra_warming_microwave": "Ζεσταίνουμε ξανά με φούρνο μικροκυμάτων",
+    "CL_DV_OV_extra_warming_keepwarm": "Διατήρηση θερμοκρασίας",
+    "CL_CF_FM_dont_remind_in_3_months": "Μην το θυμίζεις σε 3 μήνες",
+    "CL_DV_RF_cleaning_plan": "Σχέδιο καθαρισμού",
+    "CL_DV_RF_cleaning_refrigerator": "Καθαρισμός Ψυγείου",
+    "CL_DV_RF_cleaning_reminder": "Υπενθύμιση καθαρισμού",
+    "CL_DV_RF_cleaning_cycle": "Κύκλος καθαρισμού",
+    "CL_DV_RF_cleaning_history": "Ιστορικό καθαρισμού",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Ο κύκλος καθαρισμού δεν έχει επιλεγεί",
+    "CL_DV_RF_havent_cleaned_yet": "Δεν έχεις καθαρίσει ακόμα.",
+    "CL_DV_RF_garbage_disposal_reminder": "Υπενθύμιση απόρριψης σκουπιδιών",
+    "CL_DV_RF_resource_waste": "Σπατάλη πόρων",
+    "CL_DV_RF_timer_not_selected": "Το χρονόμετρο δεν έχει επιλεγεί",
+    "CL_DV_RF_add_more_reminders": "Προσθέστε περισσότερες υπενθυμίσεις",
+    "CL_DV_RF_cleaning_tips": "Συμβουλές καθαρισμού",
+    "CL_DV_RF_last_clean_time": "Η τελευταία φορά που καθαρίσατε το ψυγείο ήταν ενεργοποιημένο : ***",
+    "CL_DV_RF_last_cleaning_was_today": "Ο τελευταίος καθαρισμός έγινε σήμερα.",
+    "CL_DV_RF_you_need_cleaning_now": "Χρειάζεσαι καθάρισμα τώρα.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Επόμενος καθαρισμός σε ** ημέρες.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Ο τελευταίος καθαρισμός έγινε πριν από ** μέρες.",
+    "CL_CF_CO_x_weeks": "Εβδομάδες",
+    "CL_DV_RF_cleaned": "Καθαρίστηκε",
+    "CL_DV_OV_probe_temperature_graph": "Γράφημα θερμοκρασίας ανιχνευτή",
+    "CL_DV_OV_internal": "Εσωτερικός",
+    "CL_DV_OV_probe_desc": "Ο αισθητήρας σας βοηθά να μετρήσετε τη θερμοκρασία του φαγητού σας. Μπορείτε να δείτε τις διαφορετικές θερμοκρασίες με την πάροδο του χρόνου.",
+    "CL_DV_RF_no_cleaning_history": "Χωρίς ιστορικό καθαρισμού"
 }
