--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -889,7 +889,7 @@
     "oven_atag_extras_defrost_content": "With this function, the air circulates with the aid of the fan. No heat elements are on. Use this setting to defrost frozen dishes such as cakes, bread, and fruit.",
     "oven_atag_extras_keep_warm": "KEEP WARM",
     "oven_atag_extras_keep_warm_content": "This function keeps the cooked dishes warm.",
-    "oven_atag_extras_plate_warming": "PLATE WARMING",
+    "oven_atag_extras_plate_warming": "Plate warming",
     "oven_atag_extras_plate_warming_content": "This function is used to preheat tableware, so that the served food stays hot longer.",
     "oven_atag_extras_steam_clean": "Steam clean",
     "oven_atag_extras_steam_clean_content": "Stains get soaked and can easily be removed with a cloth once the Steam Clean program is finished.",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Make sure your bluetooth is turned on.",
     "CL_DV_PIND_accessory_firmware_update": "Accessory firmware update",
     "CL_CF_CS_ble_scan_not_list": "If your device is not listed, you can click ‘TRY AGAIN’ to search again, or click ‘NEXT’ to configure network in another way.",
-    "CL_CF_CS_ble_scan_have_not_found": "We haven’t found any device on bluetooth.You can click ‘TRY AGAIN’ to search again,or click ‘NEXT’ to configure network in another way.",
+    "CL_CF_CS_ble_scan_have_not_found": "We haven’t found any device on bluetooth. You can click ‘TRY AGAIN’ to search again, or configure network in another way.",
     "CL_DV_WM_pump_cleaning": "Cleaning pump...",
     "CL_DV_WM_autodoes_tip": "Enable this feature and your device will smartly dispense detergent and fabric softener while you do your laundry.",
     "CL_DV_WM_detergent_department_key": "DETERGENT COMPARTMENT",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Unable to hide",
     "program_management_unable_to_hide_desc": "This is the last visible program and at least one program must be kept visible.",
     "CL_CF_FM_set_deadline": "Set a deadline",
-    "CL_CF_FM_expiry_date_must_be_selected": "Expiry date must be selected"
+    "CL_CF_FM_expiry_date_must_be_selected": "Expiry date must be selected",
+    "CL_CF_FM_add_custom_food_desc": "Add a new customized item",
+    "CL_CF_FM_delete_selected_items": "Delete Selected Items",
+    "CL_CF_FM_delete_selected": "Delete Selected",
+    "CL_DV_HOB_residual_heat_content": "The cooking zone is still hot. Be careful not to touch it.",
+    "CL_CF_FM_add_custom_food": "Add Food Not Included in The Library",
+    "air_care_temp_title": "Temperature evaluation standard:",
+    "air_care_hum_title": "Humidity evaluation standard:",
+    "air_care_temp_c": "Good: 17<T<27℃\nNormal: 10≤T≤17°C, 27≤T≤30°C\nNot good: T<10°C  T>30°C",
+    "air_care_temp_f": "Good: 62.6<T<80.6℉\nNormal: 50≤T≤62.6℉,80.6≤T≤86℉\nNot good: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Good: H<70%\nNormal: 70≤H≤80%\nNot good: H＞80%",
+    "CL_CF_RM_change_floor_key": "change floor",
+    "CL_CF_FM_recently_added": "Recently Added",
+    "CL_CF_FM_no_matching_items": "No Matching Items",
+    "CL_CF_FM_search_stored_food": "Search Stored Food",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "notification",
+    "CL_CF_FM_a_day_ago": "A day ago",
+    "CL_CF_FM_a_week_ago": "A week ago",
+    "CL_CF_FM_a_month_ago": "A month ago",
+    "CL_CF_FM_a_year_ago": "A year ago",
+    "CL_CF_FM_x_days_ago": "** days ago",
+    "CL_CF_FM_x_weeks_ago": "** weeks ago",
+    "CL_CF_FM_x_months_ago": "** months ago",
+    "CL_CF_FM_x_years_ago": "** years ago",
+    "CL_CF_FM_shopping_list_details": "Shopping List Details",
+    "CL_CF_FM_no_shopping_list": "No shopping list",
+    "CL_DV_OV_24_time_zone": "Time zone",
+    "CL_CF_FM_reset_purchased_tips": "Do you want to reset all the foods in this list to the status of not purchased ?",
+    "CL_CF_FM_add_food_to_x": "Add food to \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Add the food to be purchased",
+    "CL_DV_OV_24_always_on": "Always On",
+    "CL_CF_CS_separated_ac_cs_step2": "Press the \"Horizontal Swing\" button for 6 times on the remote controller.\u2028Or press the \"Sleep\" button 8 times in the wire remote controller.",
+    "CL_CF_FM_list": "List",
+    "CL_CF_FM_select_shopping_list": "Select Shopping List",
+    "CL_CF_FM_x_items_added": "** items have been added",
+    "CL_CF_FM_create_shopping_list_first": "You need to create a shopping list first.",
+    "CL_CF_FM_no_shopping_list_available": "No Shopping List Available !",
+    "CL_DV_OV_extra_drying_desc": "Drying or dehydrating food removes moisture from the food to improve shelf life. This is a recommended program. You can change it to your preference.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Drying is the easiest method of preserving herbs. By using warm and dry air, the moisture evaporates. This helps the leaves, flowers or seeds to keep their color and flavor.",
+    "CL_DV_OV_extra_pasteurization_desc": "A mild heat treatment is applied to the food to kill harmful bacteria and extend shelf life. It can be used to preserve food such as diary products, egg products, nuts.",
+    "CL_DV_OV_extra_canning_desc": "Canning allows for preserving food from spoilage  sterilising with heat. Make sure the food is stored in containers that are hermetically sealed.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "An efficient program to quickly and safely defrost frozen foods. It’s particularly useful for a variety of foods, from meats and vegetables to pre-cooked meals.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Thaws frozen foods effectively by combining gentle heat with the natural moisture of steam. The steam helps to maintain the food's moisture levels, preserving its texture and flavor. This is especially useful for delicate foods like fish, pastries, or bread.",
+    "CL_DV_OV_extra_fan_defrost_desc": "With this function, the air circulates with the aid of the fan. No heat elements are on. Use this setting to defrost frozen dishes such as cakes, bread, and fruit.",
+    "CL_DV_OV_extra_plate_warming_desc": "Heat the plates to the desired temperature. This helps the dishes on the plates remain warmer for a longer period of time.",
+    "CL_DV_OV_extra_oshibori_desc": "Gently warms oshibori hand towels, heating them to a comfortable temperature.",
+    "CL_DV_OV_extra_hot_stone_desc": "Designed for spa-like treatments. The stones are warmed evenly to the perfect temperature, making them ready for use in relaxation or wellness routines.",
+    "CL_DV_OV_extra_sterilizing_desc": "Sanitise items such as baby bottles, kitchen utensils, or small tools. The oven reaches temperatures sufficient to eliminate bacteria and other pathogens, providing a simple and effective way to maintain cleanliness and hygiene.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Uses steam to gently reheat food, restoring its moisture and freshness. Ideal for delicate dishes like pasta, rice, or casseroles, as it ensures that reheated food retains its original texture and flavor without becoming dry.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Combining the benefits of both hot air and steam, this program is ideal for reheating a wide variety of foods. The hot air provides even heating, while the steam adds moisture, making it perfect for dishes like meat, poultry, or mixed meals, ensuring they stay juicy and flavorful.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Perfect for foods that need a crisp exterior, this program uses hot air to evenly reheat dishes such as pizza, baked goods, or roasted vegetables. The circulating hot air ensures that food is heated thoroughly while maintaining a crispy finish.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Quickly reheat food from the inside out. It’s a fast and efficient option to reheat meals. Perfect for soups, stews, or leftovers that need a quick warm-up.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Maintain food at the perfect serving temperature without further cooking. Ideal for keeping dishes warm until they are ready to be served. It’s perfect for meals that are prepared ahead of time, ensuring they stay hot and ready to enjoy.",
+    "CL_DV_OV_ends_at": "Ends at: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Enjoy the delicious, smoky flavors of grilled dishes without needing an outdoor grill. Crafted to distribute heat evenly across its entire area, minimising hot spots and ensuring consistent grilling results. Ideal for grilling a variety of foods, from meats and vegetables to seafood and even fruits.",
+    "CL_DV_OV_remote_start_title": "Remote start is disabled",
+    "CL_DV_OV_remote_start_content": "To send and start programs from your app, remote start should be active. ",
+    "CL_CF_FM_apple": "Apple",
+    "CL_CF_FM_bacon": "Bacon",
+    "CL_CF_FM_broccoli": "Broccoli",
+    "CL_CF_FM_cabbage": "Cabbage",
+    "CL_CF_FM_Cauliflower": "Cauliflower",
+    "CL_CF_FM_cod": "Cod",
+    "CL_CF_FM_dragon_fruit": "Dragon Fruit",
+    "CL_DV_OV_defrost_detail_desc": "Correctly thawing foods ensures the quality of your food after it has been frozen. Proper defrosting reduces the risk of food poisoning.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Non food programs are made for various non-culinary tasks, providing convenience and functionality beyond traditional cooking.",
+    "CL_DV_OV_extra_warming_detail_desc": "A range of warming programs for reheating and warming food, making it easy to enjoy meals, whether you're reheat leftovers or keeping dishes warm for serving.",
+    "CL_CF_FM_click_switch_status": "Click to switch the status of the item",
+    "CL_CF_FM_recent_purchased_tips": "You purchased these things, do you want to add therm to Food Inventory?",
+    "CL_DV_OV_extra_drying_herbs": "Drying Herbs",
+    "CL_DV_OV_extra_pasteurization": "Pasteurization",
+    "CL_DV_OV_extra_canning": "Canning",
+    "CL_DV_OV_extra_defrost_microwave": "Defrost with microwave",
+    "CL_DV_OV_extra_defrost_stream": "Defrost with steam",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "Hot Stones",
+    "CL_DV_OV_extra_sterilizing": "Sterilizing",
+    "CL_DV_OV_extra_warming_hotair_stream": "Reheat with hot air + steam",
+    "CL_DV_OV_extra_warming_hotair": "Reheat with hot air",
+    "CL_DV_OV_extra_warming_microwave": "Reheat with microwave",
+    "CL_DV_OV_extra_warming_keepwarm": "Keep warm",
+    "CL_CF_FM_dont_remind_in_3_months": "Don’t remind in 3 months",
+    "CL_DV_RF_cleaning_plan": "Cleaning Plan",
+    "CL_DV_RF_cleaning_refrigerator": "Cleaning Refrigerator",
+    "CL_DV_RF_cleaning_reminder": "Cleaning reminder",
+    "CL_DV_RF_cleaning_cycle": "Cleaning cycle",
+    "CL_DV_RF_cleaning_history": "Cleaning history",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Cleaning cycle not selected",
+    "CL_DV_RF_havent_cleaned_yet": "You haven't cleaned yet.",
+    "CL_DV_RF_garbage_disposal_reminder": "Garbage disposal reminder",
+    "CL_DV_RF_resource_waste": "Resource waste",
+    "CL_DV_RF_timer_not_selected": "Timer not selected",
+    "CL_DV_RF_add_more_reminders": "Add more reminders",
+    "CL_DV_RF_cleaning_tips": "Cleaning tips",
+    "CL_DV_RF_last_clean_time": "The last time you cleaned the refrigerator was on : ***",
+    "CL_DV_RF_last_cleaning_was_today": "The last cleaning was today.",
+    "CL_DV_RF_you_need_cleaning_now": "You need cleaning now.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Next cleaning in ** days.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "The last cleaning was ** days ago.",
+    "CL_CF_CO_x_weeks": "Weeks",
+    "CL_DV_RF_cleaned": "Cleaned",
+    "CL_DV_OV_probe_temperature_graph": "Probe Temperature Graph",
+    "CL_DV_OV_internal": "Internal",
+    "CL_DV_OV_probe_desc": "The probe helps you measure the temperature of your food. You can see the different temperatures over time.",
+    "CL_DV_RF_no_cleaning_history": "No cleaning history"
 }
