--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -1676,7 +1676,7 @@
     "add_timing": "AGREGAR HORARIO",
     "set_start_to_finish_time": "Establecer horario de inicio y fin",
     "pair_pump_appliance": "Calentador de agua con bomba de calor",
-    "heat_pump": "Bomba de calor",
+    "heat_pump": "tablero inversor",
     "pump_boost_1": "Aumento de potencia 1",
     "pump_electric_heating": "Calefacción eléctrica",
     "pump_holiday_mode": "Vacaciones",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Conectado y encendido;\nEl Wi-Fi está activado y conectado;\nLa contraseña de Wi-Fi no se ha cambiado recientemente.",
     "dont_remind_again_uppercase": "NO VOLVER A RECORDAR",
     "storage_tips_title": "Consejos de almacenamiento :",
-    "heat_pump_oem": "Serie PRO DHW",
+    "heat_pump_oem": "ACS de velocidad fija",
     "td22_drying_empty_water_tank": "Secado - Depósito de agua vacío",
     "td22_drying_paused": "Secado en pausa",
     "td22_drying_finished": "Secado finalizado",
@@ -2430,7 +2430,7 @@
     "logout_tips": "¿Estás segura de que quieres cerrar sesión?",
     "fridge_child_lock_open_tips": "Una vez abierto el seguro para niños, la pantalla táctil y el dispensador quedarán bloqueados.",
     "want_scan_code_tips": "Quiero escanear el código.",
-    "tri_name_key": "Bomba de calor Aire-Agua Inverter",
+    "tri_name_key": "Bomba de calor ATW Pro",
     "water_set_key": "TEMPERATURA DEL AGUA",
     "f_e_fan_fault_tip": "Fallo del ventilador de CC",
     "zone_water_key": "Agua Zona1",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Asegúrese de que su bluetooth esté encendido.",
     "CL_DV_PIND_accessory_firmware_update": "Actualización del firmware de los accesorios",
     "CL_CF_CS_ble_scan_not_list": "Si su dispositivo no está en la lista, puede hacer clic en “INTENTAR OTRA VEZ” para buscar nuevamente o hacer clic en “SIGUIENTE” para configurar la red de otra manera.",
-    "CL_CF_CS_ble_scan_have_not_found": "No hemos encontrado ningún dispositivo en bluetooth. Puede hacer clic en \"INTENTAR OTRA VEZ\" para buscar nuevamente o hacer clic en \"SIGUIENTE\" para configurar la red de otra manera.",
+    "CL_CF_CS_ble_scan_have_not_found": "No hemos encontrado ningún dispositivo con bluetooth. Puedes hacer clic en 'INTENTAR DE NUEVO' para volver a buscar, o configurar la red de otra manera.",
     "CL_DV_WM_pump_cleaning": "Bomba de limpieza...",
     "CL_DV_WM_autodoes_tip": "Habilite esta función y su dispositivo dispensará de manera inteligente detergente y suavizante de telas mientras lava su ropa.",
     "CL_DV_WM_detergent_department_key": "COMPARTIMENTO DE DETERGENTE",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Incapaz de ocultarse",
     "program_management_unable_to_hide_desc": "Este es el último programa visible y al menos un programa debe mantenerse visible.",
     "CL_CF_FM_set_deadline": "Establezca una fecha límite",
-    "CL_CF_FM_expiry_date_must_be_selected": "Se debe seleccionar la fecha de caducidad"
+    "CL_CF_FM_expiry_date_must_be_selected": "Se debe seleccionar la fecha de caducidad",
+    "CL_CF_FM_add_custom_food_desc": "Añadir un nuevo elemento personalizado",
+    "CL_CF_FM_delete_selected_items": "Eliminar elementos seleccionados",
+    "CL_CF_FM_delete_selected": "Eliminar seleccionados",
+    "CL_DV_HOB_residual_heat_content": "La zona de cocción aún está caliente. Tenga cuidado de no tocarla.",
+    "CL_CF_FM_add_custom_food": "Añadir alimentos no incluidos en la biblioteca",
+    "air_care_temp_title": "Estándar de evaluación de temperatura:",
+    "air_care_hum_title": "Norma de evaluación de humedad:",
+    "air_care_temp_c": "Bueno: 17 < T < 27℃\n Normal: 10≤T≤17°C, 27≤T≤30°C\n No es bueno: T < 10°CT > 30°C",
+    "air_care_temp_f": "Bueno: 62,6 < T < 80,6 ℉\n Normal: 50≤T≤62,6℉,80,6≤T≤86℉\n No es bueno: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Bueno: H < 70%\n Normal: 70≤H≤80%\n No es bueno: H > 80 %",
+    "CL_CF_RM_change_floor_key": "cambiar de piso",
+    "CL_CF_FM_recently_added": "Añadido recientemente",
+    "CL_CF_FM_no_matching_items": "No hay elementos coincidentes",
+    "CL_CF_FM_search_stored_food": "Buscar alimentos almacenados",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "notificación",
+    "CL_CF_FM_a_day_ago": "Hace un día",
+    "CL_CF_FM_a_week_ago": "Hace una semana",
+    "CL_CF_FM_a_month_ago": "Hace un mes",
+    "CL_CF_FM_a_year_ago": "Hace un año",
+    "CL_CF_FM_x_days_ago": "**hace días",
+    "CL_CF_FM_x_weeks_ago": "** Hace semanas",
+    "CL_CF_FM_x_months_ago": "** Hace meses",
+    "CL_CF_FM_x_years_ago": "** hace años que",
+    "CL_CF_FM_shopping_list_details": "Detalles de la lista de compras",
+    "CL_CF_FM_no_shopping_list": "Sin lista de compras",
+    "CL_DV_OV_24_time_zone": "Huso horario",
+    "CL_CF_FM_reset_purchased_tips": "¿Quieres restablecer todos los alimentos de esta lista al estado de no comprados?",
+    "CL_CF_FM_add_food_to_x": "Añadir comida a \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Añade el alimento a comprar",
+    "CL_DV_OV_24_always_on": "Siempre encendido",
+    "CL_CF_CS_separated_ac_cs_step2": "Presione el botón \"Horizontal Swing\" (Oscilación horizontal) 6 veces en el control remoto o presione el botón \"Sleep\" (Dormir) 8 veces en el control remoto con cable.",
+    "CL_CF_FM_list": "Lista",
+    "CL_CF_FM_select_shopping_list": "Seleccionar lista de compras",
+    "CL_CF_FM_x_items_added": "**Se han añadido artículos.",
+    "CL_CF_FM_create_shopping_list_first": "Primero debes crear una lista de compras.",
+    "CL_CF_FM_no_shopping_list_available": "¡No hay lista de compras disponible!",
+    "CL_DV_OV_extra_drying_desc": "El secado o deshidratación de alimentos elimina la humedad de los alimentos para mejorar su vida útil. Este es un programa recomendado. Puede cambiarlo según sus preferencias.",
+    "CL_DV_OV_extra_drying_herbs_desc": "El secado es el método más sencillo para conservar las hierbas. Al utilizar aire cálido y seco, la humedad se evapora. Esto ayuda a que las hojas, flores o semillas conserven su color y sabor.",
+    "CL_DV_OV_extra_pasteurization_desc": "Se aplica un tratamiento térmico suave a los alimentos para eliminar las bacterias dañinas y prolongar su vida útil. Se puede utilizar para conservar alimentos como productos lácteos, ovoproductos y frutos secos.",
+    "CL_DV_OV_extra_canning_desc": "El envasado permite preservar los alimentos del deterioro esterilizándolos con calor. Asegúrese de que los alimentos se almacenen en recipientes herméticamente cerrados.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Un programa eficaz para descongelar alimentos congelados de forma rápida y segura. Es especialmente útil para una variedad de alimentos, desde carnes y verduras hasta platos precocinados.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Descongela eficazmente los alimentos congelados combinando un calor suave con la humedad natural del vapor. El vapor ayuda a mantener los niveles de humedad de los alimentos, preservando su textura y sabor. Esto es especialmente útil para alimentos delicados como pescado, pasteles o pan.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Con esta función, el aire circula con la ayuda del ventilador. No se enciende ningún elemento calefactor. Utilice este ajuste para descongelar platos congelados, como pasteles, pan y fruta.",
+    "CL_DV_OV_extra_plate_warming_desc": "Calienta las placas a la temperatura deseada. Esto ayuda a que los platos que están sobre ellas permanezcan calientes durante más tiempo.",
+    "CL_DV_OV_extra_oshibori_desc": "Calienta suavemente las toallas de mano oshibori, calentándolas a una temperatura confortable.",
+    "CL_DV_OV_extra_hot_stone_desc": "Diseñado para tratamientos tipo spa. Las piedras se calientan de manera uniforme a la temperatura perfecta, lo que las deja listas para su uso en rutinas de relajación o bienestar.",
+    "CL_DV_OV_extra_sterilizing_desc": "Higieniza objetos como biberones, utensilios de cocina o pequeños utensilios. El horno alcanza temperaturas suficientes para eliminar bacterias y otros patógenos, lo que supone una forma sencilla y eficaz de mantener la limpieza y la higiene.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Utiliza vapor para recalentar suavemente los alimentos, recuperando su humedad y frescura. Ideal para platos delicados como pasta, arroz o guisos, ya que garantiza que los alimentos recalentados conserven su textura y sabor originales sin resecarse.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Este programa, que combina los beneficios del aire caliente y del vapor, es ideal para recalentar una amplia variedad de alimentos. El aire caliente proporciona un calentamiento uniforme, mientras que el vapor agrega humedad, lo que lo hace perfecto para platos como carne, aves o comidas mixtas, ya que garantiza que se mantengan jugosos y sabrosos.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Perfecto para alimentos que necesitan un exterior crujiente, este programa utiliza aire caliente para recalentar de manera uniforme platos como pizza, productos horneados o verduras asadas. El aire caliente circulante garantiza que los alimentos se calienten por completo y mantengan un acabado crujiente.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Recalienta rápidamente los alimentos de adentro hacia afuera. Es una opción rápida y eficiente para recalentar comidas. Perfecta para sopas, guisos o sobras que necesitan calentarse rápidamente.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Mantiene los alimentos a la temperatura perfecta para servir sin necesidad de cocinarlos más. Ideal para mantener los platos calientes hasta que estén listos para servir. Es perfecto para comidas que se preparan con anticipación, ya que garantiza que se mantengan calientes y listas para disfrutar.",
+    "CL_DV_OV_ends_at": "Termina en: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Disfrute de los deliciosos sabores ahumados de los platos a la parrilla sin necesidad de una parrilla al aire libre. Diseñada para distribuir el calor de manera uniforme en toda su superficie, lo que minimiza los puntos calientes y garantiza resultados de cocción uniformes. Ideal para asar una variedad de alimentos, desde carnes y verduras hasta mariscos e incluso frutas.",
+    "CL_DV_OV_remote_start_title": "El arranque remoto está deshabilitado",
+    "CL_DV_OV_remote_start_content": "Para enviar e iniciar programas desde su aplicación, el inicio remoto debe estar activo. ",
+    "CL_CF_FM_apple": "Manzana",
+    "CL_CF_FM_bacon": "Tocino",
+    "CL_CF_FM_broccoli": "Brócoli",
+    "CL_CF_FM_cabbage": "Repollo",
+    "CL_CF_FM_Cauliflower": "Coliflor",
+    "CL_CF_FM_cod": "Bacalao",
+    "CL_CF_FM_dragon_fruit": "Fruta del dragón",
+    "CL_DV_OV_defrost_detail_desc": "Descongelar correctamente los alimentos garantiza la calidad de los mismos una vez congelados. Una descongelación adecuada reduce el riesgo de intoxicación alimentaria.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Los programas no alimentarios están diseñados para diversas tareas no culinarias, proporcionando comodidad y funcionalidad más allá de la cocina tradicional.",
+    "CL_DV_OV_extra_warming_detail_desc": "Una gama de programas de calentamiento para recalentar y calentar alimentos, lo que hace que sea fácil disfrutar de las comidas, ya sea para recalentar sobras o mantener los platos calientes para servir.",
+    "CL_CF_FM_click_switch_status": "Haga clic para cambiar el estado del elemento",
+    "CL_CF_FM_recent_purchased_tips": "Compraste estas cosas, ¿quieres agregarlas al inventario de alimentos?",
+    "CL_DV_OV_extra_drying_herbs": "Secado de hierbas",
+    "CL_DV_OV_extra_pasteurization": "Pasteurización",
+    "CL_DV_OV_extra_canning": "Envase",
+    "CL_DV_OV_extra_defrost_microwave": "Descongelar con microondas",
+    "CL_DV_OV_extra_defrost_stream": "Descongelar con vapor",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "Piedras calientes",
+    "CL_DV_OV_extra_sterilizing": "Esterilizante",
+    "CL_DV_OV_extra_warming_hotair_stream": "Recalentar con aire caliente + vapor",
+    "CL_DV_OV_extra_warming_hotair": "Recalentar con aire caliente",
+    "CL_DV_OV_extra_warming_microwave": "Recalentar con microondas",
+    "CL_DV_OV_extra_warming_keepwarm": "Mantener caliente",
+    "CL_CF_FM_dont_remind_in_3_months": "No lo recuerdes en 3 meses",
+    "CL_DV_RF_cleaning_plan": "Plan de limpieza",
+    "CL_DV_RF_cleaning_refrigerator": "Limpieza del refrigerador",
+    "CL_DV_RF_cleaning_reminder": "Recordatorio de limpieza",
+    "CL_DV_RF_cleaning_cycle": "Ciclo de limpieza",
+    "CL_DV_RF_cleaning_history": "Historial de limpieza",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Ciclo de limpieza no seleccionado",
+    "CL_DV_RF_havent_cleaned_yet": "Aún no has limpiado.",
+    "CL_DV_RF_garbage_disposal_reminder": "Recordatorio de eliminación de basura",
+    "CL_DV_RF_resource_waste": "Desperdicio de recursos",
+    "CL_DV_RF_timer_not_selected": "Temporizador no seleccionado",
+    "CL_DV_RF_add_more_reminders": "Agregar más recordatorios",
+    "CL_DV_RF_cleaning_tips": "Consejos de limpieza",
+    "CL_DV_RF_last_clean_time": "La última vez que limpiaste el refrigerador fue en :***",
+    "CL_DV_RF_last_cleaning_was_today": "La última limpieza fue hoy.",
+    "CL_DV_RF_you_need_cleaning_now": "Necesitas limpieza ahora",
+    "CL_DV_RF_next_cleaning_in_x_days": "Próxima limpieza en ** días.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "La última limpieza fue hace ** días.",
+    "CL_CF_CO_x_weeks": "Semanas",
+    "CL_DV_RF_cleaned": "Limpiado",
+    "CL_DV_OV_probe_temperature_graph": "Gráfico de temperatura de la sonda",
+    "CL_DV_OV_internal": "Interno",
+    "CL_DV_OV_probe_desc": "La sonda te ayuda a medir la temperatura de tus alimentos. Puedes ver las diferentes temperaturas a lo largo del tiempo.",
+    "CL_DV_RF_no_cleaning_history": "Sin historial de limpieza"
 }
