--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -1676,7 +1676,7 @@
     "add_timing": "LISÄÄ AJOITUS",
     "set_start_to_finish_time": "Säädä aloitus-lopetusaika",
     "pair_pump_appliance": "Lämpöpumpun vedenlämmitin",
-    "heat_pump": "Lämpöpumppu",
+    "heat_pump": "Invertterikortti",
     "pump_boost_1": "Tehotila 1",
     "pump_electric_heating": "Sähkölämmitys",
     "pump_holiday_mode": "Loma",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Kytketty ja päällä;\nWi-Fi on aktivoitu ja yhdistetty;\nWi-Fi-salasanaa ei ole hiljattain muutettu.",
     "dont_remind_again_uppercase": "ÄLÄ MUISTA UUDELLEEN",
     "storage_tips_title": "Säilytysvinkkejä:",
-    "heat_pump_oem": "PRO-sarjan käyttövesi",
+    "heat_pump_oem": "Kiinteänopeuksinen käyttövesi",
     "td22_drying_empty_water_tank": "Kuivaus – Tyhjennä vesisäiliö",
     "td22_drying_paused": "Kuivaus keskeytetty",
     "td22_drying_finished": "Kuivaus päättynyt",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Haluatko varmasti kirjautua ulos?",
     "fridge_child_lock_open_tips": "Kun lapsilukko on avattu, kosketusnäyttö ja annostelija lukitaan.",
     "want_scan_code_tips": "Haluan skannata koodin.",
-    "tri_name_key": "ATW lämpöpumppu lämmitin",
+    "tri_name_key": "ATW Pro lämpöpumppu",
     "water_set_key": "VEDEN LÄMP",
     "f_e_fan_fault_tip": "DC-tuulettimen vika",
     "zone_water_key": "Alue 1 Vesi",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Varmista, että Bluetooth on päällä.",
     "CL_DV_PIND_accessory_firmware_update": "Lisävarusteiden laiteohjelmistopäivitys",
     "CL_CF_CS_ble_scan_not_list": "Jos laitettasi ei ole luettelossa, voit etsiä uudelleen napsauttamalla YRITÄ UUDELLEEN tai määrittää verkon muulla tavalla napsauttamalla SEURAAVA.",
-    "CL_CF_CS_ble_scan_have_not_found": "Emme löytäneet Bluetooth-laitetta. Voit etsiä uudelleen napsauttamalla YRITÄ UUDELLEEN tai määrittää verkon muulla tavalla napsauttamalla SEURAAVAA.",
+    "CL_CF_CS_ble_scan_have_not_found": "Emme ole löytäneet mitään bluetooth-laitetta. Voit etsiä uudelleen valitsemalla 'TRY AGAIN' tai määrittää verkon toisella tavalla.",
     "CL_DV_WM_pump_cleaning": "Pumpun puhdistus...",
     "CL_DV_WM_autodoes_tip": "Ota tämä ominaisuus käyttöön, niin laitteesi annostelee pesuainetta ja huuhteluainetta älykkäästi samalla, kun peset pyykkiä.",
     "CL_DV_WM_detergent_department_key": "PESUAINELOKERO",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Ei voi piiloutua",
     "program_management_unable_to_hide_desc": "Tämä on viimeinen näkyvä ohjelma ja vähintään yksi ohjelma on pidettävä näkyvissä.",
     "CL_CF_FM_set_deadline": "Aseta määräaika",
-    "CL_CF_FM_expiry_date_must_be_selected": "Viimeinen voimassaolopäivä on valittava"
+    "CL_CF_FM_expiry_date_must_be_selected": "Viimeinen voimassaolopäivä on valittava",
+    "CL_CF_FM_add_custom_food_desc": "Lisää uusi mukautettu kohde",
+    "CL_CF_FM_delete_selected_items": "Poista valitut kohteet",
+    "CL_CF_FM_delete_selected": "Poista valitut",
+    "CL_DV_HOB_residual_heat_content": "Keittoalue on edelleen kuuma. Varo koskemasta siihen.",
+    "CL_CF_FM_add_custom_food": "Lisää ruokaa, joka ei sisälly kirjastoon",
+    "air_care_temp_title": "Lämpötilan arviointistandardi:",
+    "air_care_hum_title": "Kosteuden arviointistandardi:",
+    "air_care_temp_c": "Hyvä: 17 < T < 27℃\n Normaali: 10≤T≤17°C, 27≤T≤30°C\n Ei hyvä: T < 10°CT > 30°C",
+    "air_care_temp_f": "Hyvä: 62,6 < T < 80,6 ℉\n Normaali: 50≤T≤62,6℉,80,6≤T≤86℉\n Ei hyvä: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Hyvä: H < 70 %\n Normaali: 70≤H≤80%\n Ei hyvä: H＞80%",
+    "CL_CF_RM_change_floor_key": "vaihtaa lattiaa",
+    "CL_CF_FM_recently_added": "Äskettäin lisätty",
+    "CL_CF_FM_no_matching_items": "Ei vastaavia kohteita",
+    "CL_CF_FM_search_stored_food": "Hae säilytettyä ruokaa",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "ilmoitus",
+    "CL_CF_FM_a_day_ago": "päivä sitten",
+    "CL_CF_FM_a_week_ago": "Viikko sitten",
+    "CL_CF_FM_a_month_ago": "Kuukausi sitten",
+    "CL_CF_FM_a_year_ago": "vuosi sitten",
+    "CL_CF_FM_x_days_ago": "** päivää sitten",
+    "CL_CF_FM_x_weeks_ago": "** viikkoa sitten",
+    "CL_CF_FM_x_months_ago": "** kuukautta sitten",
+    "CL_CF_FM_x_years_ago": "** vuotta sitten",
+    "CL_CF_FM_shopping_list_details": "Ostoslistan tiedot",
+    "CL_CF_FM_no_shopping_list": "Ei ostoslistaa",
+    "CL_DV_OV_24_time_zone": "Aikavyöhyke",
+    "CL_CF_FM_reset_purchased_tips": "Haluatko palauttaa kaikki tämän luettelon ruoat ostamatta oleviin?",
+    "CL_CF_FM_add_food_to_x": "Lisää ruokaa kohtaan \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Lisää ostettava ruoka",
+    "CL_DV_OV_24_always_on": "Pysyvästi",
+    "CL_CF_CS_separated_ac_cs_step2": "Paina \"Horizontal Swing\" -painiketta 6 kertaa kaukosäätimessä. Tai paina \"Sleep\"-painiketta 8 kertaa lankakaukosäätimessä.",
+    "CL_CF_FM_list": "Lista",
+    "CL_CF_FM_select_shopping_list": "Valitse Ostoslista",
+    "CL_CF_FM_x_items_added": "** kohteita on lisätty",
+    "CL_CF_FM_create_shopping_list_first": "Sinun on ensin luotava ostoslista.",
+    "CL_CF_FM_no_shopping_list_available": "Ostoslistaa ei ole saatavilla!",
+    "CL_DV_OV_extra_drying_desc": "Ruoan kuivaaminen tai kuivaus poistaa kosteutta ruoasta ja parantaa säilyvyyttä. Tämä on suositeltava ohjelma. Voit muuttaa sen mieleiseksesi.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Kuivaus on helpoin tapa säilöä yrttejä. Käytettäessä lämmintä ja kuivaa ilmaa kosteus haihtuu. Tämä auttaa lehtiä, kukkia tai siemeniä säilyttämään värinsä ja makunsa.",
+    "CL_DV_OV_extra_pasteurization_desc": "Elintarvikkeisiin sovelletaan lievää lämpökäsittelyä haitallisten bakteerien tappamiseksi ja säilyvyyden pidentämiseksi. Sitä voidaan käyttää elintarvikkeiden, kuten maitotuotteiden, munatuotteiden, pähkinöiden, säilöntään.",
+    "CL_DV_OV_extra_canning_desc": "Säilyke mahdollistaa ruokien säilyttämisen pilaantumiselta steriloimalla lämmöllä. Varmista, että ruokaa säilytetään hermeettisesti suljetuissa astioissa.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Tehokas ohjelma pakasteruokien nopeaan ja turvalliseen sulattamiseen. Se on erityisen hyödyllinen erilaisille elintarvikkeille lihasta ja vihanneksista esikeitettyihin aterioihin.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Sulata pakasteet tehokkaasti yhdistämällä lempeän lämmön ja höyryn luonnollisen kosteuden. Höyry auttaa ylläpitämään ruoan kosteustasoa, säilyttäen sen koostumuksen ja maun. Tämä on erityisen hyödyllistä herkille ruoille, kuten kalalle, leivonnaisille tai leivälle.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Tällä toiminnolla ilma kiertää tuulettimen avulla. Lämmityselementtejä ei ole päällä. Käytä tätä asetusta pakasteruokien, kuten kakkujen, leivän ja hedelmien, sulattamiseen.",
+    "CL_DV_OV_extra_plate_warming_desc": "Kuumenna levyt haluttuun lämpötilaan. Tämä auttaa lautasilla olevia ruokia pysymään lämpiminä pidemmän aikaa.",
+    "CL_DV_OV_extra_oshibori_desc": "Lämmittää oshibori-käsipyyhkeitä hellävaraisesti ja lämmittää ne miellyttävään lämpötilaan.",
+    "CL_DV_OV_extra_hot_stone_desc": "Suunniteltu kylpylämäisiin hoitoihin. Kivet lämmitetään tasaisesti täydelliseen lämpötilaan, joten ne ovat valmiita käytettäväksi rentoutumiseen tai hyvinvointiin.",
+    "CL_DV_OV_extra_sterilizing_desc": "Desinfioi esineet, kuten tuttipullot, keittiövälineet tai pienet työkalut. Uuni saavuttaa riittävän lämpötilan bakteerien ja muiden taudinaiheuttajien poistamiseksi, mikä tarjoaa yksinkertaisen ja tehokkaan tavan ylläpitää puhtautta ja hygieniaa.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Lämmittää ruoan varovasti höyryllä palauttaen sen kosteuden ja tuoreuden. Ihanteellinen herkille ruoille, kuten pastalle, riisille tai patoille, koska se varmistaa, että uudelleen lämmitetty ruoka säilyttää alkuperäisen koostumuksensa ja makunsa kuivumatta.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Tämä ohjelma, jossa yhdistyvät sekä kuuman ilman että höyryn edut, on ihanteellinen useiden erilaisten ruokien lämmittämiseen. Kuuma ilma lämmittää tasaisesti, kun taas höyry lisää kosteutta, mikä tekee siitä täydellisen liha-, siipikarja- tai seka-aterioiden kaltaisten ruokien, varmistaen, että ne pysyvät mehukkaina ja maukkaina.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Tämä ohjelma sopii täydellisesti elintarvikkeille, jotka tarvitsevat rapeaa ulkoa. Tämä ohjelma lämmittää kuumalla ilmalla ruokia, kuten pizzaa, leivonnaisia ​​tai paahdettuja vihanneksia, tasaisesti. Kierrättävä kuuma ilma varmistaa, että ruoka lämpenee perusteellisesti säilyttäen samalla rapean lopputuloksen.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Lämmitä ruoka nopeasti sisältä ulospäin. Se on nopea ja tehokas tapa lämmittää aterioita. Täydellinen keittoihin, muhennoksiin tai jäännöksiin, jotka tarvitsevat nopeaa lämmittelyä.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Säilytä ruoka täydellisessä tarjoilulämpötilassa ilman lisäkypsennystä. Ihanteellinen ruokien pitämiseen lämpiminä, kunnes ne ovat valmiita tarjoiluun. Se sopii täydellisesti etukäteen valmistettuihin aterioihin, mikä varmistaa, että ne pysyvät kuumina ja valmiina nautittavaksi.",
+    "CL_DV_OV_ends_at": "Päättyy: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Nauti grillattujen ruokien herkullisista savuisista mauista ilman ulkogrilliä. Suunniteltu jakamaan lämpöä tasaisesti koko alueelle, minimoiden kuumia kohtia ja varmistaen tasaisen grillaustuloksen. Ihanteellinen erilaisten ruokien grillaamiseen lihasta ja vihanneksista mereneläviin ja jopa hedelmiin.",
+    "CL_DV_OV_remote_start_title": "Etäkäynnistys on poistettu käytöstä",
+    "CL_DV_OV_remote_start_content": "Etäkäynnistyksen tulee olla aktiivinen, jotta voit lähettää ja käynnistää ohjelmia sovelluksestasi. ",
+    "CL_CF_FM_apple": "Omena",
+    "CL_CF_FM_bacon": "Pekoni",
+    "CL_CF_FM_broccoli": "Parsakaali",
+    "CL_CF_FM_cabbage": "Kaali",
+    "CL_CF_FM_Cauliflower": "Kukkakaali",
+    "CL_CF_FM_cod": "Turska",
+    "CL_CF_FM_dragon_fruit": "Dragon Fruit",
+    "CL_DV_OV_defrost_detail_desc": "Ruoan oikea sulattaminen varmistaa elintarvikkeiden laadun pakastamisen jälkeen. Oikea sulatus vähentää ruokamyrkytysriskiä.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Non food -ohjelmat on tehty erilaisiin ei-kulinaarisiin tehtäviin, mikä tarjoaa mukavuutta ja toimivuutta perinteisen ruoanlaiton lisäksi.",
+    "CL_DV_OV_extra_warming_detail_desc": "Valikoima lämmitysohjelmia ruoan uudelleenlämmittämiseen ja lämmittämiseen, mikä helpottaa aterioiden nauttimista riippumatta siitä, lämmitätkö ruoantähteet tai pidät astiat lämpiminä tarjoilua varten.",
+    "CL_CF_FM_click_switch_status": "Napsauta vaihtaaksesi kohteen tilaa",
+    "CL_CF_FM_recent_purchased_tips": "Ostit nämä tavarat, haluatko lisätä ne elintarvikevarastoon?",
+    "CL_DV_OV_extra_drying_herbs": "Yrttien kuivaus",
+    "CL_DV_OV_extra_pasteurization": "Pastörointi",
+    "CL_DV_OV_extra_canning": "Umpiointi",
+    "CL_DV_OV_extra_defrost_microwave": "Sulata mikroaaltouunilla",
+    "CL_DV_OV_extra_defrost_stream": "Sulata höyryllä",
+    "CL_DV_OV_extra_oshibori": "Oshibori-pyyhkeet",
+    "CL_DV_OV_extra_hot_stones": "Kuumat kivet",
+    "CL_DV_OV_extra_sterilizing": "Sterilointi",
+    "CL_DV_OV_extra_warming_hotair_stream": "Kuumenna kuumalla ilmalla + höyryllä",
+    "CL_DV_OV_extra_warming_hotair": "Kuumenna kuumalla ilmalla",
+    "CL_DV_OV_extra_warming_microwave": "Lämmitys mikroaaltouunilla",
+    "CL_DV_OV_extra_warming_keepwarm": "Lämpimänä pito",
+    "CL_CF_FM_dont_remind_in_3_months": "Älä muistuta 3 kuukauden kuluttua",
+    "CL_DV_RF_cleaning_plan": "Puhdistussuunnitelma",
+    "CL_DV_RF_cleaning_refrigerator": "Jääkaapin puhdistus",
+    "CL_DV_RF_cleaning_reminder": "Puhdistusmuistutus",
+    "CL_DV_RF_cleaning_cycle": "Puhdistusjakso",
+    "CL_DV_RF_cleaning_history": "Siivoushistoria",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Puhdistusjaksoa ei ole valittu",
+    "CL_DV_RF_havent_cleaned_yet": "Et ole vielä siivonnut.",
+    "CL_DV_RF_garbage_disposal_reminder": "Jätehuoltomuistutus",
+    "CL_DV_RF_resource_waste": "Resurssien tuhlausta",
+    "CL_DV_RF_timer_not_selected": "Ajastin ei valittu",
+    "CL_DV_RF_add_more_reminders": "Lisää muistutuksia",
+    "CL_DV_RF_cleaning_tips": "Siivousvinkkejä",
+    "CL_DV_RF_last_clean_time": "Viimeksi siivosit jääkaapin päällä:***",
+    "CL_DV_RF_last_cleaning_was_today": "Viimeinen siivous oli tänään.",
+    "CL_DV_RF_you_need_cleaning_now": "Tarvitset puhdistusta nyt.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Seuraava siivous ** päivän päästä.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Viimeisin siivous oli ** päivää sitten.",
+    "CL_CF_CO_x_weeks": "Viikot",
+    "CL_DV_RF_cleaned": "Puhdistettu",
+    "CL_DV_OV_probe_temperature_graph": "Anturin lämpötilakaavio",
+    "CL_DV_OV_internal": "Sisäinen",
+    "CL_DV_OV_probe_desc": "Anturin avulla voit mitata ruoan lämpötilan. Voit nähdä eri lämpötilat ajan mittaan.",
+    "CL_DV_RF_no_cleaning_history": "Ei puhdistushistoriaa"
 }
