--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -1676,7 +1676,7 @@
     "add_timing": "הוסף תזמון",
     "set_start_to_finish_time": "הגדר את זמן ההתחלה לסיום",
     "pair_pump_appliance": "מחמם מים עם משאבת חום",
-    "heat_pump": "משאבת חום",
+    "heat_pump": "לוח אינוורטר",
     "pump_boost_1": "בוסט 1",
     "pump_electric_heating": "חימום חשמלי",
     "pump_holiday_mode": "חַג",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "מחובר ומופעל;\nה-Wi-Fi מופעל ומחובר;\nסיסמת ה-Wi-Fi לא שונתה לאחרונה.",
     "dont_remind_again_uppercase": "אל תזכיר שוב",
     "storage_tips_title": "עצות אחסון:",
-    "heat_pump_oem": "סדרת PRO DHW",
+    "heat_pump_oem": "DHW במהירות קבועה",
     "td22_drying_empty_water_tank": "ייבוש - מיכל מים ריק",
     "td22_drying_paused": "הייבוש הושהה",
     "td22_drying_finished": "הייבוש הסתיים",
@@ -2430,7 +2430,7 @@
     "logout_tips": "האם אתה בטוח שברצונך להתנתק?",
     "fridge_child_lock_open_tips": "לאחר פתיחת נעילת הילדים, מסך המגע והמתקן יינעלו.",
     "want_scan_code_tips": "אני רוצה לסרוק קוד.",
-    "tri_name_key": "מחמם משאבת חום ATW",
+    "tri_name_key": "משאבת חום ATW Pro",
     "water_set_key": "טמפרטורת המים",
     "f_e_fan_fault_tip": "כשל במאוורר DC",
     "zone_water_key": "אזור 1 מים",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "ודא שה-Bluetooth שלך מופעל.",
     "CL_DV_PIND_accessory_firmware_update": "עדכון קושחת אביזרים",
     "CL_CF_CS_ble_scan_not_list": "אם המכשיר שלך אינו מופיע ברשימה, תוכל ללחוץ על 'נסה שוב' כדי לחפש שוב, או ללחוץ על 'הבא' כדי להגדיר את הרשת בדרך אחרת.",
-    "CL_CF_CS_ble_scan_have_not_found": "לא מצאנו שום מכשיר ב-Bluetooth. אתה יכול ללחוץ על 'נסה שוב' כדי לחפש שוב, או ללחוץ על 'הבא' כדי להגדיר את הרשת בדרך אחרת.",
+    "CL_CF_CS_ble_scan_have_not_found": "לא מצאנו שום מכשיר ב-Bluetooth. אתה יכול ללחוץ על 'נסה שוב' כדי לחפש שוב, או להגדיר את הרשת בדרך אחרת.",
     "CL_DV_WM_pump_cleaning": "משאבת ניקוי...",
     "CL_DV_WM_autodoes_tip": "הפעל תכונה זו והמכשיר שלך יוציא בצורה חכמה חומר ניקוי ומרכך כביסה בזמן שאתה מכבס.",
     "CL_DV_WM_detergent_department_key": "תא חומרי ניקוי",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "לא מצליח להסתיר",
     "program_management_unable_to_hide_desc": "זוהי התוכנית הגלויה האחרונה ולפחות תוכנית אחת חייבת להיות גלויה.",
     "CL_CF_FM_set_deadline": "קבע תאריך יעד",
-    "CL_CF_FM_expiry_date_must_be_selected": "יש לבחור תאריך תפוגה"
+    "CL_CF_FM_expiry_date_must_be_selected": "יש לבחור תאריך תפוגה",
+    "CL_CF_FM_add_custom_food_desc": "הוסף פריט מותאם אישית חדש",
+    "CL_CF_FM_delete_selected_items": "מחק פריטים נבחרים",
+    "CL_CF_FM_delete_selected": "מחק את נבחרות",
+    "CL_DV_HOB_residual_heat_content": "אזור הבישול עדיין חם. היזהר לא לגעת בו.",
+    "CL_CF_FM_add_custom_food": "הוסף מזון שאינו כלול בספרייה",
+    "air_care_temp_title": "תקן להערכת טמפרטורה:",
+    "air_care_hum_title": "תקן להערכת לחות:",
+    "air_care_temp_c": "טוב: 17 < T < 27℃\n רגיל: 10≤T≤17°C, 27≤T≤30°C\n לא טוב: T < 10°CT > 30°C",
+    "air_care_temp_f": "טוב: 62.6 < T < 80.6℉\n רגיל: 50≤T≤62.6℉, 80.6≤T≤86℉\n לא טוב: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "טוב: H < 70%\n רגיל: 70≤H≤80%\n לא טוב: H＞80%",
+    "CL_CF_RM_change_floor_key": "לשנות קומה",
+    "CL_CF_FM_recently_added": "נוספו לאחרונה",
+    "CL_CF_FM_no_matching_items": "אין פריטים תואמים",
+    "CL_CF_FM_search_stored_food": "חפש מזון מאוחסן",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "הוֹדָעָה",
+    "CL_CF_FM_a_day_ago": "לפני יום",
+    "CL_CF_FM_a_week_ago": "לפני שבוע",
+    "CL_CF_FM_a_month_ago": "לפני חודש",
+    "CL_CF_FM_a_year_ago": "לפני שנה",
+    "CL_CF_FM_x_days_ago": "** לפני ימים",
+    "CL_CF_FM_x_weeks_ago": "**לפני שבועות",
+    "CL_CF_FM_x_months_ago": "** לפני חודשים",
+    "CL_CF_FM_x_years_ago": "** לפני שנים",
+    "CL_CF_FM_shopping_list_details": "פרטי רשימת קניות",
+    "CL_CF_FM_no_shopping_list": "אין רשימת קניות",
+    "CL_DV_OV_24_time_zone": "אזור זמן",
+    "CL_CF_FM_reset_purchased_tips": "האם ברצונך לאפס את כל המזונות ברשימה זו למצב של לא נרכש?",
+    "CL_CF_FM_add_food_to_x": "הוסף אוכל ל-\"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "הוסף את האוכל לרכישה",
+    "CL_DV_OV_24_always_on": "תמיד פועל",
+    "CL_CF_CS_separated_ac_cs_step2": "לחץ על כפתור \"הנדנדה אופקית\" במשך 6 פעמים בשלט הרחוק. או לחץ על כפתור \"שינה\" 8 פעמים בשלט הרחוק החוט.",
+    "CL_CF_FM_list": "רְשִׁימָה",
+    "CL_CF_FM_select_shopping_list": "בחר רשימת קניות",
+    "CL_CF_FM_x_items_added": "** פריטים נוספו",
+    "CL_CF_FM_create_shopping_list_first": "תחילה עליך ליצור רשימת קניות.",
+    "CL_CF_FM_no_shopping_list_available": "אין רשימת קניות זמינה!",
+    "CL_DV_OV_extra_drying_desc": "ייבוש או התייבשות מזון מסירים לחות מהמזון כדי לשפר את חיי המדף. זוהי תוכנית מומלצת. אתה יכול לשנות את זה לפי העדפתך.",
+    "CL_DV_OV_extra_drying_herbs_desc": "ייבוש הוא השיטה הקלה ביותר לשימור עשבי תיבול. על ידי שימוש באוויר חם ויבש, הלחות מתאדה. זה עוזר לעלים, לפרחים או לזרעים לשמור על צבעם וטעמם.",
+    "CL_DV_OV_extra_pasteurization_desc": "טיפול חום עדין מוחל על המזון כדי להרוג חיידקים מזיקים ולהאריך את חיי המדף. ניתן להשתמש בו לשימור מזון כגון מוצרי יומן, מוצרי ביצים, אגוזים.",
+    "CL_DV_OV_extra_canning_desc": "שימורים מאפשרים שימור מזון מפני קלקול עיקור בחום. יש לוודא שהמזון מאוחסן במיכלים סגורים הרמטית.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "תוכנית יעילה להפשרה מהירה ובטוחה של מזון קפוא. זה שימושי במיוחד עבור מגוון מאכלים, מבשרים וירקות ועד ארוחות מבושלות מראש.",
+    "CL_DV_OV_extra_stream_defrost_desc": "מפשיר מזון קפוא ביעילות על ידי שילוב חום עדין עם הלחות הטבעית של אדים. האדים מסייעים בשמירה על רמות הלחות של המזון, תוך שמירה על מרקם וטעמו. זה שימושי במיוחד עבור מזונות עדינים כמו דגים, מאפים או לחם.",
+    "CL_DV_OV_extra_fan_defrost_desc": "עם פונקציה זו, האוויר מסתובב בעזרת המאוורר. אין גופי חום מופעלים. השתמש בהגדרה זו כדי להפשיר מנות קפואות כגון עוגות, לחם ופירות.",
+    "CL_DV_OV_extra_plate_warming_desc": "מחממים את הצלחות לטמפרטורה הרצויה. זה עוזר לכלים על הצלחות להישאר חמים יותר למשך זמן ארוך יותר.",
+    "CL_DV_OV_extra_oshibori_desc": "מחמם בעדינות מגבות ידיים של אושיבורי, מחמם אותן לטמפרטורה נוחה.",
+    "CL_DV_OV_extra_hot_stone_desc": "מיועד לטיפולים דמויי ספא. האבנים מתחממות באופן שווה לטמפרטורה המושלמת, מה שהופך אותן מוכנות לשימוש בשגרת הרפיה או בריאות.",
+    "CL_DV_OV_extra_sterilizing_desc": "חיטוי פריטים כגון בקבוקי תינוקות, כלי מטבח או כלים קטנים. התנור מגיע לטמפרטורות מספיקות לחסל חיידקים ופתוגנים אחרים, מה שמספק דרך פשוטה ויעילה לשמור על ניקיון והיגיינה.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "משתמש באדים כדי לחמם בעדינות מזון, להחזיר את הלחות והטריות שלו. אידיאלי למנות עדינות כמו פסטה, אורז או תבשילים, מכיוון שהוא מבטיח שהמזון המחומם שומר על המרקם והטעם המקורי שלו מבלי להתייבש.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "בשילוב היתרונות של אוויר חם וקיטור כאחד, תוכנית זו אידיאלית לחימום מחדש של מגוון רחב של מאכלים. האוויר החם מספק חימום אחיד, בעוד האדים מוסיפים לחות, מה שהופך אותו למושלם עבור מנות כמו בשר, עוף או ארוחות מעורבות, מה שמבטיח שהם נשארים עסיסיים ובעלי טעם.",
+    "CL_DV_OV_extra_warming_hotair_desc": "מושלם עבור מזונות הזקוקים למראה חיצוני פריך, תוכנית זו משתמשת באוויר חם כדי לחמם מחדש מנות כמו פיצה, מאפים או ירקות צלויים. האוויר החם המסתובב מבטיח חימום יסודי של המזון תוך שמירה על גימור פריך.",
+    "CL_DV_OV_extra_warming_microwave_desc": "מחממים מזון במהירות מבפנים החוצה. זוהי אפשרות מהירה ויעילה לחימום ארוחות. מושלם למרקים, תבשילים או שאריות הזקוקות לחימום מהיר.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "שמרו על מזון בטמפרטורת ההגשה המושלמת ללא בישול נוסף. אידיאלי לשמירה על מנות חמות עד שהן מוכנות להגשה. זה מושלם לארוחות שמוכנות מבעוד מועד, ומבטיח שהן נשארות חמות ומוכנות ליהנות.",
+    "CL_DV_OV_ends_at": "מסתיים ב: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "תיהנו מהטעמים הטעימים והמעושנים של מנות גריל ללא צורך בגריל חיצוני. מעוצב כדי לפזר את החום באופן שווה על פני כל שטחו, למזער נקודות חמות ולהבטיח תוצאות צלייה עקביות. אידיאלי לצלייה של מגוון מאכלים, מבשרים וירקות ועד פירות ים ואפילו פירות.",
+    "CL_DV_OV_remote_start_title": "הפעלה מרחוק מושבתת",
+    "CL_DV_OV_remote_start_content": "כדי לשלוח ולהפעיל תוכניות מהאפליקציה שלך, הפעלה מרחוק צריכה להיות פעילה. ",
+    "CL_CF_FM_apple": "תַפּוּחַ",
+    "CL_CF_FM_bacon": "בְּשַׂר חֲזִיר",
+    "CL_CF_FM_broccoli": "בְּרוֹקוֹלִי",
+    "CL_CF_FM_cabbage": "כְּרוּב",
+    "CL_CF_FM_Cauliflower": "כְּרוּבִית",
+    "CL_CF_FM_cod": "בַּקָלָה",
+    "CL_CF_FM_dragon_fruit": "פירות הדרקון",
+    "CL_DV_OV_defrost_detail_desc": "הפשרה נכונה של מזון מבטיחה את איכות המזון לאחר הקפאתו. הפשרה נכונה מפחיתה את הסיכון להרעלת מזון.",
+    "CL_DV_OV_extra_non_food_detail_desc": "תוכניות ללא מזון מיועדות למשימות שונות שאינן קולינריות, ומספקות נוחות ופונקציונליות מעבר לבישול מסורתי.",
+    "CL_DV_OV_extra_warming_detail_desc": "מגוון תוכניות חימום לחימום וחימום מזון, המאפשרות ליהנות מארוחות בקלות, בין אם אתם מחממים שאריות או שומרים על מנות חמות להגשה.",
+    "CL_CF_FM_click_switch_status": "לחץ כדי לשנות את מצב הפריט",
+    "CL_CF_FM_recent_purchased_tips": "רכשת את הדברים האלה, האם אתה רוצה להוסיף therm למלאי מזון?",
+    "CL_DV_OV_extra_drying_herbs": "ייבוש עשבי תיבול",
+    "CL_DV_OV_extra_pasteurization": "פִּסטוּר",
+    "CL_DV_OV_extra_canning": "שימורים",
+    "CL_DV_OV_extra_defrost_microwave": "הפשרה עם מיקרוגל",
+    "CL_DV_OV_extra_defrost_stream": "הפשרה עם קיטור",
+    "CL_DV_OV_extra_oshibori": "אושיבורי",
+    "CL_DV_OV_extra_hot_stones": "אבנים חמות",
+    "CL_DV_OV_extra_sterilizing": "עיקור",
+    "CL_DV_OV_extra_warming_hotair_stream": "מחממים באוויר חם + אדים",
+    "CL_DV_OV_extra_warming_hotair": "לחמם מחדש עם אוויר חם",
+    "CL_DV_OV_extra_warming_microwave": "מחממים עם מיקרוגל",
+    "CL_DV_OV_extra_warming_keepwarm": "לשמור על חום",
+    "CL_CF_FM_dont_remind_in_3_months": "אל תזכיר בעוד 3 חודשים",
+    "CL_DV_RF_cleaning_plan": "תוכנית ניקיון",
+    "CL_DV_RF_cleaning_refrigerator": "ניקוי מקרר",
+    "CL_DV_RF_cleaning_reminder": "תזכורת לניקיון",
+    "CL_DV_RF_cleaning_cycle": "מחזור ניקוי",
+    "CL_DV_RF_cleaning_history": "היסטוריית ניקוי",
+    "CL_DV_RF_cleaning_cycle_not_selected": "מחזור הניקוי לא נבחר",
+    "CL_DV_RF_havent_cleaned_yet": "עדיין לא ניקית.",
+    "CL_DV_RF_garbage_disposal_reminder": "תזכורת לפינוי אשפה",
+    "CL_DV_RF_resource_waste": "בזבוז משאבים",
+    "CL_DV_RF_timer_not_selected": "טיימר לא נבחר",
+    "CL_DV_RF_add_more_reminders": "הוסף תזכורות נוספות",
+    "CL_DV_RF_cleaning_tips": "טיפים לניקוי",
+    "CL_DV_RF_last_clean_time": "הפעם האחרונה שניקית את המקרר הייתה פועלת: ***",
+    "CL_DV_RF_last_cleaning_was_today": "הניקיון האחרון היה היום.",
+    "CL_DV_RF_you_need_cleaning_now": "אתה צריך ניקוי עכשיו.",
+    "CL_DV_RF_next_cleaning_in_x_days": "הניקוי הבא בעוד ** ימים.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "הניקוי האחרון היה לפני ** ימים.",
+    "CL_CF_CO_x_weeks": "שבועות",
+    "CL_DV_RF_cleaned": "מְנוּקֶה",
+    "CL_DV_OV_probe_temperature_graph": "גרף טמפרטורת בדיקה",
+    "CL_DV_OV_internal": "פְּנִימִי",
+    "CL_DV_OV_probe_desc": "הגשושית עוזרת לך למדוד את הטמפרטורה של האוכל שלך. ניתן לראות את הטמפרטורות השונות לאורך זמן.",
+    "CL_DV_RF_no_cleaning_history": "אין היסטוריית ניקוי"
 }
