--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -1676,7 +1676,7 @@
     "add_timing": "समय जोड़ें",
     "set_start_to_finish_time": "आरंभ से समाप्ति तक का समय निर्धारित करें",
     "pair_pump_appliance": "हीट-पंप वॉटर हीटर",
-    "heat_pump": "गर्मी पंप",
+    "heat_pump": "इन्वर्टर बोर्ड",
     "pump_boost_1": "बूस्ट 1",
     "pump_electric_heating": "बिजली की हीटिंग",
     "pump_holiday_mode": "छुट्टी",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "प्लग इन और चालू है;\nवाई-फाई सक्रिय है और कनेक्टेड है;\nवाई-फाई पासवर्ड हाल ही में नहीं बदला गया है।",
     "dont_remind_again_uppercase": "फिर से याद न करें",
     "storage_tips_title": "भंडारण युक्तियाँ :",
-    "heat_pump_oem": "प्रो सीरीज डीएचडब्ल्यू",
+    "heat_pump_oem": "निश्चित गति DHW",
     "td22_drying_empty_water_tank": "सुखाना – खाली पानी की टंकी",
     "td22_drying_paused": "सुखाने का कार्य रोका गया",
     "td22_drying_finished": "सुखाने का काम समाप्त",
@@ -2430,7 +2430,7 @@
     "logout_tips": "क्या आप लॉग आउट करना चाहते हैं?",
     "fridge_child_lock_open_tips": "चाइल्ड लॉक खुलने के बाद, टच स्क्रीन और डिस्पेंसर लॉक हो जाएंगे।",
     "want_scan_code_tips": "मैं कोड स्कैन करना चाहता हूं.",
-    "tri_name_key": "ATW हीटपंप हीटर",
+    "tri_name_key": "एटीडब्ल्यू प्रो हीट पंप",
     "water_set_key": "जल तापमान",
     "f_e_fan_fault_tip": "डीसी पंखा विफलता",
     "zone_water_key": "जोन1 जल",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "सुनिश्चित करें कि आपका ब्लूटूथ चालू है।",
     "CL_DV_PIND_accessory_firmware_update": "सहायक उपकरण फर्मवेयर अद्यतन",
     "CL_CF_CS_ble_scan_not_list": "यदि आपका डिवाइस सूचीबद्ध नहीं है, तो आप दोबारा खोजने के लिए 'पुनः प्रयास करें' पर क्लिक कर सकते हैं, या नेटवर्क को किसी अन्य तरीके से कॉन्फ़िगर करने के लिए 'अगला' पर क्लिक कर सकते हैं।",
-    "CL_CF_CS_ble_scan_have_not_found": "हमें ब्लूटूथ पर कोई डिवाइस नहीं मिली है। आप दोबारा खोजने के लिए 'पुनः प्रयास करें' पर क्लिक कर सकते हैं, या किसी अन्य तरीके से नेटवर्क कॉन्फ़िगर करने के लिए 'अगला' पर क्लिक कर सकते हैं।",
+    "CL_CF_CS_ble_scan_have_not_found": "हमें ब्लूटूथ पर कोई डिवाइस नहीं मिली है। आप फिर से खोजने के लिए 'पुनः प्रयास करें' पर क्लिक कर सकते हैं, या किसी अन्य तरीके से नेटवर्क कॉन्फ़िगर कर सकते हैं।",
     "CL_DV_WM_pump_cleaning": "सफाई पंप...",
     "CL_DV_WM_autodoes_tip": "इस सुविधा को सक्षम करें और जब आप कपड़े धो रहे होंगे, तो आपका उपकरण स्मार्ट तरीके से डिटर्जेंट और फैब्रिक सॉफ़्नर वितरित करेगा।",
     "CL_DV_WM_detergent_department_key": "डिटर्जेंट कम्पार्टमेंट",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "छिपाने में असमर्थ",
     "program_management_unable_to_hide_desc": "यह अंतिम दृश्यमान कार्यक्रम है और कम से कम एक कार्यक्रम दृश्यमान रखा जाना चाहिए।",
     "CL_CF_FM_set_deadline": "समय सीमा निर्धारित करें",
-    "CL_CF_FM_expiry_date_must_be_selected": "समाप्ति तिथि का चयन करना आवश्यक है"
+    "CL_CF_FM_expiry_date_must_be_selected": "समाप्ति तिथि का चयन करना आवश्यक है",
+    "CL_CF_FM_add_custom_food_desc": "नया अनुकूलित आइटम जोड़ें",
+    "CL_CF_FM_delete_selected_items": "चयनित आइटम हटाएं",
+    "CL_CF_FM_delete_selected": "चयनित को हटाओ",
+    "CL_DV_HOB_residual_heat_content": "खाना पकाने का क्षेत्र अभी भी गर्म है। सावधान रहें कि इसे न छुएं।",
+    "CL_CF_FM_add_custom_food": "लाइब्रेरी में शामिल न किए गए खाद्य पदार्थ जोड़ें",
+    "air_care_temp_title": "तापमान मूल्यांकन मानक:",
+    "air_care_hum_title": "आर्द्रता मूल्यांकन मानक:",
+    "air_care_temp_c": "अच्छा: 17 < T < 27℃\n सामान्य: 10≤T≤17°C, 27≤T≤30°C\n अच्छा नहीं: T < 10°CT > 30°C",
+    "air_care_temp_f": "अच्छा: 62.6 < T < 80.6℉\n सामान्य: 50≤T≤62.6℉,80.6≤T≤86℉\n अच्छा नहीं: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "अच्छा: H < 70%\n सामान्य: 70≤H≤80%\n अच्छा नहीं: H> 80%",
+    "CL_CF_RM_change_floor_key": "मंजिल बदलें",
+    "CL_CF_FM_recently_added": "हाल ही में जोड़ा",
+    "CL_CF_FM_no_matching_items": "कोई मेल खाता आइटम नहीं",
+    "CL_CF_FM_search_stored_food": "संग्रहित भोजन खोजें",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "अधिसूचना",
+    "CL_CF_FM_a_day_ago": "एक दिन पहले",
+    "CL_CF_FM_a_week_ago": "एक सप्ताह पहले",
+    "CL_CF_FM_a_month_ago": "एक महीने पहले",
+    "CL_CF_FM_a_year_ago": "एक साल पहले",
+    "CL_CF_FM_x_days_ago": "** दिन पहले",
+    "CL_CF_FM_x_weeks_ago": "** कई सप्ताह पहले",
+    "CL_CF_FM_x_months_ago": "** महीने पहले",
+    "CL_CF_FM_x_years_ago": "** साल पहले",
+    "CL_CF_FM_shopping_list_details": "खरीदारी सूची विवरण",
+    "CL_CF_FM_no_shopping_list": "कोई खरीदारी सूची नहीं",
+    "CL_DV_OV_24_time_zone": "समय क्षेत्र",
+    "CL_CF_FM_reset_purchased_tips": "क्या आप इस सूची में शामिल सभी खाद्य पदार्थों को 'नहीं खरीदा गया' की स्थिति पर रीसेट करना चाहते हैं?",
+    "CL_CF_FM_add_food_to_x": "\"***\" में भोजन जोड़ें",
+    "CL_CF_FM_add_food_to_be_purchased": "खरीदे जाने वाले खाद्य पदार्थ जोड़ें",
+    "CL_DV_OV_24_always_on": "हमेशा बने रहें",
+    "CL_CF_CS_separated_ac_cs_step2": "रिमोट कंट्रोलर पर \"हॉरिजॉन्टल स्विंग\" बटन को 6 बार दबाएँ। या वायर रिमोट कंट्रोलर में \"स्लीप\" बटन को 8 बार दबाएँ।",
+    "CL_CF_FM_list": "सूची",
+    "CL_CF_FM_select_shopping_list": "खरीदारी सूची चुनें",
+    "CL_CF_FM_x_items_added": "** आइटम जोड़ दिए गए हैं",
+    "CL_CF_FM_create_shopping_list_first": "आपको पहले एक खरीदारी सूची बनानी होगी।",
+    "CL_CF_FM_no_shopping_list_available": "कोई खरीदारी सूची उपलब्ध नहीं है!",
+    "CL_DV_OV_extra_drying_desc": "भोजन को सुखाने या निर्जलीकरण करने से भोजन से नमी निकल जाती है जिससे शेल्फ लाइफ़ बेहतर हो जाती है। यह एक अनुशंसित कार्यक्रम है। आप इसे अपनी पसंद के अनुसार बदल सकते हैं।",
+    "CL_DV_OV_extra_drying_herbs_desc": "जड़ी-बूटियों को संरक्षित करने का सबसे आसान तरीका सुखाना है। गर्म और शुष्क हवा का उपयोग करने से नमी वाष्पित हो जाती है। इससे पत्तियों, फूलों या बीजों को अपना रंग और स्वाद बनाए रखने में मदद मिलती है।",
+    "CL_DV_OV_extra_pasteurization_desc": "हानिकारक बैक्टीरिया को मारने और शेल्फ लाइफ बढ़ाने के लिए भोजन पर हल्का ताप उपचार लागू किया जाता है। इसका उपयोग डेयरी उत्पादों, अंडा उत्पादों, नट्स जैसे खाद्य पदार्थों को संरक्षित करने के लिए किया जा सकता है।",
+    "CL_DV_OV_extra_canning_desc": "डिब्बाबंदी से भोजन को गर्मी से कीटाणुरहित करके खराब होने से बचाया जा सकता है। सुनिश्चित करें कि भोजन को ऐसे कंटेनर में रखा जाए जो वायुरोधी रूप से सीलबंद हों।",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "जमे हुए खाद्य पदार्थों को जल्दी और सुरक्षित रूप से डीफ़्रॉस्ट करने के लिए एक कुशल कार्यक्रम। यह मांस और सब्जियों से लेकर पहले से पके हुए भोजन तक, विभिन्न प्रकार के खाद्य पदार्थों के लिए विशेष रूप से उपयोगी है।",
+    "CL_DV_OV_extra_stream_defrost_desc": "भाप की प्राकृतिक नमी के साथ हल्की गर्मी को मिलाकर जमे हुए खाद्य पदार्थों को प्रभावी ढंग से पिघलाता है। भाप भोजन की नमी के स्तर को बनाए रखने में मदद करती है, जिससे इसकी बनावट और स्वाद बरकरार रहता है। यह मछली, पेस्ट्री या ब्रेड जैसे नाजुक खाद्य पदार्थों के लिए विशेष रूप से उपयोगी है।",
+    "CL_DV_OV_extra_fan_defrost_desc": "इस फ़ंक्शन के साथ, हवा पंखे की सहायता से प्रसारित होती है। कोई ताप तत्व चालू नहीं हैं. केक, ब्रेड और फलों जैसे जमे हुए व्यंजनों को डीफ्रॉस्ट करने के लिए इस सेटिंग का उपयोग करें।",
+    "CL_DV_OV_extra_plate_warming_desc": "प्लेटों को मनचाहे तापमान पर गर्म करें। इससे प्लेटों पर रखे बर्तन लंबे समय तक गर्म बने रहते हैं।",
+    "CL_DV_OV_extra_oshibori_desc": "ओशिबोरी हाथ तौलिये को धीरे-धीरे गर्म करके उन्हें आरामदायक तापमान तक गर्म करता है।",
+    "CL_DV_OV_extra_hot_stone_desc": "स्पा जैसे उपचारों के लिए डिज़ाइन किया गया। पत्थरों को सही तापमान पर समान रूप से गर्म किया जाता है, जिससे वे विश्राम या स्वास्थ्य दिनचर्या में उपयोग के लिए तैयार हो जाते हैं।",
+    "CL_DV_OV_extra_sterilizing_desc": "बच्चे की बोतलें, रसोई के बर्तन या छोटे औजार जैसी चीज़ों को साफ करें। ओवन बैक्टीरिया और अन्य रोगाणुओं को खत्म करने के लिए पर्याप्त तापमान पर पहुँच जाता है, जो स्वच्छता और सफाई बनाए रखने का एक सरल और प्रभावी तरीका है।",
+    "CL_DV_OV_extra_warming_regenerate_desc": "भोजन को धीरे-धीरे गर्म करने के लिए भाप का उपयोग करता है, जिससे इसकी नमी और ताज़गी बहाल होती है। पास्ता, चावल या कैसरोल जैसे नाजुक व्यंजनों के लिए आदर्श, क्योंकि यह सुनिश्चित करता है कि गर्म किया गया भोजन बिना सूखे हुए अपनी मूल बनावट और स्वाद को बरकरार रखता है।",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "गर्म हवा और भाप दोनों के लाभों को मिलाकर, यह प्रोग्राम कई तरह के खाद्य पदार्थों को दोबारा गर्म करने के लिए आदर्श है। गर्म हवा समान ताप प्रदान करती है, जबकि भाप नमी जोड़ती है, जिससे यह मांस, मुर्गी या मिश्रित भोजन जैसे व्यंजनों के लिए एकदम सही है, यह सुनिश्चित करता है कि वे रसदार और स्वादिष्ट रहें।",
+    "CL_DV_OV_extra_warming_hotair_desc": "यह प्रोग्राम उन खाद्य पदार्थों के लिए एकदम सही है जिन्हें बाहर से कुरकुरा बनाने की ज़रूरत होती है, यह प्रोग्राम पिज्जा, बेक्ड सामान या भुनी हुई सब्जियों जैसे व्यंजनों को समान रूप से गर्म करने के लिए गर्म हवा का उपयोग करता है। परिसंचारी गर्म हवा यह सुनिश्चित करती है कि भोजन पूरी तरह से गर्म हो जाए और उसका अंतिम भाग कुरकुरा बना रहे।",
+    "CL_DV_OV_extra_warming_microwave_desc": "भोजन को अंदर से बाहर तक जल्दी से गर्म करें। यह भोजन को गर्म करने का एक तेज़ और कुशल विकल्प है। सूप, स्टू या बचे हुए खाने के लिए एकदम सही है, जिन्हें जल्दी से गर्म करने की ज़रूरत होती है।",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "भोजन को बिना पकाए परोसने के लिए सही तापमान पर रखें। व्यंजन को परोसने के लिए तैयार होने तक गर्म रखने के लिए आदर्श। यह उन भोजनों के लिए एकदम सही है जिन्हें पहले से तैयार किया जाता है, यह सुनिश्चित करता है कि वे गर्म रहें और खाने के लिए तैयार रहें।",
+    "CL_DV_OV_ends_at": "समाप्त: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "बिना किसी बाहरी ग्रिल की आवश्यकता के ग्रिल्ड व्यंजनों के स्वादिष्ट, धुएँदार स्वाद का आनंद लें। पूरे क्षेत्र में समान रूप से गर्मी वितरित करने, गर्म स्थानों को कम करने और लगातार ग्रिलिंग परिणाम सुनिश्चित करने के लिए तैयार किया गया। मांस और सब्जियों से लेकर समुद्री भोजन और यहाँ तक कि फलों तक, विभिन्न प्रकार के खाद्य पदार्थों को ग्रिल करने के लिए आदर्श।",
+    "CL_DV_OV_remote_start_title": "रिमोट स्टार्ट अक्षम है",
+    "CL_DV_OV_remote_start_content": "अपने ऐप से प्रोग्राम भेजने और शुरू करने के लिए, रिमोट स्टार्ट सक्रिय होना चाहिए. ",
+    "CL_CF_FM_apple": "सेब",
+    "CL_CF_FM_bacon": "बेकन",
+    "CL_CF_FM_broccoli": "ब्रोकोली",
+    "CL_CF_FM_cabbage": "पत्ता गोभी",
+    "CL_CF_FM_Cauliflower": "फूलगोभी",
+    "CL_CF_FM_cod": "कॉड",
+    "CL_CF_FM_dragon_fruit": "ड्रैगन फल",
+    "CL_DV_OV_defrost_detail_desc": "खाद्य पदार्थों को सही तरीके से पिघलाने से यह सुनिश्चित होता है कि आपके भोजन को जमने के बाद भी उसकी गुणवत्ता बनी रहे। उचित तरीके से डीफ्रॉस्ट करने से खाद्य विषाक्तता का जोखिम कम हो जाता है।",
+    "CL_DV_OV_extra_non_food_detail_desc": "गैर-खाद्य कार्यक्रम विभिन्न गैर-पाक कार्यों के लिए बनाए जाते हैं, जो पारंपरिक खाना पकाने से परे सुविधा और कार्यक्षमता प्रदान करते हैं।",
+    "CL_DV_OV_extra_warming_detail_desc": "भोजन को पुनः गर्म करने और गरम करने के लिए वार्मिंग कार्यक्रमों की एक श्रृंखला, जिससे भोजन का आनंद लेना आसान हो जाता है, चाहे आप बचे हुए भोजन को पुनः गर्म कर रहे हों या परोसने के लिए बर्तनों को गर्म रख रहे हों।",
+    "CL_CF_FM_click_switch_status": "आइटम की स्थिति बदलने के लिए क्लिक करें",
+    "CL_CF_FM_recent_purchased_tips": "आपने ये चीजें खरीदी हैं, क्या आप इन्हें खाद्य सूची में जोड़ना चाहते हैं?",
+    "CL_DV_OV_extra_drying_herbs": "जड़ी-बूटियाँ सुखाना",
+    "CL_DV_OV_extra_pasteurization": "pasteurization",
+    "CL_DV_OV_extra_canning": "कैनिंग",
+    "CL_DV_OV_extra_defrost_microwave": "माइक्रोवेव से डीफ़्रॉस्ट करें",
+    "CL_DV_OV_extra_defrost_stream": "भाप से डीफ्रॉस्ट करें",
+    "CL_DV_OV_extra_oshibori": "ओशिबोरी",
+    "CL_DV_OV_extra_hot_stones": "गरम पत्थर",
+    "CL_DV_OV_extra_sterilizing": "स्टरलाइज़",
+    "CL_DV_OV_extra_warming_hotair_stream": "गर्म हवा + भाप से पुनः गर्म करें",
+    "CL_DV_OV_extra_warming_hotair": "गर्म हवा से पुनः गर्म करें",
+    "CL_DV_OV_extra_warming_microwave": "माइक्रोवेव से गर्म करें",
+    "CL_DV_OV_extra_warming_keepwarm": "सुरक्षित रखना",
+    "CL_CF_FM_dont_remind_in_3_months": "3 महीने में याद मत दिलाना",
+    "CL_DV_RF_cleaning_plan": "सफाई योजना",
+    "CL_DV_RF_cleaning_refrigerator": "रेफ्रिजरेटर की सफाई",
+    "CL_DV_RF_cleaning_reminder": "सफ़ाई अनुस्मारक",
+    "CL_DV_RF_cleaning_cycle": "सफाई चक्र",
+    "CL_DV_RF_cleaning_history": "सफ़ाई का इतिहास",
+    "CL_DV_RF_cleaning_cycle_not_selected": "सफाई चक्र चयनित नहीं है",
+    "CL_DV_RF_havent_cleaned_yet": "आपने अभी तक सफ़ाई नहीं की है.",
+    "CL_DV_RF_garbage_disposal_reminder": "कचरा निपटान अनुस्मारक",
+    "CL_DV_RF_resource_waste": "संसाधन की बर्बादी",
+    "CL_DV_RF_timer_not_selected": "टाइमर चयनित नहीं है",
+    "CL_DV_RF_add_more_reminders": "अधिक अनुस्मारक जोड़ें",
+    "CL_DV_RF_cleaning_tips": "सफाई संबंधी सुझाव",
+    "CL_DV_RF_last_clean_time": "पिछली बार आपने रेफ्रिजरेटर कब साफ़ किया था: ***",
+    "CL_DV_RF_last_cleaning_was_today": "आखिरी सफ़ाई आज हुई थी।",
+    "CL_DV_RF_you_need_cleaning_now": "अब तुम्हें सफाई की जरूरत है.",
+    "CL_DV_RF_next_cleaning_in_x_days": "अगली सफ़ाई ** दिनों में होगी।",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "आखिरी सफ़ाई ** दिन पहले हुई थी।",
+    "CL_CF_CO_x_weeks": "हफ्तों",
+    "CL_DV_RF_cleaned": "साफ किया हुआ",
+    "CL_DV_OV_probe_temperature_graph": "जांच तापमान ग्राफ",
+    "CL_DV_OV_internal": "आंतरिक",
+    "CL_DV_OV_probe_desc": "जांच आपको अपने भोजन का तापमान मापने में मदद करती है। आप समय के साथ अलग-अलग तापमान देख सकते हैं।",
+    "CL_DV_RF_no_cleaning_history": "सफ़ाई का कोई इतिहास नहीं"
 }
