--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -1676,7 +1676,7 @@
     "add_timing": "IDŐZÍTÉS HOZZÁADÁSA",
     "set_start_to_finish_time": "Kezdési és befejezési idő beállítása",
     "pair_pump_appliance": "Hőszivattyús vízmelegítő",
-    "heat_pump": "Hőszivattyú",
+    "heat_pump": "Inverter kártya",
     "pump_boost_1": "Nyomásfokozás 1",
     "pump_electric_heating": "Elektromos fűtés",
     "pump_holiday_mode": "Üzemszünet",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Csatlakoztatva és bekapcsolva;\nA Wi-Fi aktiválva és csatlakoztatva van;\nA Wi-Fi jelszó nemrégiben nem változott.",
     "dont_remind_again_uppercase": "NE EMLÉKEZTESSEN ÚJRA",
     "storage_tips_title": "Tárolási tippek:",
-    "heat_pump_oem": "PRO sorozat HMV",
+    "heat_pump_oem": "Fix fordulatszámú használati melegvíz",
     "td22_drying_empty_water_tank": "Szárítás – Ürítse ki a víztartályt",
     "td22_drying_paused": "A szárítás szünetel",
     "td22_drying_finished": "A szárítás befejeződött",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Biztos, hogy ki akar jelentkezni?",
     "fridge_child_lock_open_tips": "A gyermekzár kinyitása után az érintőképernyő és az adagoló zárolva lesz.",
     "want_scan_code_tips": "Szeretném beolvasni a kódot.",
-    "tri_name_key": "ATW hőszivattyús fűtés",
+    "tri_name_key": "ATW Pro hőszivattyú",
     "water_set_key": "VÍZHŐMÉRSÉKLET",
     "f_e_fan_fault_tip": "DC ventilátor meghibásodása",
     "zone_water_key": "1. zóna víz",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Győződjön meg arról, hogy a Bluetooth be van kapcsolva.",
     "CL_DV_PIND_accessory_firmware_update": "Tartozék firmware frissítés",
     "CL_CF_CS_ble_scan_not_list": "Ha eszköze nem szerepel a listában, kattintson az „ÚJRAPRÓBÁLÁS” gombra az újbóli kereséshez, vagy kattintson a „KÖVETKEZŐ” gombra a hálózat más módon történő konfigurálásához.",
-    "CL_CF_CS_ble_scan_have_not_found": "Nem találtunk Bluetooth-eszközt. Kattintson az „ÚJRAPRÓBÁLÁS” gombra az újbóli kereséshez, vagy kattintson a „KÖVETKEZŐ” gombra a hálózat más módon történő konfigurálásához.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nem találtunk semmilyen eszközt a Bluetooth-on. Kattintson a \"PRÓBÁLJA ÚJRA\" gombra az újbóli kereséshez, vagy más módon konfigurálhatja a hálózatot.",
     "CL_DV_WM_pump_cleaning": "Szivattyú tisztítása...",
     "CL_DV_WM_autodoes_tip": "Engedélyezze ezt a funkciót, és készüléke okosan adagolja a mosószert és az öblítőt, miközben Ön mos.",
     "CL_DV_WM_detergent_department_key": "MOSÓSZERREKESZ",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Képtelen elrejteni",
     "program_management_unable_to_hide_desc": "Ez az utolsó látható program, és legalább egy programnak láthatónak kell lennie.",
     "CL_CF_FM_set_deadline": "Állítson be határidőt",
-    "CL_CF_FM_expiry_date_must_be_selected": "A lejárati dátumot ki kell választani"
+    "CL_CF_FM_expiry_date_must_be_selected": "A lejárati dátumot ki kell választani",
+    "CL_CF_FM_add_custom_food_desc": "Új testreszabott elem hozzáadása",
+    "CL_CF_FM_delete_selected_items": "Kijelölt elemek törlése",
+    "CL_CF_FM_delete_selected": "Kijelölt törlése",
+    "CL_DV_HOB_residual_heat_content": "A főzőzóna még mindig forró. Ügyeljen arra, hogy ne érintse meg.",
+    "CL_CF_FM_add_custom_food": "Adjon hozzá olyan ételt, amely nem szerepel a könyvtárban",
+    "air_care_temp_title": "Hőmérséklet értékelési szabvány:",
+    "air_care_hum_title": "Páratartalom értékelési szabvány:",
+    "air_care_temp_c": "Jó: 17 < T < 27℃\n Normál: 10≤T≤17°C, 27≤T≤30°C\n Nem jó: T < 10°CT > 30°C",
+    "air_care_temp_f": "Jó: 62,6 < T < 80,6 ℉\n Normál: 50≤T≤62,6℉, 80,6≤T≤86℉\n Nem jó: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Jó: H < 70%\n Normál: 70≤H≤80%\n Nem jó: H＞80%",
+    "CL_CF_RM_change_floor_key": "padlót cserélni",
+    "CL_CF_FM_recently_added": "Nemrég hozzáadva",
+    "CL_CF_FM_no_matching_items": "Nincs egyező elem",
+    "CL_CF_FM_search_stored_food": "Tárolt élelmiszer keresése",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "bejelentés",
+    "CL_CF_FM_a_day_ago": "Egy nappal ezelőtt",
+    "CL_CF_FM_a_week_ago": "Egy héttel ezelőtt",
+    "CL_CF_FM_a_month_ago": "Egy hónapja",
+    "CL_CF_FM_a_year_ago": "Egy éve",
+    "CL_CF_FM_x_days_ago": "** nappal ezelőtt",
+    "CL_CF_FM_x_weeks_ago": "** héttel ezelőtt",
+    "CL_CF_FM_x_months_ago": "** hónapja",
+    "CL_CF_FM_x_years_ago": "** évvel ezelőtt",
+    "CL_CF_FM_shopping_list_details": "Bevásárlólista részletei",
+    "CL_CF_FM_no_shopping_list": "Nincs bevásárlólista",
+    "CL_DV_OV_24_time_zone": "Időzóna",
+    "CL_CF_FM_reset_purchased_tips": "Vissza szeretné állítani a listán szereplő összes élelmiszert a nem vásárolt állapotba?",
+    "CL_CF_FM_add_food_to_x": "Élelmiszer hozzáadása a \"***\"-hoz",
+    "CL_CF_FM_add_food_to_be_purchased": "Adja hozzá a megvásárolni kívánt élelmiszert",
+    "CL_DV_OV_24_always_on": "Mindig bekapcsolva",
+    "CL_CF_CS_separated_ac_cs_step2": "Nyomja meg a \"Vízszintes lengés\" gombot 6-szor a távirányítón. Vagy nyomja meg nyolcszor az \"Alvó\" gombot a vezetékes távirányítón.",
+    "CL_CF_FM_list": "Lista",
+    "CL_CF_FM_select_shopping_list": "Válassza a Bevásárlólista lehetőséget",
+    "CL_CF_FM_x_items_added": "** tételek hozzáadva",
+    "CL_CF_FM_create_shopping_list_first": "Először létre kell hoznia egy bevásárlólistát.",
+    "CL_CF_FM_no_shopping_list_available": "Bevásárlólista nem elérhető!",
+    "CL_DV_OV_extra_drying_desc": "Az élelmiszerek szárítása vagy kiszáradása eltávolítja a nedvességet az élelmiszerből, hogy javítsa az eltarthatóságát. Ez egy ajánlott program. Tetszés szerint módosíthatja.",
+    "CL_DV_OV_extra_drying_herbs_desc": "A szárítás a gyógynövények tartósításának legegyszerűbb módja. Meleg és száraz levegő használatával a nedvesség elpárolog. Ez segít a leveleknek, virágoknak vagy magoknak megőrizni színüket és ízüket.",
+    "CL_DV_OV_extra_pasteurization_desc": "Enyhe hőkezelést alkalmaznak az élelmiszeren a káros baktériumok elpusztítása és az eltarthatóság meghosszabbítása érdekében. Használható élelmiszerek, például tejtermékek, tojástermékek, diófélék tartósításához.",
+    "CL_DV_OV_extra_canning_desc": "A befőzés lehetővé teszi az élelmiszerek megóvását a romlástól, hővel történő sterilizálást. Ügyeljen arra, hogy az élelmiszereket hermetikusan lezárt edényekben tárolják.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Hatékony program a fagyasztott élelmiszerek gyors és biztonságos kiolvasztására. Különféle ételekhez különösen hasznos, a húsoktól és zöldségektől az előfőzött ételekig.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Hatékonyan olvasztja fel a fagyasztott élelmiszereket a gyengéd hő és a gőz természetes nedvességtartalmának kombinálásával. A gőz segít fenntartani az élelmiszer nedvességszintjét, megőrzi annak állagát és ízét. Ez különösen hasznos olyan finom ételekhez, mint a hal, sütemények vagy kenyér.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Ezzel a funkcióval a levegő a ventilátor segítségével kering. Nincs bekapcsolva fűtőelem. Használja ezt a beállítást fagyasztott ételek, például sütemények, kenyér és gyümölcs kiolvasztására.",
+    "CL_DV_OV_extra_plate_warming_desc": "Melegítse fel a lemezeket a kívánt hőmérsékletre. Ez elősegíti, hogy a tányérokon lévő edények hosszabb ideig melegek maradjanak.",
+    "CL_DV_OV_extra_oshibori_desc": "Gyengéden felmelegíti az oshibori kéztörlőket, és kellemes hőmérsékletre melegíti őket.",
+    "CL_DV_OV_extra_hot_stone_desc": "Spa-szerű kezelésekhez tervezték. A kövek egyenletesen felmelegednek a tökéletes hőmérsékletre, így készen állnak a pihenésre vagy a wellness-rutinokra.",
+    "CL_DV_OV_extra_sterilizing_desc": "Fertőtlenítse az olyan tárgyakat, mint a cumisüvegek, konyhai eszközök vagy kis szerszámok. A sütő olyan hőmérsékletet ér el, amely elegendő a baktériumok és más kórokozók eltávolításához, egyszerű és hatékony módja a tisztaság és a higiénia fenntartásának.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Gőzt használ az ételek finom felmelegítésére, visszaállítva annak nedvességét és frissességét. Ideális olyan finom ételekhez, mint a tészta, rizs vagy rakott ételek, mivel biztosítja, hogy az újramelegített étel megőrizze eredeti állagát és ízét anélkül, hogy kiszáradna.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "A forró levegő és a gőz előnyeit kombinálva ez a program ideális különféle ételek melegítéséhez. A forró levegő egyenletes melegítést biztosít, míg a gőz nedvességet ad, így tökéletes olyan ételekhez, mint a hús, a szárnyas vagy a vegyes ételek, biztosítva, hogy lédúsak és ízesek maradjanak.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Tökéletes olyan ételekhez, amelyeknek ropogós külsőre van szükségük, ez a program forró levegőt használ az ételek, például pizza, pékáruk vagy sült zöldségek egyenletes felmelegítésére. A keringő forró levegő gondoskodik arról, hogy az étel alaposan felmelegedjen, miközben megőrzi a ropogós végeredményt.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Gyorsan melegítse fel az ételt belülről kifelé. Gyors és hatékony lehetőség az ételek újramelegítésére. Tökéletes levesekhez, pörköltekhez vagy olyan maradékokhoz, amelyek gyors felmelegítést igényelnek.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Tartsa az ételt a tökéletes tálalási hőmérsékleten további főzés nélkül. Ideális az ételek melegen tartásához a tálalásig. Tökéletes olyan ételekhez, amelyeket előre elkészítettek, így biztosítva, hogy melegek és élvezhetőek maradnak.",
+    "CL_DV_OV_ends_at": "Vége: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Élvezze a grillezett ételek finom, füstös ízeit anélkül, hogy szabadtéri grillre lenne szüksége. Úgy tervezték, hogy egyenletesen ossza el a hőt a teljes területen, minimálisra csökkentve a forró pontokat, és egyenletes grillezési eredményeket biztosítson. Ideális különféle ételek grillezéséhez, a húsoktól és zöldségektől a tenger gyümölcseiig, sőt gyümölcsökig.",
+    "CL_DV_OV_remote_start_title": "A távoli indítás le van tiltva",
+    "CL_DV_OV_remote_start_content": "Ha programokat szeretne küldeni és elindítani az alkalmazásból, a távoli indításnak aktívnak kell lennie. ",
+    "CL_CF_FM_apple": "Alma",
+    "CL_CF_FM_bacon": "Szalonna",
+    "CL_CF_FM_broccoli": "Brokkoli",
+    "CL_CF_FM_cabbage": "Káposzta",
+    "CL_CF_FM_Cauliflower": "Karfiol",
+    "CL_CF_FM_cod": "Tőkehal",
+    "CL_CF_FM_dragon_fruit": "Sárkánygyümölcs",
+    "CL_DV_OV_defrost_detail_desc": "Az élelmiszerek megfelelő kiolvasztása biztosítja az élelmiszerek minőségét a lefagyasztás után. A megfelelő leolvasztás csökkenti az ételmérgezés kockázatát.",
+    "CL_DV_OV_extra_non_food_detail_desc": "A non food programok különféle, nem kulináris feladatokra készültek, a hagyományos főzésen túlmutató kényelmet és funkcionalitást biztosítva.",
+    "CL_DV_OV_extra_warming_detail_desc": "Melegítőprogramok széles választéka az ételek felmelegítéséhez és melegítéséhez, megkönnyítve az ételek élvezetét, akár a maradékot melegíti fel, akár az ételek melegen tartását szolgálja fel.",
+    "CL_CF_FM_click_switch_status": "Kattintson az elem állapotának váltásához",
+    "CL_CF_FM_recent_purchased_tips": "Megvásárolta ezeket a dolgokat, szeretné hozzáadni őket az élelmiszerkészlethez?",
+    "CL_DV_OV_extra_drying_herbs": "Gyógynövények szárítása",
+    "CL_DV_OV_extra_pasteurization": "Pasztőrözés",
+    "CL_DV_OV_extra_canning": "Befőzés",
+    "CL_DV_OV_extra_defrost_microwave": "Mikrohullámú sütővel kiolvasztani",
+    "CL_DV_OV_extra_defrost_stream": "Leolvasztás gőzzel",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "Forró kövek",
+    "CL_DV_OV_extra_sterilizing": "Sterilizálás",
+    "CL_DV_OV_extra_warming_hotair_stream": "Melegítse fel forró levegővel + gőzzel",
+    "CL_DV_OV_extra_warming_hotair": "Melegítse fel forró levegővel",
+    "CL_DV_OV_extra_warming_microwave": "Melegítse újra mikrohullámú sütővel",
+    "CL_DV_OV_extra_warming_keepwarm": "Melegen tartás",
+    "CL_CF_FM_dont_remind_in_3_months": "Ne emlékeztess 3 hónap múlva",
+    "CL_DV_RF_cleaning_plan": "Takarítási terv",
+    "CL_DV_RF_cleaning_refrigerator": "Hűtőszekrény tisztítása",
+    "CL_DV_RF_cleaning_reminder": "Tisztítási emlékeztető",
+    "CL_DV_RF_cleaning_cycle": "Tisztítási ciklus",
+    "CL_DV_RF_cleaning_history": "Tisztítási előzmények",
+    "CL_DV_RF_cleaning_cycle_not_selected": "A tisztítási ciklus nincs kiválasztva",
+    "CL_DV_RF_havent_cleaned_yet": "Még nem takarítottál.",
+    "CL_DV_RF_garbage_disposal_reminder": "Emlékeztető a szemétszállításról",
+    "CL_DV_RF_resource_waste": "Erőforrás pazarlás",
+    "CL_DV_RF_timer_not_selected": "Az időzítő nincs kiválasztva",
+    "CL_DV_RF_add_more_reminders": "További emlékeztetők hozzáadása",
+    "CL_DV_RF_cleaning_tips": "Tisztítási tippek",
+    "CL_DV_RF_last_clean_time": "Utoljára bekapcsolva volt a hűtőszekrény tisztítása: ***",
+    "CL_DV_RF_last_cleaning_was_today": "Ma volt az utolsó takarítás.",
+    "CL_DV_RF_you_need_cleaning_now": "Most tisztításra van szüksége.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Következő takarítás ** nap múlva.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Az utolsó takarítás ** napja volt.",
+    "CL_CF_CO_x_weeks": "Hetek",
+    "CL_DV_RF_cleaned": "Megtisztítva",
+    "CL_DV_OV_probe_temperature_graph": "Szonda hőmérsékleti grafikonja",
+    "CL_DV_OV_internal": "Belső",
+    "CL_DV_OV_probe_desc": "A szonda segít mérni az étel hőmérsékletét. Láthatja a különböző hőmérsékleteket az idő múlásával.",
+    "CL_DV_RF_no_cleaning_history": "Nincs tisztítási előzmény"
 }
