--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -1676,7 +1676,7 @@
     "add_timing": "TAMBAHKAN WAKTU",
     "set_start_to_finish_time": "Tetapkan waktu mulai hingga selesai",
     "pair_pump_appliance": "Pemanas air pompa panas",
-    "heat_pump": "Pompa panas",
+    "heat_pump": "Papan inverter",
     "pump_boost_1": "Peningkatan 1",
     "pump_electric_heating": "Pemanas listrik",
     "pump_holiday_mode": "Hari libur",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Sudah dicolokkan dan dihidupkan;\nWi-Fi telah diaktifkan dan terhubung;\nKata sandi Wi-Fi tidak berubah baru-baru ini.",
     "dont_remind_again_uppercase": "JANGAN MENGINGATKAN LAGI",
     "storage_tips_title": "Kiat penyimpanan:",
-    "heat_pump_oem": "Seri PRO DHW",
+    "heat_pump_oem": "DHW kecepatan tetap",
     "td22_drying_empty_water_tank": "Pengeringan – Tangki air kosong",
     "td22_drying_paused": "Pengeringan dihentikan sementara",
     "td22_drying_finished": "Pengeringan selesai",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Anda yakin ingin logout?",
     "fridge_child_lock_open_tips": "Setelah kunci pengaman anak dibuka, layar sentuh dan dispenser akan terkunci.",
     "want_scan_code_tips": "Saya ingin memindai kode.",
-    "tri_name_key": "Pemanas pompa panas ATW",
+    "tri_name_key": "Pompa Panas ATW Pro",
     "water_set_key": "SET AIR",
     "f_e_fan_fault_tip": "Kegagalan kipas DC",
     "zone_water_key": "Zona Air",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Pastikan bluetooth Anda dihidupkan.",
     "CL_DV_PIND_accessory_firmware_update": "Pembaruan firmware aksesori",
     "CL_CF_CS_ble_scan_not_list": "Jika perangkat Anda tidak tercantum, Anda dapat mengeklik 'COBA LAGI' untuk mencari lagi, atau klik 'LANJUTKAN' untuk mengonfigurasi jaringan dengan cara lain.",
-    "CL_CF_CS_ble_scan_have_not_found": "Kami tidak menemukan perangkat apa pun di bluetooth. Anda dapat mengeklik 'COBA LAGI' untuk mencari lagi, atau klik 'LANJUTKAN' untuk mengonfigurasi jaringan dengan cara lain.",
+    "CL_CF_CS_ble_scan_have_not_found": "Kami tidak menemukan perangkat apa pun di bluetooth. Anda dapat mengklik 'TRY AGAIN' untuk mencari lagi, atau mengkonfigurasi jaringan dengan cara lain.",
     "CL_DV_WM_pump_cleaning": "Pompa pembersih...",
     "CL_DV_WM_autodoes_tip": "Aktifkan fitur ini dan perangkat Anda akan secara pintar mengeluarkan deterjen dan pelembut kain saat Anda mencuci.",
     "CL_DV_WM_detergent_department_key": "RUANG DETERJEN",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Tidak bisa disembunyikan",
     "program_management_unable_to_hide_desc": "Ini adalah program terakhir yang terlihat dan setidaknya satu program harus tetap terlihat.",
     "CL_CF_FM_set_deadline": "Tetapkan batas waktu",
-    "CL_CF_FM_expiry_date_must_be_selected": "Tanggal kedaluwarsa harus dipilih"
+    "CL_CF_FM_expiry_date_must_be_selected": "Tanggal kedaluwarsa harus dipilih",
+    "CL_CF_FM_add_custom_food_desc": "Tambahkan item baru yang disesuaikan",
+    "CL_CF_FM_delete_selected_items": "Hapus Item yang Dipilih",
+    "CL_CF_FM_delete_selected": "Hapus yang Dipilih",
+    "CL_DV_HOB_residual_heat_content": "Zona memasak masih panas. Berhati-hatilah untuk tidak menyentuhnya.",
+    "CL_CF_FM_add_custom_food": "Tambahkan Makanan yang Tidak Termasuk dalam Perpustakaan",
+    "air_care_temp_title": "Standar evaluasi suhu:",
+    "air_care_hum_title": "Standar evaluasi kelembaban:",
+    "air_care_temp_c": "Baik: 17 < T < 27℃\n Normal: 10≤T≤17°C, 27≤T≤30°C\n Tidak baik: T < 10°CT > 30°C",
+    "air_care_temp_f": "Baik: 62,6 < T < 80,6℉\n Normal: 50≤T≤62.6℉, 80.6≤T≤86℉\n Tidak bagus: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Baik: H < 70%\n Normalnya: 70≤H≤80%\n Tidak bagus: H＞80%",
+    "CL_CF_RM_change_floor_key": "ganti lantai",
+    "CL_CF_FM_recently_added": "Baru Ditambahkan",
+    "CL_CF_FM_no_matching_items": "Tidak Ada Item Yang Cocok",
+    "CL_CF_FM_search_stored_food": "Cari Makanan yang Disimpan",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "pemberitahuan",
+    "CL_CF_FM_a_day_ago": "Sehari yang lalu",
+    "CL_CF_FM_a_week_ago": "Seminggu yang lalu",
+    "CL_CF_FM_a_month_ago": "Sebulan yang lalu",
+    "CL_CF_FM_a_year_ago": "Setahun yang lalu",
+    "CL_CF_FM_x_days_ago": "** hari yang lalu",
+    "CL_CF_FM_x_weeks_ago": "** minggu lalu",
+    "CL_CF_FM_x_months_ago": "** bulan lalu",
+    "CL_CF_FM_x_years_ago": "** tahun yang lalu",
+    "CL_CF_FM_shopping_list_details": "Rincian Daftar Belanja",
+    "CL_CF_FM_no_shopping_list": "Tidak ada daftar belanja",
+    "CL_DV_OV_24_time_zone": "Zona waktu",
+    "CL_CF_FM_reset_purchased_tips": "Apakah Anda ingin mengatur ulang semua makanan dalam daftar ini ke status tidak dibeli?",
+    "CL_CF_FM_add_food_to_x": "Tambahkan makanan ke \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Tambahkan makanan yang akan dibeli",
+    "CL_DV_OV_24_always_on": "Selalu Aktif",
+    "CL_CF_CS_separated_ac_cs_step2": "Tekan tombol \"Horizontal Swing\" sebanyak 6 kali pada remote kontrol. Atau tekan tombol \"Sleep\" sebanyak 8 kali pada remote kontrol kabel.",
+    "CL_CF_FM_list": "Daftar",
+    "CL_CF_FM_select_shopping_list": "Pilih Daftar Belanja",
+    "CL_CF_FM_x_items_added": "** item telah ditambahkan",
+    "CL_CF_FM_create_shopping_list_first": "Anda perlu membuat daftar belanja terlebih dahulu.",
+    "CL_CF_FM_no_shopping_list_available": "Tidak Ada Daftar Belanja yang Tersedia!",
+    "CL_DV_OV_extra_drying_desc": "Mengeringkan atau mendehidrasi makanan menghilangkan kelembapan dari makanan untuk meningkatkan masa simpan. Ini adalah program yang direkomendasikan. Anda dapat mengubahnya sesuai keinginan.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Pengeringan merupakan metode pengawetan herba yang paling mudah. Dengan menggunakan udara hangat dan kering, kelembapan akan menguap. Hal ini membantu daun, bunga, atau biji mempertahankan warna dan rasanya.",
+    "CL_DV_OV_extra_pasteurization_desc": "Perlakuan panas ringan diterapkan pada makanan untuk membunuh bakteri berbahaya dan memperpanjang masa simpan. Dapat digunakan untuk mengawetkan makanan seperti produk olahan susu, produk telur, dan kacang-kacangan.",
+    "CL_DV_OV_extra_canning_desc": "Pengalengan memungkinkan pengawetan makanan dari pembusukan dengan cara mensterilkannya menggunakan panas. Pastikan makanan disimpan dalam wadah yang tertutup rapat.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Program yang efisien untuk mencairkan makanan beku dengan cepat dan aman. Program ini sangat berguna untuk berbagai jenis makanan, mulai dari daging dan sayuran hingga makanan yang sudah dimasak sebelumnya.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Mencairkan makanan beku secara efektif dengan memadukan panas yang lembut dengan kelembapan alami dari uap. Uap membantu menjaga kadar kelembapan makanan, menjaga tekstur dan rasanya. Ini sangat berguna untuk makanan yang lembut seperti ikan, kue kering, atau roti.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Dengan fungsi ini, udara bersirkulasi dengan bantuan kipas angin. Tidak ada elemen panas yang menyala. Gunakan pengaturan ini untuk mencairkan makanan beku seperti kue, roti, dan buah.",
+    "CL_DV_OV_extra_plate_warming_desc": "Panaskan piring hingga mencapai suhu yang diinginkan. Ini membantu makanan di atas piring tetap hangat dalam jangka waktu lebih lama.",
+    "CL_DV_OV_extra_oshibori_desc": "Menghangatkan handuk tangan oshibori dengan lembut, memanaskannya hingga suhu yang nyaman.",
+    "CL_DV_OV_extra_hot_stone_desc": "Dirancang untuk perawatan ala spa. Batu-batu tersebut dihangatkan secara merata hingga mencapai suhu yang sempurna, sehingga siap digunakan untuk relaksasi atau rutinitas kesehatan.",
+    "CL_DV_OV_extra_sterilizing_desc": "Bersihkan barang-barang seperti botol susu bayi, peralatan dapur, atau perkakas kecil. Oven mencapai suhu yang cukup untuk menghilangkan bakteri dan patogen lainnya, sehingga menjadi cara yang mudah dan efektif untuk menjaga kebersihan dan kehigienisan.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Menggunakan uap untuk memanaskan kembali makanan dengan lembut, mengembalikan kelembapan dan kesegarannya. Ideal untuk hidangan yang lembut seperti pasta, nasi, atau casserole, karena memastikan makanan yang dipanaskan kembali mempertahankan tekstur dan rasa aslinya tanpa menjadi kering.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Dengan menggabungkan manfaat udara panas dan uap, program ini ideal untuk memanaskan kembali berbagai jenis makanan. Udara panas memberikan pemanasan yang merata, sementara uap menambahkan kelembapan, sehingga sangat cocok untuk hidangan seperti daging, unggas, atau makanan campuran, memastikan makanan tetap berair dan beraroma.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Sempurna untuk makanan yang membutuhkan bagian luar yang renyah, program ini menggunakan udara panas untuk memanaskan kembali hidangan seperti pizza, makanan panggang, atau sayuran panggang secara merata. Udara panas yang bersirkulasi memastikan makanan dipanaskan secara menyeluruh sambil mempertahankan hasil akhir yang renyah.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Memanaskan kembali makanan dengan cepat dari dalam ke luar. Ini adalah pilihan yang cepat dan efisien untuk memanaskan kembali makanan. Sempurna untuk sup, semur, atau sisa makanan yang perlu dihangatkan dengan cepat.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Menjaga makanan pada suhu penyajian yang sempurna tanpa perlu dimasak lebih lanjut. Ideal untuk menjaga makanan tetap hangat hingga siap disajikan. Cocok untuk makanan yang disiapkan terlebih dahulu, memastikan makanan tetap panas dan siap dinikmati.",
+    "CL_DV_OV_ends_at": "Berakhir pada: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Nikmati cita rasa lezat dan berasap dari hidangan panggang tanpa perlu pemanggang luar ruangan. Dibuat untuk mendistribusikan panas secara merata di seluruh area, meminimalkan titik panas dan memastikan hasil pemanggangan yang konsisten. Ideal untuk memanggang berbagai makanan, mulai dari daging dan sayuran hingga makanan laut dan bahkan buah-buahan.",
+    "CL_DV_OV_remote_start_title": "Mulai jarak jauh dinonaktifkan",
+    "CL_DV_OV_remote_start_content": "Untuk mengirim dan memulai program dari aplikasi Anda, mulai jarak jauh harus aktif. ",
+    "CL_CF_FM_apple": "Apel",
+    "CL_CF_FM_bacon": "daging babi asap",
+    "CL_CF_FM_broccoli": "Brokoli",
+    "CL_CF_FM_cabbage": "Kubis",
+    "CL_CF_FM_Cauliflower": "Kembang kol",
+    "CL_CF_FM_cod": "Ikan kod",
+    "CL_CF_FM_dragon_fruit": "Buah naga",
+    "CL_DV_OV_defrost_detail_desc": "Mencairkan makanan dengan benar akan memastikan kualitas makanan setelah dibekukan. Pencairan yang tepat akan mengurangi risiko keracunan makanan.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Program non-makanan dibuat untuk berbagai tugas non-kuliner, memberikan kemudahan dan fungsionalitas di luar memasak tradisional.",
+    "CL_DV_OV_extra_warming_detail_desc": "Berbagai program penghangat untuk memanaskan kembali dan menghangatkan makanan, memudahkan Anda menikmati makanan, baik Anda memanaskan kembali sisa makanan atau menjaga hidangan tetap hangat untuk disajikan.",
+    "CL_CF_FM_click_switch_status": "Klik untuk mengganti status item",
+    "CL_CF_FM_recent_purchased_tips": "Anda membeli barang-barang ini, apakah Anda ingin menambahkan therm ke Inventaris Makanan?",
+    "CL_DV_OV_extra_drying_herbs": "Mengeringkan Rempah",
+    "CL_DV_OV_extra_pasteurization": "Pasteurisasi",
+    "CL_DV_OV_extra_canning": "Pengalengan",
+    "CL_DV_OV_extra_defrost_microwave": "Mencairkan dengan microwave",
+    "CL_DV_OV_extra_defrost_stream": "Mencairkan dengan uap",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "Batu Panas",
+    "CL_DV_OV_extra_sterilizing": "Mensterilkan",
+    "CL_DV_OV_extra_warming_hotair_stream": "Panaskan kembali dengan udara panas + uap",
+    "CL_DV_OV_extra_warming_hotair": "Panaskan kembali dengan udara panas",
+    "CL_DV_OV_extra_warming_microwave": "Panaskan kembali dengan microwave",
+    "CL_DV_OV_extra_warming_keepwarm": "Tetap hangat",
+    "CL_CF_FM_dont_remind_in_3_months": "Jangan ingatkan dalam 3 bulan",
+    "CL_DV_RF_cleaning_plan": "Rencana Pembersihan",
+    "CL_DV_RF_cleaning_refrigerator": "Membersihkan Kulkas",
+    "CL_DV_RF_cleaning_reminder": "Pengingat pembersihan",
+    "CL_DV_RF_cleaning_cycle": "Siklus pembersihan",
+    "CL_DV_RF_cleaning_history": "Riwayat pembersihan",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Siklus pembersihan tidak dipilih",
+    "CL_DV_RF_havent_cleaned_yet": "Anda belum membersihkannya.",
+    "CL_DV_RF_garbage_disposal_reminder": "Pengingat pembuangan sampah",
+    "CL_DV_RF_resource_waste": "pemborosan sumber daya",
+    "CL_DV_RF_timer_not_selected": "Pengatur waktu tidak dipilih",
+    "CL_DV_RF_add_more_reminders": "Tambahkan lebih banyak pengingat",
+    "CL_DV_RF_cleaning_tips": "Tips membersihkan",
+    "CL_DV_RF_last_clean_time": "Terakhir kali Anda membersihkan kulkas adalah pada : ***",
+    "CL_DV_RF_last_cleaning_was_today": "Pembersihan terakhir dilakukan hari ini.",
+    "CL_DV_RF_you_need_cleaning_now": "Anda butuh dibersihkan sekarang.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Pembersihan berikutnya dalam ** hari.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Pembersihan terakhir dilakukan ** hari lalu.",
+    "CL_CF_CO_x_weeks": "Minggu",
+    "CL_DV_RF_cleaned": "Dibersihkan",
+    "CL_DV_OV_probe_temperature_graph": "Grafik Suhu Probe",
+    "CL_DV_OV_internal": "Intern",
+    "CL_DV_OV_probe_desc": "Alat ukur ini membantu Anda mengukur suhu makanan. Anda dapat melihat perbedaan suhu dari waktu ke waktu.",
+    "CL_DV_RF_no_cleaning_history": "Tidak ada riwayat pembersihan"
 }
