--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -1676,7 +1676,7 @@
     "add_timing": "タイマー追加",
     "set_start_to_finish_time": "時間設定",
     "pair_pump_appliance": "ヒートポンプ",
-    "heat_pump": "ヒートポンプ",
+    "heat_pump": "インバータ基板",
     "pump_boost_1": "デュアルエネルギー1",
     "pump_electric_heating": "電気暖房",
     "pump_holiday_mode": "休日",
@@ -2220,7 +2220,7 @@
     "fridge_refr_fan_failure": "مروحة ثلاجة",
     "fridge_rx_failure": "استقبال لوحة العرض",
     "fridge_vari_evap_temp_sens_head_failure": "مستشعر المبخر MyFreshChoice",
-    "fridge_humidity sensor_failure": "مستشعر الرطوبة البيئية",
+    "fridge_humidity sensor_failure": "外気湿度センサー故障",
     "fridge_ice_sensor_failure_flag": "مستشعر صانع الثلج",
     "fridge_ice_temperature_sensor_header_failure_flag": "مستشعر درجة حرارة صندوق الثلج",
     "fridge_variable_fan_failure_status": "مروحة ماي فريش تشويس",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "接続され、電源が入っています。\nWi-Fiが有効になっており、接続されています。\nWi-Fiパスワードは最近変更されていません。",
     "dont_remind_again_uppercase": "再表示しない",
     "storage_tips_title": "保管のヒント:",
-    "heat_pump_oem": "業務用ヒートポンプ",
+    "heat_pump_oem": "定速DHW",
     "td22_drying_empty_water_tank": "乾燥 – 水タンクを空にする",
     "td22_drying_paused": "乾燥を一時停止",
     "td22_drying_finished": "乾燥完了",
@@ -2430,7 +2430,7 @@
     "logout_tips": "ログアウトします。よろしいですか？",
     "fridge_child_lock_open_tips": "チャイルドロックが解除されると、タッチスクリーンとディスペンサーがロックされます。",
     "want_scan_code_tips": "コードをスキャンしたいのですが。",
-    "tri_name_key": "ATWヒートポンプヒーター",
+    "tri_name_key": "ATWプロヒートポンプ",
     "water_set_key": "水温",
     "f_e_fan_fault_tip": "DCファンの故障",
     "zone_water_key": "ゾーン1 水",
@@ -2461,7 +2461,7 @@
     "discard_changes": "変更廃棄",
     "notification_settings": "通知設定",
     "vari_temp_sens_head_failure": "上部温度ゾーン検知ヘッド",
-    "refr_temp_sens_head_failure": "下部温度ゾーン検知ヘッド",
+    "refr_temp_sens_head_failure": "冷蔵室温度センサー故障",
     "vari_evap_temp_sens_head_failure": "蒸発センサー",
     "refr_evap_temp_sens_head_failure": "下部温度ゾーン蒸発器センサー",
     "tx_failure": "ディスプレイボードがデータを送信",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Bluetoothがオンになっていることを確認してください。",
     "CL_DV_PIND_accessory_firmware_update": "アクセサリファームウェアアップデート",
     "CL_CF_CS_ble_scan_not_list": "デバイスがリストにない場合は、「再試行」をクリックして再度検索するか、「次へ」をクリックして別の方法でネットワークを構成してください。",
-    "CL_CF_CS_ble_scan_have_not_found": "Bluetooth 上のデバイスが見つかりません。「再試行」をクリックして再度検索するか、「次へ」をクリックして別の方法でネットワークを構成してください。",
+    "CL_CF_CS_ble_scan_have_not_found": "ブルートゥースのデバイスが見つかりません。TRY AGAIN」をクリックして再度検索するか、別の方法でネットワークを設定してください。",
     "CL_DV_WM_pump_cleaning": "洗浄ポンプ...",
     "CL_DV_WM_autodoes_tip": "この機能を有効にすると、洗濯中にデバイスが洗剤と柔軟剤をスマートに分配します。",
     "CL_DV_WM_detergent_department_key": "洗剤入れ",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "隠すことができない",
     "program_management_unable_to_hide_desc": "これは最後に表示されるプログラムであり、少なくとも 1 つのプログラムを表示したままにする必要があります。",
     "CL_CF_FM_set_deadline": "期限を設定する",
-    "CL_CF_FM_expiry_date_must_be_selected": "有効期限を選択する必要があります"
+    "CL_CF_FM_expiry_date_must_be_selected": "有効期限を選択する必要があります",
+    "CL_CF_FM_add_custom_food_desc": "新しいカスタマイズアイテムを追加する",
+    "CL_CF_FM_delete_selected_items": "選択したアイテムを削除",
+    "CL_CF_FM_delete_selected": "選択項目を削除",
+    "CL_DV_HOB_residual_heat_content": "調理ゾーンはまだ熱いので、触らないように注意してください。",
+    "CL_CF_FM_add_custom_food": "ライブラリに含まれていない食品を追加する",
+    "air_care_temp_title": "温度評価基準：",
+    "air_care_hum_title": "湿度評価基準：",
+    "air_care_temp_c": "良好: 17 < T < 27℃\n正常: 10≤T≤17°C、27≤T≤30°C\n良くない: T < 10°CT > 30°C",
+    "air_care_temp_f": "良好: 62.6 < T < 80.6℉\n正常: 50≤T≤62.6℉、80.6≤T≤86℉\n良くない: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "良好: H < 70%\n正常: 70≤H≤80%\n良くない: H＞80%",
+    "CL_CF_RM_change_floor_key": "フロア変更",
+    "CL_CF_FM_recently_added": "最近追加されたもの",
+    "CL_CF_FM_no_matching_items": "一致するアイテムはありません",
+    "CL_CF_FM_search_stored_food": "保存食品を検索",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "通知",
+    "CL_CF_FM_a_day_ago": "1日前",
+    "CL_CF_FM_a_week_ago": "1週間前",
+    "CL_CF_FM_a_month_ago": "1か月前",
+    "CL_CF_FM_a_year_ago": "1年前",
+    "CL_CF_FM_x_days_ago": "** 日前",
+    "CL_CF_FM_x_weeks_ago": "** 週間前",
+    "CL_CF_FM_x_months_ago": "** 数か月前",
+    "CL_CF_FM_x_years_ago": "** 数年前",
+    "CL_CF_FM_shopping_list_details": "買い物リストの詳細",
+    "CL_CF_FM_no_shopping_list": "買い物リストなし",
+    "CL_DV_OV_24_time_zone": "タイムゾーン",
+    "CL_CF_FM_reset_purchased_tips": "このリストにあるすべての食品を未購入の状態にリセットしますか?",
+    "CL_CF_FM_add_food_to_x": "「***」に食べ物を追加する",
+    "CL_CF_FM_add_food_to_be_purchased": "購入する食品を追加する",
+    "CL_DV_OV_24_always_on": "常にオン",
+    "CL_CF_CS_separated_ac_cs_step2": "リモコンの「左右首振り」ボタンを6回押します。または、有線リモコンの「スリープ」ボタンを8回押します。",
+    "CL_CF_FM_list": "リスト",
+    "CL_CF_FM_select_shopping_list": "買い物リストを選択",
+    "CL_CF_FM_x_items_added": "** アイテムが追加されました",
+    "CL_CF_FM_create_shopping_list_first": "まず買い物リストを作成する必要があります。",
+    "CL_CF_FM_no_shopping_list_available": "利用できるショッピングリストがありません。",
+    "CL_DV_OV_extra_drying_desc": "食品を乾燥させたり脱水したりすると、食品から水分が除去され、保存期間が長くなります。これは推奨プログラムです。お好みに合わせて変更できます。",
+    "CL_DV_OV_extra_drying_herbs_desc": "乾燥はハーブを保存する最も簡単な方法です。暖かく乾燥した空気を使用することで、水分が蒸発します。これにより、葉、花、種子の色と風味が保たれます。",
+    "CL_DV_OV_extra_pasteurization_desc": "食品に軽い熱処理を施すことで有害な細菌を殺し、保存期間を延ばします。乳製品、卵製品、ナッツなどの食品の保存に使用できます。",
+    "CL_DV_OV_extra_canning_desc": "缶詰にすると、熱殺菌により食品を腐敗から守ることができます。食品は必ず密閉された容器に保存してください。",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "冷凍食品を素早く安全に解凍する効率的なプログラムです。肉や野菜から調理済みの食事まで、さまざまな食品に特に便利です。",
+    "CL_DV_OV_extra_stream_defrost_desc": "穏やかな熱と蒸気の自然な水分を組み合わせることで、冷凍食品を効果的に解凍します。蒸気は食品の水分レベルを維持し、食感と風味を保ちます。これは、魚、ペストリー、パンなどのデリケートな食品に特に役立ちます。",
+    "CL_DV_OV_extra_fan_defrost_desc": "この機能では、ファンの助けを借りて空気を循環させます。 発熱体はオンになっていません。 ケーキ、パン、フルーツなどの冷凍食品を解凍する場合にこの設定を使用します。",
+    "CL_DV_OV_extra_plate_warming_desc": "プレートを希望の温度まで加熱します。これにより、プレート上の料理が長時間温かい状態を保つことができます。",
+    "CL_DV_OV_extra_oshibori_desc": "おしぼりタオルをやさしく温め、心地よい温度に温めます。",
+    "CL_DV_OV_extra_hot_stone_desc": "スパのようなトリートメント用に設計されています。石は最適な温度に均一に温められており、リラクゼーションやウェルネス ルーチンにすぐに使用できます。",
+    "CL_DV_OV_extra_sterilizing_desc": "哺乳瓶、キッチン用品、小さな道具などのアイテムを消毒します。オーブンは細菌やその他の病原菌を除去するのに十分な温度に達するため、清潔さと衛生を保つためのシンプルで効果的な方法を提供します。",
+    "CL_DV_OV_extra_warming_regenerate_desc": "蒸気を使って食品をやさしく再加熱し、水分と新鮮さを取り戻します。再加熱した食品は乾燥することなく、本来の食感と風味が保たれるため、パスタ、米、キャセロールなどの繊細な料理に最適です。",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "熱風と蒸気の両方の利点を組み合わせたこのプログラムは、さまざまな食品の再加熱に最適です。熱風は均一に加熱し、蒸気は水分を加えるため、肉、鶏肉、ミックスミールなどの料理に最適で、ジューシーで風味豊かな料理が確実に仕上がります。",
+    "CL_DV_OV_extra_warming_hotair_desc": "外側がカリカリに仕上げたい食品に最適なこのプログラムは、熱風を使ってピザ、焼き菓子、焼き野菜などの料理を均等に再加熱します。熱風を循環させることで、食品は完全に加熱され、カリカリに仕上がります。",
+    "CL_DV_OV_extra_warming_microwave_desc": "食品を内側から素早く再加熱します。食事を素早く効率的に再加熱できます。すぐに温める必要のあるスープ、シチュー、残り物などに最適です。",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "それ以上調理しなくても、食べ物を最適な提供温度に保ちます。料理を提供する準備ができるまで温かい状態に保つのに最適です。事前に準備した食事に最適で、温かいまますぐに食べられます。",
+    "CL_DV_OV_ends_at": "終了日時: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "屋外グリルを使わずに、グリル料理のおいしいスモーキーな風味をお楽しみください。全体に熱を均等に分散するように作られているため、ホットスポットが最小限に抑えられ、一貫したグリル結果が保証されます。肉や野菜から魚介類、果物まで、さまざまな食品をグリルするのに最適です。",
+    "CL_DV_OV_remote_start_title": "リモートスタートは無効です",
+    "CL_DV_OV_remote_start_content": "アプリからプログラムを送信して起動するには、リモート スタートをアクティブにする必要があります。 ",
+    "CL_CF_FM_apple": "りんご",
+    "CL_CF_FM_bacon": "ベーコン",
+    "CL_CF_FM_broccoli": "ブロッコリー",
+    "CL_CF_FM_cabbage": "キャベツ",
+    "CL_CF_FM_Cauliflower": "カリフラワー",
+    "CL_CF_FM_cod": "タラ",
+    "CL_CF_FM_dragon_fruit": "ドラゴンフルーツ",
+    "CL_DV_OV_defrost_detail_desc": "食品を正しく解凍することで、冷凍後の食品の品質が保たれます。適切な解凍により、食中毒のリスクが軽減されます。",
+    "CL_DV_OV_extra_non_food_detail_desc": "非食品プログラムは、さまざまな非調理タスク用に作成されており、従来の調理を超えた利便性と機能性を提供します。",
+    "CL_DV_OV_extra_warming_detail_desc": "食品の再加熱や温めのためのさまざまな保温プログラムにより、残り物を温め直すときや、料理を温かいままにして盛り付けるときなど、食事を簡単に楽しむことができます。",
+    "CL_CF_FM_click_switch_status": "クリックするとアイテムのステータスが切り替わります",
+    "CL_CF_FM_recent_purchased_tips": "これらを購入しました。食品在庫に追加しますか?",
+    "CL_DV_OV_extra_drying_herbs": "ハーブの乾燥",
+    "CL_DV_OV_extra_pasteurization": "殺菌",
+    "CL_DV_OV_extra_canning": "缶詰",
+    "CL_DV_OV_extra_defrost_microwave": "電子レンジで解凍する",
+    "CL_DV_OV_extra_defrost_stream": "蒸気で解凍する",
+    "CL_DV_OV_extra_oshibori": "おしぼり",
+    "CL_DV_OV_extra_hot_stones": "ホットストーン",
+    "CL_DV_OV_extra_sterilizing": "殺菌",
+    "CL_DV_OV_extra_warming_hotair_stream": "熱風＋蒸気で再加熱",
+    "CL_DV_OV_extra_warming_hotair": "熱風で再加熱",
+    "CL_DV_OV_extra_warming_microwave": "電子レンジで温める",
+    "CL_DV_OV_extra_warming_keepwarm": "保温",
+    "CL_CF_FM_dont_remind_in_3_months": "3か月以内に通知しない",
+    "CL_DV_RF_cleaning_plan": "清掃計画",
+    "CL_DV_RF_cleaning_refrigerator": "冷蔵庫の掃除",
+    "CL_DV_RF_cleaning_reminder": "清掃リマインダー",
+    "CL_DV_RF_cleaning_cycle": "洗浄サイクル",
+    "CL_DV_RF_cleaning_history": "清掃履歴",
+    "CL_DV_RF_cleaning_cycle_not_selected": "クリーニングサイクルが選択されていません",
+    "CL_DV_RF_havent_cleaned_yet": "まだ掃除してないよ。",
+    "CL_DV_RF_garbage_disposal_reminder": "ゴミ捨てのお知らせ",
+    "CL_DV_RF_resource_waste": "資源の無駄",
+    "CL_DV_RF_timer_not_selected": "タイマーが選択されていません",
+    "CL_DV_RF_add_more_reminders": "リマインダーを追加する",
+    "CL_DV_RF_cleaning_tips": "掃除のヒント",
+    "CL_DV_RF_last_clean_time": "前回冷蔵庫を掃除したのはいつですか: ***",
+    "CL_DV_RF_last_cleaning_was_today": "今日は最後の掃除でした。",
+    "CL_DV_RF_you_need_cleaning_now": "今すぐ掃除が必要です。",
+    "CL_DV_RF_next_cleaning_in_x_days": "次回の清掃は**日後です。",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "最後の清掃は**日前でした。",
+    "CL_CF_CO_x_weeks": "週",
+    "CL_DV_RF_cleaned": "クリーニング済み",
+    "CL_DV_OV_probe_temperature_graph": "プローブ温度グラフ",
+    "CL_DV_OV_internal": "内部",
+    "CL_DV_OV_probe_desc": "プローブは食品の温度を測定するのに役立ちます。時間の経過とともに変化する温度を見ることができます。",
+    "CL_DV_RF_no_cleaning_history": "清掃履歴なし"
 }
