--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -1676,7 +1676,7 @@
     "add_timing": "УАҚЫТ ЕСЕПТЕУІН ҚОСУ",
     "set_start_to_finish_time": "Аяқталудың басталу уақытын орнатыңыз",
     "pair_pump_appliance": "Жылу сорғысының су жылытқышы",
-    "heat_pump": "Жылу сорғысы",
+    "heat_pump": "Инверторлық тақта",
     "pump_boost_1": "Күшейту 1",
     "pump_electric_heating": "Электр жылыту",
     "pump_holiday_mode": "Демалыс",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Қосылған және қосулы;\nWi-Fi белсенді және қосылған;\nWi-Fi құпия сөзі жақында өзгертілген жоқ.",
     "dont_remind_again_uppercase": "ҚАЙТА ЕСКЕРТУШЫЗ",
     "storage_tips_title": "Сақтау кеңестері:",
-    "heat_pump_oem": "PRO сериясы DHW",
+    "heat_pump_oem": "Тұрақты жылдамдықты DHW",
     "td22_drying_empty_water_tank": "Кептіру – су ыдысын босатыңыз",
     "td22_drying_paused": "Кептіру тоқтатылды",
     "td22_drying_finished": "Кептіру аяқталды",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Шығуды қалайсыз ба?",
     "fridge_child_lock_open_tips": "Балалардан қорғау құлпы ашылғаннан кейін сенсорлық экран мен диспенсер құлыпталады.",
     "want_scan_code_tips": "Мен кодты сканерлеуді қалаймын.",
-    "tri_name_key": "ATW жылу сорғы қыздырғышы",
+    "tri_name_key": "ATW Pro жылу сорғысы",
     "water_set_key": "СУ ТЕМПРАЦИЯСЫ",
     "f_e_fan_fault_tip": "Тұрақты ток желдеткішінің ақаулығы",
     "zone_water_key": "1-аймақ Су",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Bluetooth қосулы екеніне көз жеткізіңіз.",
     "CL_DV_PIND_accessory_firmware_update": "Қосымша микробағдарламаны жаңарту",
     "CL_CF_CS_ble_scan_not_list": "Құрылғыңыз тізімде жоқ болса, қайта іздеу үшін «ҚАЙТА ОРЫНДАУ» түймесін басыңыз немесе желіні басқа жолмен конфигурациялау үшін «КЕЛЕСІ» түймесін басыңыз.",
-    "CL_CF_CS_ble_scan_have_not_found": "Біз bluetooth арқылы ешбір құрылғыны таппадық. Қайтадан іздеу үшін «ҚАЙТАЛАП КӨРУ» түймесін басыңыз немесе желіні басқа жолмен конфигурациялау үшін «КЕЛЕСІ» түймесін басыңыз.",
+    "CL_CF_CS_ble_scan_have_not_found": "Біз bluetooth арқылы ешбір құрылғыны таппадық. Қайта іздеу немесе желіні басқа жолмен конфигурациялау үшін «ҚАЙТА ОРЫНДАУ» түймесін басуға болады.",
     "CL_DV_WM_pump_cleaning": "Тазалау сорғы...",
     "CL_DV_WM_autodoes_tip": "Бұл мүмкіндікті қосыңыз, сонда құрылғы кір жуу кезінде жуғыш зат пен мата жұмсартқышты ақылды түрде таратады.",
     "CL_DV_WM_detergent_department_key": "ЖҰУ ЗАТ БӨЛІМІ",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Жасыру мүмкін емес",
     "program_management_unable_to_hide_desc": "Бұл соңғы көрінетін бағдарлама және кем дегенде бір бағдарлама көрінетін болуы керек.",
     "CL_CF_FM_set_deadline": "Мерзімді белгілеңіз",
-    "CL_CF_FM_expiry_date_must_be_selected": "Жарамдылық мерзімін таңдау керек"
+    "CL_CF_FM_expiry_date_must_be_selected": "Жарамдылық мерзімін таңдау керек",
+    "CL_CF_FM_add_custom_food_desc": "Жаңа теңшелген элементті қосыңыз",
+    "CL_CF_FM_delete_selected_items": "Таңдалған элементтерді жою",
+    "CL_CF_FM_delete_selected": "Таңдалғанды ​​жою",
+    "CL_DV_HOB_residual_heat_content": "Пісіру алаңы әлі ыстық. Оған қол тигізбеу үшін абай болыңыз.",
+    "CL_CF_FM_add_custom_food": "Кітапханаға кірмейтін тағамды қосыңыз",
+    "air_care_temp_title": "Температураны бағалау стандарты:",
+    "air_care_hum_title": "Ылғалдылықты бағалау стандарты:",
+    "air_care_temp_c": "Жақсы: 17 < T < 27 ℃\n Қалыпты: 10≤T≤17°C, 27≤T≤30°C\n Жақсы емес: T < 10°CT > 30°C",
+    "air_care_temp_f": "Жақсы: 62,6 < T < 80,6℉\n Қалыпты: 50≤T≤62,6℉,80,6≤T≤86℉\n Жақсы емес: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Жақсы: H < 70%\n Қалыпты: 70≤H≤80%\n Жақсы емес: H＞80%",
+    "CL_CF_RM_change_floor_key": "еденді өзгерту",
+    "CL_CF_FM_recently_added": "Жақында қосылған",
+    "CL_CF_FM_no_matching_items": "Сәйкес келетін элементтер жоқ",
+    "CL_CF_FM_search_stored_food": "Сақталған тағамды іздеу",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "хабарландыру",
+    "CL_CF_FM_a_day_ago": "Бір күн бұрын",
+    "CL_CF_FM_a_week_ago": "Бір апта бұрын",
+    "CL_CF_FM_a_month_ago": "Бір ай бұрын",
+    "CL_CF_FM_a_year_ago": "Бір жыл бұрын",
+    "CL_CF_FM_x_days_ago": "** күн бұрын",
+    "CL_CF_FM_x_weeks_ago": "** апта бұрын",
+    "CL_CF_FM_x_months_ago": "** бірнеше ай бұрын",
+    "CL_CF_FM_x_years_ago": "** бірнеше жылдар бұрын",
+    "CL_CF_FM_shopping_list_details": "Сатып алу тізімінің мәліметтері",
+    "CL_CF_FM_no_shopping_list": "Сатып алу тізімі жоқ",
+    "CL_DV_OV_24_time_zone": "Уақыт белдеуі",
+    "CL_CF_FM_reset_purchased_tips": "Осы тізімдегі барлық тағамдарды сатып алынбаған күйіне қайтарғыңыз келе ме?",
+    "CL_CF_FM_add_food_to_x": "\"***\" ішіне тағам қосыңыз",
+    "CL_CF_FM_add_food_to_be_purchased": "Сатып алынатын тағамды қосыңыз",
+    "CL_DV_OV_24_always_on": "Әрқашан қосулы",
+    "CL_CF_CS_separated_ac_cs_step2": "Қашықтан басқару пультіндегі «Көлденең тербеліс» түймесін 6 рет басыңыз. Немесе сымды қашықтан басқару құралындағы «Ұйқы» түймесін 8 рет басыңыз.",
+    "CL_CF_FM_list": "Тізім",
+    "CL_CF_FM_select_shopping_list": "Сатып алу тізімі таңдаңыз",
+    "CL_CF_FM_x_items_added": "** элементтер қосылды",
+    "CL_CF_FM_create_shopping_list_first": "Алдымен сатып алу тізімін жасау керек.",
+    "CL_CF_FM_no_shopping_list_available": "Сатып алу тізімі жоқ!",
+    "CL_DV_OV_extra_drying_desc": "Тағамды кептіру немесе сусыздандыру сақтау мерзімін ұзарту үшін тағамнан ылғалды кетіреді. Бұл ұсынылатын бағдарлама. Оны өз қалауыңыз бойынша өзгертуге болады.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Кептіру - шөптерді сақтаудың ең оңай әдісі. Жылы және құрғақ ауаны пайдалану арқылы ылғал буланып кетеді. Бұл жапырақтардың, гүлдердің немесе тұқымдардың түсі мен дәмін сақтауға көмектеседі.",
+    "CL_DV_OV_extra_pasteurization_desc": "Зиянды бактерияларды жою және сақтау мерзімін ұзарту үшін тағамға жұмсақ термиялық өңдеу қолданылады. Оны сүт өнімдері, жұмыртқа өнімдері, жаңғақтар сияқты тағамдарды сақтау үшін пайдалануға болады.",
+    "CL_DV_OV_extra_canning_desc": "Консервілеу тағамды жылумен зарарсыздандыру арқылы бүлінуден сақтауға мүмкіндік береді. Тағамның герметикалық жабылған контейнерлерде сақталғанына көз жеткізіңіз.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Мұздатылған тағамдарды тез және қауіпсіз жібітуге арналған тиімді бағдарлама. Бұл әсіресе ет пен көкөністен алдын ала пісірілген тағамдарға дейін әртүрлі тағамдарға пайдалы.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Жұмсақ жылу мен будың табиғи ылғалдылығын біріктіру арқылы мұздатылған тағамдарды тиімді түрде ерітеді. Бу тағамның құрылымы мен дәмін сақтай отырып, ылғалдылық деңгейін сақтауға көмектеседі. Бұл әсіресе балық, кондитерлік өнімдер немесе нан сияқты нәзік тағамдар үшін пайдалы.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Бұл функция арқылы ауа желдеткіштің көмегімен айналады. Ешбір жылу элементтері қосылмаған. Бұл параметрді торттар, нан және жемістер сияқты мұздатылған тағамдарды жібіту үшін пайдаланыңыз.",
+    "CL_DV_OV_extra_plate_warming_desc": "Пластиналарды қажетті температураға дейін қыздырыңыз. Бұл табақтардағы ыдыстардың ұзақ уақыт бойы жылы болуына көмектеседі.",
+    "CL_DV_OV_extra_oshibori_desc": "Ошибори қол сүлгілерін жайлап жылытады, оларды қолайлы температураға дейін қыздырады.",
+    "CL_DV_OV_extra_hot_stone_desc": "СПА тәрізді емдеуге арналған. Тастар тамаша температураға дейін біркелкі жылытылады, бұл оларды релаксация немесе сауықтыру рәсімдерінде пайдалануға дайын етеді.",
+    "CL_DV_OV_extra_sterilizing_desc": "Бөтелкелер, ас үй ыдыстары немесе шағын құралдар сияқты заттарды зарарсыздандырыңыз. Пеш тазалық пен гигиенаны сақтаудың қарапайым және тиімді әдісін қамтамасыз ететін бактериялар мен басқа да патогендерді жою үшін жеткілікті температураға жетеді.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Тамақты ақырын қыздыру, оның ылғалдылығы мен балғындығын қалпына келтіру үшін буды пайдаланады. Макарон, күріш немесе кастрюль сияқты нәзік тағамдарға өте ыңғайлы, себебі ол қыздырылған тағамның құрғақ болмай, бастапқы құрылымы мен дәмін сақтайды.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Ыстық ауа мен будың артықшылықтарын біріктіретін бұл бағдарлама тағамның алуан түрін қыздыруға өте ыңғайлы. Ыстық ауа біркелкі қыздыруды қамтамасыз етеді, ал бу ылғал қосады, бұл ет, құс еті немесе аралас тағамдар сияқты тағамдарға өте ыңғайлы етеді, бұл олардың шырынды және дәмді болуын қамтамасыз етеді.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Сырты қытырлақ болуы керек тағамдар үшін өте қолайлы, бұл бағдарлама пицца, пісірілген өнімдер немесе қуырылған көкөністер сияқты тағамдарды біркелкі қыздыру үшін ыстық ауаны пайдаланады. Айналымдағы ыстық ауа тағамның қытырлақ күйін сақтай отырып, мұқият қыздырылуын қамтамасыз етеді.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Тамақты ішінен сыртқа қарай жылдам қыздырыңыз. Бұл тамақты қыздырудың жылдам әрі тиімді нұсқасы. Жылдам қыздыруды қажет ететін сорпалар, бұқтырылған тағамдар немесе тамақ қалдықтары үшін өте қолайлы.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Тағамды әрі қарай пісірместен мінсіз қызмет ету температурасында ұстаңыз. Ыдыстарды ұсынуға дайын болғанша жылы ұстауға өте ыңғайлы. Бұл алдын ала дайындалған тағамдарға өте ыңғайлы, бұл олардың ыстық күйінде және ләззат алуға дайын болуын қамтамасыз етеді.",
+    "CL_DV_OV_ends_at": "Аяқталатын уақыты: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Ашық грильді қажет етпей-ақ грильден жасалған тағамдардың дәмді, ысталған дәмін тамашалаңыз. Жылуды бүкіл аумаққа біркелкі тарату, ыстық нүктелерді азайту және тұрақты грильдеу нәтижелерін қамтамасыз ету үшін жасалған. Ет пен көкөністен бастап теңіз өнімдеріне, тіпті жемістерге дейін әртүрлі тағамдарды гриль жасау үшін өте қолайлы.",
+    "CL_DV_OV_remote_start_title": "Қашықтан іске қосу өшірілген",
+    "CL_DV_OV_remote_start_content": "Бағдарламаларды қолданбадан жіберу және іске қосу үшін қашықтан іске қосу белсенді болуы керек. ",
+    "CL_CF_FM_apple": "Алма",
+    "CL_CF_FM_bacon": "Бекон",
+    "CL_CF_FM_broccoli": "Брокколи",
+    "CL_CF_FM_cabbage": "Қырыққабат",
+    "CL_CF_FM_Cauliflower": "Түсті қырыққабат",
+    "CL_CF_FM_cod": "Код",
+    "CL_CF_FM_dragon_fruit": "Айдаһар жемісі",
+    "CL_DV_OV_defrost_detail_desc": "Тағамдарды дұрыс еріту тағамның мұздатылғаннан кейін сапасын қамтамасыз етеді. Дұрыс жібіту тағамнан улану қаупін азайтады.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Тағамдық емес бағдарламалар әртүрлі аспаздық емес тапсырмалар үшін жасалады, бұл дәстүрлі тағам дайындаудан тыс ыңғайлылық пен функционалдылықты қамтамасыз етеді.",
+    "CL_DV_OV_extra_warming_detail_desc": "Тамақты жылытуға және жылытуға арналған жылыту бағдарламаларының ауқымы, тамақ қалдықтарын қыздырсаңыз да немесе қызмет көрсету үшін ыдыстарды жылы ұстасаңыз да, тамақтан ләззат алуды жеңілдетеді.",
+    "CL_CF_FM_click_switch_status": "Элементтің күйін ауыстыру үшін басыңыз",
+    "CL_CF_FM_recent_purchased_tips": "Сіз бұл заттарды сатып алдыңыз, азық-түлік қорына терм қосқыңыз келе ме?",
+    "CL_DV_OV_extra_drying_herbs": "Шөптерді кептіру",
+    "CL_DV_OV_extra_pasteurization": "Пастерлеу",
+    "CL_DV_OV_extra_canning": "Консервілеу",
+    "CL_DV_OV_extra_defrost_microwave": "Микротолқынды пешпен жібіту",
+    "CL_DV_OV_extra_defrost_stream": "Бумен жібіту",
+    "CL_DV_OV_extra_oshibori": "Ошибори",
+    "CL_DV_OV_extra_hot_stones": "Ыстық тастар",
+    "CL_DV_OV_extra_sterilizing": "Стерилизация",
+    "CL_DV_OV_extra_warming_hotair_stream": "Ыстық ауа + бумен қайта қыздырыңыз",
+    "CL_DV_OV_extra_warming_hotair": "Ыстық ауамен қайта қыздырыңыз",
+    "CL_DV_OV_extra_warming_microwave": "Микротолқынды пешпен қайта қыздырыңыз",
+    "CL_DV_OV_extra_warming_keepwarm": "Жылы күйде сақтау",
+    "CL_CF_FM_dont_remind_in_3_months": "3 айдан кейін еске түсірмеңіз",
+    "CL_DV_RF_cleaning_plan": "Тазалау жоспары",
+    "CL_DV_RF_cleaning_refrigerator": "Тоңазытқышты тазалау",
+    "CL_DV_RF_cleaning_reminder": "Тазалау туралы еске салғыш",
+    "CL_DV_RF_cleaning_cycle": "Тазалау циклі",
+    "CL_DV_RF_cleaning_history": "Тазалау тарихы",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Тазалау циклі таңдалмаған",
+    "CL_DV_RF_havent_cleaned_yet": "Сіз әлі тазалаған жоқсыз.",
+    "CL_DV_RF_garbage_disposal_reminder": "Қоқысты жою туралы еске салғыш",
+    "CL_DV_RF_resource_waste": "Ресурс қалдықтары",
+    "CL_DV_RF_timer_not_selected": "Таймер таңдалмаған",
+    "CL_DV_RF_add_more_reminders": "Қосымша еске салғыштарды қосыңыз",
+    "CL_DV_RF_cleaning_tips": "Тазалау бойынша кеңестер",
+    "CL_DV_RF_last_clean_time": "Тоңазытқышты соңғы рет тазалаған кезде: ***",
+    "CL_DV_RF_last_cleaning_was_today": "Соңғы тазалау бүгін болды.",
+    "CL_DV_RF_you_need_cleaning_now": "Сізге қазір тазалау керек.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Келесі тазалау ** күннен кейін.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Соңғы тазалау ** күн бұрын болды.",
+    "CL_CF_CO_x_weeks": "Апталар",
+    "CL_DV_RF_cleaned": "Тазаланған",
+    "CL_DV_OV_probe_temperature_graph": "Зондтың температура графигі",
+    "CL_DV_OV_internal": "Ішкі",
+    "CL_DV_OV_probe_desc": "Зонд тағамның температурасын өлшеуге көмектеседі. Уақыт өте әртүрлі температураны көруге болады.",
+    "CL_DV_RF_no_cleaning_history": "Тазалау тарихы жоқ"
 }
