--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -1676,7 +1676,7 @@
     "add_timing": "타이밍 추가",
     "set_start_to_finish_time": "셋슈타트 토피니 시모",
     "pair_pump_appliance": "히트펌프 온수기",
-    "heat_pump": "히트 펌프",
+    "heat_pump": "인버터 보드",
     "pump_boost_1": "이중 에너지 1",
     "pump_electric_heating": "전기 난방",
     "pump_holiday_mode": "휴일",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "전원이 연결되고 켜져 있습니다;\nWi-Fi가 활성화되고 연결되었습니다;\nWi-Fi 비밀번호가 최근에 변경되지 않았습니다.",
     "dont_remind_again_uppercase": "다시 상기시키지 마십시오",
     "storage_tips_title": "보관 팁:",
-    "heat_pump_oem": "PRO 시리즈 DHW",
+    "heat_pump_oem": "고정 속도 DHW",
     "td22_drying_empty_water_tank": "건조 – 물탱크 비우기",
     "td22_drying_paused": "건조가 일시 중지되었습니다.",
     "td22_drying_finished": "건조완료",
@@ -2430,7 +2430,7 @@
     "logout_tips": "로그아웃하시겠습니까?",
     "fridge_child_lock_open_tips": "어린이 잠금 장치가 열리면 터치 스크린과 디스펜서가 잠깁니다.",
     "want_scan_code_tips": "코드를 스캔하고 싶습니다.",
-    "tri_name_key": "ATW 히트펌프 히터",
+    "tri_name_key": "ATW 프로 히트 펌프",
     "water_set_key": "수온",
     "f_e_fan_fault_tip": "DC 팬 고장",
     "zone_water_key": "Zone1 물",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "블루투스가 켜져 있는지 확인하세요.",
     "CL_DV_PIND_accessory_firmware_update": "액세서리 펌웨어 업데이트",
     "CL_CF_CS_ble_scan_not_list": "귀하의 기기가 목록에 없으면 '다시 시도'를 클릭하여 다시 검색하거나 '다음'을 클릭하여 다른 방식으로 네트워크를 구성할 수 있습니다.",
-    "CL_CF_CS_ble_scan_have_not_found": "블루투스에서 어떤 장치도 발견되지 않았습니다. '다시 시도'를 클릭하여 다시 검색하거나, '다음'을 클릭하여 다른 방식으로 네트워크를 구성하세요.",
+    "CL_CF_CS_ble_scan_have_not_found": "블루투스에서 장치를 찾지 못했습니다. '다시 시도'를 클릭하여 다시 검색하거나 다른 방법으로 네트워크를 구성할 수 있습니다.",
     "CL_DV_WM_pump_cleaning": "펌프 세척...",
     "CL_DV_WM_autodoes_tip": "이 기능을 활성화하면 세탁하는 동안 기기에서 세제와 섬유유연제가 스마트하게 분사됩니다.",
     "CL_DV_WM_detergent_department_key": "세제 칸",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "숨길 수 없습니다",
     "program_management_unable_to_hide_desc": "이것은 마지막으로 볼 수 있는 프로그램이며 적어도 하나의 프로그램은 계속 보여야 합니다.",
     "CL_CF_FM_set_deadline": "마감일을 정하다",
-    "CL_CF_FM_expiry_date_must_be_selected": "유효기간을 선택해야 합니다."
+    "CL_CF_FM_expiry_date_must_be_selected": "유효기간을 선택해야 합니다.",
+    "CL_CF_FM_add_custom_food_desc": "새로운 사용자 정의 항목 추가",
+    "CL_CF_FM_delete_selected_items": "선택한 항목 삭제",
+    "CL_CF_FM_delete_selected": "선택 항목 삭제",
+    "CL_DV_HOB_residual_heat_content": "쿠킹존은 아직 뜨겁습니다. 만지지 않도록 주의하세요.",
+    "CL_CF_FM_add_custom_food": "도서관에 포함되지 않은 음식 추가",
+    "air_care_temp_title": "온도 평가 기준:",
+    "air_care_hum_title": "습도 평가 기준:",
+    "air_care_temp_c": "좋음: 17 < T < 27℃\n 정상: 10≤T≤17°C, 27≤T≤30°C\n 좋지 않음: T < 10°CT > 30°C",
+    "air_care_temp_f": "좋음: 62.6 < T < 80.6℉\n 일반: 50≤T≤62.6℉,80.6≤T≤86℉\n 좋지 않음: T＜50℉ T≥86℉",
+    "air_care_hum_tips": "좋음: H < 70%\n 일반: 70≤H≤80%\n 좋지 않음: H>80%",
+    "CL_CF_RM_change_floor_key": "층을 바꾸다",
+    "CL_CF_FM_recently_added": "최근 추가됨",
+    "CL_CF_FM_no_matching_items": "일치하는 항목이 없습니다",
+    "CL_CF_FM_search_stored_food": "저장된 식품 검색",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "공고",
+    "CL_CF_FM_a_day_ago": "하루 전",
+    "CL_CF_FM_a_week_ago": "일주일 전",
+    "CL_CF_FM_a_month_ago": "한 달 전",
+    "CL_CF_FM_a_year_ago": "1년 전",
+    "CL_CF_FM_x_days_ago": "**일 전",
+    "CL_CF_FM_x_weeks_ago": "** 몇 주 전",
+    "CL_CF_FM_x_months_ago": "** 몇 달 전",
+    "CL_CF_FM_x_years_ago": "**년 전",
+    "CL_CF_FM_shopping_list_details": "쇼핑 목록 세부 정보",
+    "CL_CF_FM_no_shopping_list": "쇼핑 목록이 없습니다",
+    "CL_DV_OV_24_time_zone": "시간대",
+    "CL_CF_FM_reset_purchased_tips": "이 목록에 있는 모든 음식을 구매하지 않음 상태로 재설정하시겠습니까?",
+    "CL_CF_FM_add_food_to_x": "\"***\"에 음식을 추가하세요",
+    "CL_CF_FM_add_food_to_be_purchased": "구매할 음식을 추가하세요",
+    "CL_DV_OV_24_always_on": "항상 켜짐",
+    "CL_CF_CS_separated_ac_cs_step2": "리모컨에서 \"수평 스윙\" 버튼을 6번 누릅니다. 또는 와이어 리모컨에서 \"수면\" 버튼을 8번 누릅니다.",
+    "CL_CF_FM_list": "목록",
+    "CL_CF_FM_select_shopping_list": "쇼핑목록 선택",
+    "CL_CF_FM_x_items_added": "** 항목이 추가되었습니다",
+    "CL_CF_FM_create_shopping_list_first": "먼저 쇼핑 목록을 만들어야 합니다.",
+    "CL_CF_FM_no_shopping_list_available": "쇼핑 목록이 없습니다!",
+    "CL_DV_OV_extra_drying_desc": "식품을 건조 또는 탈수하면 식품의 수분이 제거되어 유통기한이 향상됩니다. 이는 권장되는 프로그램입니다. 원하는 대로 변경할 수 있습니다.",
+    "CL_DV_OV_extra_drying_herbs_desc": "건조는 허브를 보존하는 가장 쉬운 방법입니다. 따뜻하고 건조한 공기를 사용하면 수분이 증발합니다. 이렇게 하면 잎, 꽃 또는 씨앗이 색상과 풍미를 유지하는 데 도움이 됩니다.",
+    "CL_DV_OV_extra_pasteurization_desc": "가벼운 열처리를 식품에 적용하여 유해 박테리아를 죽이고 유통기한을 연장합니다. 유제품, 계란 제품, 견과류와 같은 식품을 보존하는 데 사용할 수 있습니다.",
+    "CL_DV_OV_extra_canning_desc": "통조림은 열로 살균하여 음식을 부패로부터 보존할 수 있게 해줍니다. 음식은 밀폐된 용기에 보관해야 합니다.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "냉동 식품을 빠르고 안전하게 해동하는 효율적인 프로그램입니다. 육류와 야채부터 조리된 식사까지 다양한 식품에 특히 유용합니다.",
+    "CL_DV_OV_extra_stream_defrost_desc": "온화한 열과 증기의 자연스러운 수분을 결합하여 냉동 식품을 효과적으로 해동합니다. 증기는 식품의 수분 수준을 유지하고 질감과 풍미를 보존하는 데 도움이 됩니다. 이것은 생선, 페이스트리 또는 빵과 같은 섬세한 식품에 특히 유용합니다.",
+    "CL_DV_OV_extra_fan_defrost_desc": "이 기능을 사용하면 팬의 도움으로 공기가 순환됩니다. 발열체가 켜져 있지 않습니다. 케이크, 빵, 과일 등 냉동 식품을 해동할 때 이 설정을 사용하세요.",
+    "CL_DV_OV_extra_plate_warming_desc": "접시를 원하는 온도로 가열합니다. 이렇게 하면 접시 위의 요리가 더 오랫동안 따뜻하게 유지됩니다.",
+    "CL_DV_OV_extra_oshibori_desc": "오시보리 손수건을 가볍게 데워서 편안한 온도로 유지합니다.",
+    "CL_DV_OV_extra_hot_stone_desc": "스파와 같은 트리트먼트를 위해 설계되었습니다. 돌은 완벽한 온도로 고르게 따뜻해져서 휴식이나 웰빙 루틴에 사용할 준비가 되었습니다.",
+    "CL_DV_OV_extra_sterilizing_desc": "아기용 젖병, 주방 도구 또는 작은 도구와 같은 품목을 살균합니다. 오븐은 박테리아와 다른 병원균을 제거하기에 충분한 온도에 도달하여 청결과 위생을 유지하는 간단하고 효과적인 방법을 제공합니다.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "증기를 사용하여 음식을 부드럽게 재가열하여 수분과 신선도를 회복합니다. 파스타, 밥 또는 캐서롤과 같은 섬세한 요리에 이상적이며, 재가열된 음식이 건조해지지 않고 원래의 질감과 풍미를 유지합니다.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "뜨거운 공기와 증기의 이점을 결합한 이 프로그램은 다양한 음식을 다시 데우는 데 이상적입니다. 뜨거운 공기는 고르게 가열하는 반면 증기는 수분을 더해 고기, 가금류 또는 혼합 식사와 같은 요리에 적합하여 육즙이 많고 풍미가 유지됩니다.",
+    "CL_DV_OV_extra_warming_hotair_desc": "바삭한 겉면이 필요한 음식에 완벽한 이 프로그램은 뜨거운 공기를 사용하여 피자, 구운 식품 또는 구운 야채와 같은 요리를 고르게 다시 데웁니다. 순환하는 뜨거운 공기는 바삭한 마무리를 유지하면서 음식이 완전히 데워지도록 합니다.",
+    "CL_DV_OV_extra_warming_microwave_desc": "음식을 안에서부터 빠르게 데워줍니다. 빠르고 효율적인 식사 데우기 옵션입니다. 빠르게 데워야 하는 수프, 스튜 또는 남은 음식에 적합합니다.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "더 이상 조리하지 않고도 음식을 완벽한 서빙 온도로 유지합니다. 서빙할 준비가 될 때까지 요리를 따뜻하게 유지하는 데 이상적입니다. 미리 준비한 식사에 적합하여 따뜻하고 즐길 준비가 된 상태를 유지합니다.",
+    "CL_DV_OV_ends_at": "종료: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "야외 그릴이 필요 없이 구운 요리의 맛있고 스모키한 풍미를 즐기세요. 전체 영역에 열을 고르게 분산하도록 제작되어 핫 스팟을 최소화하고 일관된 그릴 결과를 보장합니다. 고기와 야채부터 해산물, 심지어 과일까지 다양한 음식을 구울 때 이상적입니다.",
+    "CL_DV_OV_remote_start_title": "원격 시작이 비활성화되었습니다",
+    "CL_DV_OV_remote_start_content": "앱에서 프로그램을 보내고 시작하려면 원격 시작이 활성화되어 있어야 합니다. ",
+    "CL_CF_FM_apple": "사과",
+    "CL_CF_FM_bacon": "베이컨",
+    "CL_CF_FM_broccoli": "브로콜리",
+    "CL_CF_FM_cabbage": "양배추",
+    "CL_CF_FM_Cauliflower": "콜리플라워",
+    "CL_CF_FM_cod": "대구",
+    "CL_CF_FM_dragon_fruit": "드래곤 프루트",
+    "CL_DV_OV_defrost_detail_desc": "음식을 올바르게 해동하면 냉동 후 음식의 품질이 보장됩니다. 적절한 해동은 식중독 위험을 줄여줍니다.",
+    "CL_DV_OV_extra_non_food_detail_desc": "비식품 프로그램은 다양한 비요리 작업을 위해 만들어졌으며, 전통적인 요리보다 편의성과 기능성을 제공합니다.",
+    "CL_DV_OV_extra_warming_detail_desc": "음식을 데우거나 따뜻하게 유지하는 다양한 보온 프로그램을 통해 남은 음식을 데우거나 서빙하기 위해 접시를 따뜻하게 보관하는 등 식사를 즐기기 쉽습니다.",
+    "CL_CF_FM_click_switch_status": "항목 상태를 전환하려면 클릭하세요",
+    "CL_CF_FM_recent_purchased_tips": "이러한 품목을 구매하셨습니다. 식품 인벤토리에 열을 추가하시겠습니까?",
+    "CL_DV_OV_extra_drying_herbs": "허브 건조",
+    "CL_DV_OV_extra_pasteurization": "저온 살균",
+    "CL_DV_OV_extra_canning": "제관",
+    "CL_DV_OV_extra_defrost_microwave": "전자레인지로 해동하기",
+    "CL_DV_OV_extra_defrost_stream": "증기로 해동",
+    "CL_DV_OV_extra_oshibori": "오시보리",
+    "CL_DV_OV_extra_hot_stones": "뜨거운 돌",
+    "CL_DV_OV_extra_sterilizing": "살균",
+    "CL_DV_OV_extra_warming_hotair_stream": "뜨거운 공기 + 증기로 재가열",
+    "CL_DV_OV_extra_warming_hotair": "뜨거운 공기로 재가열",
+    "CL_DV_OV_extra_warming_microwave": "전자레인지로 다시 데워먹기",
+    "CL_DV_OV_extra_warming_keepwarm": "따뜻한 상태를 유지해",
+    "CL_CF_FM_dont_remind_in_3_months": "3개월 후에는 상기시키지 마세요",
+    "CL_DV_RF_cleaning_plan": "청소 계획",
+    "CL_DV_RF_cleaning_refrigerator": "냉장고 청소",
+    "CL_DV_RF_cleaning_reminder": "청소 알림",
+    "CL_DV_RF_cleaning_cycle": "세척주기",
+    "CL_DV_RF_cleaning_history": "청소 내역",
+    "CL_DV_RF_cleaning_cycle_not_selected": "세척주기가 선택되지 않았습니다",
+    "CL_DV_RF_havent_cleaned_yet": "아직 청소를 하지 않았네요.",
+    "CL_DV_RF_garbage_disposal_reminder": "쓰레기 처리 알림",
+    "CL_DV_RF_resource_waste": "자원 낭비",
+    "CL_DV_RF_timer_not_selected": "타이머가 선택되지 않았습니다",
+    "CL_DV_RF_add_more_reminders": "더 많은 알림 추가",
+    "CL_DV_RF_cleaning_tips": "청소 팁",
+    "CL_DV_RF_last_clean_time": "마지막으로 냉장고를 청소한 시간은 : ***이었습니다.",
+    "CL_DV_RF_last_cleaning_was_today": "오늘이 마지막 청소였습니다.",
+    "CL_DV_RF_you_need_cleaning_now": "지금 당장 청소가 필요합니다.",
+    "CL_DV_RF_next_cleaning_in_x_days": "다음 청소는 **일 후입니다.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "마지막 청소는 **일 전이었습니다.",
+    "CL_CF_CO_x_weeks": "주",
+    "CL_DV_RF_cleaned": "청소됨",
+    "CL_DV_OV_probe_temperature_graph": "프로브 온도 그래프",
+    "CL_DV_OV_internal": "내부",
+    "CL_DV_OV_probe_desc": "프로브는 음식의 온도를 측정하는 데 도움이 됩니다. 시간이 지남에 따라 다른 온도를 볼 수 있습니다.",
+    "CL_DV_RF_no_cleaning_history": "청소 내역 없음"
 }
