--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -1676,7 +1676,7 @@
     "add_timing": "TAMBAH MASA",
     "set_start_to_finish_time": "Tetapkan masa mula hingga tamat",
     "pair_pump_appliance": "Pemanas air pam haba",
-    "heat_pump": "Pam haba",
+    "heat_pump": "Papan penyongsang",
     "pump_boost_1": "Tingkatkan 1",
     "pump_electric_heating": "Pemanasan elektrik",
     "pump_holiday_mode": "Cuti",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Sudah dicolokkan dan dihidupkan;\nWi-Fi telah diaktifkan dan terhubung;\nKata sandi Wi-Fi tidak berubah baru-baru ini.",
     "dont_remind_again_uppercase": "JANGAN MENGINGATKAN LAGI",
     "storage_tips_title": "Petua penyimpanan:",
-    "heat_pump_oem": "Siri PRO DHW",
+    "heat_pump_oem": "DHW berkelajuan tetap",
     "td22_drying_empty_water_tank": "Pengeringan – Tangki air kosong",
     "td22_drying_paused": "Pengeringan dijeda",
     "td22_drying_finished": "Pengeringan selesai",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Adakah anda pasti mahu log keluar?",
     "fridge_child_lock_open_tips": "Selepas kunci kanak-kanak dibuka, skrin sentuh dan dispenser akan dikunci.",
     "want_scan_code_tips": "Saya mahu mengimbas kod.",
-    "tri_name_key": "Pemanas pam haba ATW",
+    "tri_name_key": "Pam Haba ATW Pro",
     "water_set_key": "SUHU AIR",
     "f_e_fan_fault_tip": "Kegagalan kipas DC",
     "zone_water_key": "Air Zon1",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Pastikan bluetooth anda dihidupkan.",
     "CL_DV_PIND_accessory_firmware_update": "Kemas kini perisian tegar aksesori",
     "CL_CF_CS_ble_scan_not_list": "Jika peranti anda tidak disenaraikan, anda boleh mengklik 'CUBA LAGI' untuk mencari semula atau klik 'SETERUSNYA' untuk mengkonfigurasi rangkaian dengan cara lain.",
-    "CL_CF_CS_ble_scan_have_not_found": "Kami tidak menemui sebarang peranti pada bluetooth. Anda boleh mengklik 'CUBA LAGI' untuk mencari semula, atau klik 'SETERUSNYA' untuk mengkonfigurasi rangkaian dengan cara lain.",
+    "CL_CF_CS_ble_scan_have_not_found": "Kami tidak menemui sebarang peranti pada bluetooth. Anda boleh mengklik 'CUBA LAGI' untuk mencari semula, atau mengkonfigurasi rangkaian dengan cara lain.",
     "CL_DV_WM_pump_cleaning": "Pam pembersihan...",
     "CL_DV_WM_autodoes_tip": "Dayakan ciri ini dan peranti anda akan mengeluarkan detergen dan pelembut fabrik dengan bijak semasa anda mencuci pakaian anda.",
     "CL_DV_WM_detergent_department_key": "KOMPARTMEN DETERGEN",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Tidak dapat bersembunyi",
     "program_management_unable_to_hide_desc": "Ini adalah program terakhir yang boleh dilihat dan sekurang-kurangnya satu program mesti kekal kelihatan.",
     "CL_CF_FM_set_deadline": "Tetapkan tarikh akhir",
-    "CL_CF_FM_expiry_date_must_be_selected": "Tarikh luput mesti dipilih"
+    "CL_CF_FM_expiry_date_must_be_selected": "Tarikh luput mesti dipilih",
+    "CL_CF_FM_add_custom_food_desc": "Tambah item tersuai baharu",
+    "CL_CF_FM_delete_selected_items": "Padamkan Item Terpilih",
+    "CL_CF_FM_delete_selected": "Padam Dipilih",
+    "CL_DV_HOB_residual_heat_content": "Zon memasak masih panas. Berhati-hati untuk tidak menyentuhnya.",
+    "CL_CF_FM_add_custom_food": "Tambah Makanan Tidak Termasuk dalam Perpustakaan",
+    "air_care_temp_title": "Standard penilaian suhu:",
+    "air_care_hum_title": "Standard penilaian kelembapan:",
+    "air_care_temp_c": "Baik: 17 < T < 27℃\n Biasa: 10≤T≤17°C, 27≤T≤30°C\n Tidak baik: T < 10°CT > 30°C",
+    "air_care_temp_f": "Baik: 62.6 < T < 80.6℉\n Biasa: 50≤T≤62.6℉,80.6≤T≤86℉\n Tidak baik: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Baik: H < 70%\n Biasa: 70≤H≤80%\n Tidak baik: H＞80%",
+    "CL_CF_RM_change_floor_key": "tukar lantai",
+    "CL_CF_FM_recently_added": "Baru Ditambah",
+    "CL_CF_FM_no_matching_items": "Tiada Item Padanan",
+    "CL_CF_FM_search_stored_food": "Cari Makanan Tersimpan",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "pemberitahuan",
+    "CL_CF_FM_a_day_ago": "Sehari yang lalu",
+    "CL_CF_FM_a_week_ago": "Seminggu yang lalu",
+    "CL_CF_FM_a_month_ago": "Sebulan yang lalu",
+    "CL_CF_FM_a_year_ago": "Setahun yang lalu",
+    "CL_CF_FM_x_days_ago": "** hari yang lalu",
+    "CL_CF_FM_x_weeks_ago": "** minggu lalu",
+    "CL_CF_FM_x_months_ago": "** bulan lalu",
+    "CL_CF_FM_x_years_ago": "** tahun lalu",
+    "CL_CF_FM_shopping_list_details": "Butiran Senarai Beli-belah",
+    "CL_CF_FM_no_shopping_list": "Tiada senarai beli-belah",
+    "CL_DV_OV_24_time_zone": "Zon masa",
+    "CL_CF_FM_reset_purchased_tips": "Adakah anda ingin menetapkan semula semua makanan dalam senarai ini kepada status tidak dibeli?",
+    "CL_CF_FM_add_food_to_x": "Tambahkan makanan pada \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Masukkan makanan yang hendak dibeli",
+    "CL_DV_OV_24_always_on": "Sentiasa Hidup",
+    "CL_CF_CS_separated_ac_cs_step2": "Tekan butang \"Horizontal Swing\" selama 6 kali pada alat kawalan jauh. Atau tekan butang \"Tidur\" 8 kali dalam alat kawalan jauh wayar.",
+    "CL_CF_FM_list": "Senaraikan",
+    "CL_CF_FM_select_shopping_list": "Pilih Senarai Beli-belah",
+    "CL_CF_FM_x_items_added": "** item telah ditambah",
+    "CL_CF_FM_create_shopping_list_first": "Anda perlu membuat senarai beli-belah terlebih dahulu.",
+    "CL_CF_FM_no_shopping_list_available": "Tiada Senarai Beli-belah Tersedia!",
+    "CL_DV_OV_extra_drying_desc": "Pengeringan atau penyahhidratan makanan menghilangkan lembapan daripada makanan untuk meningkatkan jangka hayat. Ini adalah program yang disyorkan. Anda boleh mengubahnya mengikut keutamaan anda.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Pengeringan adalah kaedah paling mudah untuk memelihara herba. Dengan menggunakan udara panas dan kering, lembapan tersejat. Ini membantu daun, bunga atau biji untuk mengekalkan warna dan rasanya.",
+    "CL_DV_OV_extra_pasteurization_desc": "Rawatan haba ringan digunakan pada makanan untuk membunuh bakteria berbahaya dan memanjangkan jangka hayat. Ia boleh digunakan untuk mengawet makanan seperti produk diari, produk telur, kacang.",
+    "CL_DV_OV_extra_canning_desc": "Pengetinan membolehkan untuk mengawet makanan daripada rosak disterilkan dengan haba. Pastikan makanan disimpan dalam bekas yang tertutup rapat.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Program yang cekap untuk mencair beku makanan sejuk beku dengan cepat dan selamat. Ia amat berguna untuk pelbagai jenis makanan, daripada daging dan sayur-sayuran kepada makanan yang telah dimasak.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Mencairkan makanan sejuk beku dengan berkesan dengan menggabungkan haba lembut dengan kelembapan semula jadi wap. Stim membantu mengekalkan tahap kelembapan makanan, mengekalkan tekstur dan rasanya. Ini amat berguna untuk makanan halus seperti ikan, pastri atau roti.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Dengan fungsi ini, udara beredar dengan bantuan kipas. Tiada unsur haba dihidupkan. Gunakan tetapan ini untuk mencairkan hidangan beku seperti kek, roti dan buah-buahan.",
+    "CL_DV_OV_extra_plate_warming_desc": "Panaskan pinggan pada suhu yang dikehendaki. Ini membantu hidangan di atas pinggan kekal lebih panas untuk jangka masa yang lebih lama.",
+    "CL_DV_OV_extra_oshibori_desc": "Panaskan tuala tangan oshibori perlahan-lahan, panaskan pada suhu yang selesa.",
+    "CL_DV_OV_extra_hot_stone_desc": "Direka untuk rawatan seperti spa. Batu-batu itu dipanaskan secara sekata pada suhu yang sempurna, menjadikannya sedia untuk digunakan dalam rutin relaksasi atau kesihatan.",
+    "CL_DV_OV_extra_sterilizing_desc": "Bersihkan barangan seperti botol bayi, peralatan dapur atau alatan kecil. Ketuhar mencapai suhu yang mencukupi untuk menghapuskan bakteria dan patogen lain, menyediakan cara yang mudah dan berkesan untuk mengekalkan kebersihan dan kebersihan.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Menggunakan wap untuk memanaskan semula makanan secara perlahan, memulihkan kelembapan dan kesegarannya. Sesuai untuk hidangan halus seperti pasta, nasi atau kaserol, kerana ia memastikan makanan yang dipanaskan semula mengekalkan tekstur dan rasa asalnya tanpa menjadi kering.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Menggabungkan faedah udara panas dan wap, program ini sesuai untuk memanaskan semula pelbagai jenis makanan. Udara panas memberikan pemanasan yang sekata, manakala wap menambah kelembapan, menjadikannya sesuai untuk hidangan seperti daging, ayam atau makanan campuran, memastikan ia kekal berair dan berperisa.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Sesuai untuk makanan yang memerlukan bahagian luar yang segar, program ini menggunakan udara panas untuk meratakan semula hidangan seperti piza, makanan yang dibakar atau sayur-sayuran panggang. Udara panas yang beredar memastikan makanan dipanaskan dengan teliti sambil mengekalkan kemasan yang rangup.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Cepat panaskan semula makanan dari dalam ke luar. Ia adalah pilihan yang pantas dan cekap untuk memanaskan semula makanan. Sesuai untuk sup, rebusan atau sisa makanan yang memerlukan pemanasan cepat.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Kekalkan makanan pada suhu hidangan yang sempurna tanpa memasak lagi. Sesuai untuk memastikan hidangan hangat sehingga sedia untuk dihidangkan. Ia sesuai untuk hidangan yang disediakan lebih awal, memastikan ia kekal panas dan sedia untuk dinikmati.",
+    "CL_DV_OV_ends_at": "Berakhir pada: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Nikmati rasa masakan panggang yang lazat dan berasap tanpa memerlukan pemanggang luar. Dicipta untuk mengagihkan haba secara merata ke seluruh kawasannya, meminimumkan titik panas dan memastikan hasil pemanggangan yang konsisten. Sesuai untuk memanggang pelbagai jenis makanan, daripada daging dan sayur-sayuran kepada makanan laut dan juga buah-buahan.",
+    "CL_DV_OV_remote_start_title": "Permulaan jauh dilumpuhkan",
+    "CL_DV_OV_remote_start_content": "Untuk menghantar dan memulakan program daripada apl anda, mula jauh harus aktif. ",
+    "CL_CF_FM_apple": "epal",
+    "CL_CF_FM_bacon": "Bacon",
+    "CL_CF_FM_broccoli": "Brokoli",
+    "CL_CF_FM_cabbage": "kobis",
+    "CL_CF_FM_Cauliflower": "kembang kol",
+    "CL_CF_FM_cod": "Cod",
+    "CL_CF_FM_dragon_fruit": "Buah Naga",
+    "CL_DV_OV_defrost_detail_desc": "Mencairkan makanan dengan betul memastikan kualiti makanan anda selepas ia dibekukan. Penyahbekuan yang betul mengurangkan risiko keracunan makanan.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Program bukan makanan dibuat untuk pelbagai tugas bukan masakan, memberikan kemudahan dan fungsi di luar masakan tradisional.",
+    "CL_DV_OV_extra_warming_detail_desc": "Pelbagai program pemanasan untuk memanaskan semula dan memanaskan makanan, menjadikannya mudah untuk menikmati makanan, sama ada anda memanaskan semula sisa makanan atau memastikan hidangan tetap hangat untuk disajikan.",
+    "CL_CF_FM_click_switch_status": "Klik untuk menukar status item",
+    "CL_CF_FM_recent_purchased_tips": "Anda membeli perkara ini, adakah anda ingin menambahkannya pada Inventori Makanan?",
+    "CL_DV_OV_extra_drying_herbs": "Herba Pengeringan",
+    "CL_DV_OV_extra_pasteurization": "Pempasteuran",
+    "CL_DV_OV_extra_canning": "mengetin",
+    "CL_DV_OV_extra_defrost_microwave": "Nyahbeku dengan microwave",
+    "CL_DV_OV_extra_defrost_stream": "Nyahbeku dengan wap",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "Batu Panas",
+    "CL_DV_OV_extra_sterilizing": "Mensterilkan",
+    "CL_DV_OV_extra_warming_hotair_stream": "Panaskan semula dengan udara panas + wap",
+    "CL_DV_OV_extra_warming_hotair": "Panaskan semula dengan udara panas",
+    "CL_DV_OV_extra_warming_microwave": "Panaskan semula dengan microwave",
+    "CL_DV_OV_extra_warming_keepwarm": "Tetap hangat",
+    "CL_CF_FM_dont_remind_in_3_months": "Jangan ingatkan dalam 3 bulan",
+    "CL_DV_RF_cleaning_plan": "Rancangan Pembersihan",
+    "CL_DV_RF_cleaning_refrigerator": "Membersihkan Peti Sejuk",
+    "CL_DV_RF_cleaning_reminder": "Peringatan pembersihan",
+    "CL_DV_RF_cleaning_cycle": "Kitaran pembersihan",
+    "CL_DV_RF_cleaning_history": "Sejarah pembersihan",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Kitaran pembersihan tidak dipilih",
+    "CL_DV_RF_havent_cleaned_yet": "Anda belum membersihkan lagi.",
+    "CL_DV_RF_garbage_disposal_reminder": "Peringatan pelupusan sampah",
+    "CL_DV_RF_resource_waste": "Pembaziran sumber",
+    "CL_DV_RF_timer_not_selected": "Pemasa tidak dipilih",
+    "CL_DV_RF_add_more_reminders": "Tambahkan lagi peringatan",
+    "CL_DV_RF_cleaning_tips": "Petua pembersihan",
+    "CL_DV_RF_last_clean_time": "Kali terakhir anda membersihkan peti sejuk ialah dihidupkan : ***",
+    "CL_DV_RF_last_cleaning_was_today": "Pembersihan terakhir adalah hari ini.",
+    "CL_DV_RF_you_need_cleaning_now": "Anda perlukan pembersihan sekarang.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Pembersihan seterusnya dalam ** hari.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Pembersihan terakhir ialah ** hari yang lalu.",
+    "CL_CF_CO_x_weeks": "minggu",
+    "CL_DV_RF_cleaned": "Dibersihkan",
+    "CL_DV_OV_probe_temperature_graph": "Graf Suhu Probe",
+    "CL_DV_OV_internal": "Dalaman",
+    "CL_DV_OV_probe_desc": "Probe membantu anda mengukur suhu makanan anda. Anda boleh melihat suhu yang berbeza dari semasa ke semasa.",
+    "CL_DV_RF_no_cleaning_history": "Tiada sejarah pembersihan"
 }
