--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -1676,7 +1676,7 @@
     "add_timing": "LEGG TIL TIDSMÅLING",
     "set_start_to_finish_time": "Angi klokkeslett for start og slutt",
     "pair_pump_appliance": "Varmepumpe for oppvarming av vann",
-    "heat_pump": "Varmepumpe",
+    "heat_pump": "Inverterkort",
     "pump_boost_1": "Boost 1",
     "pump_electric_heating": "Elektrisk oppvarming",
     "pump_holiday_mode": "Ferie",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Tilkoblet og slått på;\nWi-Fi er aktivert og tilkoblet;\nWi-Fi-passordet er ikke nylig endret.",
     "dont_remind_again_uppercase": "IKKE PÅMINN IGJEN",
     "storage_tips_title": "Oppbevaringstips:",
-    "heat_pump_oem": "PRO-serien varmtvann",
+    "heat_pump_oem": "Varmtvann med fast hastighet",
     "td22_drying_empty_water_tank": "Tørking – Tøm vanntanken",
     "td22_drying_paused": "Tørking stoppet",
     "td22_drying_finished": "Tørking ferdig",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Er du sikker på at du vil logge ut?",
     "fridge_child_lock_open_tips": "Etter at barnesikringen er åpnet, låses berøringsskjermen og dispenseren.",
     "want_scan_code_tips": "Jeg vil skanne kode.",
-    "tri_name_key": "ATW varmepumpevarmer",
+    "tri_name_key": "ATW Pro varmepumpe",
     "water_set_key": "VANNTEMP",
     "f_e_fan_fault_tip": "Feil i DC-vifte",
     "zone_water_key": "Sone 1 Vann",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Sørg for at Bluetooth er slått på.",
     "CL_DV_PIND_accessory_firmware_update": "Oppdatering av tilbehørsfastvare",
     "CL_CF_CS_ble_scan_not_list": "Hvis enheten din ikke er oppført, kan du klikke \"PRØV IGJEN\" for å søke på nytt, eller klikk \"NESTE\" for å konfigurere nettverket på en annen måte.",
-    "CL_CF_CS_ble_scan_have_not_found": "Vi har ikke funnet noen enhet på bluetooth. Du kan klikke \"PRØV IGJEN\" for å søke på nytt, eller klikk \"NESTE\" for å konfigurere nettverket på en annen måte.",
+    "CL_CF_CS_ble_scan_have_not_found": "Vi har ikke funnet noen enhet på Bluetooth. Du kan klikke på \"PRØV IGJEN\" for å søke på nytt, eller konfigurere nettverket på en annen måte.",
     "CL_DV_WM_pump_cleaning": "Rengjør pumpen...",
     "CL_DV_WM_autodoes_tip": "Aktiver denne funksjonen, og enheten vil på en smart måte dispensere vaskemiddel og tøymykner mens du vasker.",
     "CL_DV_WM_detergent_department_key": "VASKEMIDDELROM",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Kan ikke skjule",
     "program_management_unable_to_hide_desc": "Dette er det siste synlige programmet og minst ett program må holdes synlig.",
     "CL_CF_FM_set_deadline": "Sett en frist",
-    "CL_CF_FM_expiry_date_must_be_selected": "Utløpsdato må velges"
+    "CL_CF_FM_expiry_date_must_be_selected": "Utløpsdato må velges",
+    "CL_CF_FM_add_custom_food_desc": "Legg til et nytt tilpasset element",
+    "CL_CF_FM_delete_selected_items": "Slett valgte elementer",
+    "CL_CF_FM_delete_selected": "Slett valgte",
+    "CL_DV_HOB_residual_heat_content": "Kokesonen er fortsatt varm. Vær forsiktig så du ikke berører den.",
+    "CL_CF_FM_add_custom_food": "Legg til mat som ikke er inkludert i biblioteket",
+    "air_care_temp_title": "Temperaturevalueringsstandard:",
+    "air_care_hum_title": "Fuktighetsevalueringsstandard:",
+    "air_care_temp_c": "Bra: 17 < T < 27 ℃\n Normal: 10≤T≤17°C, 27≤T≤30°C\n Ikke bra: T < 10°CT > 30°C",
+    "air_care_temp_f": "Bra: 62,6 < T < 80,6℉\n Normal: 50≤T≤62,6℉, 80,6≤T≤86℉\n Ikke bra: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Bra: H < 70 %\n Normal: 70≤H≤80 %\n Ikke bra: H＞80 %",
+    "CL_CF_RM_change_floor_key": "bytte etasje",
+    "CL_CF_FM_recently_added": "Nylig lagt til",
+    "CL_CF_FM_no_matching_items": "Ingen samsvarende varer",
+    "CL_CF_FM_search_stored_food": "Søk i lagret mat",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "melding",
+    "CL_CF_FM_a_day_ago": "For en dag siden",
+    "CL_CF_FM_a_week_ago": "For en uke siden",
+    "CL_CF_FM_a_month_ago": "For en måned siden",
+    "CL_CF_FM_a_year_ago": "For ett år siden",
+    "CL_CF_FM_x_days_ago": "** dager siden",
+    "CL_CF_FM_x_weeks_ago": "** uker siden",
+    "CL_CF_FM_x_months_ago": "** måneder siden",
+    "CL_CF_FM_x_years_ago": "** år siden",
+    "CL_CF_FM_shopping_list_details": "Handlelistedetaljer",
+    "CL_CF_FM_no_shopping_list": "Ingen handleliste",
+    "CL_DV_OV_24_time_zone": "Tidssone",
+    "CL_CF_FM_reset_purchased_tips": "Vil du tilbakestille alle matvarene i denne listen til statusen ikke kjøpt?",
+    "CL_CF_FM_add_food_to_x": "Legg til mat i \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Legg til maten som skal kjøpes",
+    "CL_DV_OV_24_always_on": "Alltid på",
+    "CL_CF_CS_separated_ac_cs_step2": "Trykk på \"Horizontal Swing\"-knappen 6 ganger på fjernkontrollen. Eller trykk på \"Sleep\"-knappen 8 ganger i ledningsfjernkontrollen.",
+    "CL_CF_FM_list": "Liste",
+    "CL_CF_FM_select_shopping_list": "Velg Handleliste",
+    "CL_CF_FM_x_items_added": "** elementer er lagt til",
+    "CL_CF_FM_create_shopping_list_first": "Du må lage en handleliste først.",
+    "CL_CF_FM_no_shopping_list_available": "Ingen handleliste tilgjengelig!",
+    "CL_DV_OV_extra_drying_desc": "Tørking eller dehydrering av mat fjerner fuktighet fra maten for å forbedre holdbarheten. Dette er et anbefalt program. Du kan endre det til dine preferanser.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Tørking er den enkleste metoden for å bevare urter. Ved å bruke varm og tørr luft fordamper fuktigheten. Dette hjelper bladene, blomstene eller frøene til å beholde fargen og smaken.",
+    "CL_DV_OV_extra_pasteurization_desc": "En mild varmebehandling påføres maten for å drepe skadelige bakterier og forlenge holdbarheten. Den kan brukes til å konservere mat som dagbokprodukter, eggprodukter, nøtter.",
+    "CL_DV_OV_extra_canning_desc": "Hermetisering gjør det mulig å bevare mat fra ødeleggelse sterilisering med varme. Sørg for at maten oppbevares i beholdere som er hermetisk forseglet.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Et effektivt program for raskt og trygt å tine frossen mat. Det er spesielt nyttig for en rekke matvarer, fra kjøtt og grønnsaker til ferdigkokte måltider.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Tiner frossen mat effektivt ved å kombinere mild varme med den naturlige fuktigheten til damp. Dampen bidrar til å opprettholde matens fuktighetsnivå, og bevarer dens tekstur og smak. Dette er spesielt nyttig for delikat mat som fisk, bakverk eller brød.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Med denne funksjonen sirkulerer luften ved hjelp av viften. Ingen varmeelementer er på. Bruk denne innstillingen til å tine frosne retter som kaker, brød og frukt.",
+    "CL_DV_OV_extra_plate_warming_desc": "Varm opp platene til ønsket temperatur. Dette gjør at rettene på tallerkenene holder seg varmere over lengre tid.",
+    "CL_DV_OV_extra_oshibori_desc": "Varmer forsiktig Oshibori håndklær, varmer dem til en behagelig temperatur.",
+    "CL_DV_OV_extra_hot_stone_desc": "Designet for spa-lignende behandlinger. Steinene varmes jevnt opp til perfekt temperatur, noe som gjør dem klare til bruk i avslapnings- eller velværerutiner.",
+    "CL_DV_OV_extra_sterilizing_desc": "Rengjør gjenstander som tåteflasker, kjøkkenutstyr eller småverktøy. Ovnen når temperaturer som er tilstrekkelige til å eliminere bakterier og andre patogener, og gir en enkel og effektiv måte å opprettholde renslighet og hygiene.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Bruker damp til å varme opp maten skånsomt, og gjenoppretter dens fuktighet og friskhet. Ideell for delikate retter som pasta, ris eller gryteretter, siden det sikrer at oppvarmet mat beholder sin opprinnelige tekstur og smak uten å bli tørr.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Ved å kombinere fordelene med både varmluft og damp, er dette programmet ideelt for oppvarming av et bredt utvalg av matvarer. Den varme luften gir jevn oppvarming, mens dampen tilfører fuktighet, noe som gjør den perfekt til retter som kjøtt, fjærfe eller blandede måltider, og sørger for at de holder seg saftige og smakfulle.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Dette programmet er perfekt for matvarer som trenger et skarpt ytre, og bruker varmluft til å varme opp retter som pizza, bakevarer eller stekte grønnsaker jevnt. Den sirkulerende varme luften sørger for at maten varmes godt opp samtidig som den opprettholder en sprø finish.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Varm opp mat raskt fra innsiden og ut. Det er et raskt og effektivt alternativ for å varme opp måltider. Perfekt til supper, gryteretter eller rester som trenger en rask oppvarming.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Hold maten på den perfekte serveringstemperaturen uten ytterligere tilberedning. Ideell for å holde retter varme til de skal serveres. Den er perfekt for måltider som tilberedes på forhånd, og sikrer at de holder seg varme og klare til å nytes.",
+    "CL_DV_OV_ends_at": "Slutter kl.: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Nyt de deilige, røykfylte smakene av grillretter uten å trenge en utendørs grill. Laget for å fordele varmen jevnt over hele området, minimere varme punkter og sikre konsistente grillresultater. Ideell for å grille en rekke matvarer, fra kjøtt og grønnsaker til sjømat og til og med frukt.",
+    "CL_DV_OV_remote_start_title": "Fjernstart er deaktivert",
+    "CL_DV_OV_remote_start_content": "For å sende og starte programmer fra appen din, bør fjernstart være aktiv. ",
+    "CL_CF_FM_apple": "Eple",
+    "CL_CF_FM_bacon": "Bacon",
+    "CL_CF_FM_broccoli": "Brokkoli",
+    "CL_CF_FM_cabbage": "Kål",
+    "CL_CF_FM_Cauliflower": "Blomkål",
+    "CL_CF_FM_cod": "Torsk",
+    "CL_CF_FM_dragon_fruit": "Dragefrukt",
+    "CL_DV_OV_defrost_detail_desc": "Riktig tining av matvarer sikrer kvaliteten på maten etter at den har blitt frosset. Riktig tining reduserer risikoen for matforgiftning.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Non food-programmer er laget for ulike ikke-kulinariske oppgaver, og gir bekvemmelighet og funksjonalitet utover tradisjonell matlaging.",
+    "CL_DV_OV_extra_warming_detail_desc": "En rekke varmeprogrammer for oppvarming og oppvarming av mat, som gjør det enkelt å nyte måltider, enten du skal varme opp matrester eller holde retter varme til servering.",
+    "CL_CF_FM_click_switch_status": "Klikk for å bytte status for elementet",
+    "CL_CF_FM_recent_purchased_tips": "Du kjøpte disse tingene, vil du legge til therm til matvarelageret?",
+    "CL_DV_OV_extra_drying_herbs": "Tørking av urter",
+    "CL_DV_OV_extra_pasteurization": "Pasteurisering",
+    "CL_DV_OV_extra_canning": "Hermetikk",
+    "CL_DV_OV_extra_defrost_microwave": "Tin med mikrobølgeovn",
+    "CL_DV_OV_extra_defrost_stream": "Tin med damp",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "Varme steiner",
+    "CL_DV_OV_extra_sterilizing": "Sterilisering",
+    "CL_DV_OV_extra_warming_hotair_stream": "Varm opp med varmluft + damp",
+    "CL_DV_OV_extra_warming_hotair": "Varm opp igjen med varmluft",
+    "CL_DV_OV_extra_warming_microwave": "Varm opp igjen med mikrobølgeovn",
+    "CL_DV_OV_extra_warming_keepwarm": "Holde varm",
+    "CL_CF_FM_dont_remind_in_3_months": "Ikke påminn om 3 måneder",
+    "CL_DV_RF_cleaning_plan": "Renholdsplan",
+    "CL_DV_RF_cleaning_refrigerator": "Rengjøring av kjøleskap",
+    "CL_DV_RF_cleaning_reminder": "Påminnelse om rengjøring",
+    "CL_DV_RF_cleaning_cycle": "Rengjøringssyklus",
+    "CL_DV_RF_cleaning_history": "Rengjøringshistorikk",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Rengjøringssyklus ikke valgt",
+    "CL_DV_RF_havent_cleaned_yet": "Du har ikke ryddet ennå.",
+    "CL_DV_RF_garbage_disposal_reminder": "Påminnelse om søppeltømming",
+    "CL_DV_RF_resource_waste": "Ressurssløsing",
+    "CL_DV_RF_timer_not_selected": "Timer ikke valgt",
+    "CL_DV_RF_add_more_reminders": "Legg til flere påminnelser",
+    "CL_DV_RF_cleaning_tips": "Rengjøringstips",
+    "CL_DV_RF_last_clean_time": "Sist gang du rengjorde kjøleskapet var på: ***",
+    "CL_DV_RF_last_cleaning_was_today": "Siste rengjøring var i dag.",
+    "CL_DV_RF_you_need_cleaning_now": "Du trenger rengjøring nå.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Neste rengjøring om ** dager.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Den siste rengjøringen var for ** dager siden.",
+    "CL_CF_CO_x_weeks": "Uker",
+    "CL_DV_RF_cleaned": "Rengjort",
+    "CL_DV_OV_probe_temperature_graph": "Probe temperatur graf",
+    "CL_DV_OV_internal": "Innvendig",
+    "CL_DV_OV_probe_desc": "Sonden hjelper deg med å måle temperaturen på maten. Du kan se de forskjellige temperaturene over tid.",
+    "CL_DV_RF_no_cleaning_history": "Ingen rengjøringshistorikk"
 }
