--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -1676,7 +1676,7 @@
     "add_timing": "DODAJ CZAS",
     "set_start_to_finish_time": "Ustaw czas rozpoczęcia i zakończenia",
     "pair_pump_appliance": "Podgrzewacz wody z pompą ciepła",
-    "heat_pump": "Pompa ciepła",
+    "heat_pump": "Inwerter",
     "pump_boost_1": "Wzmocnienie 1",
     "pump_electric_heating": "Ogrzewanie elektryczne",
     "pump_holiday_mode": "Wakacje",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Podłączony i włączony;\nWi-Fi jest aktywowane i połączone;\nHasło Wi-Fi nie było ostatnio zmieniane.",
     "dont_remind_again_uppercase": "WIĘCEJ NIE PAMIĘTAJ",
     "storage_tips_title": "Wskazówki dotyczące przechowywania:",
-    "heat_pump_oem": "PRO seria DHW",
+    "heat_pump_oem": "Stała prędkość CWU",
     "td22_drying_empty_water_tank": "Suszenie – Opróżnij zbiornik na wodę",
     "td22_drying_paused": "Suszenie zostało wstrzymane",
     "td22_drying_finished": "Suszenie zakończone",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Czy na pewno chcesz się wylogować?",
     "fridge_child_lock_open_tips": "Po otwarciu blokady rodzicielskiej ekran dotykowy i dozownik zostaną zablokowane.",
     "want_scan_code_tips": "Chcę zeskanować kod.",
-    "tri_name_key": "Pompa ciepła powietrze-woda",
+    "tri_name_key": "Pompa ciepła ATW Pro",
     "water_set_key": "TEMPERATURA WODY",
     "f_e_fan_fault_tip": "Awaria wentylatora prądu stałego",
     "zone_water_key": "Strefa 1 Woda",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Upewnij się, że Bluetooth jest włączony.",
     "CL_DV_PIND_accessory_firmware_update": "Aktualizacja oprogramowania sprzętowego akcesoriów",
     "CL_CF_CS_ble_scan_not_list": "Jeśli Twoje urządzenie nie znajduje się na liście, możesz kliknąć przycisk „SPRÓBUJ PONOWNIE”, aby wyszukać ponownie, lub kliknąć przycisk „DALEJ”, aby skonfigurować sieć w inny sposób.",
-    "CL_CF_CS_ble_scan_have_not_found": "Nie znaleźliśmy żadnego urządzenia z Bluetooth. Możesz kliknąć „SPRÓBUJ PONOWNIE”, aby wyszukać ponownie, lub kliknąć „DALEJ”, aby skonfigurować sieć w inny sposób.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nie znaleźliśmy żadnego urządzenia na bluetooth. Możesz kliknąć \"TRY AGAIN\", aby wyszukać ponownie lub skonfigurować sieć w inny sposób.",
     "CL_DV_WM_pump_cleaning": "Czyszczenie pompy...",
     "CL_DV_WM_autodoes_tip": "Włącz tę funkcję, a Twoje urządzenie będzie inteligentnie dozować detergent i płyn zmiękczający podczas prania.",
     "CL_DV_WM_detergent_department_key": "KOMORA NA DETERGENT",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Nie można ukryć",
     "program_management_unable_to_hide_desc": "Jest to ostatni widoczny program i co najmniej jeden program musi pozostać widoczny.",
     "CL_CF_FM_set_deadline": "Ustaw termin",
-    "CL_CF_FM_expiry_date_must_be_selected": "Należy wybrać datę ważności"
+    "CL_CF_FM_expiry_date_must_be_selected": "Należy wybrać datę ważności",
+    "CL_CF_FM_add_custom_food_desc": "Dodaj nowy niestandardowy element",
+    "CL_CF_FM_delete_selected_items": "Usuń wybrane elementy",
+    "CL_CF_FM_delete_selected": "Usuń wybrane",
+    "CL_DV_HOB_residual_heat_content": "Strefa gotowania jest nadal gorąca. Uważaj, żeby jej nie dotykać.",
+    "CL_CF_FM_add_custom_food": "Dodaj jedzenie, którego nie ma w bibliotece",
+    "air_care_temp_title": "Norma oceny temperatury:",
+    "air_care_hum_title": "Norma oceny wilgotności:",
+    "air_care_temp_c": "Dobrze: 17 < T < 27℃\n Normalne: 10≤T≤17°C, 27≤T≤30°C\n Niedobrze: T < 10°CT > 30°C",
+    "air_care_temp_f": "Dobrze: 62,6 < T < 80,6℉\n Normalne: 50≤T≤62,6℉,80,6≤T≤86℉\n Niedobrze: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Dobrze: H < 70%\n Normalne: 70≤H≤80%\n Niedobrze: H＞80%",
+    "CL_CF_RM_change_floor_key": "zmień piętro",
+    "CL_CF_FM_recently_added": "Ostatnio dodane",
+    "CL_CF_FM_no_matching_items": "Brak pasujących elementów",
+    "CL_CF_FM_search_stored_food": "Wyszukaj Przechowywaną Żywność",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "powiadomienie",
+    "CL_CF_FM_a_day_ago": "Dzień temu",
+    "CL_CF_FM_a_week_ago": "Tydzień temu",
+    "CL_CF_FM_a_month_ago": "Miesiąc temu",
+    "CL_CF_FM_a_year_ago": "Rok temu",
+    "CL_CF_FM_x_days_ago": "** dni temu",
+    "CL_CF_FM_x_weeks_ago": "** tygodnie temu",
+    "CL_CF_FM_x_months_ago": "** miesiące temu",
+    "CL_CF_FM_x_years_ago": "** lat temu",
+    "CL_CF_FM_shopping_list_details": "Szczegóły listy zakupów",
+    "CL_CF_FM_no_shopping_list": "Brak listy zakupów",
+    "CL_DV_OV_24_time_zone": "Strefa czasowa",
+    "CL_CF_FM_reset_purchased_tips": "Czy chcesz przywrócić wszystkim produktom spożywczym na tej liście status „niezakupione”?",
+    "CL_CF_FM_add_food_to_x": "Dodaj jedzenie do \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Dodaj żywność, którą chcesz kupić",
+    "CL_DV_OV_24_always_on": "Zawsze włączony",
+    "CL_CF_CS_separated_ac_cs_step2": "Naciśnij przycisk „Horizontal Swing” 6 razy na pilocie. Lub naciśnij przycisk „Sleep” 8 razy na przewodowym pilocie.",
+    "CL_CF_FM_list": "Lista",
+    "CL_CF_FM_select_shopping_list": "Wybierz listę zakupów",
+    "CL_CF_FM_x_items_added": "** dodano elementy",
+    "CL_CF_FM_create_shopping_list_first": "Najpierw musisz utworzyć listę zakupów.",
+    "CL_CF_FM_no_shopping_list_available": "Brak listy zakupów!",
+    "CL_DV_OV_extra_drying_desc": "Suszenie lub odwadnianie żywności usuwa wilgoć z żywności, aby wydłużyć jej trwałość. Jest to zalecany program. Możesz go zmienić według własnych preferencji.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Suszenie jest najłatwiejszą metodą konserwacji ziół. Używając ciepłego i suchego powietrza, wilgoć odparowuje. Pomaga to liściom, kwiatom lub nasionom zachować ich kolor i smak.",
+    "CL_DV_OV_extra_pasteurization_desc": "Łagodna obróbka cieplna jest stosowana do żywności w celu zabicia szkodliwych bakterii i wydłużenia okresu przydatności do spożycia. Może być stosowana do konserwowania żywności, takiej jak produkty mleczne, produkty jajeczne, orzechy.",
+    "CL_DV_OV_extra_canning_desc": "Konserwowanie pozwala na zachowanie żywności przed zepsuciem poprzez sterylizację cieplną. Upewnij się, że żywność jest przechowywana w hermetycznie zamkniętych pojemnikach.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Wydajny program do szybkiego i bezpiecznego rozmrażania mrożonek. Jest szczególnie przydatny do różnych produktów spożywczych, od mięs i warzyw po wstępnie ugotowane posiłki.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Skutecznie rozmraża mrożone produkty, łącząc delikatne ciepło z naturalną wilgocią pary. Para pomaga utrzymać poziom wilgoci w żywności, zachowując jej strukturę i smak. Jest to szczególnie przydatne w przypadku delikatnych produktów, takich jak ryby, ciastka lub chleb.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Dzięki tej funkcji powietrze jest rozprowadzane za pomocą wentylatora. Nie są włączane żadne elementy grzewcze. Tego ustawienia należy używać do rozmrażania zamrożonych potraw, takich jak ciasta, chleb i owoce.",
+    "CL_DV_OV_extra_plate_warming_desc": "Podgrzej talerze do pożądanej temperatury. Dzięki temu potrawy na talerzach pozostaną cieplejsze przez dłuższy czas.",
+    "CL_DV_OV_extra_oshibori_desc": "Delikatnie podgrzewa ręczniki oshibori, podgrzewając je do komfortowej temperatury.",
+    "CL_DV_OV_extra_hot_stone_desc": "Zaprojektowane do zabiegów w stylu spa. Kamienie są równomiernie podgrzewane do idealnej temperatury, dzięki czemu są gotowe do użycia w zabiegach relaksacyjnych lub wellness.",
+    "CL_DV_OV_extra_sterilizing_desc": "Dezynfekuj przedmioty, takie jak butelki dla niemowląt, przybory kuchenne lub małe narzędzia. Piekarnik osiąga temperaturę wystarczającą do wyeliminowania bakterii i innych patogenów, zapewniając prosty i skuteczny sposób na utrzymanie czystości i higieny.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Używa pary do delikatnego podgrzewania jedzenia, przywracając jego wilgoć i świeżość. Idealny do delikatnych dań, takich jak makaron, ryż lub zapiekanki, ponieważ zapewnia, że podgrzane jedzenie zachowuje swoją oryginalną konsystencję i smak bez wysychania.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Łącząc zalety gorącego powietrza i pary, ten program jest idealny do podgrzewania szerokiej gamy potraw. Gorące powietrze zapewnia równomierne ogrzewanie, podczas gdy para dodaje wilgoci, dzięki czemu doskonale nadaje się do potraw takich jak mięso, drób lub posiłki mieszane, zapewniając, że pozostaną soczyste i pełne smaku.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Idealny do potraw, które wymagają chrupiącej skórki, ten program wykorzystuje gorące powietrze do równomiernego podgrzewania potraw, takich jak pizza, wypieki lub pieczone warzywa. Cyrkulacja gorącego powietrza zapewnia dokładne podgrzanie potraw przy jednoczesnym zachowaniu chrupkości.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Szybkie podgrzewanie jedzenia od środka na zewnątrz. To szybka i wydajna opcja podgrzewania posiłków. Idealna do zup, gulaszów lub resztek, które wymagają szybkiego podgrzania.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Utrzymuj jedzenie w idealnej temperaturze serwowania bez dalszego gotowania. Idealne do utrzymywania potraw w cieple, aż będą gotowe do podania. Jest idealne do posiłków przygotowywanych z wyprzedzeniem, zapewniając, że pozostaną gorące i gotowe do spożycia.",
+    "CL_DV_OV_ends_at": "Kończy się o: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Ciesz się pysznymi, wędzonymi smakami grillowanych potraw bez potrzeby grilla zewnętrznego. Zaprojektowany tak, aby równomiernie rozprowadzać ciepło na całej powierzchni, minimalizując gorące punkty i zapewniając spójne rezultaty grillowania. Idealny do grillowania różnych potraw, od mięs i warzyw po owoce morza, a nawet owoce.",
+    "CL_DV_OV_remote_start_title": "Zdalne uruchamianie jest wyłączone",
+    "CL_DV_OV_remote_start_content": "Aby wysyłać i uruchamiać programy z aplikacji, opcja zdalnego uruchamiania musi być aktywna. ",
+    "CL_CF_FM_apple": "Jabłko",
+    "CL_CF_FM_bacon": "Boczek",
+    "CL_CF_FM_broccoli": "Brokuł",
+    "CL_CF_FM_cabbage": "Kapusta",
+    "CL_CF_FM_Cauliflower": "Kalafior",
+    "CL_CF_FM_cod": "Dorsz",
+    "CL_CF_FM_dragon_fruit": "Smoczy owoc",
+    "CL_DV_OV_defrost_detail_desc": "Prawidłowe rozmrażanie żywności zapewnia jakość żywności po jej zamrożeniu. Prawidłowe rozmrażanie zmniejsza ryzyko zatrucia pokarmowego.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Programy non-food zostały stworzone do różnych zadań niezwiązanych z gotowaniem, zapewniając wygodę i funkcjonalność wykraczającą poza tradycyjne gotowanie.",
+    "CL_DV_OV_extra_warming_detail_desc": "Szeroka gama programów podgrzewania, umożliwiających podgrzewanie i odgrzewanie potraw, dzięki czemu możesz cieszyć się posiłkami bez względu na to, czy podgrzewasz resztki, czy utrzymujesz ciepło potraw przed podaniem.",
+    "CL_CF_FM_click_switch_status": "Kliknij, aby zmienić status elementu",
+    "CL_CF_FM_recent_purchased_tips": "Kupiłeś te rzeczy. Czy chcesz je dodać do inwentarza żywności?",
+    "CL_DV_OV_extra_drying_herbs": "Suszenie ziół",
+    "CL_DV_OV_extra_pasteurization": "Pasteryzacja",
+    "CL_DV_OV_extra_canning": "Konserwowanie",
+    "CL_DV_OV_extra_defrost_microwave": "Rozmrażanie za pomocą mikrofalówki",
+    "CL_DV_OV_extra_defrost_stream": "Rozmrażanie za pomocą pary",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "Gorące kamienie",
+    "CL_DV_OV_extra_sterilizing": "Sterylizujący",
+    "CL_DV_OV_extra_warming_hotair_stream": "Podgrzewanie gorącym powietrzem + parą",
+    "CL_DV_OV_extra_warming_hotair": "Podgrzewać gorącym powietrzem",
+    "CL_DV_OV_extra_warming_microwave": "Podgrzewanie w kuchence mikrofalowej",
+    "CL_DV_OV_extra_warming_keepwarm": "Utrzymywanie ciepła",
+    "CL_CF_FM_dont_remind_in_3_months": "Nie przypominaj za 3 miesiące",
+    "CL_DV_RF_cleaning_plan": "Plan czyszczenia",
+    "CL_DV_RF_cleaning_refrigerator": "Czyszczenie lodówki",
+    "CL_DV_RF_cleaning_reminder": "Przypomnienie o czyszczeniu",
+    "CL_DV_RF_cleaning_cycle": "Cykl czyszczenia",
+    "CL_DV_RF_cleaning_history": "Historia czyszczenia",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Nie wybrano cyklu czyszczenia",
+    "CL_DV_RF_havent_cleaned_yet": "Jeszcze nie sprzątałeś.",
+    "CL_DV_RF_garbage_disposal_reminder": "Przypomnienie o wywozie śmieci",
+    "CL_DV_RF_resource_waste": "Marnowanie zasobów",
+    "CL_DV_RF_timer_not_selected": "Nie wybrano timera",
+    "CL_DV_RF_add_more_reminders": "Dodaj więcej przypomnień",
+    "CL_DV_RF_cleaning_tips": "Porady dotyczące czyszczenia",
+    "CL_DV_RF_last_clean_time": "Ostatni raz czyściłeś lodówkę: ***",
+    "CL_DV_RF_last_cleaning_was_today": "Ostatnie sprzątanie było dzisiaj.",
+    "CL_DV_RF_you_need_cleaning_now": "Potrzebujesz natychmiastowego sprzątania.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Następne sprzątanie za ** dni.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Ostatnie sprzątanie było ** dni temu.",
+    "CL_CF_CO_x_weeks": "Tygodnie",
+    "CL_DV_RF_cleaned": "Wyczyszczony",
+    "CL_DV_OV_probe_temperature_graph": "Wykres temperatury sondy",
+    "CL_DV_OV_internal": "Wewnętrzny",
+    "CL_DV_OV_probe_desc": "Sonda pomaga zmierzyć temperaturę jedzenia. Możesz zobaczyć różne temperatury w czasie.",
+    "CL_DV_RF_no_cleaning_history": "Brak historii czyszczenia"
 }
