--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -1676,7 +1676,7 @@
     "add_timing": "PRIDAŤ ČASOVAČ",
     "set_start_to_finish_time": "Nastavte čas od začiatku do konca",
     "pair_pump_appliance": "Ohrievač vody s tepelným čerpadlom",
-    "heat_pump": "Tepelné čerpadlo",
+    "heat_pump": "Invertorová doska",
     "pump_boost_1": "Posilnenie 1",
     "pump_electric_heating": "Elektrické vykurovanie",
     "pump_holiday_mode": "Dovolenka",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Pripojené a zapnuté;\nWi-Fi je aktivované a pripojené;\nHeslo Wi-Fi sa nedávno nezmenilo.",
     "dont_remind_again_uppercase": "NEPODMIŇUJTE ZNOVA",
     "storage_tips_title": "Tipy na skladovanie:",
-    "heat_pump_oem": "TÚV série PRO",
+    "heat_pump_oem": "Pevné otáčky TÚV",
     "td22_drying_empty_water_tank": "Sušenie – Vyprázdnite nádrž na vodu",
     "td22_drying_paused": "Sušenie prerušené",
     "td22_drying_finished": "Sušenie dokončené",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Naozaj sa chcete odhlásiť?",
     "fridge_child_lock_open_tips": "Po otvorení detskej poistky sa dotyková obrazovka a dávkovač uzamknú.",
     "want_scan_code_tips": "Chcem naskenovať kód.",
-    "tri_name_key": "Ohrievač tepelného čerpadla ATW",
+    "tri_name_key": "Tepelné čerpadlo ATW Pro",
     "water_set_key": "TEPLOTA VODY",
     "f_e_fan_fault_tip": "Porucha DC ventilátora",
     "zone_water_key": "Zóna 1 Voda",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Uistite sa, že máte zapnuté bluetooth.",
     "CL_DV_PIND_accessory_firmware_update": "Aktualizácia firmvéru príslušenstva",
     "CL_CF_CS_ble_scan_not_list": "Ak vaše zariadenie nie je uvedené v zozname, môžete kliknúť na „SKÚŠAŤ ZNOVU“ a hľadať znova, alebo kliknúť na „ĎALEJ“ a nakonfigurovať sieť iným spôsobom.",
-    "CL_CF_CS_ble_scan_have_not_found": "Na bluetooth sme nenašli žiadne zariadenie. Môžete kliknúť na „SKÚŠAŤ ZNOVU“ a hľadať znova, alebo kliknúť na „ĎALEJ“ a nakonfigurovať sieť iným spôsobom.",
+    "CL_CF_CS_ble_scan_have_not_found": "Na bluetooth sme nenašli žiadne zariadenie. Môžete kliknúť na „SKÚŠAŤ ZNOVU“ pre opätovné vyhľadávanie alebo nakonfigurovať sieť iným spôsobom.",
     "CL_DV_WM_pump_cleaning": "Čistiace čerpadlo...",
     "CL_DV_WM_autodoes_tip": "Povoľte túto funkciu a vaše zariadenie bude inteligentne dávkovať prací prostriedok a aviváž počas prania.",
     "CL_DV_WM_detergent_department_key": "PRIESTOR NA PRACÍ PROSTRIEDOK",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Nedá sa skryť",
     "program_management_unable_to_hide_desc": "Toto je posledný viditeľný program a aspoň jeden program musí zostať viditeľný.",
     "CL_CF_FM_set_deadline": "Stanovte si termín",
-    "CL_CF_FM_expiry_date_must_be_selected": "Je potrebné vybrať dátum vypršania platnosti"
+    "CL_CF_FM_expiry_date_must_be_selected": "Je potrebné vybrať dátum vypršania platnosti",
+    "CL_CF_FM_add_custom_food_desc": "Pridajte novú prispôsobenú položku",
+    "CL_CF_FM_delete_selected_items": "Odstrániť vybraté položky",
+    "CL_CF_FM_delete_selected": "Odstrániť vybraté",
+    "CL_DV_HOB_residual_heat_content": "Varná zóna je stále horúca. Dávajte pozor, aby ste sa ho nedotkli.",
+    "CL_CF_FM_add_custom_food": "Pridajte jedlo, ktoré nie je súčasťou knižnice",
+    "air_care_temp_title": "Štandard vyhodnocovania teploty:",
+    "air_care_hum_title": "Štandard hodnotenia vlhkosti:",
+    "air_care_temp_c": "Dobré: 17 < T < 27 °C\n Normálne: 10≤T≤17°C, 27≤T≤30°C\n Nie je dobré: T < 10°CT > 30°C",
+    "air_care_temp_f": "Dobrý: 62,6 < T < 80,6℉\n Normálne: 50≤T≤62,6℉, 80,6≤T≤86℉\n Nie je dobré: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Dobré: H < 70 %\n Normálne: 70≤H≤80 %\n Nie je dobré: H 80 %",
+    "CL_CF_RM_change_floor_key": "zmeniť podlahu",
+    "CL_CF_FM_recently_added": "Nedávno pridané",
+    "CL_CF_FM_no_matching_items": "Žiadne zodpovedajúce položky",
+    "CL_CF_FM_search_stored_food": "Vyhľadajte uložené potraviny",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "oznámenie",
+    "CL_CF_FM_a_day_ago": "Pred dňom",
+    "CL_CF_FM_a_week_ago": "Pred týždňom",
+    "CL_CF_FM_a_month_ago": "Pred mesiacom",
+    "CL_CF_FM_a_year_ago": "Pred rokom",
+    "CL_CF_FM_x_days_ago": "pred ** dňami",
+    "CL_CF_FM_x_weeks_ago": "pred ** týždňami",
+    "CL_CF_FM_x_months_ago": "** pred mesiacmi",
+    "CL_CF_FM_x_years_ago": "** pred rokmi",
+    "CL_CF_FM_shopping_list_details": "Podrobnosti nákupného zoznamu",
+    "CL_CF_FM_no_shopping_list": "Žiadny nákupný zoznam",
+    "CL_DV_OV_24_time_zone": "Časové pásmo",
+    "CL_CF_FM_reset_purchased_tips": "Chcete obnoviť všetky potraviny v tomto zozname do stavu nekúpené?",
+    "CL_CF_FM_add_food_to_x": "Pridať jedlo do \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Pridajte jedlo, ktoré chcete zakúpiť",
+    "CL_DV_OV_24_always_on": "Vždy zapnuté",
+    "CL_CF_CS_separated_ac_cs_step2": "Stlačte tlačidlo \"Horizontal Swing\" 6-krát na diaľkovom ovládači. Alebo stlačte 8-krát tlačidlo „Spánok“ na drôtovom diaľkovom ovládači.",
+    "CL_CF_FM_list": "Zoznam",
+    "CL_CF_FM_select_shopping_list": "Vyberte Nákupný zoznam",
+    "CL_CF_FM_x_items_added": "** položky boli pridané",
+    "CL_CF_FM_create_shopping_list_first": "Najprv musíte vytvoriť nákupný zoznam.",
+    "CL_CF_FM_no_shopping_list_available": "Nie je k dispozícii žiadny nákupný zoznam!",
+    "CL_DV_OV_extra_drying_desc": "Sušenie alebo sušenie potravín odstraňuje vlhkosť z potravín, aby sa zlepšila ich trvanlivosť. Toto je odporúčaný program. Môžete ho zmeniť podľa svojich preferencií.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Sušenie je najjednoduchší spôsob konzervovania bylín. Použitím teplého a suchého vzduchu sa vlhkosť odparí. To pomáha listom, kvetom alebo semenám udržať si farbu a chuť.",
+    "CL_DV_OV_extra_pasteurization_desc": "Na jedlo sa aplikuje mierna tepelná úprava, aby sa zničili škodlivé baktérie a predĺžila sa trvanlivosť. Môže sa použiť na konzervovanie potravín, ako sú mliečne výrobky, vaječné výrobky, orechy.",
+    "CL_DV_OV_extra_canning_desc": "Konzervovanie umožňuje konzerváciu potravín pred znehodnotením sterilizáciou teplom. Uistite sa, že potraviny sú skladované v nádobách, ktoré sú hermeticky uzavreté.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Efektívny program na rýchle a bezpečné rozmrazovanie mrazených potravín. Je to obzvlášť užitočné pre rôzne jedlá, od mäsa a zeleniny až po predvarené jedlá.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Účinne rozmrazuje mrazené potraviny spojením jemného tepla s prirodzenou vlhkosťou pary. Para pomáha udržiavať úroveň vlhkosti jedla, zachováva jeho textúru a chuť. To je obzvlášť užitočné pre jemné jedlá, ako sú ryby, pečivo alebo chlieb.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Pri tejto funkcii vzduch cirkuluje pomocou ventilátora. Nie sú zapnuté žiadne tepelné prvky. Toto nastavenie použite na rozmrazovanie mrazených jedál, ako sú koláče, chlieb a ovocie.",
+    "CL_DV_OV_extra_plate_warming_desc": "Zahrejte taniere na požadovanú teplotu. To pomáha, aby pokrmy na tanieroch zostali dlhšie teplé.",
+    "CL_DV_OV_extra_oshibori_desc": "Jemne ohrieva uteráky oshibori a ohrieva ich na príjemnú teplotu.",
+    "CL_DV_OV_extra_hot_stone_desc": "Navrhnuté pre kúpeľné procedúry. Kamene sa rovnomerne zahrejú na dokonalú teplotu, vďaka čomu sú pripravené na použitie pri relaxačných alebo wellness procedúrach.",
+    "CL_DV_OV_extra_sterilizing_desc": "Dezinfikujte predmety, ako sú dojčenské fľaše, kuchynské náčinie alebo drobné náradie. Rúra dosahuje teploty dostatočné na elimináciu baktérií a iných patogénov, čo poskytuje jednoduchý a účinný spôsob udržiavania čistoty a hygieny.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Používa paru na jemné ohrievanie jedla, čím sa obnovuje jeho vlhkosť a sviežosť. Ideálne pre jemné jedlá, ako sú cestoviny, ryža alebo kastróly, pretože zaisťuje, že zohriate jedlo si zachová svoju pôvodnú textúru a chuť bez toho, aby sa vysušilo.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Tento program, ktorý kombinuje výhody horúceho vzduchu a pary, je ideálny na ohrievanie širokej škály jedál. Horúci vzduch zaisťuje rovnomerné zahrievanie, zatiaľ čo para dodáva vlhkosť, vďaka čomu je ideálny pre jedlá ako mäso, hydina alebo miešané jedlá, pričom zaisťuje, že zostanú šťavnaté a voňavé.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Tento program, ktorý je ideálny pre potraviny, ktoré potrebujú chrumkavý povrch, využíva horúci vzduch na rovnomerné ohrievanie jedál, ako je pizza, pečivo alebo pečená zelenina. Cirkulujúci horúci vzduch zaisťuje dôkladné prehriatie jedla pri zachovaní chrumkavého povrchu.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Rýchlo zohrejte jedlo zvnútra von. Je to rýchla a efektívna možnosť ohrievania jedál. Ideálne pre polievky, dusené mäso alebo zvyšky, ktoré potrebujú rýchle zahriatie.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Udržujte jedlo pri perfektnej teplote podávania bez ďalšieho varenia. Ideálne na udržiavanie pokrmov teplých, kým nie sú pripravené na servírovanie. Je ideálny pre jedlá, ktoré sú pripravené v predstihu, vďaka čomu zostanú horúce a pripravené na vychutnanie.",
+    "CL_DV_OV_ends_at": "Končí o: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Vychutnajte si lahodné, údené chute grilovaných jedál bez potreby vonkajšieho grilu. Vyrobené tak, aby rovnomerne rozvádzalo teplo po celej ploche, minimalizovalo horúce miesta a zaistilo konzistentné výsledky grilovania. Ideálne na grilovanie rôznych jedál, od mäsa a zeleniny až po morské plody a dokonca aj ovocie.",
+    "CL_DV_OV_remote_start_title": "Vzdialený štart je zakázaný",
+    "CL_DV_OV_remote_start_content": "Ak chcete odosielať a spúšťať programy z vašej aplikácie, vzdialené spustenie by malo byť aktívne. ",
+    "CL_CF_FM_apple": "Apple",
+    "CL_CF_FM_bacon": "Slanina",
+    "CL_CF_FM_broccoli": "Brokolica",
+    "CL_CF_FM_cabbage": "Kapustnica",
+    "CL_CF_FM_Cauliflower": "Karfiol",
+    "CL_CF_FM_cod": "Treska škvrnitá",
+    "CL_CF_FM_dragon_fruit": "Dračie ovocie",
+    "CL_DV_OV_defrost_detail_desc": "Správne rozmrazovanie potravín zabezpečuje kvalitu vašich potravín po ich zmrazení. Správne rozmrazovanie znižuje riziko otravy jedlom.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Nepotravinové programy sú určené na rôzne kulinárske úlohy a poskytujú pohodlie a funkčnosť nad rámec tradičného varenia.",
+    "CL_DV_OV_extra_warming_detail_desc": "Rad programov ohrievania na ohrievanie a ohrievanie jedla, ktoré vám uľahčí vychutnať si jedlo, či už ohrievate zvyšky jedla alebo udržiavate pokrmy teplé na servírovanie.",
+    "CL_CF_FM_click_switch_status": "Kliknutím prepnete stav položky",
+    "CL_CF_FM_recent_purchased_tips": "Kúpili ste si tieto veci, chcete pridať term do zásob potravín?",
+    "CL_DV_OV_extra_drying_herbs": "Sušenie byliniek",
+    "CL_DV_OV_extra_pasteurization": "Pasterizácia",
+    "CL_DV_OV_extra_canning": "Konzervovanie",
+    "CL_DV_OV_extra_defrost_microwave": "Rozmrazovanie pomocou mikrovlnnej rúry",
+    "CL_DV_OV_extra_defrost_stream": "Rozmrazovanie pomocou pary",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "horúce kamene",
+    "CL_DV_OV_extra_sterilizing": "Sterilizácia",
+    "CL_DV_OV_extra_warming_hotair_stream": "Ohrievajte horúcim vzduchom + parou",
+    "CL_DV_OV_extra_warming_hotair": "Prehrejte horúcim vzduchom",
+    "CL_DV_OV_extra_warming_microwave": "Ohrievajte pomocou mikrovlnnej rúry",
+    "CL_DV_OV_extra_warming_keepwarm": "Udržanie tepla",
+    "CL_CF_FM_dont_remind_in_3_months": "Nepripomínať o 3 mesiace",
+    "CL_DV_RF_cleaning_plan": "Plán čistenia",
+    "CL_DV_RF_cleaning_refrigerator": "Čistenie chladničky",
+    "CL_DV_RF_cleaning_reminder": "Upomienka na čistenie",
+    "CL_DV_RF_cleaning_cycle": "Čistiaci cyklus",
+    "CL_DV_RF_cleaning_history": "História čistenia",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Nie je zvolený čistiaci cyklus",
+    "CL_DV_RF_havent_cleaned_yet": "Ešte ste neupratovali.",
+    "CL_DV_RF_garbage_disposal_reminder": "Pripomenutie odvozu odpadu",
+    "CL_DV_RF_resource_waste": "Odpad zo zdrojov",
+    "CL_DV_RF_timer_not_selected": "Časovač nie je vybratý",
+    "CL_DV_RF_add_more_reminders": "Pridajte ďalšie pripomienky",
+    "CL_DV_RF_cleaning_tips": "Tipy na čistenie",
+    "CL_DV_RF_last_clean_time": "Chladničku ste naposledy čistili dňa : ***",
+    "CL_DV_RF_last_cleaning_was_today": "Posledné upratovanie bolo dnes.",
+    "CL_DV_RF_you_need_cleaning_now": "Teraz potrebujete vyčistiť.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Ďalšie čistenie o ** dní.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Posledné upratovanie bolo pred ** dňami.",
+    "CL_CF_CO_x_weeks": "týždňov",
+    "CL_DV_RF_cleaned": "Vyčistené",
+    "CL_DV_OV_probe_temperature_graph": "Graf teploty sondy",
+    "CL_DV_OV_internal": "Interné",
+    "CL_DV_OV_probe_desc": "Sonda vám pomôže merať teplotu vášho jedla. Môžete vidieť rôzne teploty v priebehu času.",
+    "CL_DV_RF_no_cleaning_history": "Žiadna história čistenia"
 }
