--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -1676,7 +1676,7 @@
     "add_timing": "DODAJ VREME",
     "set_start_to_finish_time": "Podesite vreme od početka do završetka",
     "pair_pump_appliance": "Toplotna pumpa – grejač za vodu",
-    "heat_pump": "Toplotna pumpa",
+    "heat_pump": "Плоча инвертера",
     "pump_boost_1": "Pojačanje 1",
     "pump_electric_heating": "Električno grejanje",
     "pump_holiday_mode": "Odmor",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "1. Уређај је прикључен у струју и укључује се.\n2. Ваш Wi-Fi је активан и повезан.\n3. Wi-Fi лозинка није недавно промењена.",
     "dont_remind_again_uppercase": "НЕ ПОДСЕЋАЈ ПОНОВО",
     "storage_tips_title": "Савети за складиштење:",
-    "heat_pump_oem": "ПРО серија ТВ",
+    "heat_pump_oem": "ПТВ фиксне брзине",
     "td22_drying_empty_water_tank": "Сушење – Испразните резервоар за воду",
     "td22_drying_paused": "Сушење је паузирано",
     "td22_drying_finished": "Сушење је завршено",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Да ли сте сигурни да желите да се одјавите?",
     "fridge_child_lock_open_tips": "Након што се укључи дечја брава, екран осетљив на додир и дозатор ће бити закључани.",
     "want_scan_code_tips": "Желим да скенирам код.",
-    "tri_name_key": "АТВ грејач топлотне пумпе",
+    "tri_name_key": "АТВ Про топлотна пумпа",
     "water_set_key": "ТЕМПЕРАТУРА ВОДЕ",
     "f_e_fan_fault_tip": "Неуспех DC вентилатора",
     "zone_water_key": "Зона1 вода",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Уверите се да је ваш блуетоотх укључен.",
     "CL_DV_PIND_accessory_firmware_update": "Ажурирање фирмвера додатне опреме",
     "CL_CF_CS_ble_scan_not_list": "Ако ваш уређај није на листи, можете кликнути на „ПОКУШАЈ ПОНОВНО“ да бисте поново претражили или кликните на „ДАЉЕ“ да бисте конфигурисали мрежу на други начин.",
-    "CL_CF_CS_ble_scan_have_not_found": "Нисмо пронашли ниједан уређај на блуетоотх-у. Можете да кликнете на 'ПОКУШАЈ ПОНОВНО' да претражите поново или да кликнете на 'ДАЉЕ' да конфигуришете мрежу на други начин.",
+    "CL_CF_CS_ble_scan_have_not_found": "Нисмо пронашли ниједан уређај на блуетоотх-у. Можете да кликнете на „ПОКУШАЈ ПОНОВНО“ да поново претражите или да конфигуришете мрежу на други начин.",
     "CL_DV_WM_pump_cleaning": "Пумпа за чишћење...",
     "CL_DV_WM_autodoes_tip": "Омогућите ову функцију и ваш уређај ће паметно дозирати детерџент и омекшивач док перете веш.",
     "CL_DV_WM_detergent_department_key": "ОДЈЕЉАК ЗА ДЕТЕРЏЕНТ",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Није могуће сакрити",
     "program_management_unable_to_hide_desc": "Ово је последњи видљиви програм и најмање један програм мора остати видљив.",
     "CL_CF_FM_set_deadline": "Одредите рок",
-    "CL_CF_FM_expiry_date_must_be_selected": "Датум истека мора бити изабран"
+    "CL_CF_FM_expiry_date_must_be_selected": "Датум истека мора бити изабран",
+    "CL_CF_FM_add_custom_food_desc": "Додајте нову прилагођену ставку",
+    "CL_CF_FM_delete_selected_items": "Избришите изабране ставке",
+    "CL_CF_FM_delete_selected": "Избриши изабрано",
+    "CL_DV_HOB_residual_heat_content": "Зона за кување је још врућа. Пазите да га не додирнете.",
+    "CL_CF_FM_add_custom_food": "Додајте храну која није укључена у библиотеку",
+    "air_care_temp_title": "Стандард за процену температуре:",
+    "air_care_hum_title": "Стандард за процену влажности:",
+    "air_care_temp_c": "Добро: 17 < Т < 27 ℃\n Нормално: 10≤Т≤17°Ц, 27≤Т≤30°Ц\n Није добро: Т < 10°ЦТ > 30°Ц",
+    "air_care_temp_f": "Добро: 62,6 < Т < 80,6℉\n Нормално: 50≤Т≤62.6℉, 80.6≤Т≤86℉\n Није добро: Т＜50℉ Т＞86℉",
+    "air_care_hum_tips": "Добро: Х < 70%\n Нормално: 70≤Х≤80%\n Није добро: Х＞80%",
+    "CL_CF_RM_change_floor_key": "променити под",
+    "CL_CF_FM_recently_added": "Недавно додано",
+    "CL_CF_FM_no_matching_items": "Нема одговарајућих ставки",
+    "CL_CF_FM_search_stored_food": "Претражите ускладиштену храну",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "обавештење",
+    "CL_CF_FM_a_day_ago": "Пре један дан",
+    "CL_CF_FM_a_week_ago": "Пре недељу дана",
+    "CL_CF_FM_a_month_ago": "Пре месец дана",
+    "CL_CF_FM_a_year_ago": "Пре годину дана",
+    "CL_CF_FM_x_days_ago": "** пре дана",
+    "CL_CF_FM_x_weeks_ago": "** пре недељу дана",
+    "CL_CF_FM_x_months_ago": "** пре месец дана",
+    "CL_CF_FM_x_years_ago": "** године",
+    "CL_CF_FM_shopping_list_details": "Детаљи листе за куповину",
+    "CL_CF_FM_no_shopping_list": "Нема листе за куповину",
+    "CL_DV_OV_24_time_zone": "Временска зона",
+    "CL_CF_FM_reset_purchased_tips": "Да ли желите да све намирнице на овој листи ресетујете на статус некупљене?",
+    "CL_CF_FM_add_food_to_x": "Додајте храну у \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Додајте храну коју желите да купите",
+    "CL_DV_OV_24_always_on": "Алваис Он",
+    "CL_CF_CS_separated_ac_cs_step2": "Притисните дугме \"Хоризонтални замах\" 6 пута на даљинском управљачу. Или притисните дугме \"Слееп\" 8 пута на жичаном даљинском управљачу.",
+    "CL_CF_FM_list": "Лист",
+    "CL_CF_FM_select_shopping_list": "Изаберите Листа за куповину",
+    "CL_CF_FM_x_items_added": "** ставке су додате",
+    "CL_CF_FM_create_shopping_list_first": "Прво морате да направите листу за куповину.",
+    "CL_CF_FM_no_shopping_list_available": "Листа за куповину није доступна!",
+    "CL_DV_OV_extra_drying_desc": "Сушење или дехидрација хране уклања влагу из хране како би се продужио рок трајања. Ово је препоручени програм. Можете га променити по жељи.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Сушење је најлакши начин очувања биља. Коришћењем топлог и сувог ваздуха, влага испарава. Ово помаже лишћу, цвећу или семену да задрже боју и укус.",
+    "CL_DV_OV_extra_pasteurization_desc": "Блага топлотна обрада се примењује на храну како би се убиле штетне бактерије и продужио рок трајања. Може се користити за очување хране као што су млечни производи, производи од јаја, ораси.",
+    "CL_DV_OV_extra_canning_desc": "Конзервирање омогућава очување хране од кварења стерилизацијом топлотом. Уверите се да се храна складишти у контејнерима који су херметички затворени.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Ефикасан програм за брзо и безбедно одмрзавање смрзнуте хране. Посебно је користан за разноврсну храну, од меса и поврћа до претходно куваних оброка.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Ефикасно одмрзава замрзнуту храну комбиновањем нежне топлоте са природном влагом паре. Пара помаже у одржавању нивоа влаге у храни, чувајући њену текстуру и укус. Ово је посебно корисно за деликатну храну попут рибе, пецива или хлеба.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Sa ovom funkcijom, vazduh cirkuliše uz pomoć ventilatora. Nijedan toplotni element nije uključen. Koristite ovu postavku za odmrzavanje zamrznutih jela kao što su kolači, hleb i voće.",
+    "CL_DV_OV_extra_plate_warming_desc": "Загрејте плоче на жељену температуру. Ово помаже да посуђе на тањирима остане топлије током дужег временског периода.",
+    "CL_DV_OV_extra_oshibori_desc": "Нежно загрева осхибори пешкире за руке, загревајући их на угодну температуру.",
+    "CL_DV_OV_extra_hot_stone_desc": "Дизајниран за спа третмане. Камење се равномерно загрева до савршене температуре, што их чини спремним за употребу у релаксацији или веллнесс рутинама.",
+    "CL_DV_OV_extra_sterilizing_desc": "Дезинфикујте предмете као што су флашице за бебе, кухињски прибор или мали алати. Рерна достиже температуру довољну да елиминише бактерије и друге патогене, пружајући једноставан и ефикасан начин одржавања чистоће и хигијене.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Користи пару за нежно загревање хране, враћајући јој влажност и свежину. Идеалан за деликатна јела као што су тестенина, пиринач или тепсије, јер обезбеђује да поново загрејана храна задржи своју оригиналну текстуру и укус без да се осуши.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Комбинујући предности топлог ваздуха и паре, овај програм је идеалан за подгревање широког спектра намирница. Врући ваздух обезбеђује равномерно загревање, док пара додаје влагу, што га чини савршеним за јела попут меса, живине или мешаних оброка, осигуравајући да остану сочна и укусна.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Савршен за храну којој је потребна хрскава спољашњост, овај програм користи врућ ваздух за равномерно загревање јела као што су пица, пециво или печено поврће. Врући ваздух који циркулише обезбеђује да се храна темељно загреје уз одржавање хрскавог завршетка.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Брзо подгрејте храну изнутра ка споља. То је брза и ефикасна опција за подгревање оброка. Савршено за супе, варива или остатке хране којима је потребно брзо загревање.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Одржавајте храну на савршеној температури за сервирање без даљег кувања. Идеално за одржавање јела топлим док не буду спремна за сервирање. Савршен је за оброке који се припремају унапред, осигуравајући да остану топли и спремни за уживање.",
+    "CL_DV_OV_ends_at": "Завршава се у: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Уживајте у укусним, димљеним укусима јела са роштиља без потребе за роштиљем на отвореном. Направљен да равномерно распоређује топлоту по целој површини, минимизирајући вруће тачке и обезбеђујући доследне резултате печења. Идеалан за печење разних намирница, од меса и поврћа до морских плодова, па чак и воћа.",
+    "CL_DV_OV_remote_start_title": "Даљинско покретање је онемогућено",
+    "CL_DV_OV_remote_start_content": "Да бисте слали и покретали програме из своје апликације, даљинско покретање би требало да буде активно. ",
+    "CL_CF_FM_apple": "Аппле",
+    "CL_CF_FM_bacon": "Сланина",
+    "CL_CF_FM_broccoli": "Броколи",
+    "CL_CF_FM_cabbage": "Купус",
+    "CL_CF_FM_Cauliflower": "карфиол",
+    "CL_CF_FM_cod": "Цод",
+    "CL_CF_FM_dragon_fruit": "Драгон Фруит",
+    "CL_DV_OV_defrost_detail_desc": "Правилно одмрзавање хране осигурава квалитет ваше хране након што је замрзнута. Правилно одмрзавање смањује ризик од тровања храном.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Непрехрамбени програми су направљени за разне некулинарске задатке, пружајући практичност и функционалност изван традиционалног кувања.",
+    "CL_DV_OV_extra_warming_detail_desc": "Низ програма за загревање за подгревање и загревање хране, што олакшава уживање у оброцима, било да подгревате остатке јела или одржавате јела топлим за сервирање.",
+    "CL_CF_FM_click_switch_status": "Кликните да бисте променили статус ставке",
+    "CL_CF_FM_recent_purchased_tips": "Купили сте ове ствари, да ли желите да додате термо у инвентар хране?",
+    "CL_DV_OV_extra_drying_herbs": "Сушење биља",
+    "CL_DV_OV_extra_pasteurization": "Пастеризација",
+    "CL_DV_OV_extra_canning": "Конзервирање",
+    "CL_DV_OV_extra_defrost_microwave": "Одмрзните микроталасном",
+    "CL_DV_OV_extra_defrost_stream": "Одмрзните паром",
+    "CL_DV_OV_extra_oshibori": "Осхибори",
+    "CL_DV_OV_extra_hot_stones": "Хот Стонес",
+    "CL_DV_OV_extra_sterilizing": "Стерилизовање",
+    "CL_DV_OV_extra_warming_hotair_stream": "Загрејати топлим ваздухом + паром",
+    "CL_DV_OV_extra_warming_hotair": "Загрејати топлим ваздухом",
+    "CL_DV_OV_extra_warming_microwave": "Поново загрејте микроталасном",
+    "CL_DV_OV_extra_warming_keepwarm": "Одржавање топлоте",
+    "CL_CF_FM_dont_remind_in_3_months": "Не подсећај за 3 месеца",
+    "CL_DV_RF_cleaning_plan": "План чишћења",
+    "CL_DV_RF_cleaning_refrigerator": "Чишћење фрижидера",
+    "CL_DV_RF_cleaning_reminder": "Подсетник за чишћење",
+    "CL_DV_RF_cleaning_cycle": "Циклус чишћења",
+    "CL_DV_RF_cleaning_history": "Историја чишћења",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Циклус чишћења није изабран",
+    "CL_DV_RF_havent_cleaned_yet": "Још нисте очистили.",
+    "CL_DV_RF_garbage_disposal_reminder": "Подсетник за одлагање смећа",
+    "CL_DV_RF_resource_waste": "Расипање ресурса",
+    "CL_DV_RF_timer_not_selected": "Тајмер није изабран",
+    "CL_DV_RF_add_more_reminders": "Додајте још подсетника",
+    "CL_DV_RF_cleaning_tips": "Савети за чишћење",
+    "CL_DV_RF_last_clean_time": "Последњи пут када сте чистили фрижидер било је: ***",
+    "CL_DV_RF_last_cleaning_was_today": "Последње чишћење је било данас.",
+    "CL_DV_RF_you_need_cleaning_now": "Сада вам треба чишћење.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Следеће чишћење за ** дана.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Последње чишћење је било пре ** дана.",
+    "CL_CF_CO_x_weeks": "Недеље",
+    "CL_DV_RF_cleaned": "Очишћено",
+    "CL_DV_OV_probe_temperature_graph": "Графикон температуре сонде",
+    "CL_DV_OV_internal": "Унутрашње",
+    "CL_DV_OV_probe_desc": "Сонда вам помаже да мерите температуру ваше хране. Можете видети различите температуре током времена.",
+    "CL_DV_RF_no_cleaning_history": "Нема историје чишћења"
 }
