--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -1676,7 +1676,7 @@
     "add_timing": "LÄGG TILL TIMER",
     "set_start_to_finish_time": "Ställ in start- och sluttid",
     "pair_pump_appliance": "Varmvattenberedare med värmepump",
-    "heat_pump": "Värmepump",
+    "heat_pump": "Inverterkort",
     "pump_boost_1": "Ökning 1",
     "pump_electric_heating": "Eluppvärmning",
     "pump_holiday_mode": "Semester",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Ansluten och påslagen;\nWi-Fi är aktiverat och anslutet;\nWi-Fi-lösenordet har inte ändrats nyligen.",
     "dont_remind_again_uppercase": "PÅMINN INTE IGEN",
     "storage_tips_title": "Förvaringstips:",
-    "heat_pump_oem": "PRO-serien VV",
+    "heat_pump_oem": "Varmvattenberedare med fast hastighet",
     "td22_drying_empty_water_tank": "Torkning – Töm vattentanken",
     "td22_drying_paused": "Torkning pausad",
     "td22_drying_finished": "Torkning klar",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Är du säker på att du vill logga ut?",
     "fridge_child_lock_open_tips": "Efter att barnlåset har öppnats låses pekskärmen och dispensern.",
     "want_scan_code_tips": "Jag vill skanna koden.",
-    "tri_name_key": "ATW värmepumpsvärmare",
+    "tri_name_key": "ATW Pro värmepump",
     "water_set_key": "VATTENTEMP",
     "f_e_fan_fault_tip": "DC-fläktfel",
     "zone_water_key": "Zon 1 Vatten",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Se till att din bluetooth är påslagen.",
     "CL_DV_PIND_accessory_firmware_update": "Uppdatering av tillbehörsfirmware",
     "CL_CF_CS_ble_scan_not_list": "Om din enhet inte finns med i listan kan du klicka på 'FÖRSÖKA IGEN' för att söka igen, eller klicka på 'NÄSTA' för att konfigurera nätverket på annat sätt.",
-    "CL_CF_CS_ble_scan_have_not_found": "Vi har inte hittat någon enhet på bluetooth. Du kan klicka på \"FÖRSÖKA IGEN\" för att söka igen, eller klicka på \"NÄSTA\" för att konfigurera nätverket på annat sätt.",
+    "CL_CF_CS_ble_scan_have_not_found": "Vi har inte hittat någon enhet på bluetooth. Du kan klicka på \"FÖRSÖK IGEN\" för att söka igen, eller konfigurera nätverket på ett annat sätt.",
     "CL_DV_WM_pump_cleaning": "Rengör pumpen...",
     "CL_DV_WM_autodoes_tip": "Aktivera den här funktionen så kommer din enhet smart att dosera tvättmedel och sköljmedel medan du tvättar.",
     "CL_DV_WM_detergent_department_key": "Tvättmedelsfack",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Det går inte att gömma sig",
     "program_management_unable_to_hide_desc": "Detta är det sista synliga programmet och minst ett program måste hållas synligt.",
     "CL_CF_FM_set_deadline": "Sätt en deadline",
-    "CL_CF_FM_expiry_date_must_be_selected": "Utgångsdatum måste väljas"
+    "CL_CF_FM_expiry_date_must_be_selected": "Utgångsdatum måste väljas",
+    "CL_CF_FM_add_custom_food_desc": "Lägg till ett nytt anpassat objekt",
+    "CL_CF_FM_delete_selected_items": "Ta bort markerade objekt",
+    "CL_CF_FM_delete_selected": "Ta bort markerade",
+    "CL_DV_HOB_residual_heat_content": "Kokzonen är fortfarande varm. Var försiktig så att du inte rör vid den.",
+    "CL_CF_FM_add_custom_food": "Lägg till mat som inte ingår i biblioteket",
+    "air_care_temp_title": "Temperaturutvärderingsstandard:",
+    "air_care_hum_title": "Fuktighetsutvärderingsstandard:",
+    "air_care_temp_c": "Bra: 17 < T < 27 ℃\n Normal: 10≤T≤17°C, 27≤T≤30°C\n Inte bra: T < 10°CT > 30°C",
+    "air_care_temp_f": "Bra: 62,6 < T < 80,6℉\n Normal: 50≤T≤62,6℉, 80,6≤T≤86℉\n Inte bra: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Bra: H < 70 %\n Normal: 70≤H≤80 %\n Inte bra: H＞80%",
+    "CL_CF_RM_change_floor_key": "byta våning",
+    "CL_CF_FM_recently_added": "Nyligen tillagd",
+    "CL_CF_FM_no_matching_items": "Inga matchande föremål",
+    "CL_CF_FM_search_stored_food": "Sök lagrad mat",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "underrättelse",
+    "CL_CF_FM_a_day_ago": "För en dag sedan",
+    "CL_CF_FM_a_week_ago": "För en vecka sedan",
+    "CL_CF_FM_a_month_ago": "För en månad sedan",
+    "CL_CF_FM_a_year_ago": "För ett år sedan",
+    "CL_CF_FM_x_days_ago": "** dagar sedan",
+    "CL_CF_FM_x_weeks_ago": "** veckor sedan",
+    "CL_CF_FM_x_months_ago": "** månader sedan",
+    "CL_CF_FM_x_years_ago": "** år sedan",
+    "CL_CF_FM_shopping_list_details": "Inköpslista Detaljer",
+    "CL_CF_FM_no_shopping_list": "Ingen inköpslista",
+    "CL_DV_OV_24_time_zone": "Tidszon",
+    "CL_CF_FM_reset_purchased_tips": "Vill du återställa alla livsmedel i den här listan till statusen ej köpt?",
+    "CL_CF_FM_add_food_to_x": "Lägg till mat till \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Lägg till maten som ska köpas",
+    "CL_DV_OV_24_always_on": "Alltid på",
+    "CL_CF_CS_separated_ac_cs_step2": "Tryck på \"Horizontal Swing\"-knappen 6 gånger på fjärrkontrollen. Eller tryck på \"Sleep\"-knappen 8 gånger i trådfjärrkontrollen.",
+    "CL_CF_FM_list": "Lista",
+    "CL_CF_FM_select_shopping_list": "Välj Inköpslista",
+    "CL_CF_FM_x_items_added": "** objekt har lagts till",
+    "CL_CF_FM_create_shopping_list_first": "Du måste skapa en inköpslista först.",
+    "CL_CF_FM_no_shopping_list_available": "Ingen inköpslista tillgänglig!",
+    "CL_DV_OV_extra_drying_desc": "Att torka eller torka mat tar bort fukt från maten för att förbättra hållbarheten. Detta är ett rekommenderat program. Du kan ändra det efter dina önskemål.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Torkning är den enklaste metoden för att konservera örter. Genom att använda varm och torr luft avdunstar fukten. Detta hjälper bladen, blommorna eller fröna att behålla sin färg och smak.",
+    "CL_DV_OV_extra_pasteurization_desc": "En mild värmebehandling appliceras på maten för att döda skadliga bakterier och förlänga hållbarheten. Den kan användas för att konservera mat som mejeriprodukter, äggprodukter, nötter.",
+    "CL_DV_OV_extra_canning_desc": "Konservering gör det möjligt att bevara mat från att förstöras steriliseras med värme. Se till att maten förvaras i behållare som är hermetiskt tillslutna.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Ett effektivt program för att snabbt och säkert tina upp fryst mat. Det är särskilt användbart för en mängd olika livsmedel, från kött och grönsaker till färdiglagade måltider.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Tinar fryst mat effektivt genom att kombinera skonsam värme med ångans naturliga fukt. Ångan hjälper till att bibehålla matens fuktnivåer och bevarar dess konsistens och smak. Detta är särskilt användbart för känsliga livsmedel som fisk, bakverk eller bröd.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Med denna funktion cirkulerar luften med hjälp av fläkten. Inga värmeelement är påslagna. Använd denna inställning för att tina upp frysta rätter, såsom kakor, bröd och frukt.",
+    "CL_DV_OV_extra_plate_warming_desc": "Värm upp plattorna till önskad temperatur. Detta gör att rätterna på tallrikarna håller sig varmare under en längre tid.",
+    "CL_DV_OV_extra_oshibori_desc": "Värmer försiktigt oshibori handdukar, värmer dem till en behaglig temperatur.",
+    "CL_DV_OV_extra_hot_stone_desc": "Designad för spaliknande behandlingar. Stenarna värms jämnt till den perfekta temperaturen, vilket gör dem redo att användas i avslappnings- eller wellnessrutiner.",
+    "CL_DV_OV_extra_sterilizing_desc": "Rengör föremål som nappflaskor, köksredskap eller små verktyg. Ugnen når temperaturer som är tillräckliga för att eliminera bakterier och andra patogener, vilket ger ett enkelt och effektivt sätt att upprätthålla renlighet och hygien.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Använder ånga för att försiktigt värma upp mat, vilket återställer dess fuktighet och fräschör. Idealisk för känsliga rätter som pasta, ris eller kassler, eftersom det säkerställer att uppvärmd mat behåller sin ursprungliga konsistens och smak utan att bli torr.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Genom att kombinera fördelarna med både varmluft och ånga, är detta program idealiskt för att värma upp en mängd olika livsmedel. Den varma luften ger jämn uppvärmning, medan ångan tillför fukt, vilket gör den perfekt för rätter som kött, fågel eller blandade måltider, vilket säkerställer att de förblir saftiga och smakrika.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Detta program är perfekt för mat som behöver ett skarpt yttre och använder varmluft för att jämnt värma upp rätter som pizza, bakverk eller rostade grönsaker. Den cirkulerande varma luften ser till att maten värms upp ordentligt samtidigt som den behåller en krispig finish.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Värm snabbt upp maten inifrån och ut. Det är ett snabbt och effektivt alternativ för att värma upp måltider. Perfekt för soppor, grytor eller rester som behöver en snabb uppvärmning.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Håll maten vid den perfekta serveringstemperaturen utan ytterligare tillagning. Perfekt för att hålla rätter varma tills de är redo att serveras. Den är perfekt för måltider som tillagas i förväg, vilket säkerställer att de förblir varma och redo att avnjutas.",
+    "CL_DV_OV_ends_at": "Slutar kl: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Njut av de läckra, rökiga smakerna av grillade rätter utan att behöva en utomhusgrill. Tillverkad för att fördela värmen jämnt över hela området, vilket minimerar varma punkter och säkerställer konsekventa grillresultat. Idealisk för att grilla en mängd olika livsmedel, från kött och grönsaker till skaldjur och till och med frukt.",
+    "CL_DV_OV_remote_start_title": "Fjärrstart är inaktiverat",
+    "CL_DV_OV_remote_start_content": "För att skicka och starta program från din app, bör fjärrstart vara aktiv. ",
+    "CL_CF_FM_apple": "Äpple",
+    "CL_CF_FM_bacon": "Bacon",
+    "CL_CF_FM_broccoli": "Broccoli",
+    "CL_CF_FM_cabbage": "Kål",
+    "CL_CF_FM_Cauliflower": "Blomkål",
+    "CL_CF_FM_cod": "Torsk",
+    "CL_CF_FM_dragon_fruit": "Drakfrukt",
+    "CL_DV_OV_defrost_detail_desc": "Korrekt upptining av mat säkerställer kvaliteten på din mat efter att den har frysts in. Korrekt upptining minskar risken för matförgiftning.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Non food-program är gjorda för olika icke-kulinariska uppgifter, vilket ger bekvämlighet och funktionalitet bortom traditionell matlagning.",
+    "CL_DV_OV_extra_warming_detail_desc": "En rad uppvärmningsprogram för att värma upp och värma mat, vilket gör det enkelt att njuta av måltider, oavsett om du värmer upp matrester eller håller rätter varma för servering.",
+    "CL_CF_FM_click_switch_status": "Klicka för att ändra status för objektet",
+    "CL_CF_FM_recent_purchased_tips": "Du köpte dessa saker, vill du lägga till therm till Food Inventory?",
+    "CL_DV_OV_extra_drying_herbs": "Torkande örter",
+    "CL_DV_OV_extra_pasteurization": "Pastörisering",
+    "CL_DV_OV_extra_canning": "Konservering",
+    "CL_DV_OV_extra_defrost_microwave": "Tina med mikrovågsugn",
+    "CL_DV_OV_extra_defrost_stream": "Tina med Steam",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "Heta stenar",
+    "CL_DV_OV_extra_sterilizing": "Sterilisering",
+    "CL_DV_OV_extra_warming_hotair_stream": "Värm upp med varmluft + ånga",
+    "CL_DV_OV_extra_warming_hotair": "Värm upp med varmluft",
+    "CL_DV_OV_extra_warming_microwave": "Värm igen med mikrovågsugn",
+    "CL_DV_OV_extra_warming_keepwarm": "Hålla varmt",
+    "CL_CF_FM_dont_remind_in_3_months": "Påminn inte om 3 månader",
+    "CL_DV_RF_cleaning_plan": "Städplan",
+    "CL_DV_RF_cleaning_refrigerator": "Rengöring av kylskåp",
+    "CL_DV_RF_cleaning_reminder": "Rengöring påminnelse",
+    "CL_DV_RF_cleaning_cycle": "Rengöringscykel",
+    "CL_DV_RF_cleaning_history": "Rengöringshistorik",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Rengöringscykel inte vald",
+    "CL_DV_RF_havent_cleaned_yet": "Du har inte städat ännu.",
+    "CL_DV_RF_garbage_disposal_reminder": "Påminnelse om sophantering",
+    "CL_DV_RF_resource_waste": "Resursslöseri",
+    "CL_DV_RF_timer_not_selected": "Timer inte vald",
+    "CL_DV_RF_add_more_reminders": "Lägg till fler påminnelser",
+    "CL_DV_RF_cleaning_tips": "Rengöringstips",
+    "CL_DV_RF_last_clean_time": "Senast du städade kylskåpet var på: ***",
+    "CL_DV_RF_last_cleaning_was_today": "Sista städningen var idag.",
+    "CL_DV_RF_you_need_cleaning_now": "Du behöver städa nu.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Nästa städning om ** dagar.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Senaste städningen var för ** dagar sedan.",
+    "CL_CF_CO_x_weeks": "Veckor",
+    "CL_DV_RF_cleaned": "Rensad",
+    "CL_DV_OV_probe_temperature_graph": "Sondtemperaturgraf",
+    "CL_DV_OV_internal": "Inre",
+    "CL_DV_OV_probe_desc": "Sonden hjälper dig att mäta temperaturen på din mat. Du kan se de olika temperaturerna över tiden.",
+    "CL_DV_RF_no_cleaning_history": "Ingen städhistorik"
 }
