--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -1676,7 +1676,7 @@
     "add_timing": "เพิ่มเวลา",
     "set_start_to_finish_time": "ตั้งเวลาเริ่มต้นจนถึงสิ้นสุด",
     "pair_pump_appliance": "เครื่องทำน้ำอุ่นแบบปั๊มความร้อน",
-    "heat_pump": "ปั๊มความร้อน",
+    "heat_pump": "บอร์ดอินเวอร์เตอร์",
     "pump_boost_1": "บูสต์ 1",
     "pump_electric_heating": "เครื่องทำความร้อนไฟฟ้า",
     "pump_holiday_mode": "วันหยุด",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "เสียบปลั๊กและเปิดอยู่;\nWi-Fi เปิดใช้งานและเชื่อมต่อแล้ว;\nรหัสผ่าน Wi-Fi ไม่ได้เปลี่ยนแปลงเมื่อเร็ว ๆ นี้",
     "dont_remind_again_uppercase": "ไม่แจ้งเตือนอีก",
     "storage_tips_title": "เคล็ดลับการจัดเก็บ:",
-    "heat_pump_oem": "DHW ซีรีส์ PRO",
+    "heat_pump_oem": "DHW ความเร็วคงที่",
     "td22_drying_empty_water_tank": "การอบแห้ง – ถังเก็บน้ำเปล่า",
     "td22_drying_paused": "หยุดการทำให้แห้งชั่วคราว",
     "td22_drying_finished": "การอบแห้งเสร็จสิ้น",
@@ -2430,7 +2430,7 @@
     "logout_tips": "คุณแน่ใจว่าคุณต้องการที่จะออกจากระบบ?",
     "fridge_child_lock_open_tips": "หลังจากเปิดตัวล็อกป้องกันเด็กแล้ว หน้าจอสัมผัสและตัวจ่ายจะล็อก",
     "want_scan_code_tips": "ฉันต้องการสแกนโค้ด",
-    "tri_name_key": "เครื่องทำความร้อนปั๊มความร้อน ATW",
+    "tri_name_key": "ปั๊มความร้อน ATW Pro",
     "water_set_key": "ชุดระบบน้ำ",
     "f_e_fan_fault_tip": "พัดลมกระแสตรงล้มเหลว",
     "zone_water_key": "โซนน้ำ",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "ตรวจสอบให้แน่ใจว่าบลูทูธของคุณเปิดอยู่",
     "CL_DV_PIND_accessory_firmware_update": "อัพเดตเฟิร์มแวร์อุปกรณ์เสริม",
     "CL_CF_CS_ble_scan_not_list": "หากไม่มีอุปกรณ์ของคุณอยู่ในรายการ คุณสามารถคลิก 'ลองอีกครั้ง' เพื่อค้นหาอีกครั้ง หรือคลิก 'ถัดไป' เพื่อกำหนดค่าเครือข่ายในอีกวิธีหนึ่ง",
-    "CL_CF_CS_ble_scan_have_not_found": "เราไม่พบอุปกรณ์ใดๆ บนบลูทูธ คุณสามารถคลิก 'ลองอีกครั้ง' เพื่อค้นหาอีกครั้ง หรือคลิก 'ถัดไป' เพื่อกำหนดค่าเครือข่ายในอีกวิธีหนึ่ง",
+    "CL_CF_CS_ble_scan_have_not_found": "เราไม่พบอุปกรณ์ใด ๆ บนบลูทูธ คุณสามารถคลิก 'ลองอีกครั้ง' เพื่อค้นหาอีกครั้ง หรือกําหนดค่าเครือข่ายด้วยวิธีอื่น",
     "CL_DV_WM_pump_cleaning": "ปั๊มทำความสะอาด...",
     "CL_DV_WM_autodoes_tip": "เปิดใช้คุณสมบัตินี้แล้วเครื่องของคุณจะจ่ายผงซักฟอกและน้ำยาปรับผ้านุ่มอย่างชาญฉลาดในขณะที่คุณซักผ้า",
     "CL_DV_WM_detergent_department_key": "ช่องเติมผงซักฟอก",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "ไม่สามารถซ่อนได้",
     "program_management_unable_to_hide_desc": "นี่เป็นโปรแกรมสุดท้ายที่มองเห็นได้และจะต้องมองเห็นอย่างน้อยหนึ่งโปรแกรม",
     "CL_CF_FM_set_deadline": "กำหนดเส้นตาย",
-    "CL_CF_FM_expiry_date_must_be_selected": "ต้องเลือกวันหมดอายุ"
+    "CL_CF_FM_expiry_date_must_be_selected": "ต้องเลือกวันหมดอายุ",
+    "CL_CF_FM_add_custom_food_desc": "เพิ่มรายการที่กำหนดเองใหม่",
+    "CL_CF_FM_delete_selected_items": "ลบรายการที่เลือก",
+    "CL_CF_FM_delete_selected": "ลบรายการที่เลือก",
+    "CL_DV_HOB_residual_heat_content": "บริเวณทำอาหารยังร้อนอยู่ ระวังอย่าให้โดน",
+    "CL_CF_FM_add_custom_food": "เพิ่มอาหารที่ไม่มีในห้องสมุด",
+    "air_care_temp_title": "มาตรฐานการประเมินอุณหภูมิ:",
+    "air_care_hum_title": "มาตรฐานการประเมินความชื้น:",
+    "air_care_temp_c": "ดี: 17 < T < 27℃\n ปกติ: 10≤T≤17°C, 27≤T≤30°C\n ไม่ดี: T < 10°CT > 30°C",
+    "air_care_temp_f": "ดี: 62.6 < T < 80.6℉\n ปกติ: 50≤T≤62.6℉,80.6≤T≤86℉\n ไม่ดี: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "ดี : H < 70%\n ปกติ: 70≤H≤80%\n ไม่ดี: H＞80%",
+    "CL_CF_RM_change_floor_key": "เปลี่ยนชั้น",
+    "CL_CF_FM_recently_added": "เพิ่มล่าสุด",
+    "CL_CF_FM_no_matching_items": "ไม่มีรายการที่ตรงกัน",
+    "CL_CF_FM_search_stored_food": "ค้นหาอาหารที่เก็บไว้",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "การแจ้งเตือน",
+    "CL_CF_FM_a_day_ago": "เมื่อวันก่อน",
+    "CL_CF_FM_a_week_ago": "เมื่อสัปดาห์ที่แล้ว",
+    "CL_CF_FM_a_month_ago": "เมื่อเดือนที่แล้ว",
+    "CL_CF_FM_a_year_ago": "เมื่อหนึ่งปีที่แล้ว",
+    "CL_CF_FM_x_days_ago": "** วันที่ผ่านมา",
+    "CL_CF_FM_x_weeks_ago": "** สัปดาห์ที่แล้ว",
+    "CL_CF_FM_x_months_ago": "** เดือนที่แล้ว",
+    "CL_CF_FM_x_years_ago": "** ปีที่ผ่านมา",
+    "CL_CF_FM_shopping_list_details": "รายละเอียดรายการช้อปปิ้ง",
+    "CL_CF_FM_no_shopping_list": "ไม่มีรายการช้อปปิ้ง",
+    "CL_DV_OV_24_time_zone": "เขตเวลา",
+    "CL_CF_FM_reset_purchased_tips": "คุณต้องการรีเซ็ตรายการอาหารทั้งหมดในรายการนี้เป็นสถานะไม่ได้ซื้อหรือไม่",
+    "CL_CF_FM_add_food_to_x": "เพิ่มอาหารให้ \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "เพิ่มรายการอาหารที่ต้องการซื้อ",
+    "CL_DV_OV_24_always_on": "เปิดตลอดเวลา",
+    "CL_CF_CS_separated_ac_cs_step2": "กดปุ่ม \"หมุนแนวนอน\" บนรีโมทคอนโทรล 6 ครั้ง หรือกดปุ่ม \"พักเครื่อง\" บนรีโมทคอนโทรลแบบมีสาย 8 ครั้ง",
+    "CL_CF_FM_list": "รายการ",
+    "CL_CF_FM_select_shopping_list": "เลือกรายการช้อปปิ้ง",
+    "CL_CF_FM_x_items_added": "** เพิ่มรายการแล้ว",
+    "CL_CF_FM_create_shopping_list_first": "คุณต้องสร้างรายการช้อปปิ้งก่อน",
+    "CL_CF_FM_no_shopping_list_available": "ไม่มีรายการช้อปปิ้ง!",
+    "CL_DV_OV_extra_drying_desc": "การอบแห้งหรือทำให้แห้งอาหารจะช่วยขจัดความชื้นออกจากอาหารเพื่อยืดอายุการเก็บรักษา นี่เป็นโปรแกรมที่แนะนำ คุณสามารถเปลี่ยนแปลงได้ตามความต้องการ",
+    "CL_DV_OV_extra_drying_herbs_desc": "การอบแห้งเป็นวิธีที่ง่ายที่สุดในการถนอมสมุนไพร โดยใช้ลมอุ่นและแห้ง ความชื้นจะระเหยออกไป ช่วยให้ใบ ดอก หรือเมล็ดพืชคงสีและรสชาติไว้ได้",
+    "CL_DV_OV_extra_pasteurization_desc": "การให้ความร้อนอ่อนๆ กับอาหารจะช่วยฆ่าเชื้อแบคทีเรียที่เป็นอันตรายและยืดอายุการเก็บรักษา สามารถใช้ถนอมอาหารได้ เช่น ผลิตภัณฑ์จากนม ผลิตภัณฑ์จากไข่ ถั่ว",
+    "CL_DV_OV_extra_canning_desc": "การบรรจุกระป๋องช่วยให้สามารถถนอมอาหารไม่ให้เน่าเสียได้โดยการฆ่าเชื้อด้วยความร้อน ตรวจสอบให้แน่ใจว่าเก็บอาหารไว้ในภาชนะที่ปิดสนิท",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "โปรแกรมที่มีประสิทธิภาพในการละลายอาหารแช่แข็งได้อย่างรวดเร็วและปลอดภัย มีประโยชน์อย่างยิ่งสำหรับอาหารหลากหลายประเภท ตั้งแต่เนื้อสัตว์และผักไปจนถึงอาหารปรุงสุกแล้ว",
+    "CL_DV_OV_extra_stream_defrost_desc": "ละลายอาหารแช่แข็งได้อย่างมีประสิทธิภาพด้วยการผสมผสานความร้อนอ่อนๆ กับความชื้นตามธรรมชาติของไอน้ำ ไอน้ำช่วยรักษาระดับความชื้นของอาหาร รักษาเนื้อสัมผัสและรสชาติไว้ได้ ซึ่งมีประโยชน์โดยเฉพาะอย่างยิ่งสำหรับอาหารละเอียดอ่อน เช่น ปลา ขนมอบ หรือขนมปัง",
+    "CL_DV_OV_extra_fan_defrost_desc": "ด้วยฟังก์ชันนี้ อากาศจะไหลเวียนโดยใช้พัดลมช่วย ไม่มีองค์ประกอบความร้อนเปิดอยู่ ใช้การตั้งค่านี้เพื่อละลายอาหารแช่แข็ง เช่น เค้ก ขนมปัง และผลไม้",
+    "CL_DV_OV_extra_plate_warming_desc": "อุ่นจานให้ได้อุณหภูมิที่ต้องการ วิธีนี้จะช่วยให้จานบนจานอุ่นได้นานขึ้น",
+    "CL_DV_OV_extra_oshibori_desc": "อุ่นผ้าเช็ดมือโอชิโบริเบาๆ จนได้อุณหภูมิที่สบาย",
+    "CL_DV_OV_extra_hot_stone_desc": "ออกแบบมาเพื่อการบำบัดแบบสปา หินได้รับการอุ่นอย่างสม่ำเสมอจนถึงอุณหภูมิที่เหมาะสม จึงพร้อมสำหรับการใช้ในการผ่อนคลายหรือการดูแลสุขภาพ",
+    "CL_DV_OV_extra_sterilizing_desc": "ฆ่าเชื้อสิ่งของต่างๆ เช่น ขวดนม อุปกรณ์เครื่องครัว หรือเครื่องมือขนาดเล็ก เตาอบจะมีอุณหภูมิเพียงพอที่จะกำจัดแบคทีเรียและเชื้อโรคอื่นๆ ได้ ซึ่งเป็นวิธีง่ายๆ และมีประสิทธิภาพในการรักษาความสะอาดและสุขอนามัย",
+    "CL_DV_OV_extra_warming_regenerate_desc": "ใช้ไอน้ำเพื่ออุ่นอาหารอย่างอ่อนโยน ช่วยคืนความชื้นและความสดให้กับอาหาร เหมาะสำหรับอาหารจานละเอียดอ่อน เช่น พาสต้า ข้าว หรือหม้อตุ๋น เพราะช่วยให้มั่นใจว่าอาหารที่อุ่นซ้ำจะยังคงเนื้อสัมผัสและรสชาติเดิมไว้ได้โดยไม่แห้ง",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "โปรแกรมนี้ผสมผสานข้อดีของทั้งลมร้อนและไอน้ำเข้าด้วยกัน จึงเหมาะอย่างยิ่งสำหรับการอุ่นอาหารหลากหลายชนิด ลมร้อนช่วยให้ความร้อนสม่ำเสมอ ขณะที่ไอน้ำช่วยเพิ่มความชื้น จึงเหมาะอย่างยิ่งสำหรับอาหารประเภทเนื้อสัตว์ สัตว์ปีก หรืออาหารผสม ช่วยให้อาหารยังคงความชุ่มฉ่ำและรสชาติดี",
+    "CL_DV_OV_extra_warming_hotair_desc": "โปรแกรมนี้เหมาะสำหรับอาหารที่ต้องการความกรอบนอกนุ่มใน โดยใช้ลมร้อนในการอุ่นอาหารให้ร้อนสม่ำเสมอ เช่น พิซซ่า เบเกอรี่ หรือผักย่าง ลมร้อนที่หมุนเวียนจะช่วยให้ความร้อนอาหารได้อย่างทั่วถึงในขณะที่ยังคงความกรอบไว้",
+    "CL_DV_OV_extra_warming_microwave_desc": "อุ่นอาหารจากภายในสู่ภายนอกได้อย่างรวดเร็ว เป็นทางเลือกที่รวดเร็วและมีประสิทธิภาพในการอุ่นอาหาร เหมาะสำหรับซุป สตูว์ หรืออาหารเหลือที่ต้องอุ่นให้ร้อนอย่างรวดเร็ว",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "รักษาอุณหภูมิอาหารให้เหมาะสมโดยไม่ต้องปรุงสุกอีก เหมาะสำหรับอุ่นอาหารไว้จนกว่าจะพร้อมเสิร์ฟ เหมาะอย่างยิ่งสำหรับอาหารที่เตรียมไว้ล่วงหน้า ช่วยให้อาหารร้อนและพร้อมรับประทาน",
+    "CL_DV_OV_ends_at": "สิ้นสุดที่: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "เพลิดเพลินกับรสชาติที่อร่อยและหอมกรุ่นของอาหารย่างโดยไม่ต้องใช้เตาย่างกลางแจ้ง ออกแบบมาให้กระจายความร้อนได้สม่ำเสมอทั่วทั้งบริเวณ ลดจุดร้อนและทำให้การย่างอาหารสม่ำเสมอ เหมาะสำหรับการย่างอาหารหลากหลายประเภท ตั้งแต่เนื้อสัตว์และผักไปจนถึงอาหารทะเลและแม้แต่ผลไม้",
+    "CL_DV_OV_remote_start_title": "การสตาร์ทระยะไกลถูกปิดใช้งาน",
+    "CL_DV_OV_remote_start_content": "หากต้องการส่งและเริ่มโปรแกรมจากแอปของคุณ จำเป็นต้องเปิดใช้งานการเริ่มระบบจากระยะไกล ",
+    "CL_CF_FM_apple": "แอปเปิล",
+    "CL_CF_FM_bacon": "เบคอน",
+    "CL_CF_FM_broccoli": "บร็อคโคลี่",
+    "CL_CF_FM_cabbage": "กะหล่ำปลี",
+    "CL_CF_FM_Cauliflower": "ดอกกะหล่ำ",
+    "CL_CF_FM_cod": "ปลาค็อด",
+    "CL_CF_FM_dragon_fruit": "ผลไม้มังกร",
+    "CL_DV_OV_defrost_detail_desc": "การละลายอาหารอย่างถูกต้องจะช่วยให้คุณภาพของอาหารหลังจากแช่แข็งดีขึ้น การละลายอาหารอย่างถูกต้องจะช่วยลดความเสี่ยงของการเกิดอาหารเป็นพิษ",
+    "CL_DV_OV_extra_non_food_detail_desc": "โปรแกรมที่ไม่ใช่อาหารถูกสร้างขึ้นมาเพื่อวัตถุประสงค์ต่างๆ ที่ไม่ใช่การทำอาหาร โดยให้ความสะดวกสบายและใช้งานได้จริงมากกว่าการปรุงอาหารแบบดั้งเดิม",
+    "CL_DV_OV_extra_warming_detail_desc": "โปรแกรมอุ่นอาหารหลากหลายสำหรับการอุ่นและอุ่นอาหาร ช่วยให้เพลิดเพลินกับมื้ออาหารได้อย่างง่ายดาย ไม่ว่าคุณจะอุ่นอาหารเหลือหรืออุ่นจานเพื่อเสิร์ฟ",
+    "CL_CF_FM_click_switch_status": "คลิกเพื่อสลับสถานะรายการ",
+    "CL_CF_FM_recent_purchased_tips": "คุณซื้อสิ่งเหล่านี้แล้ว คุณต้องการเพิ่มเทอร์มลงในสินค้าคงคลังอาหารหรือไม่?",
+    "CL_DV_OV_extra_drying_herbs": "การอบแห้งสมุนไพร",
+    "CL_DV_OV_extra_pasteurization": "การพาสเจอร์ไรเซชั่น",
+    "CL_DV_OV_extra_canning": "การบรรจุกระป๋อง",
+    "CL_DV_OV_extra_defrost_microwave": "ละลายน้ำแข็งด้วยไมโครเวฟ",
+    "CL_DV_OV_extra_defrost_stream": "ละลายน้ำแข็งด้วยไอน้ำ",
+    "CL_DV_OV_extra_oshibori": "โอชิโบริ",
+    "CL_DV_OV_extra_hot_stones": "หินร้อน",
+    "CL_DV_OV_extra_sterilizing": "การฆ่าเชื้อ",
+    "CL_DV_OV_extra_warming_hotair_stream": "อุ่นด้วยลมร้อน+ไอน้ำ",
+    "CL_DV_OV_extra_warming_hotair": "การอุ่นด้วยลมร้อน",
+    "CL_DV_OV_extra_warming_microwave": "อุ่นด้วยไมโครเวฟ",
+    "CL_DV_OV_extra_warming_keepwarm": "ให้อบอุ่น",
+    "CL_CF_FM_dont_remind_in_3_months": "ไม่ต้องเตือนใน 3 เดือน",
+    "CL_DV_RF_cleaning_plan": "แผนการทำความสะอาด",
+    "CL_DV_RF_cleaning_refrigerator": "การทำความสะอาดตู้เย็น",
+    "CL_DV_RF_cleaning_reminder": "การเตือนการทำความสะอาด",
+    "CL_DV_RF_cleaning_cycle": "วงจรการทำความสะอาด",
+    "CL_DV_RF_cleaning_history": "ประวัติการทำความสะอาด",
+    "CL_DV_RF_cleaning_cycle_not_selected": "ไม่ได้เลือกรอบการทำความสะอาด",
+    "CL_DV_RF_havent_cleaned_yet": "คุณยังไม่ได้ทำความสะอาดเลย",
+    "CL_DV_RF_garbage_disposal_reminder": "เตือนการกำจัดขยะ",
+    "CL_DV_RF_resource_waste": "ขยะทรัพยากร",
+    "CL_DV_RF_timer_not_selected": "ไม่ได้เลือกตัวจับเวลา",
+    "CL_DV_RF_add_more_reminders": "เพิ่มคำเตือนเพิ่มเติม",
+    "CL_DV_RF_cleaning_tips": "เคล็ดลับการทำความสะอาด",
+    "CL_DV_RF_last_clean_time": "ครั้งสุดท้ายที่คุณทำความสะอาดตู้เย็นคือวันที่ : ***",
+    "CL_DV_RF_last_cleaning_was_today": "การทำความสะอาดครั้งสุดท้ายคือวันนี้",
+    "CL_DV_RF_you_need_cleaning_now": "คุณต้องทำความสะอาดตอนนี้",
+    "CL_DV_RF_next_cleaning_in_x_days": "ทำความสะอาดครั้งต่อไปใน ** วัน",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "การทำความสะอาดครั้งสุดท้ายคือเมื่อ ** วันก่อน",
+    "CL_CF_CO_x_weeks": "สัปดาห์",
+    "CL_DV_RF_cleaned": "ทำความสะอาดแล้ว",
+    "CL_DV_OV_probe_temperature_graph": "กราฟอุณหภูมิของโพรบ",
+    "CL_DV_OV_internal": "ภายใน",
+    "CL_DV_OV_probe_desc": "หัววัดช่วยให้คุณวัดอุณหภูมิของอาหารได้ คุณสามารถดูอุณหภูมิที่แตกต่างกันในแต่ละช่วงเวลาได้",
+    "CL_DV_RF_no_cleaning_history": "ไม่มีประวัติการทำความสะอาด"
 }
