--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -1676,7 +1676,7 @@
     "add_timing": "ZAMANLAMA EKLE",
     "set_start_to_finish_time": "Başlangıç-bitiş zamanını ayarlayın",
     "pair_pump_appliance": "Isı pompalı su ısıtıcısı",
-    "heat_pump": "Isı pompası",
+    "heat_pump": "İnvertör panosu",
     "pump_boost_1": "Yükseltme 1",
     "pump_electric_heating": "Elektrikli ısıtma",
     "pump_holiday_mode": "Tatil",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Bağlı ve açık;\nWi-Fi etkinleştirildi ve bağlandı;\nWi-Fi şifresi son zamanlarda değiştirilmedi.",
     "dont_remind_again_uppercase": "TEKRAR HATIRLATMA",
     "storage_tips_title": "Depolama ipuçları:",
-    "heat_pump_oem": "PRO serisi DHW",
+    "heat_pump_oem": "Sabit hızlı DHW",
     "td22_drying_empty_water_tank": "Kurutma – Boş su deposu",
     "td22_drying_paused": "Kurutma duraklatıldı",
     "td22_drying_finished": "Kurutma tamamlandı",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Oturumu kapatmak istediğinizden emin misiniz?",
     "fridge_child_lock_open_tips": "Çocuk kilidi açıldıktan sonra dokunmatik ekran ve dağıtıcı kilitlenecektir.",
     "want_scan_code_tips": "Kodu taramak istiyorum.",
-    "tri_name_key": "ATW ısı pompası ısıtıcısı",
+    "tri_name_key": "ATW Pro Isı Pompası",
     "water_set_key": "SU SICAKLIĞI",
     "f_e_fan_fault_tip": "DC fan arızası",
     "zone_water_key": "Bölge1 Su",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Bluetooth'unuzun açık olduğundan emin olun.",
     "CL_DV_PIND_accessory_firmware_update": "Aksesuar aygıt yazılımı güncellemesi",
     "CL_CF_CS_ble_scan_not_list": "Cihazınız listede yoksa, tekrar arama yapmak için 'TEKRAR DENE'ye tıklayabilir veya ağı başka bir şekilde yapılandırmak için 'İLERİ'ye tıklayabilirsiniz.",
-    "CL_CF_CS_ble_scan_have_not_found": "Bluetooth'ta herhangi bir cihaz bulamadık. Tekrar aramak için 'TEKRAR DENE'ye tıklayabilir veya ağı başka bir şekilde yapılandırmak için 'İLERİ'ye tıklayabilirsiniz.",
+    "CL_CF_CS_ble_scan_have_not_found": "Bluetooth üzerinde herhangi bir cihaz bulamadık. Tekrar aramak için 'TEKRAR DENE' seçeneğine tıklayabilir veya ağı başka bir şekilde yapılandırabilirsiniz.",
     "CL_DV_WM_pump_cleaning": "Pompa temizleniyor...",
     "CL_DV_WM_autodoes_tip": "Bu özelliği etkinleştirin ve çamaşırlarınızı yıkarken cihazınız akıllı bir şekilde deterjanı ve yumuşatıcıyı dağıtacaktır.",
     "CL_DV_WM_detergent_department_key": "DETERJAN BÖLMESİ",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Gizlenemiyorum",
     "program_management_unable_to_hide_desc": "Bu son görünen programdır ve en az bir programın görünür tutulması gerekir.",
     "CL_CF_FM_set_deadline": "Bir son tarih belirleyin",
-    "CL_CF_FM_expiry_date_must_be_selected": "Son kullanma tarihi seçilmelidir"
+    "CL_CF_FM_expiry_date_must_be_selected": "Son kullanma tarihi seçilmelidir",
+    "CL_CF_FM_add_custom_food_desc": "Yeni bir özelleştirilmiş öğe ekle",
+    "CL_CF_FM_delete_selected_items": "Seçili Öğeleri Sil",
+    "CL_CF_FM_delete_selected": "Seçilenleri Sil",
+    "CL_DV_HOB_residual_heat_content": "Pişirme alanı hala sıcak. Dokunmamaya dikkat edin.",
+    "CL_CF_FM_add_custom_food": "Kütüphanede Olmayan Yiyecekleri Ekle",
+    "air_care_temp_title": "Sıcaklık değerlendirme standardı:",
+    "air_care_hum_title": "Nem değerlendirme standardı:",
+    "air_care_temp_c": "İyi: 17 < T < 27℃\n Normal: 10≤T≤17°C, 27≤T≤30°C\n İyi değil: T < 10°CT > 30°C",
+    "air_care_temp_f": "İyi: 62.6 < T < 80.6℉\n Normal: 50≤T≤62.6℉,80.6≤T≤86℉\n İyi değil: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "İyi: H < %70\n Normal: 70≤H≤80%\n İyi değil: H＞%80",
+    "CL_CF_RM_change_floor_key": "kat değiştirmek",
+    "CL_CF_FM_recently_added": "Son Eklenenler",
+    "CL_CF_FM_no_matching_items": "Eşleşen Öğe Yok",
+    "CL_CF_FM_search_stored_food": "Depolanmış Gıdaları Ara",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "bildiri",
+    "CL_CF_FM_a_day_ago": "Bir gün önce",
+    "CL_CF_FM_a_week_ago": "Bir hafta önce",
+    "CL_CF_FM_a_month_ago": "Bir ay önce",
+    "CL_CF_FM_a_year_ago": "Bir yıl önce",
+    "CL_CF_FM_x_days_ago": "** gün önce",
+    "CL_CF_FM_x_weeks_ago": "** hafta önce",
+    "CL_CF_FM_x_months_ago": "** aylar önce",
+    "CL_CF_FM_x_years_ago": "** Yıllar önce",
+    "CL_CF_FM_shopping_list_details": "Alışveriş Listesi Ayrıntıları",
+    "CL_CF_FM_no_shopping_list": "Alışveriş listesi yok",
+    "CL_DV_OV_24_time_zone": "Zaman dilimi",
+    "CL_CF_FM_reset_purchased_tips": "Bu listedeki tüm yiyeceklerin durumunu satın alınmadı olarak sıfırlamak istiyor musunuz?",
+    "CL_CF_FM_add_food_to_x": "\"***\"e yiyecek ekle",
+    "CL_CF_FM_add_food_to_be_purchased": "Satın alınacak yiyeceği ekleyin",
+    "CL_DV_OV_24_always_on": "Her zaman açık",
+    "CL_CF_CS_separated_ac_cs_step2": "Uzaktan kumandadaki \"Yatay Salınım\" düğmesine 6 kez basın. Veya kablolu uzaktan kumandadaki \"Uyku\" düğmesine 8 kez basın.",
+    "CL_CF_FM_list": "Liste",
+    "CL_CF_FM_select_shopping_list": "Alışveriş Listesini Seçin",
+    "CL_CF_FM_x_items_added": "** öğeler eklendi",
+    "CL_CF_FM_create_shopping_list_first": "Öncelikle bir alışveriş listesi oluşturmanız gerekiyor.",
+    "CL_CF_FM_no_shopping_list_available": "Alışveriş Listesi Bulunamadı!",
+    "CL_DV_OV_extra_drying_desc": "Gıdayı kurutmak veya suyunu almak, raf ömrünü uzatmak için gıdadaki nemi giderir. Bu önerilen bir programdır. Bunu tercihinize göre değiştirebilirsiniz.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Kurutma, otları korumanın en kolay yöntemidir. Sıcak ve kuru hava kullanılarak nem buharlaşır. Bu, yaprakların, çiçeklerin veya tohumların renklerini ve lezzetlerini korumalarına yardımcı olur.",
+    "CL_DV_OV_extra_pasteurization_desc": "Zararlı bakterileri öldürmek ve raf ömrünü uzatmak için gıdaya hafif bir ısıl işlem uygulanır. Süt ürünleri, yumurta ürünleri, kuruyemişler gibi gıdaları korumak için kullanılabilir.",
+    "CL_DV_OV_extra_canning_desc": "Konserveleme, yiyeceklerin bozulmadan korunmasını ve ısıyla sterilize edilmesini sağlar. Yiyeceklerin hermetik olarak kapatılmış kaplarda saklandığından emin olun.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Dondurulmuş gıdaları hızlı ve güvenli bir şekilde çözmek için etkili bir program. Etlerden sebzelere ve önceden pişirilmiş yemeklere kadar çeşitli gıdalar için özellikle yararlıdır.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Dondurulmuş yiyecekleri, hafif ısıyı buharın doğal nemi ile birleştirerek etkili bir şekilde çözer. Buhar, yiyeceğin nem seviyelerinin korunmasına yardımcı olarak dokusunu ve lezzetini korur. Bu, özellikle balık, hamur işi veya ekmek gibi hassas yiyecekler için faydalıdır.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Bu fonksiyon ile fan yardımıyla hava sirkülasyonu sağlanır. Hiçbir ısı elemanı açık değildir. Kek, ekmek ve meyve gibi donmuş yemeklerin buzunu çözmek için bu ayarı kullanın.",
+    "CL_DV_OV_extra_plate_warming_desc": "Plakaları istediğiniz sıcaklığa ısıtın. Bu, plakalardaki yemeklerin daha uzun süre sıcak kalmasına yardımcı olur.",
+    "CL_DV_OV_extra_oshibori_desc": "Oshibori el havlularını nazikçe ısıtarak konforlu bir sıcaklığa getirir.",
+    "CL_DV_OV_extra_hot_stone_desc": "Spa benzeri tedaviler için tasarlanmıştır. Taşlar mükemmel sıcaklığa eşit şekilde ısıtılır ve bu sayede rahatlama veya sağlıklı yaşam rutinlerinde kullanıma hazır hale gelir.",
+    "CL_DV_OV_extra_sterilizing_desc": "Bebek şişeleri, mutfak eşyaları veya küçük aletler gibi eşyaları dezenfekte edin. Fırın, bakterileri ve diğer patojenleri ortadan kaldırmak için yeterli sıcaklıklara ulaşır ve temizlik ve hijyeni korumak için basit ve etkili bir yol sağlar.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Yiyecekleri nazikçe yeniden ısıtmak için buhar kullanır, nemini ve tazeliğini geri kazandırır. Makarna, pilav veya güveç gibi hassas yemekler için idealdir, çünkü yeniden ısıtılan yiyeceklerin kurumadan orijinal dokusunu ve lezzetini korumasını sağlar.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Hem sıcak havanın hem de buharın faydalarını birleştiren bu program, çok çeşitli yiyecekleri yeniden ısıtmak için idealdir. Sıcak hava eşit ısıtma sağlarken, buhar nem katarak et, kümes hayvanları veya karışık yemekler gibi yemekler için mükemmel hale getirir ve sulu ve lezzetli kalmalarını sağlar.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Dış yüzeyi çıtır çıtır olması gereken yiyecekler için mükemmel olan bu program, pizza, fırınlanmış ürünler veya kızarmış sebzeler gibi yemekleri eşit şekilde yeniden ısıtmak için sıcak havayı kullanır. Dolaşan sıcak hava, yiyeceklerin çıtır çıtır bir yüzey korurken iyice ısıtılmasını sağlar.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Yiyecekleri içeriden dışarıya doğru hızla yeniden ısıtın. Yemekleri yeniden ısıtmak için hızlı ve etkili bir seçenektir. Çorbalar, güveçler veya hızlı bir şekilde ısıtılması gereken artıklar için mükemmeldir.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Yiyecekleri daha fazla pişirmeden mükemmel servis sıcaklığında tutun. Yemekleri servis edilmeye hazır olana kadar sıcak tutmak için idealdir. Önceden hazırlanan yemekler için mükemmeldir, sıcak kalmalarını ve tadını çıkarmaya hazır olmalarını sağlar.",
+    "CL_DV_OV_ends_at": "Bitiş: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Açık havada ızgaraya ihtiyaç duymadan ızgara yemeklerin lezzetli, dumanlı lezzetlerinin tadını çıkarın. Sıcak noktaları en aza indirerek ve tutarlı ızgara sonuçları sağlayarak ısıyı tüm alanına eşit şekilde dağıtmak için tasarlanmıştır. Etlerden sebzelere, deniz ürünlerinden meyvelere kadar çeşitli yiyecekleri ızgara yapmak için idealdir.",
+    "CL_DV_OV_remote_start_title": "Uzaktan başlatma devre dışı bırakıldı",
+    "CL_DV_OV_remote_start_content": "Uygulamanızdan program gönderip başlatabilmeniz için uzaktan başlatma özelliğinin aktif olması gerekmektedir. ",
+    "CL_CF_FM_apple": "Elma",
+    "CL_CF_FM_bacon": "Bacon",
+    "CL_CF_FM_broccoli": "Brokoli",
+    "CL_CF_FM_cabbage": "Lahana",
+    "CL_CF_FM_Cauliflower": "Karnabahar",
+    "CL_CF_FM_cod": "Morina",
+    "CL_CF_FM_dragon_fruit": "Ejder Meyvesi",
+    "CL_DV_OV_defrost_detail_desc": "Yiyecekleri doğru şekilde çözdürmek, dondurulduktan sonra yiyeceklerinizin kalitesini garanti eder. Doğru şekilde çözdürme, gıda zehirlenmesi riskini azaltır.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Gıda dışı programlar, geleneksel yemek pişirmenin ötesinde kolaylık ve işlevsellik sağlayan, mutfak dışı çeşitli görevler için tasarlanmıştır.",
+    "CL_DV_OV_extra_warming_detail_desc": "Yiyecekleri tekrar ısıtmak ve ısıtmak için çeşitli ısıtma programları, ister artıkları tekrar ısıtın, ister servis için yemekleri sıcak tutun, yemeklerinizin tadını çıkarmanızı kolaylaştırır.",
+    "CL_CF_FM_click_switch_status": "Öğenin durumunu değiştirmek için tıklayın",
+    "CL_CF_FM_recent_purchased_tips": "Bunları satın aldınız, Gıda Envanterinize term eklemek ister misiniz?",
+    "CL_DV_OV_extra_drying_herbs": "Otların Kurutulması",
+    "CL_DV_OV_extra_pasteurization": "Pastörizasyon",
+    "CL_DV_OV_extra_canning": "Konserveleme",
+    "CL_DV_OV_extra_defrost_microwave": "Mikrodalga ile çözdürün",
+    "CL_DV_OV_extra_defrost_stream": "Buharla çözdürün",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "Sıcak Taşlar",
+    "CL_DV_OV_extra_sterilizing": "Sterilizasyon",
+    "CL_DV_OV_extra_warming_hotair_stream": "Sıcak hava + buharla yeniden ısıtma",
+    "CL_DV_OV_extra_warming_hotair": "Sıcak hava ile yeniden ısıtma",
+    "CL_DV_OV_extra_warming_microwave": "Mikrodalgada ısıtın",
+    "CL_DV_OV_extra_warming_keepwarm": "Sıcak tutmak",
+    "CL_CF_FM_dont_remind_in_3_months": "3 ay sonra hatırlatma",
+    "CL_DV_RF_cleaning_plan": "Temizlik Planı",
+    "CL_DV_RF_cleaning_refrigerator": "Buzdolabının Temizlenmesi",
+    "CL_DV_RF_cleaning_reminder": "Temizlik hatırlatıcısı",
+    "CL_DV_RF_cleaning_cycle": "Temizleme döngüsü",
+    "CL_DV_RF_cleaning_history": "Temizlik geçmişi",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Temizleme döngüsü seçilmedi",
+    "CL_DV_RF_havent_cleaned_yet": "Henüz temizlemedin.",
+    "CL_DV_RF_garbage_disposal_reminder": "Çöp öğütücü hatırlatıcısı",
+    "CL_DV_RF_resource_waste": "Kaynak israfı",
+    "CL_DV_RF_timer_not_selected": "Zamanlayıcı seçilmedi",
+    "CL_DV_RF_add_more_reminders": "Daha fazla hatırlatıcı ekle",
+    "CL_DV_RF_cleaning_tips": "Temizlik ipuçları",
+    "CL_DV_RF_last_clean_time": "Buzdolabını en son ne zaman temizlediniz : ***",
+    "CL_DV_RF_last_cleaning_was_today": "Bugün son temizlik yapıldı.",
+    "CL_DV_RF_you_need_cleaning_now": "Hemen temizliğe ihtiyacınız var.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Bir sonraki temizlik ** gün sonra.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Son temizlik ** gün önce yapıldı.",
+    "CL_CF_CO_x_weeks": "Haftalar",
+    "CL_DV_RF_cleaned": "Temizlendi",
+    "CL_DV_OV_probe_temperature_graph": "Prob Sıcaklık Grafiği",
+    "CL_DV_OV_internal": "Dahili",
+    "CL_DV_OV_probe_desc": "Prob, yemeğinizin sıcaklığını ölçmenize yardımcı olur. Zaman içindeki farklı sıcaklıkları görebilirsiniz.",
+    "CL_DV_RF_no_cleaning_history": "Temizlik geçmişi yok"
 }
