--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -1676,7 +1676,7 @@
     "add_timing": "ДОДАТИ ЧАС",
     "set_start_to_finish_time": "Встановіть час від початку до кінця",
     "pair_pump_appliance": "Водонагрівач із тепловим насосом",
-    "heat_pump": "Тепловий насос",
+    "heat_pump": "Інверторна плата",
     "pump_boost_1": "Підживлювальний насос 1",
     "pump_electric_heating": "Електричне опалення",
     "pump_holiday_mode": "Режим «Відпустка»",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Підключено і ввімкнено;\nWi-Fi активовано і підключено;\nПароль Wi-Fi не змінювався останнім часом.",
     "dont_remind_again_uppercase": "НЕ НАГАДУВАТИ БІЛЬШЕ",
     "storage_tips_title": "Поради щодо зберігання",
-    "heat_pump_oem": "Пральні машини серії PRO",
+    "heat_pump_oem": "ГВП з фіксованою швидкістю",
     "td22_drying_empty_water_tank": "Сушіння: спорожніть резервуар для води",
     "td22_drying_paused": "Сушіння зупинено",
     "td22_drying_finished": "Сушіння завершено",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Ви впевнені, що бажаєте вийти?",
     "fridge_child_lock_open_tips": "Після відкриття блокування від дітей сенсорний екран і дозатор буде заблоковано.",
     "want_scan_code_tips": "Я хочу відсканувати код.",
-    "tri_name_key": "Нагрівач з тепловим насосом ATW",
+    "tri_name_key": "Тепловий насос ATW Pro",
     "water_set_key": "ТЕМП. ВОДИ",
     "f_e_fan_fault_tip": "Несправність вентилятора постійного струму",
     "zone_water_key": "Зона1 Вода",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Переконайтеся, що ваш bluetooth увімкнено.",
     "CL_DV_PIND_accessory_firmware_update": "Оновлення прошивки аксесуара",
     "CL_CF_CS_ble_scan_not_list": "Якщо вашого пристрою немає в списку, ви можете натиснути «СПРОБУВАТИ ЩЕ РАЗ», щоб виконати пошук знову, або натиснути «ДАЛІ», щоб налаштувати мережу іншим способом.",
-    "CL_CF_CS_ble_scan_have_not_found": "Ми не знайшли жодного пристрою з підтримкою bluetooth. Ви можете натиснути «СПРОБУВАТИ ЗНОВУ», щоб виконати пошук ще раз, або натиснути «ДАЛІ», щоб налаштувати мережу іншим способом.",
+    "CL_CF_CS_ble_scan_have_not_found": "Ми не знайшли жодного пристрою на блютуз. Ви можете натиснути «СПРОБУВАТИ ЗНОВУ», щоб знову шукати, або налаштувати мережу іншим способом.",
     "CL_DV_WM_pump_cleaning": "Очисний насос...",
     "CL_DV_WM_autodoes_tip": "Увімкніть цю функцію, і ваш пристрій розумно дозуватиме миючий засіб і пом’якшувач тканини, поки ви пратимете білизну.",
     "CL_DV_WM_detergent_department_key": "ВІДДІЛЕННЯ МИЮЧОГО ЗАСОБУ",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Неможливо сховатися",
     "program_management_unable_to_hide_desc": "Це остання видима програма, і принаймні одна програма має бути видимою.",
     "CL_CF_FM_set_deadline": "Встановіть крайній термін",
-    "CL_CF_FM_expiry_date_must_be_selected": "Потрібно вибрати термін придатності"
+    "CL_CF_FM_expiry_date_must_be_selected": "Потрібно вибрати термін придатності",
+    "CL_CF_FM_add_custom_food_desc": "Додайте новий індивідуальний елемент",
+    "CL_CF_FM_delete_selected_items": "Видалити вибрані елементи",
+    "CL_CF_FM_delete_selected": "Видалити вибране",
+    "CL_DV_HOB_residual_heat_content": "Конфорка ще гаряча. Будьте обережні, щоб не торкнутися його.",
+    "CL_CF_FM_add_custom_food": "Додайте їжу, яка не включена в бібліотеку",
+    "air_care_temp_title": "Стандарт оцінки температури:",
+    "air_care_hum_title": "Стандарт оцінки вологості:",
+    "air_care_temp_c": "Добре: 17 < T < 27 ℃\n Нормальна: 10≤T≤17°C, 27≤T≤30°C\n Погано: T < 10°CT > 30°C",
+    "air_care_temp_f": "Добре: 62,6 < T < 80,6℉\n Нормальний: 50≤T≤62,6℉,80,6≤T≤86℉\n Не добре: T<50℉ T>86℉",
+    "air_care_hum_tips": "Добре: H < 70%\n Нормальний: 70≤H≤80%\n Погано: H>80%",
+    "CL_CF_RM_change_floor_key": "змінити підлогу",
+    "CL_CF_FM_recently_added": "Нещодавно додані",
+    "CL_CF_FM_no_matching_items": "Немає відповідних елементів",
+    "CL_CF_FM_search_stored_food": "Пошук продуктів харчування, що зберігаються",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "повідомлення",
+    "CL_CF_FM_a_day_ago": "День тому",
+    "CL_CF_FM_a_week_ago": "Тиждень тому",
+    "CL_CF_FM_a_month_ago": "Місяць тому",
+    "CL_CF_FM_a_year_ago": "Рік тому",
+    "CL_CF_FM_x_days_ago": "** днів тому",
+    "CL_CF_FM_x_weeks_ago": "** тижнів тому",
+    "CL_CF_FM_x_months_ago": "** місяців тому",
+    "CL_CF_FM_x_years_ago": "** років тому",
+    "CL_CF_FM_shopping_list_details": "Деталі списку покупок",
+    "CL_CF_FM_no_shopping_list": "Немає списку покупок",
+    "CL_DV_OV_24_time_zone": "Часовий пояс",
+    "CL_CF_FM_reset_purchased_tips": "Ви бажаєте скинути всі продукти в цьому списку до статусу \"не придбано\"?",
+    "CL_CF_FM_add_food_to_x": "Додати їжу в \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Додайте їжу, яку потрібно придбати",
+    "CL_DV_OV_24_always_on": "Завжди ввімкнено",
+    "CL_CF_CS_separated_ac_cs_step2": "Натисніть кнопку «Горизонтальне гойдання» 6 разів на пульті дистанційного керування. Або 8 разів натиснути кнопку «Сон» в дротовому пульті.",
+    "CL_CF_FM_list": "Список",
+    "CL_CF_FM_select_shopping_list": "Виберіть Список покупок",
+    "CL_CF_FM_x_items_added": "** додано елементів",
+    "CL_CF_FM_create_shopping_list_first": "Спочатку потрібно створити список покупок.",
+    "CL_CF_FM_no_shopping_list_available": "Немає списку покупок!",
+    "CL_DV_OV_extra_drying_desc": "Висушування або зневоднення їжі видаляє вологу з їжі, щоб подовжити термін зберігання. Це рекомендована програма. Ви можете змінити його на свій смак.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Сушка — найпростіший спосіб збереження трав. Використовуючи тепле і сухе повітря, волога випаровується. Це допомагає листям, квітам або насінню зберегти свій колір і смак.",
+    "CL_DV_OV_extra_pasteurization_desc": "Їжу піддають м’якій термічній обробці, щоб знищити шкідливі бактерії та подовжити термін зберігання. Його можна використовувати для консервування харчових продуктів, таких як молочні продукти, яєчні продукти, горіхи.",
+    "CL_DV_OV_extra_canning_desc": "Консервування дозволяє захистити харчові продукти від псування шляхом термічної стерилізації. Слідкуйте за тим, щоб продукти зберігалися в герметично закритих контейнерах.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Ефективна програма для швидкого та безпечного розморожування заморожених продуктів. Це особливо корисно для різноманітних продуктів, від м’яса та овочів до готових страв.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Ефективно розморожує заморожені продукти завдяки поєднанню м’якого тепла з природною вологістю пари. Пара допомагає підтримувати рівень вологи в їжі, зберігаючи її текстуру та смак. Це особливо корисно для делікатних продуктів, таких як риба, випічка або хліб.",
+    "CL_DV_OV_extra_fan_defrost_desc": "За використання цієї функції повітря циркулює за допомогою вентилятора. Нагрівальні елементи не вмикаються. Використовуйте це налаштування для розморожування заморожених страв, як-от тортів, хліба та фруктів.",
+    "CL_DV_OV_extra_plate_warming_desc": "Нагрійте пластини до потрібної температури. Завдяки цьому страви на тарілках залишаються теплішими довше.",
+    "CL_DV_OV_extra_oshibori_desc": "Ніжно зігріває ошибори рушників для рук, нагріваючи їх до комфортної температури.",
+    "CL_DV_OV_extra_hot_stone_desc": "Призначений для спа-процедур. Камені рівномірно нагріваються до ідеальної температури, що робить їх готовими до використання в процедурах відпочинку або оздоровлення.",
+    "CL_DV_OV_extra_sterilizing_desc": "Продезінфікуйте такі предмети, як дитячі пляшечки, кухонне начиння або дрібні інструменти. Духова шафа досягає температури, достатньої для знищення бактерій та інших хвороботворних мікроорганізмів, забезпечуючи простий і ефективний спосіб підтримувати чистоту та гігієну.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Використовує пару для м’якого розігріву їжі, відновлюючи її вологість і свіжість. Ідеально підходить для таких делікатних страв, як макарони, рис або запіканки, оскільки гарантує, що розігріта їжа збереже свою оригінальну текстуру та смак, не пересохнувши.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Поєднуючи в собі переваги гарячого повітря та пари, ця програма ідеально підходить для розігрівання різноманітних страв. Гаряче повітря забезпечує рівномірне нагрівання, а пара додає вологи, що робить його ідеальним для таких страв, як м’ясо, птиця або змішані страви, гарантуючи, що вони залишаться соковитими та ароматними.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Ідеально підходить для продуктів, які потребують хрусткої зовнішності, ця програма використовує гаряче повітря для рівномірного розігрівання таких страв, як піца, випічка або смажені овочі. Циркулююче гаряче повітря гарантує, що їжа розігріється, зберігаючи хрусткий смак.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Швидко розігрійте їжу зсередини. Це швидкий і ефективний спосіб розігріти страви. Ідеально підходить для супів, рагу або залишків їжі, які потребують швидкого розігріву.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Підтримуйте їжу при ідеальній температурі для подачі без подальшого приготування. Ідеально підходить для збереження теплих страв до готовності до подачі. Він ідеально підходить для страв, які готуються заздалегідь, гарантуючи, що вони залишаються гарячими та готовими до насолоди.",
+    "CL_DV_OV_ends_at": "Закінчується о: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Насолоджуйтесь чудовим димним смаком страв, приготованих на грилі, не потребуючи гриля на відкритому повітрі. Створений для рівномірного розподілу тепла по всій площі, мінімізуючи гарячі точки та забезпечуючи незмінні результати смаження. Ідеально підходить для приготування на грилі різноманітних продуктів, від м’яса та овочів до морепродуктів і навіть фруктів.",
+    "CL_DV_OV_remote_start_title": "Дистанційний запуск вимкнено",
+    "CL_DV_OV_remote_start_content": "Щоб надсилати та запускати програми з вашої програми, віддалений запуск має бути активним. ",
+    "CL_CF_FM_apple": "Яблуко",
+    "CL_CF_FM_bacon": "Бекон",
+    "CL_CF_FM_broccoli": "Брокколі",
+    "CL_CF_FM_cabbage": "Капуста",
+    "CL_CF_FM_Cauliflower": "Цвітна капуста",
+    "CL_CF_FM_cod": "тріска",
+    "CL_CF_FM_dragon_fruit": "Драконів плід",
+    "CL_DV_OV_defrost_detail_desc": "Правильне розморожування продуктів гарантує якість вашої їжі після її заморожування. Правильне розморожування знижує ризик харчового отруєння.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Нехарчові програми розроблені для різноманітних некулінарних завдань, забезпечуючи зручність і функціональність за межами традиційного приготування.",
+    "CL_DV_OV_extra_warming_detail_desc": "Ряд програм розігрівання для розігрівання та розігрівання їжі, що полегшує насолоду від їжі, незалежно від того, розігріваєте ви залишки їжі чи підтримуєте страви теплими для подачі.",
+    "CL_CF_FM_click_switch_status": "Натисніть, щоб змінити статус елемента",
+    "CL_CF_FM_recent_purchased_tips": "Ви придбали ці речі, бажаєте додати терм до асортименту їжі?",
+    "CL_DV_OV_extra_drying_herbs": "Сушіння трав",
+    "CL_DV_OV_extra_pasteurization": "пастеризація",
+    "CL_DV_OV_extra_canning": "Консервування",
+    "CL_DV_OV_extra_defrost_microwave": "Розморожування за допомогою мікрохвильової печі",
+    "CL_DV_OV_extra_defrost_stream": "Розморозити за допомогою пари",
+    "CL_DV_OV_extra_oshibori": "Ошіборі",
+    "CL_DV_OV_extra_hot_stones": "Гарячі камені",
+    "CL_DV_OV_extra_sterilizing": "Стерилізуюча",
+    "CL_DV_OV_extra_warming_hotair_stream": "Розігріти гарячим повітрям + парою",
+    "CL_DV_OV_extra_warming_hotair": "Розігріти гарячим повітрям",
+    "CL_DV_OV_extra_warming_microwave": "Розігрійте за допомогою мікрохвильової печі",
+    "CL_DV_OV_extra_warming_keepwarm": "Підтримування температури",
+    "CL_CF_FM_dont_remind_in_3_months": "Не нагадувати через 3 місяці",
+    "CL_DV_RF_cleaning_plan": "План очищення",
+    "CL_DV_RF_cleaning_refrigerator": "Очищення холодильника",
+    "CL_DV_RF_cleaning_reminder": "Нагадування про очищення",
+    "CL_DV_RF_cleaning_cycle": "Цикл очищення",
+    "CL_DV_RF_cleaning_history": "Історія очищення",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Не вибрано цикл очищення",
+    "CL_DV_RF_havent_cleaned_yet": "Ви ще не прибрали.",
+    "CL_DV_RF_garbage_disposal_reminder": "Пам'ятка про утилізацію сміття",
+    "CL_DV_RF_resource_waste": "Відходи ресурсів",
+    "CL_DV_RF_timer_not_selected": "Таймер не вибрано",
+    "CL_DV_RF_add_more_reminders": "Додайте більше нагадувань",
+    "CL_DV_RF_cleaning_tips": "Поради щодо чищення",
+    "CL_DV_RF_last_clean_time": "Востаннє ви чистили холодильник: ***",
+    "CL_DV_RF_last_cleaning_was_today": "Останнє прибирання було сьогодні.",
+    "CL_DV_RF_you_need_cleaning_now": "Тобі зараз потрібна чистка.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Наступне прибирання через ** днів.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Останнє прибирання було ** днів тому.",
+    "CL_CF_CO_x_weeks": "тижнів",
+    "CL_DV_RF_cleaned": "Очистили",
+    "CL_DV_OV_probe_temperature_graph": "Графік температури зонда",
+    "CL_DV_OV_internal": "внутрішній",
+    "CL_DV_OV_probe_desc": "Зонд допомагає вимірювати температуру їжі. Ви можете побачити різні температури з часом.",
+    "CL_DV_RF_no_cleaning_history": "Немає історії очищення"
 }
