--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -1676,7 +1676,7 @@
     "add_timing": "THÊM HẸN GIỜ",
     "set_start_to_finish_time": "Thiết lập thời gian bắt đầu và kết thúc",
     "pair_pump_appliance": "Máy nước nóng bơm nhiệt",
-    "heat_pump": "Bơm nhiệt",
+    "heat_pump": "Bảng biến tần",
     "pump_boost_1": "Tăng cường 1",
     "pump_electric_heating": "Đun nước sử dụng điện",
     "pump_holiday_mode": "Nghỉ ngơi",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Đã cắm điện và bật;\nWi-Fi đã được kích hoạt và kết nối;\nMật khẩu Wi-Fi gần đây không thay đổi.",
     "dont_remind_again_uppercase": "KHÔNG NHẮC LẠI",
     "storage_tips_title": "Mẹo bảo quản :",
-    "heat_pump_oem": "Dòng PRO series DHW",
+    "heat_pump_oem": "DHW tốc độ cố định",
     "td22_drying_empty_water_tank": "Sấy khô – Đổ hết bình chứa nước",
     "td22_drying_paused": "Đã tạm ngừng sấy khô",
     "td22_drying_finished": "Đã sấy khô xong",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Bạn có chắc chắn bạn muốn thoát?",
     "fridge_child_lock_open_tips": "Sau khi mở khóa trẻ em, màn hình cảm ứng và ngăn chứa sẽ bị khóa.",
     "want_scan_code_tips": "Tôi muốn quét mã.",
-    "tri_name_key": "Máy sưởi bơm nhiệt ATW",
+    "tri_name_key": "Máy bơm nhiệt ATW Pro",
     "water_set_key": "THIẾT LẬP NƯỚC",
     "f_e_fan_fault_tip": "Lỗi quạt DC",
     "zone_water_key": "Nước vùng",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Đảm bảo Bluetooth của bạn đã được bật.",
     "CL_DV_PIND_accessory_firmware_update": "Cập nhật phần mềm phụ kiện",
     "CL_CF_CS_ble_scan_not_list": "Nếu thiết bị của bạn không có trong danh sách, bạn có thể nhấp vào 'THỬ LẠI' để tìm kiếm lại hoặc nhấp vào 'TIẾP THEO' để cấu hình mạng theo cách khác.",
-    "CL_CF_CS_ble_scan_have_not_found": "Chúng tôi không tìm thấy bất kỳ thiết bị nào trên Bluetooth. Bạn có thể nhấp vào 'THỬ LẠI' để tìm kiếm lại hoặc nhấp vào 'TIẾP THEO' để cấu hình mạng theo cách khác.",
+    "CL_CF_CS_ble_scan_have_not_found": "Chúng tôi chưa tìm thấy bất kỳ thiết bị nào trên bluetooth. Bạn có thể nhấp vào 'THỬ LẠI' để tìm kiếm lại hoặc định cấu hình mạng theo cách khác.",
     "CL_DV_WM_pump_cleaning": "Vệ sinh máy bơm...",
     "CL_DV_WM_autodoes_tip": "Bật tính năng này và thiết bị của bạn sẽ thông minh phân phối chất tẩy rửa và nước xả vải trong khi bạn giặt quần áo.",
     "CL_DV_WM_detergent_department_key": "NGĂN CHẤT TẨY RỬA",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Không thể ẩn",
     "program_management_unable_to_hide_desc": "Đây là chương trình cuối cùng có thể nhìn thấy và ít nhất một chương trình phải được giữ ở chế độ hiển thị.",
     "CL_CF_FM_set_deadline": "Đặt thời hạn",
-    "CL_CF_FM_expiry_date_must_be_selected": "Ngày hết hạn phải được chọn"
+    "CL_CF_FM_expiry_date_must_be_selected": "Ngày hết hạn phải được chọn",
+    "CL_CF_FM_add_custom_food_desc": "Thêm một mục tùy chỉnh mới",
+    "CL_CF_FM_delete_selected_items": "Xóa các mục đã chọn",
+    "CL_CF_FM_delete_selected": "Xóa mục đã chọn",
+    "CL_DV_HOB_residual_heat_content": "Vùng nấu vẫn còn nóng. Hãy cẩn thận không chạm vào nó.",
+    "CL_CF_FM_add_custom_food": "Thêm Thực phẩm Không Có trong Thư viện",
+    "air_care_temp_title": "Tiêu chuẩn đánh giá nhiệt độ:",
+    "air_care_hum_title": "Tiêu chuẩn đánh giá độ ẩm:",
+    "air_care_temp_c": "Tốt: 17 < T < 27℃\n Bình thường: 10≤T≤17°C, 27≤T≤30°C\n Không tốt: T < 10°CT > 30°C",
+    "air_care_temp_f": "Tốt: 62,6 < T < 80,6℉\n Bình thường: 50≤T≤62.6℉,80.6≤T≤86℉\n Không tốt: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Tốt: H < 70%\n Bình thường: 70≤H≤80%\n Không tốt: H＞80%",
+    "CL_CF_RM_change_floor_key": "thay đổi tầng",
+    "CL_CF_FM_recently_added": "Mới thêm gần đây",
+    "CL_CF_FM_no_matching_items": "Không có mục nào phù hợp",
+    "CL_CF_FM_search_stored_food": "Tìm kiếm Thực phẩm lưu trữ",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "thông báo",
+    "CL_CF_FM_a_day_ago": "Một ngày trước",
+    "CL_CF_FM_a_week_ago": "Một tuần trước",
+    "CL_CF_FM_a_month_ago": "Một tháng trước",
+    "CL_CF_FM_a_year_ago": "Một năm trước",
+    "CL_CF_FM_x_days_ago": "** ngày trước",
+    "CL_CF_FM_x_weeks_ago": "** tuần trước",
+    "CL_CF_FM_x_months_ago": "** tháng trước",
+    "CL_CF_FM_x_years_ago": "** năm trước",
+    "CL_CF_FM_shopping_list_details": "Chi tiết danh sách mua sắm",
+    "CL_CF_FM_no_shopping_list": "Không có danh sách mua sắm",
+    "CL_DV_OV_24_time_zone": "Múi giờ",
+    "CL_CF_FM_reset_purchased_tips": "Bạn có muốn đặt lại tất cả thực phẩm trong danh sách này về trạng thái chưa mua không?",
+    "CL_CF_FM_add_food_to_x": "Thêm thức ăn vào \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Thêm thực phẩm cần mua",
+    "CL_DV_OV_24_always_on": "Luôn luôn bật",
+    "CL_CF_CS_separated_ac_cs_step2": "Nhấn nút \"Horizontal Swing\" 6 lần trên bộ điều khiển từ xa. Hoặc nhấn nút \"Sleep\" 8 lần trên bộ điều khiển từ xa có dây.",
+    "CL_CF_FM_list": "Danh sách",
+    "CL_CF_FM_select_shopping_list": "Chọn danh sách mua sắm",
+    "CL_CF_FM_x_items_added": "** các mục đã được thêm vào",
+    "CL_CF_FM_create_shopping_list_first": "Trước tiên, bạn cần lập danh sách mua sắm.",
+    "CL_CF_FM_no_shopping_list_available": "Không có danh sách mua sắm nào khả dụng!",
+    "CL_DV_OV_extra_drying_desc": "Sấy khô hoặc khử nước thực phẩm sẽ loại bỏ độ ẩm khỏi thực phẩm để kéo dài thời hạn sử dụng. Đây là chương trình được khuyến nghị. Bạn có thể thay đổi theo sở thích của mình.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Sấy khô là phương pháp bảo quản thảo mộc dễ nhất. Bằng cách sử dụng không khí ấm và khô, độ ẩm sẽ bốc hơi. Điều này giúp lá, hoa hoặc hạt giữ được màu sắc và hương vị.",
+    "CL_DV_OV_extra_pasteurization_desc": "Xử lý nhiệt nhẹ được áp dụng cho thực phẩm để tiêu diệt vi khuẩn có hại và kéo dài thời hạn sử dụng. Có thể sử dụng để bảo quản thực phẩm như các sản phẩm từ sữa, sản phẩm từ trứng, các loại hạt.",
+    "CL_DV_OV_extra_canning_desc": "Đóng hộp cho phép bảo quản thực phẩm khỏi hư hỏng bằng cách khử trùng bằng nhiệt. Đảm bảo thực phẩm được bảo quản trong hộp đựng kín.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Một chương trình hiệu quả để rã đông thực phẩm đông lạnh nhanh chóng và an toàn. Nó đặc biệt hữu ích cho nhiều loại thực phẩm, từ thịt và rau đến các bữa ăn đã nấu chín trước.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Rã đông thực phẩm đông lạnh hiệu quả bằng cách kết hợp nhiệt độ nhẹ với độ ẩm tự nhiên của hơi nước. Hơi nước giúp duy trì độ ẩm của thực phẩm, giữ nguyên kết cấu và hương vị của thực phẩm. Điều này đặc biệt hữu ích đối với các loại thực phẩm mềm như cá, bánh ngọt hoặc bánh mì.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Với chức năng này, không khí sẽ lưu thông với sự trợ giúp của quạt. Không có phần nhiệt nào được bật. Sử dụng cài đặt này để rã đông các món ăn đông lạnh, chẳng hạn như bánh gato, bánh mì và trái cây.",
+    "CL_DV_OV_extra_plate_warming_desc": "Làm nóng đĩa đến nhiệt độ mong muốn. Điều này giúp các món ăn trên đĩa giữ được độ ấm trong thời gian dài hơn.",
+    "CL_DV_OV_extra_oshibori_desc": "Làm ấm nhẹ nhàng khăn tay oshibori, làm nóng chúng đến nhiệt độ dễ chịu.",
+    "CL_DV_OV_extra_hot_stone_desc": "Được thiết kế cho các liệu pháp giống như spa. Đá được làm ấm đều đến nhiệt độ hoàn hảo, giúp chúng sẵn sàng để sử dụng trong các liệu trình thư giãn hoặc chăm sóc sức khỏe.",
+    "CL_DV_OV_extra_sterilizing_desc": "Vệ sinh các vật dụng như bình sữa, đồ dùng nhà bếp hoặc các dụng cụ nhỏ. Lò nướng đạt đến nhiệt độ đủ để loại bỏ vi khuẩn và các tác nhân gây bệnh khác, cung cấp một cách đơn giản và hiệu quả để duy trì sự sạch sẽ và vệ sinh.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Sử dụng hơi nước để hâm nóng nhẹ nhàng thực phẩm, phục hồi độ ẩm và độ tươi của thực phẩm. Lý tưởng cho các món ăn tinh tế như mì ống, cơm hoặc món hầm, vì nó đảm bảo thực phẩm hâm nóng giữ được kết cấu và hương vị ban đầu mà không bị khô.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Kết hợp lợi ích của cả không khí nóng và hơi nước, chương trình này lý tưởng để hâm nóng nhiều loại thực phẩm. Không khí nóng cung cấp nhiệt đều, trong khi hơi nước bổ sung độ ẩm, làm cho nó hoàn hảo cho các món ăn như thịt, gia cầm hoặc các bữa ăn hỗn hợp, đảm bảo chúng vẫn ngon ngọt và đậm đà.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Hoàn hảo cho các loại thực phẩm cần lớp vỏ giòn, chương trình này sử dụng không khí nóng để hâm nóng đều các món ăn như pizza, đồ nướng hoặc rau củ nướng. Không khí nóng lưu thông đảm bảo thực phẩm được hâm nóng kỹ lưỡng trong khi vẫn giữ được lớp vỏ giòn.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Làm nóng thức ăn nhanh chóng từ trong ra ngoài. Đây là lựa chọn nhanh chóng và hiệu quả để hâm nóng bữa ăn. Hoàn hảo cho súp, món hầm hoặc thức ăn thừa cần hâm nóng nhanh.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Duy trì thực phẩm ở nhiệt độ phục vụ hoàn hảo mà không cần nấu thêm. Lý tưởng để giữ ấm các món ăn cho đến khi chúng sẵn sàng để phục vụ. Hoàn hảo cho các bữa ăn được chuẩn bị trước, đảm bảo chúng luôn nóng và sẵn sàng để thưởng thức.",
+    "CL_DV_OV_ends_at": "Kết thúc vào lúc: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Thưởng thức hương vị khói thơm ngon của các món nướng mà không cần lò nướng ngoài trời. Được chế tạo để phân phối nhiệt đều khắp toàn bộ khu vực, giảm thiểu các điểm nóng và đảm bảo kết quả nướng đồng đều. Lý tưởng để nướng nhiều loại thực phẩm, từ thịt và rau đến hải sản và thậm chí cả trái cây.",
+    "CL_DV_OV_remote_start_title": "Khởi động từ xa bị vô hiệu hóa",
+    "CL_DV_OV_remote_start_content": "Để gửi và khởi động chương trình từ ứng dụng của bạn, tính năng khởi động từ xa phải được kích hoạt. ",
+    "CL_CF_FM_apple": "Quả táo",
+    "CL_CF_FM_bacon": "Thịt xông khói",
+    "CL_CF_FM_broccoli": "Súp lơ xanh",
+    "CL_CF_FM_cabbage": "Bắp cải",
+    "CL_CF_FM_Cauliflower": "Súp lơ",
+    "CL_CF_FM_cod": "Cá tuyết",
+    "CL_CF_FM_dragon_fruit": "Thanh long",
+    "CL_DV_OV_defrost_detail_desc": "Rã đông thực phẩm đúng cách sẽ đảm bảo chất lượng thực phẩm sau khi đông lạnh. Rã đông đúng cách giúp giảm nguy cơ ngộ độc thực phẩm.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Các chương trình không liên quan đến thực phẩm được tạo ra cho nhiều nhiệm vụ không liên quan đến nấu ăn, mang lại sự tiện lợi và chức năng vượt xa nấu ăn truyền thống.",
+    "CL_DV_OV_extra_warming_detail_desc": "Nhiều chương trình hâm nóng để hâm lại và làm ấm thức ăn, giúp bạn dễ dàng thưởng thức bữa ăn, dù bạn đang hâm lại thức ăn thừa hay giữ ấm bát đĩa để phục vụ.",
+    "CL_CF_FM_click_switch_status": "Nhấp để chuyển đổi trạng thái của mục",
+    "CL_CF_FM_recent_purchased_tips": "Bạn đã mua những thứ này, bạn có muốn thêm nhiệt vào Kho thực phẩm không?",
+    "CL_DV_OV_extra_drying_herbs": "Sấy khô thảo mộc",
+    "CL_DV_OV_extra_pasteurization": "Thanh trùng",
+    "CL_DV_OV_extra_canning": "Đóng hộp",
+    "CL_DV_OV_extra_defrost_microwave": "Rã đông bằng lò vi sóng",
+    "CL_DV_OV_extra_defrost_stream": "Rã đông bằng hơi nước",
+    "CL_DV_OV_extra_oshibori": "Oshibori",
+    "CL_DV_OV_extra_hot_stones": "Đá nóng",
+    "CL_DV_OV_extra_sterilizing": "Khử trùng",
+    "CL_DV_OV_extra_warming_hotair_stream": "Làm nóng lại bằng không khí nóng + hơi nước",
+    "CL_DV_OV_extra_warming_hotair": "Làm nóng lại bằng không khí nóng",
+    "CL_DV_OV_extra_warming_microwave": "Làm nóng lại bằng lò vi sóng",
+    "CL_DV_OV_extra_warming_keepwarm": "Giữ ấm",
+    "CL_CF_FM_dont_remind_in_3_months": "Đừng nhắc lại trong 3 tháng",
+    "CL_DV_RF_cleaning_plan": "Kế hoạch vệ sinh",
+    "CL_DV_RF_cleaning_refrigerator": "Vệ sinh tủ lạnh",
+    "CL_DV_RF_cleaning_reminder": "Nhắc nhở vệ sinh",
+    "CL_DV_RF_cleaning_cycle": "Chu trình vệ sinh",
+    "CL_DV_RF_cleaning_history": "Lịch sử vệ sinh",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Chu trình vệ sinh chưa được chọn",
+    "CL_DV_RF_havent_cleaned_yet": "Bạn vẫn chưa dọn dẹp.",
+    "CL_DV_RF_garbage_disposal_reminder": "Nhắc nhở xử lý rác thải",
+    "CL_DV_RF_resource_waste": "Chất thải tài nguyên",
+    "CL_DV_RF_timer_not_selected": "Bộ hẹn giờ chưa được chọn",
+    "CL_DV_RF_add_more_reminders": "Thêm nhiều lời nhắc nhở hơn",
+    "CL_DV_RF_cleaning_tips": "Mẹo vệ sinh",
+    "CL_DV_RF_last_clean_time": "Lần cuối cùng bạn vệ sinh tủ lạnh là vào: ***",
+    "CL_DV_RF_last_cleaning_was_today": "Lần dọn dẹp cuối cùng là hôm nay.",
+    "CL_DV_RF_you_need_cleaning_now": "Bạn cần phải vệ sinh ngay bây giờ.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Lần vệ sinh tiếp theo sau ** ngày.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Lần vệ sinh cuối cùng là cách đây ** ngày.",
+    "CL_CF_CO_x_weeks": "Tuần",
+    "CL_DV_RF_cleaned": "Đã làm sạch",
+    "CL_DV_OV_probe_temperature_graph": "Biểu đồ nhiệt độ đầu dò",
+    "CL_DV_OV_internal": "Nội bộ",
+    "CL_DV_OV_probe_desc": "Đầu dò giúp bạn đo nhiệt độ của thực phẩm. Bạn có thể thấy nhiệt độ khác nhau theo thời gian.",
+    "CL_DV_RF_no_cleaning_history": "Không có lịch sử vệ sinh"
 }
