--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -1676,7 +1676,7 @@
     "add_timing": "新增定時任務",
     "set_start_to_finish_time": "設置開始結束時間",
     "pair_pump_appliance": "熱泵熱水器",
-    "heat_pump": "熱泵",
+    "heat_pump": "变频热泵热水器",
     "pump_boost_1": "雙能1",
     "pump_electric_heating": "電加熱",
     "pump_holiday_mode": "假期",
@@ -2185,7 +2185,7 @@
     "ac_checking_new": "檢測中",
     "last_exam": "上次检测",
     "ac_result": "结果",
-    "add_a_favorite": "添加喜爱",
+    "add_a_favorite": "添加最爱",
     "add_a_schedule": "添加计划",
     "exam_again": "重新检测",
     "ac_new_temperature_unit": "溫度單位",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "已插電，並已開啟；\nWi-Fi已激活並連接；\nWi-Fi密碼最近無更改。",
     "dont_remind_again_uppercase": "不再提醒",
     "storage_tips_title": "存储提示：",
-    "heat_pump_oem": "PRO系列生活熱水",
+    "heat_pump_oem": "定速熱泵熱水器",
     "td22_drying_empty_water_tank": "烘乾 - 清空水箱",
     "td22_drying_paused": "烘乾已暫停",
     "td22_drying_finished": "烘乾已完成",
@@ -2430,7 +2430,7 @@
     "logout_tips": "確定要登出嗎？",
     "fridge_child_lock_open_tips": "儿童锁开启后，冰箱的触控板将锁定，出水/冰功能将被禁用。",
     "want_scan_code_tips": "我想掃碼",
-    "tri_name_key": "三联供采暖机",
+    "tri_name_key": "熱泵戶式水機",
     "water_set_key": "水温设置",
     "f_e_fan_fault_tip": "外风机故障",
     "zone_water_key": "区域1水温",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "確保您的藍牙已開啟。",
     "CL_DV_PIND_accessory_firmware_update": "配件韌體更新",
     "CL_CF_CS_ble_scan_not_list": "如果您的裝置未列出，您可以按一下「重試」重新搜索，或按一下「下一步」以其他方式設定網路。",
-    "CL_CF_CS_ble_scan_have_not_found": "我們尚未在藍牙上找到任何裝置。",
+    "CL_CF_CS_ble_scan_have_not_found": "我們還沒有找到任何藍牙設備。您可以點擊「重试」重新搜索，或以其他方式配置網路。",
     "CL_DV_WM_pump_cleaning": "清洗幫浦...",
     "CL_DV_WM_autodoes_tip": "啟用此功能，您的設備將在您洗衣服時智慧地分配洗滌劑和織物柔軟劑。",
     "CL_DV_WM_detergent_department_key": "洗滌劑室",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "無法隱藏",
     "program_management_unable_to_hide_desc": "這是最後一個可見程序，並且至少有一個程序必須保持可見。",
     "CL_CF_FM_set_deadline": "設定截止日期",
-    "CL_CF_FM_expiry_date_must_be_selected": "必須選擇到期日"
+    "CL_CF_FM_expiry_date_must_be_selected": "必須選擇到期日",
+    "CL_CF_FM_add_custom_food_desc": "新增的客製化項目",
+    "CL_CF_FM_delete_selected_items": "刪除所選項目",
+    "CL_CF_FM_delete_selected": "刪除所選內容",
+    "CL_DV_HOB_residual_heat_content": "烹飪區仍然很熱。小心不要碰它。",
+    "CL_CF_FM_add_custom_food": "增加圖書館未包含的食物",
+    "air_care_temp_title": "溫度評價標準：",
+    "air_care_hum_title": "濕度評估標準：",
+    "air_care_temp_c": "良好：17 < T < 27℃\n正常：10≤T≤17℃，27≤T≤30℃\n不好：T < 10°C > 30°C",
+    "air_care_temp_f": "良好：62.6 < T < 80.6°F\n正常：50≤T≤62.6°F，80.6≤T≤86°F\n不好：T<50°T>86°F",
+    "air_care_hum_tips": "良好：H < 70%\n正常：70≤H≤80%\n不好：H＞80%",
+    "CL_CF_RM_change_floor_key": "換樓層",
+    "CL_CF_FM_recently_added": "最近新增",
+    "CL_CF_FM_no_matching_items": "沒有匹配的項目",
+    "CL_CF_FM_search_stored_food": "搜尋儲存的食物",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "通知",
+    "CL_CF_FM_a_day_ago": "一天前",
+    "CL_CF_FM_a_week_ago": "一週前",
+    "CL_CF_FM_a_month_ago": "一個月前",
+    "CL_CF_FM_a_year_ago": "一年前",
+    "CL_CF_FM_x_days_ago": "** 天前",
+    "CL_CF_FM_x_weeks_ago": "** 幾週前",
+    "CL_CF_FM_x_months_ago": "** 幾個月前",
+    "CL_CF_FM_x_years_ago": "** 幾年前",
+    "CL_CF_FM_shopping_list_details": "購物清單詳情",
+    "CL_CF_FM_no_shopping_list": "沒有購物清單",
+    "CL_DV_OV_24_time_zone": "時區",
+    "CL_CF_FM_reset_purchased_tips": "您想將此清單中的所有食品重設為未購買狀態嗎？",
+    "CL_CF_FM_add_food_to_x": "將食物加入“***”",
+    "CL_CF_FM_add_food_to_be_purchased": "加入要購買的食物",
+    "CL_DV_OV_24_always_on": "始終保持開啟",
+    "CL_CF_CS_separated_ac_cs_step2": "按遙控器「水平擺動」鍵6次。或按下有線遙控器上的「睡眠」按鈕8次。",
+    "CL_CF_FM_list": "清單",
+    "CL_CF_FM_select_shopping_list": "選擇購物清單",
+    "CL_CF_FM_x_items_added": "** 項目已新增",
+    "CL_CF_FM_create_shopping_list_first": "您需要先建立一個購物清單。",
+    "CL_CF_FM_no_shopping_list_available": "沒有可用的購物清單！",
+    "CL_DV_OV_extra_drying_desc": "乾燥或脫水食品可以去除食品中的水分，以延長保質期。這是一個推薦的程式。您可以根據自己的喜好更改它。",
+    "CL_DV_OV_extra_drying_herbs_desc": "乾燥是保存草藥最簡單的方法。透過使用溫暖乾燥的空氣，水分就會蒸發。這有助於葉子、花朵或種子保持其顏色和風味。",
+    "CL_DV_OV_extra_pasteurization_desc": "對食品進行溫和的熱處理，以殺死有害細菌並延長保質期。可用於保存乳製品、蛋製品、堅果等食品。",
+    "CL_DV_OV_extra_canning_desc": "罐頭可以透過加熱滅菌來防止食物變質。確保食物存放在密封的容器中。",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "快速、安全地解凍冷凍食品的有效程序。它對於各種食物特別有用，從肉類和蔬菜到預煮飯。",
+    "CL_DV_OV_extra_stream_defrost_desc": "透過將溫和的熱量與蒸氣的自然水分結合，有效解凍冷凍食品。蒸氣有助於保持食物的水分含量，保持其質地和風味。這對於魚、糕點或麵包等精緻食品特別有用。",
+    "CL_DV_OV_extra_fan_defrost_desc": "有了這個功能，空氣在風扇的幫助下迴圈。不會打開加熱元件。使用此設置解凍冷凍食品，如蛋糕、麵包和水果。",
+    "CL_DV_OV_extra_plate_warming_desc": "將板加熱至所需溫度。這有助於盤子上的菜餚在更長的時間內保持溫暖。",
+    "CL_DV_OV_extra_oshibori_desc": "溫和地加熱 oshibori 手巾，將其加熱至舒適的溫度。",
+    "CL_DV_OV_extra_hot_stone_desc": "專為水療般的護理而設計。這些石頭均勻地加熱到完美的溫度，使它們可以用於放鬆或健康日常活動。",
+    "CL_DV_OV_extra_sterilizing_desc": "對嬰兒奶瓶、廚房用具或小工具等物品進行消毒。烤箱達到的溫度足以消除細菌和其他病原體，提供了一種簡單有效的保持清潔和衛生的方法。",
+    "CL_DV_OV_extra_warming_regenerate_desc": "使用蒸氣輕輕地重新加熱食物，以恢復其水分和新鮮度。非常適合義大利麵、米飯或砂鍋菜等精緻菜餚，因為它可確保加熱的食物保留其原始質地和風味而不會變乾。",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "該程序結合了熱風和蒸汽的優點，非常適合重新加熱各種食物。熱空氣提供均勻的加熱，而蒸氣增加水分，使其非常適合肉類、家禽或混合餐等菜餚，確保它們保持多汁和美味。",
+    "CL_DV_OV_extra_warming_hotair_desc": "該程序非常適合需要酥脆外觀的食物，它使用熱空氣均勻地重新加熱披薩、烘焙食品或烤蔬菜等菜餚。循環的熱空氣確保食物被徹底加熱，同時保持酥脆的口感。",
+    "CL_DV_OV_extra_warming_microwave_desc": "從內到外快速加熱食物。這是重新加熱食物的快速有效的選擇。非常適合需要快速加熱的湯、燉菜或剩菜。",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "將食物保持在完美的食用溫度，無需進一步烹飪。非常適合在準備上菜之前保持菜餚溫暖。它非常適合提前準備的飯菜，確保它們保持熱度並隨時可以享用。",
+    "CL_DV_OV_ends_at": "結束於：#",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "無需戶外燒烤架即可享受美味的煙燻風味燒烤菜餚。精心設計，可在整個區域均勻分佈熱量，最大限度地減少熱點並確保一致的燒烤效果。非常適合燒烤各種食物，從肉類和蔬菜到海鮮，甚至水果。",
+    "CL_DV_OV_remote_start_title": "遠端啟動已停用",
+    "CL_DV_OV_remote_start_content": "若要從您的應用程式發送和啟動程序，遠端啟動應處於活動狀態。 ",
+    "CL_CF_FM_apple": "蘋果",
+    "CL_CF_FM_bacon": "培根",
+    "CL_CF_FM_broccoli": "綠色花椰菜",
+    "CL_CF_FM_cabbage": "高麗菜",
+    "CL_CF_FM_Cauliflower": "花椰菜",
+    "CL_CF_FM_cod": "鱈魚",
+    "CL_CF_FM_dragon_fruit": "火龍果",
+    "CL_DV_OV_defrost_detail_desc": "正確解凍食物可以確保食物冷凍後的品質。適當的解凍可以降低食物中毒的風險。",
+    "CL_DV_OV_extra_non_food_detail_desc": "非食品程序是為各種非烹飪任務而設計的，提供了傳統烹飪之外的便利性和功能性。",
+    "CL_DV_OV_extra_warming_detail_desc": "一系列用於重新加熱和加熱食物的加熱程序，無論您是重新加熱剩菜還是保溫待上菜，都可以輕鬆享用餐點。",
+    "CL_CF_FM_click_switch_status": "點選可切換項目狀態",
+    "CL_CF_FM_recent_purchased_tips": "您購買了這些東西，是否要將它們添加到食品庫存中？",
+    "CL_DV_OV_extra_drying_herbs": "乾燥香草",
+    "CL_DV_OV_extra_pasteurization": "巴氏滅菌",
+    "CL_DV_OV_extra_canning": "罐頭",
+    "CL_DV_OV_extra_defrost_microwave": "用微波爐解凍",
+    "CL_DV_OV_extra_defrost_stream": "用蒸氣除霜",
+    "CL_DV_OV_extra_oshibori": "押堀",
+    "CL_DV_OV_extra_hot_stones": "熱石",
+    "CL_DV_OV_extra_sterilizing": "滅菌",
+    "CL_DV_OV_extra_warming_hotair_stream": "用熱風+蒸氣重新加熱",
+    "CL_DV_OV_extra_warming_hotair": "用熱空氣重新加熱",
+    "CL_DV_OV_extra_warming_microwave": "用微波加熱",
+    "CL_DV_OV_extra_warming_keepwarm": "保溫",
+    "CL_CF_FM_dont_remind_in_3_months": "3個月內不要提醒",
+    "CL_DV_RF_cleaning_plan": "清潔日志",
+    "CL_DV_RF_cleaning_refrigerator": "清潔冰箱",
+    "CL_DV_RF_cleaning_reminder": "清潔提醒",
+    "CL_DV_RF_cleaning_cycle": "清洗週期",
+    "CL_DV_RF_cleaning_history": "清潔歷史",
+    "CL_DV_RF_cleaning_cycle_not_selected": "未選擇清潔週期",
+    "CL_DV_RF_havent_cleaned_yet": "你還沒打掃乾淨呢",
+    "CL_DV_RF_garbage_disposal_reminder": "垃圾處理提醒",
+    "CL_DV_RF_resource_waste": "資源浪費",
+    "CL_DV_RF_timer_not_selected": "未選擇計時器",
+    "CL_DV_RF_add_more_reminders": "增加更多提醒",
+    "CL_DV_RF_cleaning_tips": "清潔技巧",
+    "CL_DV_RF_last_clean_time": "您上次清潔冰箱的時間是：***",
+    "CL_DV_RF_last_cleaning_was_today": "最後一次清潔是在今天。",
+    "CL_DV_RF_you_need_cleaning_now": "你現在需要清潔。",
+    "CL_DV_RF_next_cleaning_in_x_days": "下次清潔將在 ** 天後進行。",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "最後一次清潔是在**天前。",
+    "CL_CF_CO_x_weeks": "週數",
+    "CL_DV_RF_cleaned": "已清潔",
+    "CL_DV_OV_probe_temperature_graph": "探頭溫度圖",
+    "CL_DV_OV_internal": "內部的",
+    "CL_DV_OV_probe_desc": "探頭可幫助您測量食物的溫度。您可以看到隨時間變化的不同溫度。",
+    "CL_DV_RF_no_cleaning_history": "無清潔歷史"
 }
