--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -1676,7 +1676,7 @@
     "add_timing": "添加定时任务",
     "set_start_to_finish_time": "设置开始结束时间",
     "pair_pump_appliance": "热泵热水器",
-    "heat_pump": "热泵",
+    "heat_pump": "变频热泵热水器",
     "pump_boost_1": "双能1",
     "pump_electric_heating": "电加热",
     "pump_holiday_mode": "假日",
@@ -2185,7 +2185,7 @@
     "ac_checking_new": "诊断中",
     "last_exam": "上次检测",
     "ac_result": "结果",
-    "add_a_favorite": "添加喜爱",
+    "add_a_favorite": "添加最爱",
     "add_a_schedule": "添加计划",
     "exam_again": "重新检测",
     "ac_new_temperature_unit": "温度单位",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "已插电，并已开启；\nWi-Fi已激活并连接；\nWi-Fi密码最近无更改。",
     "dont_remind_again_uppercase": "不再提醒",
     "storage_tips_title": "存储提示：",
-    "heat_pump_oem": "PRO 系列生活热水",
+    "heat_pump_oem": "定速热泵热水器",
     "td22_drying_empty_water_tank": "烘干 - 清空水箱",
     "td22_drying_paused": "烘干已暂停",
     "td22_drying_finished": "烘干已完成",
@@ -2430,7 +2430,7 @@
     "logout_tips": "确定要退出登录吗？",
     "fridge_child_lock_open_tips": "儿童锁开启后，冰箱的触控板将锁定，出水/冰功能将被禁用。",
     "want_scan_code_tips": "我想扫码",
-    "tri_name_key": "三联供采暖机",
+    "tri_name_key": "热泵户式水机",
     "water_set_key": "水温设置",
     "f_e_fan_fault_tip": "外风机故障",
     "zone_water_key": "区域1水温",
@@ -3653,7 +3653,7 @@
     "close_all": "关闭所有",
     "circle_mode_des": "水路1和水路2工作模式相同",
     "select_c_m": "选择回路类型",
-    "favorite_name": "收藏名称",
+    "favorite_name": "最爱名称",
     "weekly_key": "每周",
     "all_day": "全天",
     "asko_oven_display_setting_content": "配置烤箱显示屏的设置。",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "确保您的蓝牙已打开。",
     "CL_DV_PIND_accessory_firmware_update": "配件固件更新",
     "CL_CF_CS_ble_scan_not_list": "如果您的设备不在列表中，您可以点击“重试”重新搜索，或点击“下一步”以其他方式配置网络。",
-    "CL_CF_CS_ble_scan_have_not_found": "我们没有在蓝牙上找到任何设备。您可以点击“重试”重新搜索，或点击“下一步”以其他方式配置网络。",
+    "CL_CF_CS_ble_scan_have_not_found": "我们未在蓝牙上找到任何设备。您可以点击“重试”重新搜索，或以其他方式配置网络。",
     "CL_DV_WM_pump_cleaning": "清洗泵...",
     "CL_DV_WM_autodoes_tip": "启用此功能，您的设备将在您洗衣服时智能地分配洗涤剂和织物柔软剂。",
     "CL_DV_WM_detergent_department_key": "洗涤剂隔间",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "无法隐藏",
     "program_management_unable_to_hide_desc": "这是最后一个可见的程序，并且必须保持至少一个程序可见。",
     "CL_CF_FM_set_deadline": "设定截止日期",
-    "CL_CF_FM_expiry_date_must_be_selected": "必须选择到期日期"
+    "CL_CF_FM_expiry_date_must_be_selected": "必须选择到期日期",
+    "CL_CF_FM_add_custom_food_desc": "添加新的定制商品",
+    "CL_CF_FM_delete_selected_items": "删除选定项目",
+    "CL_CF_FM_delete_selected": "删除选定项",
+    "CL_DV_HOB_residual_heat_content": "烹饪区仍然很热。小心不要触摸它。",
+    "CL_CF_FM_add_custom_food": "添加图书馆未包含的食物",
+    "air_care_temp_title": "温度评价标准：",
+    "air_care_hum_title": "湿度评价标准：",
+    "air_care_temp_c": "良好：17 < T < 27℃\n正常：10≤T≤17℃，27≤T≤30℃\n不好：T < 10°CT > 30°C",
+    "air_care_temp_f": "良好：62.6 < T < 80.6℉\n正常：50≤T≤62.6℉，80.6≤T≤86℉\n不好：T＜50℉ T＞86℉",
+    "air_care_hum_tips": "良好：H < 70%\n正常：70≤H≤80%\n不良：H＞80%",
+    "CL_CF_RM_change_floor_key": "改变楼层",
+    "CL_CF_FM_recently_added": "最近添加",
+    "CL_CF_FM_no_matching_items": "没有匹配项",
+    "CL_CF_FM_search_stored_food": "搜索储存的食物",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "通知",
+    "CL_CF_FM_a_day_ago": "1天前",
+    "CL_CF_FM_a_week_ago": "一周前",
+    "CL_CF_FM_a_month_ago": "一个月前",
+    "CL_CF_FM_a_year_ago": "一年前",
+    "CL_CF_FM_x_days_ago": "** 天前",
+    "CL_CF_FM_x_weeks_ago": "** 周前",
+    "CL_CF_FM_x_months_ago": "** 几个月前",
+    "CL_CF_FM_x_years_ago": "** 几年前",
+    "CL_CF_FM_shopping_list_details": "购物清单详情",
+    "CL_CF_FM_no_shopping_list": "没有购物清单",
+    "CL_DV_OV_24_time_zone": "时区",
+    "CL_CF_FM_reset_purchased_tips": "您是否要将此列表中的所有食物重置为未购买状态？",
+    "CL_CF_FM_add_food_to_x": "将食物添加到“***”",
+    "CL_CF_FM_add_food_to_be_purchased": "添加要购买的食物",
+    "CL_DV_OV_24_always_on": "始终开启",
+    "CL_CF_CS_separated_ac_cs_step2": "按遥控器“水平摆动”键6次。或按有线遥控器“休眠”键8次。",
+    "CL_CF_FM_list": "列表",
+    "CL_CF_FM_select_shopping_list": "选择购物清单",
+    "CL_CF_FM_x_items_added": "** 项已添加",
+    "CL_CF_FM_create_shopping_list_first": "您需要先创建一个购物清单。",
+    "CL_CF_FM_no_shopping_list_available": "没有可用的购物清单！",
+    "CL_DV_OV_extra_drying_desc": "干燥或脱水食物可去除食物中的水分，延长保质期。这是推荐的程序。您可以根据自己的喜好进行更改。",
+    "CL_DV_OV_extra_drying_herbs_desc": "干燥是保存草药最简单的方法。使用温暖干燥的空气，水分蒸发。这有助于叶子、花朵或种子保持其颜色和风味。",
+    "CL_DV_OV_extra_pasteurization_desc": "对食品进行温和的热处理，杀死有害细菌，延长保质期。可用于保存乳制品、蛋制品、坚果等食品。",
+    "CL_DV_OV_extra_canning_desc": "罐装食品可通过加热消毒防止食物变质。确保将食物存放在密封的容器中。",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "一款高效程序，可快速安全地解冻冷冻食品。它特别适用于各种食品，从肉类和蔬菜到预煮食品。",
+    "CL_DV_OV_extra_stream_defrost_desc": "通过将温和的热量与蒸汽的天然水分相结合，可有效解冻冷冻食品。蒸汽有助于保持食物的水分含量，保留其质地和风味。这对鱼、糕点或面包等精致食物尤其有用。",
+    "CL_DV_OV_extra_fan_defrost_desc": "有了这个功能，空气在风扇的帮助下循环。不会打开加热组件。使用此设置解冻冷冻食品，如蛋糕、面包和水果。",
+    "CL_DV_OV_extra_plate_warming_desc": "将盘子加热到所需温度。这有助于盘子上的菜肴在更长的时间内保持温暖。",
+    "CL_DV_OV_extra_oshibori_desc": "轻轻加热毛巾，将其加热至舒适的温度。",
+    "CL_DV_OV_extra_hot_stone_desc": "专为类似水疗的治疗而设计。石头被均匀加热至最佳温度，可用于放松或健康护理。",
+    "CL_DV_OV_extra_sterilizing_desc": "消毒婴儿奶瓶、厨房用具或小工具等物品。烤箱达到足够的温度以消灭细菌和其他病原体，提供一种简单有效的方法来保持清洁和卫生。",
+    "CL_DV_OV_extra_warming_regenerate_desc": "使用蒸汽温和地重新加热食物，恢复其水分和新鲜度。非常适合意大利面、米饭或砂锅菜等精致菜肴，因为它可以确保重新加热的食物保持其原有的质地和风味而不会变干。",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "该程序结合了热风和蒸汽的优点，非常适合加热各种食物。热风提供均匀的加热效果，而蒸汽则增加水分，非常适合加热肉类、家禽或混合食物等菜肴，确保它们保持多汁和美味。",
+    "CL_DV_OV_extra_warming_hotair_desc": "此程序非常适合需要外脆内软的食物，它使用热风均匀加热披萨、烘焙食品或烤蔬菜等菜肴。循环热风确保食物充分加热，同时保持外脆内软。",
+    "CL_DV_OV_extra_warming_microwave_desc": "从内到外快速加热食物。这是一种快速有效的加热食物的方法。非常适合需要快速加热的汤、炖菜或剩菜。",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "无需进一步烹饪即可将食物保持在最佳食用温度。非常适合在上桌前保持菜肴的温度。它非常适合提前准备的饭菜，确保它们保持热度并随时可供享用。",
+    "CL_DV_OV_ends_at": "结束于：#",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "无需户外烧烤架，即可享受烧烤菜肴的美味和烟熏风味。精心设计，可在整个区域均匀分布热量，最大限度地减少热点并确保一致的烧烤效果。非常适合烧烤各种食物，从肉类和蔬菜到海鲜甚至水果。",
+    "CL_DV_OV_remote_start_title": "远程启动已禁用",
+    "CL_DV_OV_remote_start_content": "要从您的应用程序发送和启动程序，远程启动应该处于活动状态。 ",
+    "CL_CF_FM_apple": "苹果",
+    "CL_CF_FM_bacon": "熏肉",
+    "CL_CF_FM_broccoli": "西兰花",
+    "CL_CF_FM_cabbage": "卷心菜",
+    "CL_CF_FM_Cauliflower": "菜花",
+    "CL_CF_FM_cod": "鳕鱼",
+    "CL_CF_FM_dragon_fruit": "火龙果",
+    "CL_DV_OV_defrost_detail_desc": "正确解冻食物可确保食物冷冻后的质量。正确解冻可降低食物中毒的风险。",
+    "CL_DV_OV_extra_non_food_detail_desc": "非食品程序适用于各种非烹饪任务，提供超越传统烹饪的便利性和功能性。",
+    "CL_DV_OV_extra_warming_detail_desc": "一系列用于重新加热和加热食物的加热程序，让您轻松享用美食，无论您是重新加热剩菜还是保温菜肴以供上桌。",
+    "CL_CF_FM_click_switch_status": "点击切换项目状态",
+    "CL_CF_FM_recent_purchased_tips": "您购买了这些东西，要将它们添加到食品库存中吗？",
+    "CL_DV_OV_extra_drying_herbs": "干燥草药",
+    "CL_DV_OV_extra_pasteurization": "巴氏灭菌",
+    "CL_DV_OV_extra_canning": "罐装",
+    "CL_DV_OV_extra_defrost_microwave": "用微波炉解冻",
+    "CL_DV_OV_extra_defrost_stream": "蒸汽除霜",
+    "CL_DV_OV_extra_oshibori": "绑缚",
+    "CL_DV_OV_extra_hot_stones": "热石",
+    "CL_DV_OV_extra_sterilizing": "灭菌",
+    "CL_DV_OV_extra_warming_hotair_stream": "用热空气+蒸汽重新加热",
+    "CL_DV_OV_extra_warming_hotair": "用热风重新加热",
+    "CL_DV_OV_extra_warming_microwave": "用微波炉加热",
+    "CL_DV_OV_extra_warming_keepwarm": "保温",
+    "CL_CF_FM_dont_remind_in_3_months": "3个月内无需提醒",
+    "CL_DV_RF_cleaning_plan": "清洁日志",
+    "CL_DV_RF_cleaning_refrigerator": "清洁冰箱",
+    "CL_DV_RF_cleaning_reminder": "清洁提醒",
+    "CL_DV_RF_cleaning_cycle": "清洁周期",
+    "CL_DV_RF_cleaning_history": "清洁历史记录",
+    "CL_DV_RF_cleaning_cycle_not_selected": "未选择清洁周期",
+    "CL_DV_RF_havent_cleaned_yet": "你还没清理。",
+    "CL_DV_RF_garbage_disposal_reminder": "垃圾处理提醒",
+    "CL_DV_RF_resource_waste": "资源浪费",
+    "CL_DV_RF_timer_not_selected": "未选择定时器",
+    "CL_DV_RF_add_more_reminders": "添加更多提醒",
+    "CL_DV_RF_cleaning_tips": "清洁技巧",
+    "CL_DV_RF_last_clean_time": "您上次清洁冰箱的时间是：***",
+    "CL_DV_RF_last_cleaning_was_today": "最后一次清洁是今天。",
+    "CL_DV_RF_you_need_cleaning_now": "你现在需要清洁。",
+    "CL_DV_RF_next_cleaning_in_x_days": "下次清洁将在 ** 天后进行。",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "最后一次清洁是**天前。",
+    "CL_CF_CO_x_weeks": "周数",
+    "CL_DV_RF_cleaned": "已清理",
+    "CL_DV_OV_probe_temperature_graph": "探针温度图",
+    "CL_DV_OV_internal": "内部的",
+    "CL_DV_OV_probe_desc": "探头可帮助您测量食物的温度。您可以看到随时间变化的温度。",
+    "CL_DV_RF_no_cleaning_history": "无清洁记录"
 }
