--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -1676,7 +1676,7 @@
     "add_timing": "ДОБАВИТЬ ВРЕМЯ",
     "set_start_to_finish_time": "Установите время начала и окончания",
     "pair_pump_appliance": "Водонагреватель с тепловым насосом",
-    "heat_pump": "Тепловой насос",
+    "heat_pump": "Инверторная плата",
     "pump_boost_1": "Ускоренный нагрев 1",
     "pump_electric_heating": "Электронагрев",
     "pump_holiday_mode": "Отпуск",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Подключено и включено;\nWi-Fi активировано и подключено;\nПароль Wi-Fi недавно не изменялся.",
     "dont_remind_again_uppercase": "БОЛЬШЕ НЕ НАПОМИНАТЬ",
     "storage_tips_title": "Советы по хранению:",
-    "heat_pump_oem": "PRO series DHW",
+    "heat_pump_oem": "ГВС с фиксированной скоростью",
     "td22_drying_empty_water_tank": "Сушка – пустой бак для воды",
     "td22_drying_paused": "Сушка приостановлена",
     "td22_drying_finished": "Сушка завершена",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Вы действительно хотите выйти?",
     "fridge_child_lock_open_tips": "После открытия замка от детей сенсорный экран и дозатор будут заблокированы.",
     "want_scan_code_tips": "Я хочу отсканировать код.",
-    "tri_name_key": "Нагреватель теплового насоса ATW",
+    "tri_name_key": "Тепловой насос ATW Pro",
     "water_set_key": "ТЕМПЕРАТУРА ВОДЫ",
     "f_e_fan_fault_tip": "отказ вентилятора постоянного тока",
     "zone_water_key": "Зона 1 Вода",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Убедитесь, что Bluetooth включен.",
     "CL_DV_PIND_accessory_firmware_update": "Обновление прошивки аксессуара",
     "CL_CF_CS_ble_scan_not_list": "Если вашего устройства нет в списке, вы можете нажать «ПОПРОБОВАТЬ ЕЩЕ РАЗ», чтобы повторить поиск, или нажать «ДАЛЕЕ», чтобы настроить сеть другим способом.",
-    "CL_CF_CS_ble_scan_have_not_found": "Мы не нашли ни одного устройства Bluetooth. Вы можете нажать «ПОВТОРИТЬ ПОПРОБОВКУ», чтобы повторить поиск, или нажать «ДАЛЕЕ», чтобы настроить сеть другим способом.",
+    "CL_CF_CS_ble_scan_have_not_found": "Мы не нашли ни одного устройства по bluetooth. Вы можете нажать \"TRY AGAIN\" для повторного поиска или настроить сеть другим способом.",
     "CL_DV_WM_pump_cleaning": "Очистка насоса...",
     "CL_DV_WM_autodoes_tip": "Включите эту функцию, и ваше устройство будет автоматически дозировать моющее средство и кондиционер для белья, пока вы стираете.",
     "CL_DV_WM_detergent_department_key": "ОТСЕК ДЛЯ МОЮЩЕГО СРЕДСТВА",
@@ -4267,5 +4267,109 @@
     "program_management_unable_to_hide": "Невозможно скрыть",
     "program_management_unable_to_hide_desc": "Это последняя видимая программа, и по крайней мере одна программа должна быть видна.",
     "CL_CF_FM_set_deadline": "Установите крайний срок",
-    "CL_CF_FM_expiry_date_must_be_selected": "Необходимо выбрать дату истечения срока действия."
+    "CL_CF_FM_expiry_date_must_be_selected": "Необходимо выбрать дату истечения срока действия.",
+    "CL_CF_FM_add_custom_food_desc": "Добавить новый индивидуальный элемент",
+    "CL_CF_FM_delete_selected_items": "Удалить выбранные элементы",
+    "CL_CF_FM_delete_selected": "Удалить выбранное",
+    "CL_DV_HOB_residual_heat_content": "Зона приготовления пищи все еще горячая. Будьте осторожны, не прикасайтесь к ней.",
+    "CL_CF_FM_add_custom_food": "Добавить еду, не включенную в библиотеку",
+    "air_care_temp_title": "Стандарт оценки температуры:",
+    "air_care_hum_title": "Стандарт оценки влажности:",
+    "air_care_temp_c": "Хорошо: 17 < T < 27℃\n Норма: 10≤T≤17°C, 27≤T≤30°C\n Нехорошо: T < 10°CT > 30°C",
+    "air_care_temp_f": "Хорошо: 62,6 < T < 80,6℉\n Норма: 50≤T≤62.6℉,80.6≤T≤86℉\n Нехорошо: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Хорошо: В < 70%\n Норма: 70≤H≤80%\n Нехорошо: H＞80%",
+    "CL_CF_RM_change_floor_key": "сменить пол",
+    "CL_CF_FM_recently_added": "Недавно добавлено",
+    "CL_CF_FM_no_matching_items": "Нет соответствующих элементов",
+    "CL_CF_FM_search_stored_food": "Поиск сохраненных продуктов питания",
+    "CL_DV_VM_drum_clean_reminder_notification_key": "уведомление",
+    "CL_CF_FM_a_day_ago": "День назад",
+    "CL_CF_FM_a_week_ago": "Неделю назад",
+    "CL_CF_FM_a_month_ago": "Месяц назад",
+    "CL_CF_FM_a_year_ago": "Год назад",
+    "CL_CF_FM_x_days_ago": "** дней назад",
+    "CL_CF_FM_x_weeks_ago": "** недель назад",
+    "CL_CF_FM_x_months_ago": "** несколько месяцев назад",
+    "CL_CF_FM_x_years_ago": "** много лет назад",
+    "CL_CF_FM_shopping_list_details": "Подробности списка покупок",
+    "CL_CF_FM_no_shopping_list": "Нет списка покупок",
+    "CL_DV_OV_24_time_zone": "Часовой пояс",
+    "CL_CF_FM_reset_purchased_tips": "Хотите сбросить все продукты в этом списке до статуса «не куплено»?",
+    "CL_CF_FM_add_food_to_x": "Добавить еду в \"***\"",
+    "CL_CF_FM_add_food_to_be_purchased": "Добавьте продукты, которые нужно купить",
+    "CL_DV_OV_24_always_on": "Всегда включен",
+    "CL_CF_CS_separated_ac_cs_step2": "Нажмите кнопку «Горизонтальное качание» 6 раз на пульте дистанционного управления. Или нажмите кнопку «Сон» 8 раз на проводном пульте дистанционного управления.",
+    "CL_CF_FM_list": "Список",
+    "CL_CF_FM_select_shopping_list": "Выбрать список покупок",
+    "CL_CF_FM_x_items_added": "** элементы были добавлены",
+    "CL_CF_FM_create_shopping_list_first": "Сначала вам нужно составить список покупок.",
+    "CL_CF_FM_no_shopping_list_available": "Список покупок отсутствует!",
+    "CL_DV_OV_extra_drying_desc": "Сушка или дегидратация продуктов удаляет из них влагу, что увеличивает срок годности. Это рекомендуемая программа. Вы можете изменить ее по своему усмотрению.",
+    "CL_DV_OV_extra_drying_herbs_desc": "Сушка — самый простой способ сохранения трав. При использовании теплого и сухого воздуха влага испаряется. Это помогает листьям, цветам или семенам сохранять цвет и вкус.",
+    "CL_DV_OV_extra_pasteurization_desc": "Мягкая термическая обработка применяется к пище, чтобы убить вредные бактерии и продлить срок годности. Ее можно использовать для консервирования таких продуктов, как молочные продукты, яичные продукты, орехи.",
+    "CL_DV_OV_extra_canning_desc": "Консервирование позволяет сохранить продукты питания от порчи путем стерилизации при помощи тепла. Убедитесь, что продукты хранятся в герметично закрытых контейнерах.",
+    "CL_DV_OV_extra_mircowave_defrost_desc": "Эффективная программа для быстрой и безопасной разморозки замороженных продуктов. Она особенно полезна для различных продуктов, от мяса и овощей до полуфабрикатов.",
+    "CL_DV_OV_extra_stream_defrost_desc": "Эффективно размораживает замороженные продукты, сочетая мягкое тепло с естественной влажностью пара. Пар помогает поддерживать уровень влажности продуктов, сохраняя их текстуру и вкус. Это особенно полезно для деликатных продуктов, таких как рыба, выпечка или хлеб.",
+    "CL_DV_OV_extra_fan_defrost_desc": "Воздух циркулирует без включения нагревательных элементов. Работает только вентилятор. Используйте этот режим для постепенного размораживания замороженных продуктов, таких как торты, пироги, хлеб и фрукты.",
+    "CL_DV_OV_extra_plate_warming_desc": "Нагрейте тарелки до желаемой температуры. Это поможет блюдам на тарелках оставаться теплыми в течение более длительного периода времени.",
+    "CL_DV_OV_extra_oshibori_desc": "Мягко согревает полотенца для рук осибори, нагревая их до комфортной температуры.",
+    "CL_DV_OV_extra_hot_stone_desc": "Разработано для спа-процедур. Камни равномерно нагреваются до идеальной температуры, что делает их готовыми к использованию в релаксационных или оздоровительных процедурах.",
+    "CL_DV_OV_extra_sterilizing_desc": "Дезинфицируйте такие предметы, как детские бутылочки, кухонные принадлежности или мелкие инструменты. Духовка достигает температур, достаточных для уничтожения бактерий и других патогенов, что обеспечивает простой и эффективный способ поддержания чистоты и гигиены.",
+    "CL_DV_OV_extra_warming_regenerate_desc": "Использует пар для мягкого разогрева пищи, восстанавливая ее влажность и свежесть. Идеально подходит для деликатных блюд, таких как паста, рис или запеканки, поскольку гарантирует, что разогретая пища сохранит свою первоначальную текстуру и вкус, не становясь сухой.",
+    "CL_DV_OV_extra_warming_hotair_stream_desc": "Объединяя преимущества горячего воздуха и пара, эта программа идеально подходит для разогрева самых разных блюд. Горячий воздух обеспечивает равномерный нагрев, а пар добавляет влагу, что делает ее идеальной для блюд из мяса, птицы или смешанных блюд, гарантируя, что они останутся сочными и ароматными.",
+    "CL_DV_OV_extra_warming_hotair_desc": "Идеально подходит для продуктов, которым нужна хрустящая корочка, эта программа использует горячий воздух для равномерного разогрева блюд, таких как пицца, выпечка или жареные овощи. Циркулирующий горячий воздух обеспечивает тщательный разогрев пищи, сохраняя при этом хрустящую корочку.",
+    "CL_DV_OV_extra_warming_microwave_desc": "Быстро разогрейте еду изнутри. Это быстрый и эффективный способ разогреть еду. Идеально подходит для супов, рагу или остатков еды, которые нужно быстро разогреть.",
+    "CL_DV_OV_extra_warming_keepwarm_desc": "Поддерживайте идеальную температуру подачи еды без дополнительной готовки. Идеально подходит для поддержания блюд в тепле до момента подачи. Идеально подходит для блюд, которые готовятся заранее, гарантируя, что они останутся горячими и готовыми к употреблению.",
+    "CL_DV_OV_ends_at": "Заканчивается в: #",
+    "CL_DV_OV_extra_celsius_grill_plate_inner_desc": "Наслаждайтесь восхитительными, дымными ароматами блюд, приготовленных на гриле, без необходимости использования уличного гриля. Создан для равномерного распределения тепла по всей площади, минимизируя горячие точки и гарантируя постоянные результаты гриля. Идеально подходит для гриля различных продуктов, от мяса и овощей до морепродуктов и даже фруктов.",
+    "CL_DV_OV_remote_start_title": "Удаленный запуск отключен",
+    "CL_DV_OV_remote_start_content": "Для отправки и запуска программ из вашего приложения должен быть активирован удаленный запуск. ",
+    "CL_CF_FM_apple": "Яблоко",
+    "CL_CF_FM_bacon": "Бекон",
+    "CL_CF_FM_broccoli": "Брокколи",
+    "CL_CF_FM_cabbage": "Капуста",
+    "CL_CF_FM_Cauliflower": "Цветная капуста",
+    "CL_CF_FM_cod": "Треска",
+    "CL_CF_FM_dragon_fruit": "Драконий фрукт",
+    "CL_DV_OV_defrost_detail_desc": "Правильное размораживание продуктов обеспечивает качество вашей еды после заморозки. Правильное размораживание снижает риск пищевого отравления.",
+    "CL_DV_OV_extra_non_food_detail_desc": "Непищевые программы предназначены для различных некулинарных задач, обеспечивая удобство и функциональность, выходящую за рамки традиционной кулинарии.",
+    "CL_DV_OV_extra_warming_detail_desc": "Ряд программ подогрева для разогрева и повторного приготовления пищи, что позволяет с легкостью наслаждаться трапезой, независимо от того, разогреваете ли вы остатки еды или сохраняете блюда теплыми для подачи на стол.",
+    "CL_CF_FM_click_switch_status": "Нажмите, чтобы переключить статус элемента.",
+    "CL_CF_FM_recent_purchased_tips": "Вы приобрели эти вещи. Хотите добавить их в продовольственный инвентарь?",
+    "CL_DV_OV_extra_drying_herbs": "Сушка трав",
+    "CL_DV_OV_extra_pasteurization": "Пастеризация",
+    "CL_DV_OV_extra_canning": "Консервирование",
+    "CL_DV_OV_extra_defrost_microwave": "Размораживание с микроволнами",
+    "CL_DV_OV_extra_defrost_stream": "Размораживание с паром",
+    "CL_DV_OV_extra_oshibori": "Ошибори",
+    "CL_DV_OV_extra_hot_stones": "Горячие камни",
+    "CL_DV_OV_extra_sterilizing": "Стерилизация",
+    "CL_DV_OV_extra_warming_hotair_stream": "Разогрев горячим воздухом + паром",
+    "CL_DV_OV_extra_warming_hotair": "Разогреть горячим воздухом",
+    "CL_DV_OV_extra_warming_microwave": "Разогрев с микроволнами",
+    "CL_DV_OV_extra_warming_keepwarm": "Поддержание температуры блюда",
+    "CL_CF_FM_dont_remind_in_3_months": "Не напоминать через 3 месяца",
+    "CL_DV_RF_cleaning_plan": "План уборки",
+    "CL_DV_RF_cleaning_refrigerator": "Чистка холодильника",
+    "CL_DV_RF_cleaning_reminder": "Напоминание об уборке",
+    "CL_DV_RF_cleaning_cycle": "Цикл очистки",
+    "CL_DV_RF_cleaning_history": "История уборки",
+    "CL_DV_RF_cleaning_cycle_not_selected": "Цикл очистки не выбран",
+    "CL_DV_RF_havent_cleaned_yet": "Вы еще не убрались.",
+    "CL_DV_RF_garbage_disposal_reminder": "Напоминание о вывозе мусора",
+    "CL_DV_RF_resource_waste": "Растрата ресурсов",
+    "CL_DV_RF_timer_not_selected": "Таймер не выбран",
+    "CL_DV_RF_add_more_reminders": "Добавить больше напоминаний",
+    "CL_DV_RF_cleaning_tips": "Советы по уборке",
+    "CL_DV_RF_last_clean_time": "В последний раз вы чистили холодильник: ***",
+    "CL_DV_RF_last_cleaning_was_today": "Последняя уборка была сегодня.",
+    "CL_DV_RF_you_need_cleaning_now": "Вам нужна уборка прямо сейчас.",
+    "CL_DV_RF_next_cleaning_in_x_days": "Следующая уборка через ** дней.",
+    "CL_DV_RF_last_cleaning_was_x_days_ago": "Последняя уборка была ** дней назад.",
+    "CL_CF_CO_x_weeks": "Недели",
+    "CL_DV_RF_cleaned": "Очищено",
+    "CL_DV_OV_probe_temperature_graph": "График температуры зонда",
+    "CL_DV_OV_internal": "Внутренний",
+    "CL_DV_OV_probe_desc": "Зонд помогает вам измерить температуру вашей пищи. Вы можете видеть разницу температур с течением времени.",
+    "CL_DV_RF_no_cleaning_history": "Нет истории очистки"
 }
